Converted faux dashes to em-dashes
Ahhhhh, typography. My #1 pet peeve about the original text is the use
of hyphens where em-dashes belong. We can fuss over whether they should
be em-dashes or en-dashes, but I'm right and you're wrong, so what's
the use? Besides, the canon novels use em-dashes, so we should be
consistent. Yeah.

--- a/003.htm
+++ b/003.htm
@@ -2,25 +2,25 @@
 
 <hr />
 
-<p><i>"But then the question is - who?"</i></p>
+<p><i>"But then the question is — who?"</i></p>
 
 <hr />
 
-<p>"Good Lord," said the barman, peering at Harry, "is this - can this be -?"</p>
+<p>"Good Lord," said the barman, peering at Harry, "is this — can this be —?"</p>
 
 <p>Harry leaned towards the bar of the Leaky Cauldron as best he could, though it came up to somewhere around the tips of his eyebrows. A question like <i>that</i> deserved his very best.</p>
 
-<p>"Am I - could I be - maybe - you never know - if I'm <i>not</i> - but then the question is - <i>who?</i> "</p>
+<p>"Am I — could I be — maybe — you never know — if I'm <i>not</i> — but then the question is — <i>who?</i> "</p>
 
 <p>"Bless my soul," whispered the old barman. "Harry Potter... what an honour."</p>
 
-<p>Harry blinked, then rallied. "Well, yes, you're quite perceptive; most people don't realise that so quickly -"</p>
+<p>Harry blinked, then rallied. "Well, yes, you're quite perceptive; most people don't realise that so quickly —"</p>
 
 <p>"That's enough," Professor McGonagall said. Her hand tightened on Harry's shoulder. "Don't pester the boy, Tom, he's new to all this."</p>
 
 <p>"But it is him?" quavered an old woman. "It's Harry Potter?" With a scraping sound, she got up from her chair.</p>
 
-<p>"Doris -" McGonagall said warningly. The glare she shot around the room should have been enough to intimidate anyone.</p>
+<p>"Doris —" McGonagall said warningly. The glare she shot around the room should have been enough to intimidate anyone.</p>
 
 <p>"I only want to shake his hand," the woman whispered. She bent low and stuck out a wrinkled hand, which Harry, feeling confused and more uncomfortable than he ever had in his life, carefully shook. Tears fell from the woman's eyes onto their clasped hands. "My granson was an Auror," she whispered to him. "Died in seventy-nine. Thank you, Harry Potter. Thank heavens for you."</p>
 
@@ -80,7 +80,7 @@
 
 <p>"Don't get me wrong, it's a <i>great</i> distraction," Harry said as his head kept swivelling, "probably the best distraction anyone has ever tried on me, but don't think I've forgotten about our pending discussion."</p>
 
-<p>Professor McGonagall sighed. "Your parents - or your mother at any rate - may have been very wise not to tell you."</p>
+<p>Professor McGonagall sighed. "Your parents — or your mother at any rate — may have been very wise not to tell you."</p>
 
 <p>"So you wish that I could continue in blissful ignorance? There is a certain flaw in that plan, Professor McGonagall."</p>
 
@@ -102,7 +102,7 @@
 
 <p>And those two might have died with their wands in their hands and not regretted their choices, for they <i>were</i> heroes; but for that they had an infant child, their son, Harry Potter.</p>
 
-<p>Tears were coming into Harry's eyes. He wiped them away in anger or maybe desperation, <i>I didn't know those people, not really, they aren't my parents</i> now, <i>it would be pointless to feel so sad for them -</i></p>
+<p>Tears were coming into Harry's eyes. He wiped them away in anger or maybe desperation, <i>I didn't know those people, not really, they aren't my parents</i> now, <i>it would be pointless to feel so sad for them —</i></p>
 
 <p>When Harry was done sobbing into the witch's robes, he looked up, and felt a little bit better to see tears in Professor McGonagall's eyes as well.</p>
 
@@ -114,7 +114,7 @@
 
 <p>(And somewhere in the back of his mind was a small, small note of confusion, a sense of something wrong about that story; and it should have been a part of Harry's art to notice that tiny note, but he was distracted. For it is a sad rule that whenever you are most in need of your art as a rationalist, that is when you are most likely to forget it.)</p>
 
-<p>Harry detached himself from Professor McGonagall's side. "I'll - have to think about this," he said, trying to keep his voice under control. He stared at his shoes. "Um. You can go ahead and call them my parents, if you want, you don't have to say 'genetic parents' or anything. I guess there's no reason I can't have two mothers and two fathers."</p>
+<p>Harry detached himself from Professor McGonagall's side. "I'll — have to think about this," he said, trying to keep his voice under control. He stared at his shoes. "Um. You can go ahead and call them my parents, if you want, you don't have to say 'genetic parents' or anything. I guess there's no reason I can't have two mothers and two fathers."</p>
 
 <p>There was no sound from Professor McGonagall.</p>
 
