--- a/004.htm
+++ b/004.htm
@@ -80,7 +80,7 @@
 
 <p>"Interesting..." Harry said slowly. "So some of this really is, in a sense, mine. That is, earned by me. Sort of. Possibly. Even if I don't remember the occasion." Harry's fingers tapped against his trouser-leg. "That makes me feel less guilty about spending <i>a very tiny fraction of it! Don't panic, Professor McGonagall!</i> "</p>
 
-<p>"Mr. Potter! You are a minor, and as such, you will only be allowed to make <i>reasonable</i> withdrawals from -"</p>
+<p>"Mr. Potter! You are a minor, and as such, you will only be allowed to make <i>reasonable</i> withdrawals from —"</p>
 
 <p>"I am <i>all about</i> reasonable! I am totally on board with fiscal prudence and impulse control! But I <i>did</i> see some things on the way here which would constitute <i>sensible, grown-up</i> purchases..."</p>
 
@@ -92,19 +92,19 @@
 
 <p>Professor McGonagall's face grew stern. "Those are <i>very</i> expensive, Mr. Potter!"</p>
 
-<p>"Yes, but -" Harry pleaded. "I'm sure that when I'm an adult I'll want one. And I <i>can</i> afford one. Logically, it would make just as much sense to buy it now instead of later, and get the use of it right away. It's the same money either way, right? I mean, I <i>would</i> want a good one, with <i>lots</i> of room inside, good enough that I wouldn't have to just get a better one later..." Harry trailed off hopefully.</p>
+<p>"Yes, but —" Harry pleaded. "I'm sure that when I'm an adult I'll want one. And I <i>can</i> afford one. Logically, it would make just as much sense to buy it now instead of later, and get the use of it right away. It's the same money either way, right? I mean, I <i>would</i> want a good one, with <i>lots</i> of room inside, good enough that I wouldn't have to just get a better one later..." Harry trailed off hopefully.</p>
 
-<p>Professor McGonagall's gaze didn't waver. "And just what would you <i>keep</i> in a trunk like that, Mr. Potter -"</p>
+<p>Professor McGonagall's gaze didn't waver. "And just what would you <i>keep</i> in a trunk like that, Mr. Potter —"</p>
 
 <p>"Books."</p>
 
 <p>"Of course," sighed Professor McGonagall.</p>
 
-<p>"You should have told me <i>much earlier</i> that sort of magic item existed! And that I could afford one! Now my father and I are going to have to spend the next two days <i>frantically</i> hitting up all the secondhand bookshops for old textbooks, so I can have a decent science library with me at Hogwarts - and maybe a small science fiction collection, if I can assemble something decent out of the bargain bins. Or better yet, I'll make the deal a little sweeter for you, okay? Just let me buy -"</p>
+<p>"You should have told me <i>much earlier</i> that sort of magic item existed! And that I could afford one! Now my father and I are going to have to spend the next two days <i>frantically</i> hitting up all the secondhand bookshops for old textbooks, so I can have a decent science library with me at Hogwarts — and maybe a small science fiction collection, if I can assemble something decent out of the bargain bins. Or better yet, I'll make the deal a little sweeter for you, okay? Just let me buy —"</p>
 
 <p>" <i>Mr. Potter!</i> You think you can <i>bribe</i> me?"</p>
 
-<p>"What? <i>No!</i> Not like that! I'm saying, Hogwarts can keep some of the books I bring, if you think that any of them would make good additions to the library. I'm going to be getting them cheap, and <i>I</i> just want to have them around somewhere or other. It's okay to bribe people with <i>books,</i> right? That's a -"</p>
+<p>"What? <i>No!</i> Not like that! I'm saying, Hogwarts can keep some of the books I bring, if you think that any of them would make good additions to the library. I'm going to be getting them cheap, and <i>I</i> just want to have them around somewhere or other. It's okay to bribe people with <i>books,</i> right? That's a —"</p>
 
 <p>"Family tradition."</p>
 
@@ -114,7 +114,7 @@
 
 <p>"That's the spirit! And does a 'mokeskin pouch' do what I think it does?"</p>
 
-<p>"It can't do as much as a trunk," the witch said with visible reluctance, "but... a mokeskin pouch with a Retrieval Charm and Undetectable Extension Charm can hold a number of items until they are called forth by the one who emplaced them -"</p>
+<p>"It can't do as much as a trunk," the witch said with visible reluctance, "but... a mokeskin pouch with a Retrieval Charm and Undetectable Extension Charm can hold a number of items until they are called forth by the one who emplaced them —"</p>
 
 <p>"Yes! I definitely need one of those too! It would be like the super beltpack of ultimate awesomeness! Batman's utility belt of holding! Never mind my swiss army knife, I could carry a whole tool set in there! Or <i>books!</i> I could have the top three books I was reading on me at all times, and just pull one out anywhere! I'll never have to waste another minute of my life! What do you say, Professor McGonagall? It's for the sake of children's reading, the best of all possible causes."</p>
 
