--- a/012.htm
+++ b/012.htm
@@ -66,7 +66,7 @@
 
 <p>No other name was called out after that, and Harry realised that "Zabini, Blaise" did sound close to the end of the alphabet. Great, so now he'd <i>only</i> applauded Zabini... Oh well.</p>
 
-<p>Dumbledore got up again and began heading towards the podium. Apparently they were about to be treated to a speech -</p>
+<p>Dumbledore got up again and began heading towards the podium. Apparently they were about to be treated to a speech —</p>
 
 <p>And Harry was struck by the inspiration for a <i>brilliant</i> experimental test.</p>
 
@@ -78,11 +78,11 @@
 
 <p>But then if <i>anyone in the world</i> could resist the power of the Comed-Tea, it would be Dumbledore. So if this worked, the Comed-Tea was literally <i>invincible.</i></p>
 
-<p>Harry pulled the ring on the Comed-Tea under the table, wanting to do this a bit unobtrusively. The can made a quiet hissing noise. A few heads turned to look at him, but soon turned back as -</p>
+<p>Harry pulled the ring on the Comed-Tea under the table, wanting to do this a bit unobtrusively. The can made a quiet hissing noise. A few heads turned to look at him, but soon turned back as —</p>
 
 <p>"Welcome! Welcome to a new year at Hogwarts!" said Dumbledore, beaming at the students with his arms opened wide, as if nothing could have pleased him more than to see them all there.</p>
 
-<p>Harry took a first mouthful of Comed-Tea and lowered the can again. He would swallow the pop a little at a time and try not to choke no matter <i>what</i> Dumbledore said -</p>
+<p>Harry took a first mouthful of Comed-Tea and lowered the can again. He would swallow the pop a little at a time and try not to choke no matter <i>what</i> Dumbledore said —</p>
 
 <p>"Before we begin our banquet, I would like to say a few words. And here they are: Happy happy boom boom swamp swamp swamp! Thank you!"</p>
 
@@ -122,7 +122,7 @@
 
 <p>"Brilliant!" Harry whispered. "If everyone knows, no one will suspect it's a secret!"</p>
 
-<p>"Exactly," whispered a student, and then he frowned. "Wait, that doesn't sound quite right -"</p>
+<p>"Exactly," whispered a student, and then he frowned. "Wait, that doesn't sound quite right —"</p>
 
 <p><i>Note to self: The 75th percentile of Hogwarts students a.k.a. Ravenclaw House is not the world's most exclusive program for gifted children.</i></p>
 
@@ -136,7 +136,7 @@
 
 <p>Come to think of it, he had also completely wrecked Hogwarts within ten minutes flat of getting Sorted.</p>
 
-<p>Harry did feel a certain amount of regret about this - Merlin knew what an insane Headmaster was going to do to his next seven years of schooling - but he couldn't <i>help</i> feeling a twinge of pride, too.</p>
+<p>Harry did feel a certain amount of regret about this — Merlin knew what an insane Headmaster was going to do to his next seven years of schooling — but he couldn't <i>help</i> feeling a twinge of pride, too.</p>
 
 <p>Tomorrow. No later than tomorrow at the very latest he was going to stop walking down the path that led to Dark Lord Harry. A prospect which was sounding scarier by the minute.</p>
 
@@ -146,7 +146,7 @@
 
 <p>Harry automatically started loading up his plate with whatever was in front of him, blue sausages with tiny glowing bits, whatever.</p>
 
-<p>"What were you thinking about, the Sorting -" began to say Padma Patil, one of the other first-year Ravenclaws.</p>
+<p>"What were you thinking about, the Sorting —" began to say Padma Patil, one of the other first-year Ravenclaws.</p>
 
 <p>"No pestering during mealtimes!" chorused at least three people. "House Rule!" added another. "Otherwise we'd all starve around here."</p>
 
@@ -262,7 +262,7 @@
 
 <p>Professor Quirrell made his way up to the podium and stood there, blinking. "Ah..." he said. "Ah..." Then his courage seemed to fail him utterly, and he stood there in silence, occasionally twitching.</p>
 
-<p>"Oh, great," whispered the older student, "looks like another <i>long</i> year in Defence class -"</p>
+<p>"Oh, great," whispered the older student, "looks like another <i>long</i> year in Defence class —"</p>
 
 <p>"Salutations, my young apprentices," Professor Quirrell said in a dry, confident tone. "We all know that Hogwarts tends to suffer a certain <i>misfortune</i> in its selections for this position, and no doubt many of you are already wondering what doom shall befall me this year. I assure you, that doom is not to be my incompetence." He smiled thinly. "Believe it or not, I have long wished to someday try my hand as the Professor of Defence Against the Dark Arts here at the Hogwarts School of Witchcraft and Wizardry. The first to teach this class was Salazar Slytherin himself, and as late as the fourteenth century it was traditional for the greatest fighting wizards of every persuasion to try their hands at teaching here. Past Professors of Defence have included not just the legendary wandering hero Harold Shea but also the quote undying unquote Baba Yaga, yes, I see some of you are still shuddering at the sound of her name even though she's been dead for six hundred years. That must have been an interesting time to attend Hogwarts, don't you think?"</p>
 
