--- a/014.htm
+++ b/014.htm
@@ -12,7 +12,7 @@
 
 <p>The office of the Deputy Headmistress was clean and well-organised; on the wall immediately adjacent to the desk was a maze of wooden cubbyholes of all shapes and sizes, most with several parchment scrolls thrust into them, and it was somehow very clear that Professor McGonagall knew exactly what every cubbyhole meant, even if no one else did. A single parchment lay on the actual desk, which was, aside from that, clean. Behind the desk was a closed door barred with several locks.</p>
 
-<p>Professor McGonagall was sitting on a backless stool behind the desk, looking puzzled - her eyes had widened, with perhaps a slight note of apprehension, as she saw Harry.</p>
+<p>Professor McGonagall was sitting on a backless stool behind the desk, looking puzzled — her eyes had widened, with perhaps a slight note of apprehension, as she saw Harry.</p>
 
 <p>"Mr. Potter?" said Professor McGonagall. "What is this about?"</p>
 
@@ -140,7 +140,7 @@
 
 <p><i>That's it, it's official now, they've ratified it in Parliament, everyone in the wizarding world is completely stupid.</i></p>
 
-<p>"And while I hate to get all <i>PHILOSOPHICAL,</i>" Harry desperately tried to lower his voice to something under a shriek, "has anyone thought about the <i>IMPLICATIONS</i> of going back six hours and doing something that changes time which would pretty much <i>DELETE ALL THE PEOPLE AFFECTED</i> and <i>REPLACE THEM WITH DIFFERENT VERSIONS -</i>"</p>
+<p>"And while I hate to get all <i>PHILOSOPHICAL,</i>" Harry desperately tried to lower his voice to something under a shriek, "has anyone thought about the <i>IMPLICATIONS</i> of going back six hours and doing something that changes time which would pretty much <i>DELETE ALL THE PEOPLE AFFECTED</i> and <i>REPLACE THEM WITH DIFFERENT VERSIONS —</i>"</p>
 
 <p>"Oh, you can't <i>change</i> time!" Professor McGonagall interrupted. "Good heavens, Mr. Potter, do you think these would be allowed students if <i>that</i> was possible? What if someone tried to change their test scores?"</p>
 
@@ -148,7 +148,7 @@
 
 <p>"So..." Harry said slowly. "People just find that the universe... happens to be self-consistent, somehow, even though it has time-travel in it. If I and my future self interact then I'll see the same thing as both of me, even though, on my own first run through, my future self is already acting in full knowledge of things that, from my own perspective, haven't happened yet..." Harry's voice trailed off into the inadequacy of English.</p>
 
-<p>"Correct, I think," said Professor McGonagall. "Although wizards <i>are</i> advised to avoid being seen by their past selves. If you're attending two classes at the same time and you need to cross paths with yourself, for example, the first version of you should step aside and close his eyes at a known time - you have a watch already, good - so that the future you can pass. It's all there in the pamphlet."</p>
+<p>"Correct, I think," said Professor McGonagall. "Although wizards <i>are</i> advised to avoid being seen by their past selves. If you're attending two classes at the same time and you need to cross paths with yourself, for example, the first version of you should step aside and close his eyes at a known time — you have a watch already, good — so that the future you can pass. It's all there in the pamphlet."</p>
 
 <p>"Ahahahaa. And what happens when someone <i>ignores</i> that advice?"</p>
 
@@ -168,7 +168,7 @@
 
 <p>It all made sense now. It all <i>finally</i> made sense.</p>
 
-<p>" <i>SO THAT'S HOW THE COMED-TEA WORKS!</i> Of <i>course!</i> The spell doesn't <i>force</i> funny events to happen, it just makes you <i>feel an impulse to drink</i> right before funny things are going to happen anyway! I'm such a fool, I should have realised when I felt the impulse to drink the Comed-Tea before Dumbledore's second speech, <i>didn't</i> drink it, and then choked on my own saliva instead - drinking the Comed-Tea doesn't cause the comedy, the comedy causes you to drink the Comed-Tea! I saw the two events were correlated and assumed the Comed-Tea had to be the cause and the comedy had to be the effect because I thought temporal order restrained causation and causal graphs had to be acyclic BUT IT ALL MAKES SENSE ONCE YOU DRAW THE CAUSAL ARROWS GOING <i>BACKWARDS IN TIME!</i> "</p>
+<p>" <i>SO THAT'S HOW THE COMED-TEA WORKS!</i> Of <i>course!</i> The spell doesn't <i>force</i> funny events to happen, it just makes you <i>feel an impulse to drink</i> right before funny things are going to happen anyway! I'm such a fool, I should have realised when I felt the impulse to drink the Comed-Tea before Dumbledore's second speech, <i>didn't</i> drink it, and then choked on my own saliva instead — drinking the Comed-Tea doesn't cause the comedy, the comedy causes you to drink the Comed-Tea! I saw the two events were correlated and assumed the Comed-Tea had to be the cause and the comedy had to be the effect because I thought temporal order restrained causation and causal graphs had to be acyclic BUT IT ALL MAKES SENSE ONCE YOU DRAW THE CAUSAL ARROWS GOING <i>BACKWARDS IN TIME!</i> "</p>
 
 <p>Realisation struck Harry the <i>second</i> pile-driver.</p>
 
@@ -192,7 +192,7 @@
 
 <p>Up until this point Harry had lived by the admonition of E. T. Jaynes that if you were ignorant about a phenomenon, that was a fact about your own state of mind, not a fact about the phenomenon itself; that your uncertainty was a fact about you, not a fact about whatever you were uncertain about; that ignorance existed in the mind, not in reality; that a blank map did not correspond to a blank territory. There were mysterious questions, but a mysterious answer was a contradiction in terms. A phenomenon could be mysterious <i>to</i> some particular person, but there could be no phenomena mysterious of themselves. To worship a sacred mystery was just to worship your own ignorance.</p>
 
-<p>So Harry had looked upon magic and refused to be intimidated. People had no sense of history, they learned about chemistry and biology and astronomy and thought that these matters had always been the proper meat of science, that they had <i>never been</i> mysterious. The stars had once been mysteries. Lord Kelvin had once called the nature of life and biology - the response of muscles to human will and the generation of trees from seeds - a mystery "infinitely beyond" the reach of science. (Not just a little beyond, mind you, but <i>infinitely</i> beyond. Lord Kelvin certainly had felt a huge emotional charge from <i>not knowing something</i>.) Every mystery ever solved had been a puzzle from the dawn of the human species right up until someone solved it.</p>
+<p>So Harry had looked upon magic and refused to be intimidated. People had no sense of history, they learned about chemistry and biology and astronomy and thought that these matters had always been the proper meat of science, that they had <i>never been</i> mysterious. The stars had once been mysteries. Lord Kelvin had once called the nature of life and biology — the response of muscles to human will and the generation of trees from seeds — a mystery "infinitely beyond" the reach of science. (Not just a little beyond, mind you, but <i>infinitely</i> beyond. Lord Kelvin certainly had felt a huge emotional charge from <i>not knowing something</i>.) Every mystery ever solved had been a puzzle from the dawn of the human species right up until someone solved it.</p>
 
 <p>Now, for the first time, he was up against the prospect of a mystery that was threatening to be <i>permanent</i>. If Time didn't work by acyclic causal networks then Harry didn't understand what was meant by cause and effect; and if Harry didn't understand causes and effects then he didn't understand what sort of stuff reality might be made of instead; and it was entirely possible that his human mind never <i>could</i> understand, because his brain was made of <i>old-fashioned linear-time neurons,</i> and this had turned out to be an impoverished subset of reality.</p>
 
@@ -244,7 +244,7 @@
 
 <p>Harry held up one hand. "I swear that I intend to do nothing of the sort to any of your things, that I only intend to access objects that I myself own, that I have no pranking or otherwise questionable intentions towards any of you, and that I do not anticipate those intentions changing before I get to breakfast in the Great Hall."</p>
 
-<p>Terry frowned. "Wait, is that -"</p>
+<p>Terry frowned. "Wait, is that —"</p>
 
 <p>"Don't worry," said Penelope Clearwater, who was there to guide them. "There were no loopholes. Well-worded, Potter, you should be a lawyer."</p>
 
@@ -256,7 +256,7 @@
 
 <p>Penelope sighed. "What, <i>all</i> of it? That would take weeks. You'll pick it up as you go along." She turned to go, followed by the other students. "If I don't see you at breakfast in thirty minutes, Potter, I'll start the search."</p>
 
-<p>Once everyone was gone, Harry attached the note to his bed - he'd already written it and all the other notes, working in his cavern level before everyone else woke up. Then he carefully reached inside the Quietus field and pulled the Cloak of Invisibility off Harry-1's still-sleeping form.</p>
+<p>Once everyone was gone, Harry attached the note to his bed — he'd already written it and all the other notes, working in his cavern level before everyone else woke up. Then he carefully reached inside the Quietus field and pulled the Cloak of Invisibility off Harry-1's still-sleeping form.</p>
 
 <p>And just for the sake of mischief, Harry put the Cloak into Harry-1's pouch, knowing it would thereby already be in his own.</p>
 
@@ -290,7 +290,7 @@
 
 <p>Eight first-year boys, mostly the same height. One of them had a scar on his forehead and he wasn't acting like the others.</p>
 
-<p><i>Oh wad some power the giftie gie us<br /> To see oursel's as others see us!<br /> It wad frae monie a blunder free us,<br /> And foolish notion -</i></p>
+<p><i>Oh wad some power the giftie gie us<br /> To see oursel's as others see us!<br /> It wad frae monie a blunder free us,<br /> And foolish notion —</i></p>
 
 <p>Professor McGonagall was right. The Sorting Hat was right. It was clear once you saw it from the outside.</p>
 
