--- a/020.htm
+++ b/020.htm
@@ -2,7 +2,7 @@
 
 <hr />
 
-<p>Harry stared up at the gray ceiling of the small room, from where he lay on the portable yet soft bed that had been placed there. He'd eaten quite a lot of Professor Quirrell's snacks - intricate confections of chocolate and other substances, dusted with sparkling sprinkles and jeweled with tiny sugar gems, looking highly expensive and proving, in fact, to be quite tasty. Harry hadn't felt the least bit guilty about it either, <i>this</i> he had <i>earned</i>.</p>
+<p>Harry stared up at the gray ceiling of the small room, from where he lay on the portable yet soft bed that had been placed there. He'd eaten quite a lot of Professor Quirrell's snacks — intricate confections of chocolate and other substances, dusted with sparkling sprinkles and jeweled with tiny sugar gems, looking highly expensive and proving, in fact, to be quite tasty. Harry hadn't felt the least bit guilty about it either, <i>this</i> he had <i>earned</i>.</p>
 
 <p>He hadn't tried to sleep. Harry had a feeling that he wouldn't like what happened when he closed his eyes.</p>
 
@@ -14,7 +14,7 @@
 
 <p>Anti-Dark-Lord-Harry program, +1 point didn't <i>begin</i> to cover it. Harry wondered what the Sorting Hat would say <i>now</i>, if he could put it on his head.</p>
 
-<p>No <i>wonder</i> Professor Quirrell had accused Harry of heading down the path of a Dark Lord. Harry had been too slow on the uptake, he should have seen the parallel right away -</p>
+<p>No <i>wonder</i> Professor Quirrell had accused Harry of heading down the path of a Dark Lord. Harry had been too slow on the uptake, he should have seen the parallel right away —</p>
 
 <p><i>Understand that the Dark Lord did not win that day. His goal was to learn martial arts, and yet he left without a single lesson.</i></p>
 
@@ -40,7 +40,7 @@
 
 <p>"Professor Quirrell," Harry said, "am I off the path to becoming a Dark Lord, now?"</p>
 
-<p>Professor Quirrell looked at Harry. "Mr. Potter," he said solemnly, with only a slight grin, "a word of advice. There is such a thing as a performance which is too perfect. Real people who have just been beaten and humiliated for fifteen minutes do not stand up and graciously forgive their enemies. It is the sort of thing you do when you're trying to <i>convince</i> everyone you're not Dark, not -"</p>
+<p>Professor Quirrell looked at Harry. "Mr. Potter," he said solemnly, with only a slight grin, "a word of advice. There is such a thing as a performance which is too perfect. Real people who have just been beaten and humiliated for fifteen minutes do not stand up and graciously forgive their enemies. It is the sort of thing you do when you're trying to <i>convince</i> everyone you're not Dark, not —"</p>
 
 <p>" <i>I can't believe this! You can't have every possible observation confirm your theory!</i> "</p>
 
@@ -50,7 +50,7 @@
 
 <p>"To convince me that you harbor no ambitions of becoming a Dark Lord?" said Professor Quirrell, now looking outright amused. "I suppose you could just raise your right hand."</p>
 
-<p>"What?" Harry said blankly. "But I can raise my right hand whether or not I -" Harry stopped, feeling rather stupid.</p>
+<p>"What?" Harry said blankly. "But I can raise my right hand whether or not I —" Harry stopped, feeling rather stupid.</p>
 
 <p>"Indeed," said Professor Quirrell. "You can just as easily do it either way. There is nothing you can do to convince me because I would know that was exactly what you were trying to do. And if we are to be even more precise, then while I suppose it is barely possible that perfectly good people exist even though I have never met one, it is nonetheless <i>improbable</i> that someone would be beaten for fifteen minutes and then stand up and feel a great surge of kindly forgiveness for his attackers. On the other hand it is <i>less</i> improbable that a young child would imagine this as the <i>role to play</i> in order to convince his teacher and classmates that he is not the next Dark Lord. The import of an act lies not in what that act <i>resembles on the surface,</i> Mr. Potter, but in the states of mind which make that act more or less probable."</p>
 
@@ -78,7 +78,7 @@
 
 <p>Harry sat up. Professor Quirrell was regarding him with one of the strangest expressions Harry had seen on anyone's face, let alone anyone as dignified as Professor Quirrell.</p>
 
-<p>"It happens when I get angry," Harry explained. "My blood runs cold, everything gets cold, everything seems perfectly clear... In retrospect it's been with me for a while - in my first year of Muggle school, someone tried to take away my ball during recess and I held it behind my back and kicked him in the solar plexus which I'd read was a weak point, and the other kids didn't bother me after that. And I bit a math teacher when she wouldn't accept my dominance. But it's only just recently that I've been under enough stress to notice that it's an actual, you know, mysterious dark side, and not just an anger management problem like the school psychologist said. And I don't have any super magical powers when it happens, that was one of the first things I checked."</p>
+<p>"It happens when I get angry," Harry explained. "My blood runs cold, everything gets cold, everything seems perfectly clear... In retrospect it's been with me for a while — in my first year of Muggle school, someone tried to take away my ball during recess and I held it behind my back and kicked him in the solar plexus which I'd read was a weak point, and the other kids didn't bother me after that. And I bit a math teacher when she wouldn't accept my dominance. But it's only just recently that I've been under enough stress to notice that it's an actual, you know, mysterious dark side, and not just an anger management problem like the school psychologist said. And I don't have any super magical powers when it happens, that was one of the first things I checked."</p>
 
 <p>Professor Quirrell rubbed his nose. "Let me think about this," he said.</p>
 
@@ -108,7 +108,7 @@
 
 <p>"Very good, Mr. Potter. You may indeed so consider."</p>
 
-<p>" <i>Professor Quirrell -</i>"</p>
+<p>" <i>Professor Quirrell —</i>"</p>
 
 <p>"I won't repeat what you're about to say," Professor Quirrell said, smiling.</p>
 
@@ -120,7 +120,7 @@
 
 <p>"Surely you've wanted to hurt people," said Professor Quirrell. "You wanted to hurt those bullies today. Being a Dark Lord means that people you <i>want</i> to hurt get hurt."</p>
 
-<p>Harry floundered for words and then decided to simply go with the obvious. "First of all, just because I want to hurt someone doesn't mean it's right -"</p>
+<p>Harry floundered for words and then decided to simply go with the obvious. "First of all, just because I want to hurt someone doesn't mean it's right —"</p>
 
 <p>"What makes something right, if not your wanting it?"</p>
 
@@ -128,7 +128,7 @@
 
 <p>"Pardon me?" said Professor Quirrell.</p>
 
-<p>"It's the ethical theory that the good is what satisfies the preferences of the most people -"</p>
+<p>"It's the ethical theory that the good is what satisfies the preferences of the most people —"</p>
 
 <p>"No," Professor Quirrell said. His fingers rubbed the bridge of his nose. "I don't think that's quite what I was trying to say. Mr. Potter, in the end people all do what they want to do. Sometimes people give names like 'right' to things they want to do, but how could we possibly act on anything <i>but</i> our own desires?"</p>
 
@@ -160,7 +160,7 @@
 
 <p>"I'm sorry," Harry said.</p>
 
-<p>"Don't be," said Professor Quirrell. "It was long ago, and I resolved my parental issues to my own satisfaction. So you are held back by the thought of your parents' disapproval? Does that mean that if they died in an accident, there would be nothing left to stop you from -"</p>
+<p>"Don't be," said Professor Quirrell. "It was long ago, and I resolved my parental issues to my own satisfaction. So you are held back by the thought of your parents' disapproval? Does that mean that if they died in an accident, there would be nothing left to stop you from —"</p>
 
 <p>"No," Harry said. "Just no. It is their <i>impulse to kindness</i> which sheltered me. That impulse is not only in my parents. And that impulse is what would be betrayed."</p>
 
@@ -174,7 +174,7 @@
 
 <p>"That's only if you use your power for evil," explained Harry. "If you use the power for good, you're a Light Lord."</p>
 
-<p>"I see," Professor Quirrell said. He tapped his other cheek with a finger. "I suppose I can work with that. But Mr. Potter, while the scope of your ambition is worthy of Salazar himself, how exactly do you propose to go about it? Is step one to become a great fighting wizard, or Head Unspeakable, or Minister of Magic, or -"</p>
+<p>"I see," Professor Quirrell said. He tapped his other cheek with a finger. "I suppose I can work with that. But Mr. Potter, while the scope of your ambition is worthy of Salazar himself, how exactly do you propose to go about it? Is step one to become a great fighting wizard, or Head Unspeakable, or Minister of Magic, or —"</p>
 
 <p>"Step one is to become a scientist."</p>
 
@@ -190,7 +190,7 @@
 
 <p>"A <i>scientist!</i> " said Professor Quirrell. There was genuine indignation on his face, and his voice had grown stronger and sharper. "You could be the best of all my students! The greatest fighting wizard to come out of Hogwarts in five decades! I cannot picture you wasting your days in a white lab coat doing pointless things to rats!"</p>
 
-<p>"Hey!" said Harry. "There's more to science than that! Not that there's anything <i>wrong</i> with experimenting on rats, of course. But science <i>is</i> how you go about understanding and controlling the universe -"</p>
+<p>"Hey!" said Harry. "There's more to science than that! Not that there's anything <i>wrong</i> with experimenting on rats, of course. But science <i>is</i> how you go about understanding and controlling the universe —"</p>
 
 <p>"Fool," said Professor Quirrell, in a voice of quiet, bitter intensity. "You're a fool, Harry Potter." He passed a hand over his face, and when that hand had passed, his face was calmer. "Or more likely you have not yet found your true ambition. May I strongly recommend that you try to become a Dark Lord instead? I will do anything I can to help as a matter of public service."</p>
 
@@ -268,7 +268,7 @@
 
 <p>There was a wrench of disorientation in Harry's mind as the part that wanted to run away screaming from the scariest thing it had ever seen ran away, rotating into place a part of him which could take the shock.</p>
 
-<p><i>None</i> of Harry's facets were happy about having their star-gazing interrupted. "Headmaster Albus Percival -" Harry started to say in icy tones.</p>
+<p><i>None</i> of Harry's facets were happy about having their star-gazing interrupted. "Headmaster Albus Percival —" Harry started to say in icy tones.</p>
 
 <p><i>WHAM.</i> Professor Quirrell's hand came down hard upon his desk. " <i>Mr. Potter!</i> " barked Professor Quirrell. "This is the <i>Headmaster of Hogwarts</i> and you are a mere student! You will address him appropriately!"</p>
 
@@ -290,9 +290,9 @@
 
 <p>"I was teaching him how to lose," Professor Quirrell said dryly. "It's an important life skill."</p>
 
-<p>It was apparent that Dumbledore still didn't understand, but his voice had lowered in register. "Harry..." he said slowly. "If there's any threat the Defense Professor has offered you to prevent you from complaining -"</p>
+<p>It was apparent that Dumbledore still didn't understand, but his voice had lowered in register. "Harry..." he said slowly. "If there's any threat the Defense Professor has offered you to prevent you from complaining —"</p>
 
-<p><i>You lunatic, after today of all days do you really think I -</i></p>
+<p><i>You lunatic, after today of all days do you really think I —</i></p>
 
 <p>"Headmaster," Harry said, trying to look abashed, "what's wrong with me isn't that I keep quiet about abusive professors."</p>
 
@@ -306,7 +306,7 @@
 
 <p>Dumbledore came closer to Harry, scrutinizing. "Your color looks a little off, Harry," the old wizard said. He peered closely at Harry's face. "What did you have for lunch today?"</p>
 
-<p>"What?" Harry said, his mind wobbling in sudden confusion. Why would Dumbledore be asking about deep-fried lamb and thin-sliced broccoli when that was just about the <i>last</i> probable cause of -</p>
+<p>"What?" Harry said, his mind wobbling in sudden confusion. Why would Dumbledore be asking about deep-fried lamb and thin-sliced broccoli when that was just about the <i>last</i> probable cause of —</p>
 
 <p>The old wizard straightened up. "Never mind, then. I think you're fine."</p>
 
@@ -324,7 +324,7 @@
 
 <p>The confusion lasted just exactly as long as it took Harry to understand what had just happened.</p>
 
-<p>" <i>You - !</i> "</p>
+<p>" <i>You — !</i> "</p>
 
 <p>"Gently, Mr. Potter," said Professor Quirrell. His face was hard, however, as he stared at Dumbledore.</p>
 
@@ -342,13 +342,13 @@
 
 <p>"I did not think so. Then since <i>you</i> have deprived him of my free services, <i>you</i> will pay for Mr. Potter's tutoring by a licensed Occlumency instructor."</p>
 
-<p>"Such services do not come cheaply," Dumbledore said, looking at Professor Quirrell in some surprise. "Although I do have certain connections -"</p>
+<p>"Such services do not come cheaply," Dumbledore said, looking at Professor Quirrell in some surprise. "Although I do have certain connections —"</p>
 
 <p>Professor Quirrell shook his head firmly. "No. Mr. Potter will ask his account manager at Gringotts to recommend a neutral instructor. With respect, Headmaster Dumbledore, after the events of this morning I must protest you or your friends having access to Mr. Potter's mind. I must also insist that the instructor have taken an Unbreakable Vow to reveal nothing, and that he agree to be Obliviated of each session immediately afterward."</p>
 
 <p>Dumbledore was frowning. "Such services are <i>extremely</i> expensive, as you well know, and I cannot help but wonder why <i>you</i> deem them necessary."</p>
 
-<p>"If it's money that's the problem," Harry spoke up, "I have some ideas for making large amounts of money quickly -"</p>
+<p>"If it's money that's the problem," Harry spoke up, "I have some ideas for making large amounts of money quickly —"</p>
 
 <p>"Thank you Quirinus, your wisdom is now quite evident and I am sorry for disputing it. Your concern for Harry Potter does you credit, as well."</p>
 
@@ -378,7 +378,7 @@
 
 <p>"Can you cast the spell again?" Harry said the moment Dumbledore was gone.</p>
 
-<p>"Not today," said Professor Quirrell quietly, "and not tomorrow either, I'm afraid. It takes a lot out of me to cast, though less to keep going, and so I usually prefer to maintain it as long as possible. This time I cast it on impulse. Had I thought, and realized we might be interrupted -"</p>
+<p>"Not today," said Professor Quirrell quietly, "and not tomorrow either, I'm afraid. It takes a lot out of me to cast, though less to keep going, and so I usually prefer to maintain it as long as possible. This time I cast it on impulse. Had I thought, and realized we might be interrupted —"</p>
 
 <p>Dumbledore was now Harry's least favorite person in the entire world.</p>
 
@@ -390,13 +390,13 @@
 
 <p>"Have you heard of the Pioneer program?" Harry said. "They were probes that would fly by different planets and take pictures. Two of the probes would end up on trajectories that took them out of the Solar System and into interstellar space. So they put a golden plaque on the probes, with a picture of a man, and a woman, and showing where to find our Sun in the galaxy."</p>
 
-<p>Professor Quirrell was silent for a moment, then smiled. "Tell me, Mr. Potter, can you guess what thought went through my mind when I finished assembling the thirty-seven items on the list of things I would never do as a Dark Lord? Put yourself in my shoes - imagine yourself in my place - and guess."</p>
+<p>Professor Quirrell was silent for a moment, then smiled. "Tell me, Mr. Potter, can you guess what thought went through my mind when I finished assembling the thirty-seven items on the list of things I would never do as a Dark Lord? Put yourself in my shoes — imagine yourself in my place — and guess."</p>
 
 <p>Harry imagined himself looking over a list of thirty-seven things not to do once he became a Dark Lord.</p>
 
 <p>"You decided that if you had to follow the <i>whole</i> list <i>all</i> the time, there wouldn't be much point in becoming a Dark Lord in the first place," Harry said.</p>
 
-<p>" <i>Precisely</i>," said Professor Quirrell. He was grinning. "So I am going to violate rule two - which was simply 'don't brag' - and tell you about something I have done. I don't see how the knowledge could do any harm. And I strongly suspect you would have figured it out anyway, once we knew each other well enough. Nonetheless... I shall have your oath never to speak of what I am about to tell."</p>
+<p>" <i>Precisely</i>," said Professor Quirrell. He was grinning. "So I am going to violate rule two — which was simply 'don't brag' — and tell you about something I have done. I don't see how the knowledge could do any harm. And I strongly suspect you would have figured it out anyway, once we knew each other well enough. Nonetheless... I shall have your oath never to speak of what I am about to tell."</p>
 
 <p>"You have it!" Harry had a feeling this was going to be <i>really</i> good.</p>
 
@@ -434,7 +434,7 @@
 
 <p>Which made Harry rather suspicious, considering that it'd taken less than a minute for <i>Harry</i> to think of it.</p>
 
-<p>"Maybe you included a holographic message like in <i>Star Wars?</i> " said Harry. "Or... hm. A portrait seems to store a whole human brain's worth of information... you couldn't have added any extra mass to the probe, but maybe you could've turned an existing part into a portrait of yourself? Or you found a volunteer dying of a terminal illness, snuck them into NASA, and cast a spell to make sure their <i>ghost</i> ended up in the plaque -"</p>
+<p>"Maybe you included a holographic message like in <i>Star Wars?</i> " said Harry. "Or... hm. A portrait seems to store a whole human brain's worth of information... you couldn't have added any extra mass to the probe, but maybe you could've turned an existing part into a portrait of yourself? Or you found a volunteer dying of a terminal illness, snuck them into NASA, and cast a spell to make sure their <i>ghost</i> ended up in the plaque —"</p>
 
 <p>"Mr. Potter," Professor Quirrell said, his voice suddenly sharp, "a spell requiring a human death would certainly be classified by the Ministry as Dark Arts, regardless of circumstances. Students should not be heard talking about such things."</p>
 
@@ -444,9 +444,9 @@
 
 <p>"Please be discreet about the whole matter, Mr. Potter," Professor Quirrell said. "I prefer to go through my life without attracting public notice. You will find nothing in the newspapers about Quirinus Quirrell until I decided it was time for me to teach Defense at Hogwarts."</p>
 
-<p>That seemed a little sad, but Harry understood. Then Harry realized the implications. "So just how much awesome stuff <i>have</i> you done that no one else knows about -"</p>
+<p>That seemed a little sad, but Harry understood. Then Harry realized the implications. "So just how much awesome stuff <i>have</i> you done that no one else knows about —"</p>
 
-<p>"Oh, some," said Professor Quirrell. "But I think that's quite enough for today, Mr. Potter, I confess I am feeling a bit tired -"</p>
+<p>"Oh, some," said Professor Quirrell. "But I think that's quite enough for today, Mr. Potter, I confess I am feeling a bit tired —"</p>
 
 <p>"I understand. And <i>thank you.</i> For <i>everything</i>."</p>
 
