--- a/021.htm
+++ b/021.htm
@@ -64,7 +64,7 @@
 
 <p>Harry Potter carefully placed a bookmark into his book, closed it, and laid it aside.</p>
 
-<p>"I would like to note for the benefit of posterity," said the Boy-Who-Lived in a clear voice, "that I had only half a book left, and that I ran into a number of unexpected delays -"</p>
+<p>"I would like to note for the benefit of posterity," said the Boy-Who-Lived in a clear voice, "that I had only half a book left, and that I ran into a number of unexpected delays —"</p>
 
 <p>" <i>You lost!</i> " shrieked Hermione. "You <i>did!</i> You <i>lost our contest!</i> "</p>
 
@@ -76,7 +76,7 @@
 
 <p>" <i>You</i> set the time limit."</p>
 
-<p>Harry's Look of Flaming Fire grew even hotter. "I did not have any logical way of knowing I'd have to save the entire school from Professor Snape, or get beaten up in Defense class, and if I told you how I lost all the time between 5pm and dinner on Thursday you would think I was insane -"</p>
+<p>Harry's Look of Flaming Fire grew even hotter. "I did not have any logical way of knowing I'd have to save the entire school from Professor Snape, or get beaten up in Defense class, and if I told you how I lost all the time between 5pm and dinner on Thursday you would think I was insane —"</p>
 
 <p>"Awww, it sounds like <i>someone</i> fell prey to the <i>planning fallacy.</i>"</p>
 
@@ -122,7 +122,7 @@
 
 <p>"I want you to know, Draco Malfoy," said the silhouette in tones of deadly calm, "that I do not blame you for my recent defeat."</p>
 
-<p>Draco opened his mouth in unthinking protest, there was no possible reason why he <i>should</i> be blamed -</p>
+<p>Draco opened his mouth in unthinking protest, there was no possible reason why he <i>should</i> be blamed —</p>
 
 <p>"It was due, more than anything else, to my own stupidity," continued that shadowy figure. "There were many other things I could have done, at any step along the way. You did not ask me to do <i>exactly</i> what I did. You only asked for help. I was the one who unwisely chose that particular method. But the fact remains that I lost the contest by half a book. The actions of your pet idiot, and the favor you asked for, and, yes, my own foolishness in going about it, caused me to <i>lose time</i>. More time than you know. Time which, in the end, proved critical. The fact remains, Draco Malfoy, that if you had not asked that favor, I <i>would</i> have won. And not... instead... <i>lost</i>."</p>
 
@@ -134,7 +134,7 @@
 
 <p>Draco nodded solemnly. Before arriving he had taken the wise precaution of learning every available detail of Harry's date, so that he could get all of his hysterical laughing done before their appointed meeting time, and would not commit a <i>faux pas</i> by giggling continuously until he lost consciousness.</p>
 
-<p>"Do you think," Draco said, "that something sad ought to happen to the Granger girl -"</p>
+<p>"Do you think," Draco said, "that something sad ought to happen to the Granger girl —"</p>
 
 <p>"Spread the word in Slytherin that the Granger girl is <i>mine</i> and anyone who meddles in <i>my</i> affairs will have their remains scattered over an area wide enough to include twelve different spoken languages. And since I am not in Gryffindor and I use <i>cunning</i> rather than immediate frontal attacks, they should not panic if I am seen smiling at her."</p>
 
@@ -164,7 +164,7 @@
 
 <p>"Yes," said Draco.</p>
 
-<p>"Excellent," said the shadowy figure. "I have had something of a <i>crowded week</i>, and it will take time to plan your curriculum -"</p>
+<p>"Excellent," said the shadowy figure. "I have had something of a <i>crowded week</i>, and it will take time to plan your curriculum —"</p>
 
 <p>"I've got a lot of things I need to do myself to consolidate my power in Slytherin," said Draco, "not to mention homework. Maybe we should just start in October?"</p>
 
@@ -172,7 +172,7 @@
 
 <p>Draco shook his head.</p>
 
-<p>"Then so much for that. You will learn your mathematics eventually, but not right away, I think. The third option is that I teach you of genetics and evolution and inheritance, what you would call blood -"</p>
+<p>"Then so much for that. You will learn your mathematics eventually, but not right away, I think. The third option is that I teach you of genetics and evolution and inheritance, what you would call blood —"</p>
 
 <p>"That one," said Draco.</p>
 
@@ -186,11 +186,11 @@
 
 <p>"You can <i>always</i> make the answer come out your way," said Draco. That had been practically the first thing his tutors had taught him. "It's just a matter of finding the right arguments."</p>
 
-<p>"No," said the shadowy figure, voice rising in frustration, "no, no, no! Then you get the <i>wrong answer</i> and you can't go to the Moon that way! Nature isn't a person, you can't trick them into believing something else, if you try to tell the Moon it's made of cheese you can argue for days and it won't change the Moon! What you're talking about is <i>rationalization</i>, like starting with a sheet of paper, moving straight down to the bottom line, using ink to write 'and <i>therefore,</i> the Moon is made of cheese', and then moving back up to write all sorts of clever arguments above. But either the Moon is made of cheese or it isn't. The moment you wrote the bottom line, it was already true or already false. Whether or not the whole sheet of paper ends up with the right conclusion or the wrong conclusion is fixed the instant you write down the bottom line. If you're trying to pick between two expensive trunks, and you like the shiny one, it doesn't matter what clever arguments you come up with for buying it, the <i>real</i> rule you used to <i>choose which trunk to argue for</i> was 'pick the shiny one', and however effective that rule is at picking good trunks, that's the kind of trunk you'll get. Rationality <i>can't</i> be used to argue for a fixed side, its only possible use is <i>deciding which side to argue</i>. Science isn't for <i>convincing</i> anyone that the blood purists are right. That's <i>politics!</i> The power of science comes from <i>finding out the way Nature really is that can't be changed by arguing!</i> What science <i>can</i> do is tell us <i>how blood really works,</i> how wizards really inherit their powers from their parents, and whether Muggleborns are really weaker or stronger -"</p>
+<p>"No," said the shadowy figure, voice rising in frustration, "no, no, no! Then you get the <i>wrong answer</i> and you can't go to the Moon that way! Nature isn't a person, you can't trick them into believing something else, if you try to tell the Moon it's made of cheese you can argue for days and it won't change the Moon! What you're talking about is <i>rationalization</i>, like starting with a sheet of paper, moving straight down to the bottom line, using ink to write 'and <i>therefore,</i> the Moon is made of cheese', and then moving back up to write all sorts of clever arguments above. But either the Moon is made of cheese or it isn't. The moment you wrote the bottom line, it was already true or already false. Whether or not the whole sheet of paper ends up with the right conclusion or the wrong conclusion is fixed the instant you write down the bottom line. If you're trying to pick between two expensive trunks, and you like the shiny one, it doesn't matter what clever arguments you come up with for buying it, the <i>real</i> rule you used to <i>choose which trunk to argue for</i> was 'pick the shiny one', and however effective that rule is at picking good trunks, that's the kind of trunk you'll get. Rationality <i>can't</i> be used to argue for a fixed side, its only possible use is <i>deciding which side to argue</i>. Science isn't for <i>convincing</i> anyone that the blood purists are right. That's <i>politics!</i> The power of science comes from <i>finding out the way Nature really is that can't be changed by arguing!</i> What science <i>can</i> do is tell us <i>how blood really works,</i> how wizards really inherit their powers from their parents, and whether Muggleborns are really weaker or stronger —"</p>
 
 <p>" <i>Stronger!</i> " said Draco. He had been trying to follow this, a puzzled frown on his face, he could see how it <i>sort</i> of made sense but it certainly wasn't like anything he'd ever heard before. And then Harry Potter had said something Draco couldn't possibly let pass. "You think mudbloods are <i>stronger?</i> "</p>
 
-<p>"I think nothing," said the shadowy figure. "I know nothing. I believe nothing. My bottom line is not yet written. I will figure out how to test the magical strength of Muggleborns, and the magical strength of purebloods. If my tests tell me that Muggleborns are weaker, I will believe they are weaker. If my tests tell me that Muggleborns are stronger, I will believe they are stronger. Knowing this and other truths, I will gain some measure of power -"</p>
+<p>"I think nothing," said the shadowy figure. "I know nothing. I believe nothing. My bottom line is not yet written. I will figure out how to test the magical strength of Muggleborns, and the magical strength of purebloods. If my tests tell me that Muggleborns are weaker, I will believe they are weaker. If my tests tell me that Muggleborns are stronger, I will believe they are stronger. Knowing this and other truths, I will gain some measure of power —"</p>
 
 <p>"And you expect <i>me</i> to believe whatever you say?" Draco demanded hotly.</p>
 
@@ -198,7 +198,7 @@
 
 <p>Draco stared at the shadowy figure for a while, his eyes narrowed. "Nice trap, Harry," he said. "I'll have to remember that one, it's new."</p>
 
-<p>The shadowy figure shook his head. "It's not a trap, Draco. Remember - I <i>don't know</i> what we'll find. But you do not understand the universe by arguing with it or telling it to come back with a different answer next time. When you put on the robes of a scientist you must forget all your politics and arguments and factions and sides, silence the desperate clingings of your mind, and wish only to hear the answer of Nature." The shadowy figure paused. "Most people can't do it. That's why this is difficult. Are you sure you wouldn't rather just learn about the brain?"</p>
+<p>The shadowy figure shook his head. "It's not a trap, Draco. Remember — I <i>don't know</i> what we'll find. But you do not understand the universe by arguing with it or telling it to come back with a different answer next time. When you put on the robes of a scientist you must forget all your politics and arguments and factions and sides, silence the desperate clingings of your mind, and wish only to hear the answer of Nature." The shadowy figure paused. "Most people can't do it. That's why this is difficult. Are you sure you wouldn't rather just learn about the brain?"</p>
 
 <p>"And if I tell you I'd rather learn about the brain," Draco said, his voice now hard, "you'll go around telling people that I was afraid of what I'd find."</p>
 
@@ -232,13 +232,13 @@
 
 <p>There was a slight pause, and then the figure nodded. "Fair point."</p>
 
-<p>"Look, Harry," said Draco without much hope, "I thought the idea was to take all the things that Muggles know, combine them with things that wizards know, and become masters of both worlds. Wouldn't it be a lot easier to just study all the things that Muggles <i>already</i> found out, like the Moon stuff, and use <i>that</i> power -"</p>
+<p>"Look, Harry," said Draco without much hope, "I thought the idea was to take all the things that Muggles know, combine them with things that wizards know, and become masters of both worlds. Wouldn't it be a lot easier to just study all the things that Muggles <i>already</i> found out, like the Moon stuff, and use <i>that</i> power —"</p>
 
 <p>" <i>No,</i>" said the figure with a sharp shake of his head, sending green shadows moving around his nose and eyes. His voice had turned very grim. "If you cannot learn the scientist's art of accepting reality, then I <i>must not</i> tell you what that acceptance has discovered. It would be like a powerful wizard telling you of those gates which must not be opened, and those seals which must not be broken, before you had proven your intelligence and discipline by surviving the lesser perils."</p>
 
 <p>A chill went down Draco's spine and he shuddered involuntarily. He knew it had been visible even in the dim light. "All right," said Draco. "I understand." Father had told him that many times. When a more powerful wizard told you that you weren't ready to know, you didn't pry any further if you wanted to live.</p>
 
-<p>The figure inclined his head. "Indeed. But there is something else you should understand. The first scientists, being Muggles, lacked your traditions. In the beginning they simply did not comprehend the notion of dangerous knowledge, and thought that all things known should be spoken freely. When their searches turned dangerous, they told their politicians of things that should have stayed secret - don't look like that, Draco, it wasn't simple stupidity. They did have to be smart enough to uncover the secret in the first place. But they were Muggles, it was the first time they'd found anything <i>really</i> dangerous, and they didn't <i>start out</i> with a tradition of secrecy. There was a war going on, and the scientists on one side worried that if they <i>didn't</i> talk, the scientists of the <i>enemy</i> country would tell <i>their</i> politicians first..." The voice trailed off significantly. "They didn't destroy the world. But it was close. And <i>we</i> are not going to repeat that mistake."</p>
+<p>The figure inclined his head. "Indeed. But there is something else you should understand. The first scientists, being Muggles, lacked your traditions. In the beginning they simply did not comprehend the notion of dangerous knowledge, and thought that all things known should be spoken freely. When their searches turned dangerous, they told their politicians of things that should have stayed secret — don't look like that, Draco, it wasn't simple stupidity. They did have to be smart enough to uncover the secret in the first place. But they were Muggles, it was the first time they'd found anything <i>really</i> dangerous, and they didn't <i>start out</i> with a tradition of secrecy. There was a war going on, and the scientists on one side worried that if they <i>didn't</i> talk, the scientists of the <i>enemy</i> country would tell <i>their</i> politicians first..." The voice trailed off significantly. "They didn't destroy the world. But it was close. And <i>we</i> are not going to repeat that mistake."</p>
 
 <p>"Right," Draco said, his voice now very firm. " <i>We</i> won't. We're wizards, and studying science doesn't make us Muggles."</p>
 
@@ -254,25 +254,25 @@
 
 <p>There was a very short pause.</p>
 
-<p>"We're going to need better robes," said the shadowy figure, "with hoods and so on -"</p>
+<p>"We're going to need better robes," said the shadowy figure, "with hoods and so on —"</p>
 
-<p>"I was <i>just thinking</i> that," said Draco. "We don't need whole new robes, though, just cowled cloaks to put on. I have a friend in Slytherin, she'll take your measurements -"</p>
+<p>"I was <i>just thinking</i> that," said Draco. "We don't need whole new robes, though, just cowled cloaks to put on. I have a friend in Slytherin, she'll take your measurements —"</p>
 
-<p>"Don't tell her what it's <i>for</i>, though -"</p>
+<p>"Don't tell her what it's <i>for</i>, though —"</p>
 
 <p>"I'm not <i>stupid!</i> "</p>
 
-<p>"And no masks for now, not when it's just you and me -" said the shadowy figure.</p>
+<p>"And no masks for now, not when it's just you and me —" said the shadowy figure.</p>
 
-<p>"Right! But later on we should have some sort of special mark that all our servants have, the Mark of Science, like a snake eating the Moon on their right arms -"</p>
+<p>"Right! But later on we should have some sort of special mark that all our servants have, the Mark of Science, like a snake eating the Moon on their right arms —"</p>
 
 <p>"It's called a PhD and wouldn't that make it too easy to identify our people?"</p>
 
 <p>"Huh?"</p>
 
-<p>"I mean, what if someone is like 'okay, now everyone pull up their robes over their right arms' and our guy is like 'whoops, sorry, looks like I'm a spy' -"</p>
+<p>"I mean, what if someone is like 'okay, now everyone pull up their robes over their right arms' and our guy is like 'whoops, sorry, looks like I'm a spy' —"</p>
 
-<p><i>"Forget I said anything,</i>" said Draco, sweat suddenly springing out all over his body. He needed a distraction, <i>fast</i> - "And what do we call ourselves? The Science Eaters?"</p>
+<p><i>"Forget I said anything,</i>" said Draco, sweat suddenly springing out all over his body. He needed a distraction, <i>fast</i> — "And what do we call ourselves? The Science Eaters?"</p>
 
 <p>"No," said the shadowy figure slowly. "That doesn't sound right..."</p>
 
@@ -372,7 +372,7 @@
 
 <p>"Look what <i>we</i> got you!"</p>
 
-<p>And George took, from behind Fred's back -</p>
+<p>And George took, from behind Fred's back —</p>
 
 <p>A cake with twelve flaming candles.</p>
 
@@ -380,7 +380,7 @@
 
 <p>"That's not right," said someone. "Harry Potter was born on the thirty-first of Jul-"</p>
 
-<p>" <i>HE IS COMING</i>," said a huge hollow voice that cut through all conversation like a sword of ice. " <i>THE ONE WHO WILL TEAR APART THE VERY -</i>"</p>
+<p>" <i>HE IS COMING</i>," said a huge hollow voice that cut through all conversation like a sword of ice. " <i>THE ONE WHO WILL TEAR APART THE VERY —</i>"</p>
 
 <p>Dumbledore had leapt out of his throne and run straight over the Head Table and seized hold of the woman speaking those awful words, Fawkes had appeared in a flash, and all three of them vanished in a crack of fire.</p>
 
