--- a/022.htm
+++ b/022.htm
@@ -42,7 +42,7 @@
 
 <p>There also seemed to be a number of bats flying around the room.</p>
 
-<p>That was where, future historians would one day record - <i>if</i> the whole project ever actually amounted to anything - the scientific study of magic had begun, with two young first-year Hogwarts students.</p>
+<p>That was where, future historians would one day record — <i>if</i> the whole project ever actually amounted to anything — the scientific study of magic had begun, with two young first-year Hogwarts students.</p>
 
 <p>Harry James Potter-Evans-Verres, theorist.</p>
 
@@ -108,7 +108,7 @@
 
 <p>There was an old story passed down among scientists, a cautionary tale, the story of Blondlot and the N-Rays.</p>
 
-<p>Shortly after the discovery of X-Rays, an eminent French physicist named Prosper-Rene Blondlot - who had been first to measure the speed of radio waves and show that they propagated at the speed of light - had announced the discovery of an amazing new phenomenon, N-Rays, which would induce a faint brightening of a screen. You had to look hard to see it, but it was there. N-Rays had all sorts of interesting properties. They were bent by aluminium and could be focused by an aluminium prism into striking a treated thread of cadmium sulfide, which would then glow faintly in the dark...</p>
+<p>Shortly after the discovery of X-Rays, an eminent French physicist named Prosper-Rene Blondlot — who had been first to measure the speed of radio waves and show that they propagated at the speed of light — had announced the discovery of an amazing new phenomenon, N-Rays, which would induce a faint brightening of a screen. You had to look hard to see it, but it was there. N-Rays had all sorts of interesting properties. They were bent by aluminium and could be focused by an aluminium prism into striking a treated thread of cadmium sulfide, which would then glow faintly in the dark...</p>
 
 <p>Soon dozens of other scientists had confirmed Blondlot's results, especially in France.</p>
 
@@ -198,7 +198,7 @@
 
 <p>"Okay! So you gave me this <i>whole long lecture</i> about how hard it was to do basic science and how we might need to stay on the problem for <i>thirty-five years</i>, and then you went and expected us to make the greatest discovery in the history of magic in the first hour we were working together. You didn't just hope, you really expected it. You're silly."</p>
 
-<p>"Thank you. Now -"</p>
+<p>"Thank you. Now —"</p>
 
 <p>"I've read all the books you gave me and I still don't know what to call that. Overconfidence? Planning fallacy? Super duper Lake Wobegon effect? They'll have to name it after you. Harry Bias."</p>
 
@@ -230,7 +230,7 @@
 
 <p>"So," said Hermione. She was leaning back in her chair and the smug look was back on her face. "What did we discover today?"</p>
 
-<p>"I discovered," said Harry through gritted teeth, "that when it comes to doing truly basic research on a genuinely confusing problem where you have no clue what's going on, my books on scientific methodology aren't worth crap -"</p>
+<p>"I discovered," said Harry through gritted teeth, "that when it comes to doing truly basic research on a genuinely confusing problem where you have no clue what's going on, my books on scientific methodology aren't worth crap —"</p>
 
 <p>"Language, Mr. Potter! Some of us are innocent young girls!"</p>
 
@@ -284,7 +284,7 @@
 
 <p>Draco did not clench his fists in frustration. "She's just some mudblood," Draco said, keeping his voice calm, rather than shouting. "If you don't like her, push her down the stairs."</p>
 
-<p>"Ravenclaw would know -"</p>
+<p>"Ravenclaw would know —"</p>
 
 <p>"Have Pansy Parkinson push her down the stairs! You wouldn't even have to manipulate her, offer her a Sickle and she'd do it!"</p>
 
@@ -424,13 +424,13 @@
 
 <p>"Dr. Malfoy," said Dr. Potter with a hopeful look, "I was wondering if the <i>Journal of Irreproducible Results</i> could consider for publication my paper entitled 'On the Heritability of Magical Ability'."</p>
 
-<p>Draco looked at the parchment, smiling while he considered possible rejections. If he was a professor, he would have refused the essay as too short, so -</p>
+<p>Draco looked at the parchment, smiling while he considered possible rejections. If he was a professor, he would have refused the essay as too short, so —</p>
 
 <p>"It's too long, Dr. Potter," said Dr. Malfoy.</p>
 
 <p>For a moment there was genuine incredulity on Dr. Potter's face.</p>
 
-<p>"Ah..." said Dr. Potter. "How about if I get rid of the separate lines for observations and conclusions, and just put in a <i>therefore</i> -"</p>
+<p>"Ah..." said Dr. Potter. "How about if I get rid of the separate lines for observations and conclusions, and just put in a <i>therefore</i> —"</p>
 
 <p>"Then it'll be too short. Next!"</p>
 
@@ -448,7 +448,7 @@
 
 <p>(Draco was starting to understand why Snape had used his hold over Dumbledore just to get a position that let him be awful to students.)</p>
 
-<p>And then -</p>
+<p>And then —</p>
 
 <p>Dr. Potter was approaching with a superior smirk on his face.</p>
 
@@ -464,7 +464,7 @@
 
 <p>The Death Eater was starting to get nervous about the fact that he wasn't a real scientist, and Draco was trying to remember how to talk like Harry Potter.</p>
 
-<p>"You, ah, need to consider other possible explanations for your, um, observation, besides just this one -"</p>
+<p>"You, ah, need to consider other possible explanations for your, um, observation, besides just this one —"</p>
 
 <p>"Really?" interrupted Dr. Potter. "Like what, exactly? <i>House elves are stealing our magic?</i> My data admit of only one possible conclusion, Dr. Malfoy. There <i>are</i> no other plausible hypotheses."</p>
 
@@ -498,7 +498,7 @@
 
 <p>"All right," Harry said. He was still scribbling. "Because three centuries ago is when Muggles started to not believe in magic, which I thought might have something to do with it. And about a century and a half ago was when Muggles began using a kind of technology that stops working around magic and I was wondering if it might also go the other way around."</p>
 
-<p>Draco exploded out of his chair, so angry he could hardly even speak. "It's the <i>Muggles</i> -"</p>
+<p>Draco exploded out of his chair, so angry he could hardly even speak. "It's the <i>Muggles</i> —"</p>
 
 <p>" <i>Damn it!</i> " roared Harry. "Weren't you even listening to <i>yourself?</i> It's been going on for eight centuries at least and the Muggles weren't doing anything interesting then! <i>We have to figure out the real truth!</i> The Muggles <i>might</i> have something to do with this but if they <i>don't</i> and you go blaming everything on them and that stops us from figuring out what's <i>really</i> going on then one day you're going to wake up in the morning and find out that your wand is just a stick of wood!"</p>
 
@@ -516,7 +516,7 @@
 
 <p>Harry stopped scribbling and looked up. His face had an angry expression. "Your father never told you that life isn't fair?"</p>
 
-<p>Father had said that every single time Draco used the word. "But, but, it's too awful to believe that -"</p>
+<p>Father had said that every single time Draco used the word. "But, but, it's too awful to believe that —"</p>
 
 <p>"Draco, let me introduce you to something I call the Litany of Tarski. It changes every time you use it. On this occasion it runs like so: <i>If magic is fading out of the world, I want to believe that magic is fading out of the world. If magic is not fading out of the world, I want not to believe that magic is fading out of the world. Let me not become attached to beliefs I may not want.</i> If we're living in a world where magic is fading, <i>that's what we have to believe,</i> we have to know what's coming, so we can stop it, or in the very worst case, be prepared to do what we can in the time we have left. Not believing it won't stop it from happening. So the <i>only</i> question we have to ask is whether magic is <i>actually</i> fading, and if that's the world we live in then that's what we want to believe. Litany of Gendlin: <i>What's true is already so, owning up to it doesn't make it worse.</i> Got that, Draco? I'm going to make you memorize it later. It's something you repeat to yourself any time you start wondering if it's a good idea to believe something that isn't actually true. In fact I want you to say it right now. <i>What's true is already so, owning up to it doesn't make it worse.</i> Say it."</p>
 
@@ -570,7 +570,7 @@
 
 <p>"So that distinguishes between 1 and 2 on the one hand, and 3 on the other hand," said Harry. "Now we need some way to distinguish between 1 and 2. Magic fading, blood weakening, how could we tell the difference?"</p>
 
-<p>"What kind of Charms did students used to cast in their first year at Hogwarts?" said Draco. "If they used to be able to cast much more powerful Charms, the blood was stronger -"</p>
+<p>"What kind of Charms did students used to cast in their first year at Hogwarts?" said Draco. "If they used to be able to cast much more powerful Charms, the blood was stronger —"</p>
 
 <p>Harry Potter shook his head. "Or magic itself was stronger. We have to figure out some way of telling the <i>difference.</i>" Harry stood up from his chair, began pacing nervously through the classroom. "No, wait, that might still work. Suppose different spells use up different amounts of magical energy. Then if the ambient magic weakened, the powerful spells would die first, but the spells everyone learns in their first year would stay the same..." Harry's nervous pacing sped up. "It's not a very good test, it's more about powerful wizardry being lost versus all wizardry being lost, someone's blood could be too weak for powerful wizardry but strong enough for easy spells... Draco, do you know if more powerful wizards within a <i>single</i> era, like powerful wizards from just this century, are more powerful as children? If the Dark Lord had cast the Cooling Charm when he was eleven, could he have frozen the whole room?"</p>
 
@@ -586,11 +586,11 @@
 
 <p>Draco sat down again and scrabbled in his bookbag for parchment and quill. When it was laid down on the desk, Draco looked up, face determined. "Go ahead."</p>
 
-<p>"Find portraits who knew a married Squib couple - don't make that face, Draco, it's important information. Just ask recent portraits who are Gryffindors or something. Find portraits who knew a married Squib couple well enough to know the names of all their children. Write down the name of each child and whether that child was a wizard, a Squib, or a Muggle. If they don't know whether the child was a Squib or a Muggle, write down 'non-wizard'. Write that down for <i>every</i> child the couple had, don't leave any out. If the portrait only knows the name of the wizarding children, not the names of <i>all</i> the children, then don't write down <i>any</i> data from that couple. It's very important that you only bring me data from someone who knows <i>all</i> the children a Squib couple had, well enough to know them all by name. Try to get at least forty names total, if you can, and if you have time for more, even better. Have you got all that?"</p>
+<p>"Find portraits who knew a married Squib couple — don't make that face, Draco, it's important information. Just ask recent portraits who are Gryffindors or something. Find portraits who knew a married Squib couple well enough to know the names of all their children. Write down the name of each child and whether that child was a wizard, a Squib, or a Muggle. If they don't know whether the child was a Squib or a Muggle, write down 'non-wizard'. Write that down for <i>every</i> child the couple had, don't leave any out. If the portrait only knows the name of the wizarding children, not the names of <i>all</i> the children, then don't write down <i>any</i> data from that couple. It's very important that you only bring me data from someone who knows <i>all</i> the children a Squib couple had, well enough to know them all by name. Try to get at least forty names total, if you can, and if you have time for more, even better. Have you got all that?"</p>
 
 <p>"Repeat it," Draco said, when he was done writing, and Harry repeated it.</p>
 
-<p>"I've got it," Draco said, "but why -"</p>
+<p>"I've got it," Draco said, "but why —"</p>
 
 <p>"It has to do with one of the secrets of blood that scientists already discovered. I'll explain when you get back. Let's split up and meet back here in an hour, 6:22pm that should be. Are we ready to go?"</p>
 
