--- a/023.htm
+++ b/023.htm
@@ -24,13 +24,13 @@
 
 <p>"They're no more powerful than the spells we use now."</p>
 
-<p>Harry Potter's fist struck a desk, hard. "Damn it. All right. My own experiment was a failure, Draco. There's something called the Interdict of Merlin -"</p>
+<p>Harry Potter's fist struck a desk, hard. "Damn it. All right. My own experiment was a failure, Draco. There's something called the Interdict of Merlin —"</p>
 
 <p>Draco hit himself on the forehead, realizing.</p>
 
 <p>"- which stops anyone from getting knowledge of powerful spells out of books, even if you find and read a powerful wizard's notes they won't make sense to you, it has to go from one living mind to another. I couldn't find any powerful spells that we had the instructions for but couldn't cast. But if you can't get them out of old books, why would anyone bother passing them on by word of mouth after they stopped working? Did you get the data on the Squib couples?"</p>
 
-<p>Draco started to hand the parchment over -</p>
+<p>Draco started to hand the parchment over —</p>
 
 <p>But Harry Potter held up a hand. "Law of science, Draco. First I tell you the theory and the prediction. Then you show me the data. That way you know I'm not just making up a theory to fit; you know that the theory actually predicted the data in <i>advance.</i> I have to explain this to you anyway, so I have to explain it <i>before</i> you show me the data. That's the rule. So put on your cloak and let's sit down."</p>
 
@@ -118,7 +118,7 @@
 
 <p>Harry held up a finger and the old man finished the list.</p>
 
-<p>Then Harry thanked all the portraits for helping - Draco, pretty much on automatic, did so as well and more graciously - and they headed back to the classroom.</p>
+<p>Then Harry thanked all the portraits for helping — Draco, pretty much on automatic, did so as well and more graciously — and they headed back to the classroom.</p>
 
 <p>And Harry brought out the original parchment with the hypotheses, and began scribbling.</p>
 
@@ -150,7 +150,7 @@
 
 <p>"So it was all just a stupid trick, then."</p>
 
-<p>Harry Potter stared at him for a moment, still sitting. When he spoke, his voice was quiet. "It was a fair test, Draco. If it had come out a different way, I would have accepted it. That's not something I would ever cheat on. Ever. I didn't look at your data before I made my predictions. I told you up front when the Interdict of Merlin invalidated the first experiment -"</p>
+<p>Harry Potter stared at him for a moment, still sitting. When he spoke, his voice was quiet. "It was a fair test, Draco. If it had come out a different way, I would have accepted it. That's not something I would ever cheat on. Ever. I didn't look at your data before I made my predictions. I told you up front when the Interdict of Merlin invalidated the first experiment —"</p>
 
 <p>"Oh," Draco said, the anger starting to come out into his voice, "you didn't know how the whole thing was going to come out?"</p>
 
@@ -182,7 +182,7 @@
 
 <p>"They would have put her with relatives," Draco said, his voice trembling. "They'll still look the same."</p>
 
-<p>"You see. You already know what experimental result you'll have to excuse. If you still believed in blood purism you would say, sure, let's go take a look, I bet she won't look like her parents, she's too powerful to be a real Muggleborn -"</p>
+<p>"You see. You already know what experimental result you'll have to excuse. If you still believed in blood purism you would say, sure, let's go take a look, I bet she won't look like her parents, she's too powerful to be a real Muggleborn —"</p>
 
 <p>"They <i>would</i> have put her with relatives!"</p>
 
@@ -190,13 +190,13 @@
 
 <p>Draco's breathing was ragged. "Do you realize <i>what you've done?</i> " Draco surged forward and he seized Harry by the collar of his robes. His voice rose to a scream, it sounded unbearably loud in the closed classroom and the silence. " <i>Do you realize what you've done?</i> "</p>
 
-<p>Harry's voice was shaky. "You had a belief. The belief was false. I helped you see that. What's true is already so, owning up to it doesn't make it worse -"</p>
+<p>Harry's voice was shaky. "You had a belief. The belief was false. I helped you see that. What's true is already so, owning up to it doesn't make it worse —"</p>
 
 <p>The fingers on Draco's right hand clenched into a fist and that hand dropped down and blasted up unstoppably and punched Harry Potter in the jaw so hard that his body went crashing back into a desk and then to the floor.</p>
 
 <p>" <i>Idiot!</i> " screamed Draco. " <i>Idiot! Idiot!</i> "</p>
 
-<p>"Draco," whispered Harry from the floor, "Draco, I'm sorry, I didn't think this would happen for months, I didn't expect you to awaken as a scientist this quickly, I thought I would have longer to prepare you, teach you the techniques that make it hurt less to admit you're wrong -"</p>
+<p>"Draco," whispered Harry from the floor, "Draco, I'm sorry, I didn't think this would happen for months, I didn't expect you to awaken as a scientist this quickly, I thought I would have longer to prepare you, teach you the techniques that make it hurt less to admit you're wrong —"</p>
 
 <p>"What about Father?" Draco said. His voice trembled with rage. "Were you going to prepare <i>him</i> or did you just not <i>care</i> what happened after this?"</p>
 
@@ -208,7 +208,7 @@
 
 <p>"So you planned for me to lie to him and tell him I still believe," Draco said, voice shaking. "I'll always have to lie to him, and now when I grow up I can't be a Death Eater, and I won't even be able to tell him why not."</p>
 
-<p>"If your father really loves you," whispered Harry from the floor, "he'll still love you even if you don't become a Death Eater, and it sounds like your father <i>does</i> really love you, Draco -"</p>
+<p>"If your father really loves you," whispered Harry from the floor, "he'll still love you even if you don't become a Death Eater, and it sounds like your father <i>does</i> really love you, Draco —"</p>
 
 <p>" <i>Your</i> stepfather is a scientist," Draco said. The words coming out like biting knives. "If <i>you</i> weren't going to be a scientist, he would still love you. But you'd be a <i>little less special</i> to him."</p>
 
@@ -216,7 +216,7 @@
 
 <p>"You should have warned me," Draco said. His voice rose. " <i>You should have warned me!</i> "</p>
 
-<p>"I... I did... every time I told you about the power, I told you about the price. I said, you have to admit you're wrong. I said this would be the hardest path for you. That this was the sacrifice anyone had to make to become a scientist. I said, what if the experiment says one thing and your family and friends say another -"</p>
+<p>"I... I did... every time I told you about the power, I told you about the price. I said, you have to admit you're wrong. I said this would be the hardest path for you. That this was the sacrifice anyone had to make to become a scientist. I said, what if the experiment says one thing and your family and friends say another —"</p>
 
 <p>" <i>You call that a warning?</i> " Draco was screaming now. " <i>You call that a warning? When we're doing a ritual that calls for a permanent sacrifice?</i> "</p>
 
@@ -226,7 +226,7 @@
 
 <p>"You're wrong about one thing," Draco said, his voice deadly. "Granger isn't the strongest student in Hogwarts. She just gets the best grades in class. You're about to find out the difference."</p>
 
-<p>Sudden shock showed in Harry's face, and he tried to roll quickly to his feet -</p>
+<p>Sudden shock showed in Harry's face, and he tried to roll quickly to his feet —</p>
 
 <p>It was already too late for him.</p>
 
@@ -246,7 +246,7 @@
 
 <p>Draco's hand whitened on his wand, but his aim stayed steady.</p>
 
-<p>"Just so you know," Harry said through gritted teeth, "if you'd told me I was wrong I would have listened. <i>I</i> won't ever torture <i>you</i> when you show me that I'm wrong. And you <i>will</i>. Someday. You're awakened as a scientist now, and even if you never learn to use your power, you'll always," Harry gasped, "be looking, for ways, to test, your beliefs -"</p>
+<p>"Just so you know," Harry said through gritted teeth, "if you'd told me I was wrong I would have listened. <i>I</i> won't ever torture <i>you</i> when you show me that I'm wrong. And you <i>will</i>. Someday. You're awakened as a scientist now, and even if you never learn to use your power, you'll always," Harry gasped, "be looking, for ways, to test, your beliefs —"</p>
 
 <p>Draco's backing away was less smooth, now, a little faster, and he had to work to keep his wand on Harry as he reached back to open the door and stepped back out of the classroom.</p>
 
@@ -412,7 +412,7 @@
 
 <p>Harry dropped the remnants of his hacksaw to the ground. The brass hinges had proved impervious, not even scratched, and Harry was beginning to suspect that even the desperation act of trying to Transfigure acid or explosives would have failed to open this door. On the plus side, the attempt had destroyed the hacksaw.</p>
 
-<p>His watch said it was 7:02pm, with less than fifteen minutes left, and Harry tried to remember if there were any other sharp things in his pouch that needed destroying, and felt another fit of tears welling up. If only, when his Time-Turner opened, he could go back and <i>prevent</i> -</p>
+<p>His watch said it was 7:02pm, with less than fifteen minutes left, and Harry tried to remember if there were any other sharp things in his pouch that needed destroying, and felt another fit of tears welling up. If only, when his Time-Turner opened, he could go back and <i>prevent</i> —</p>
 
 <p>And that was when Harry realized he was being <i>silly</i>.</p>
 
@@ -432,5 +432,5 @@
 
 <p>At 7:07pm, the door opened.</p>
 
-<p>Professor Flitwick's puff-bearded face looked rather concerned. "Are you all right, Harry?" said the squeaky voice of Ravenclaw's Head of House. "I got a note saying you'd been locked in here -"</p>
+<p>Professor Flitwick's puff-bearded face looked rather concerned. "Are you all right, Harry?" said the squeaky voice of Ravenclaw's Head of House. "I got a note saying you'd been locked in here —"</p>
 
