--- a/026.htm
+++ b/026.htm
@@ -16,7 +16,7 @@
 
 <p>Harry was a bit taken aback. <i>Not in a good mood</i> didn't quite seem to cover it. What could be bothering Professor Quirrell this much...?</p>
 
-<p>Well, you didn't just walk out on friends when they were feeling down. Harry cautiously advanced into the room. "Is there anything I can do to help -"</p>
+<p>Well, you didn't just walk out on friends when they were feeling down. Harry cautiously advanced into the room. "Is there anything I can do to help —"</p>
 
 <p>"No," said Professor Quirrell, still not looking up from the book.</p>
 
@@ -40,7 +40,7 @@
 
 <p>"No, I'm in a terrible mood today for no particular reason. <i>Yes I'm serious, you fool!</i> He didn't know. He <i>actually didn't know.</i> I didn't believe it until the Aurors confirmed it under Veritaserum. He is in his <i>sixth year at Hogwarts</i> and he cast a high-level Dark curse <i>without knowing what it did.</i>"</p>
 
-<p>"You don't mean," Harry said, "that he was <i>mistaken</i> about what it did, that he somehow read the wrong spell description -"</p>
+<p>"You don't mean," Harry said, "that he was <i>mistaken</i> about what it did, that he somehow read the wrong spell description —"</p>
 
 <p>"All he knew was that it was meant to be directed at an enemy. He <i>knew</i> that was all he knew."</p>
 
@@ -76,7 +76,7 @@
 
 <p>"You're not running away," observed Professor Quirrell.</p>
 
-<p>Harry opened his mouth -</p>
+<p>Harry opened his mouth —</p>
 
 <p>"If you're about to say you're not scared of me," said Professor Quirrell, " <i>don't.</i>"</p>
 
@@ -120,7 +120,7 @@
 
 <p>He'd done homework in the safety of his trunk for the next couple of hours, after telling his dormmates to come get him if anyone found him an original newspaper.</p>
 
-<p>Harry was still ignorant at 10AM, when he'd left Hogwarts in a carriage with Professor Quirrell, who was in the front right, and currently slumped over in zombie-mode. Harry was sitting diagonally across, as far away as the carriage allowed, in the back left. Even so, Harry had a constant feeling of doom as the carriage rattled over a small path through a section of non-forbidden forest. It made it a bit hard to read, especially since the material was difficult, and Harry suddenly wished he was reading one of his childhood science fiction books instead -</p>
+<p>Harry was still ignorant at 10AM, when he'd left Hogwarts in a carriage with Professor Quirrell, who was in the front right, and currently slumped over in zombie-mode. Harry was sitting diagonally across, as far away as the carriage allowed, in the back left. Even so, Harry had a constant feeling of doom as the carriage rattled over a small path through a section of non-forbidden forest. It made it a bit hard to read, especially since the material was difficult, and Harry suddenly wished he was reading one of his childhood science fiction books instead —</p>
 
 <p>"We're outside the wards, Mr. Potter," said Professor Quirrell's voice from the front. "Time to go."</p>
 
@@ -140,11 +140,11 @@
 
 <p>Moments later, there was a sort of sucking-popping sound from a few paces behind Harry, and when Harry turned to look Professor Quirrell was there.</p>
 
-<p>"Do you mind -" said Harry, at the same time as Professor Quirrell said, "I'm afraid I -"</p>
+<p>"Do you mind —" said Harry, at the same time as Professor Quirrell said, "I'm afraid I —"</p>
 
 <p>Harry stopped, Professor Quirrell didn't.</p>
 
-<p>"- need to go off and set something in motion, Mr. Potter. As it has been thoroughly explained to me that I am responsible for anything whatsoever that happens to you, I'll be leaving you with -"</p>
+<p>"- need to go off and set something in motion, Mr. Potter. As it has been thoroughly explained to me that I am responsible for anything whatsoever that happens to you, I'll be leaving you with —"</p>
 
 <p>"Newsstand," Harry said.</p>
 
@@ -156,7 +156,7 @@
 
 <p>If the bookstore burned down, Harry was going to stick around in the middle of the fire until Professor Quirrell got back.</p>
 
-<p>Meanwhile -</p>
+<p>Meanwhile —</p>
 
 <p>Harry took a quick glance around.</p>
 
@@ -174,7 +174,7 @@
 
 <p>" <i>Me!</i> "</p>
 
-<p>"Is it <i>true?</i> Are you <i>really</i> -"</p>
+<p>"Is it <i>true?</i> Are you <i>really</i> —"</p>
 
 <p>" <i>Shut up!</i> Sorry, I've been waiting <i>all day</i> to read this in the original newspaper instead of hearing about it secondhand, so please just <i>hand it over</i>, all right?"</p>
 
@@ -200,11 +200,11 @@
 
 <p>Harry was sitting in a cheap folding chair, rereading the newspaper for the fourth time, when the door whispered softly and Professor Quirrell came back into the shop.</p>
 
-<p>"My apologies for - <i>what</i> in Merlin's name are you reading?"</p>
+<p>"My apologies for — <i>what</i> in Merlin's name are you reading?"</p>
 
 <p>"It would seem," said Harry, awe in his voice, "that one Mr. Arthur Weasley was placed under the Imperius Curse by a Death Eater whom my father killed, thus creating a debt to the Noble House of Potter, which my father demanded be repaid by the hand in marriage of the recently born Ginevra Weasley. Do people actually do that sort of thing around here?"</p>
 
-<p>"How could Miss Skeeter <i>possibly</i> be fool enough to believe -"</p>
+<p>"How could Miss Skeeter <i>possibly</i> be fool enough to believe —"</p>
 
 <p>And Professor Quirrell's voice cut off.</p>
 
@@ -242,11 +242,11 @@
 
 <p>"I see your point," Professor Quirrell said slowly. "But... no, Mr. Potter. It may be impossible, but I can <i>imagine</i> tampering with the Wizengamot proceedings. It is <i>unimaginable</i> that the Grand Manager of Gringotts should affix the seal of his office in witness to a false betrothal contract, and Miss Skeeter personally verified that seal."</p>
 
-<p>"Indeed," said Harry, "you would expect the Grand Manager of Gringotts to get involved with that much money changing hands. It seems Mr. Weasley was greatly in debt, and so demanded an additional payment of ten thousand Galleons -"</p>
+<p>"Indeed," said Harry, "you would expect the Grand Manager of Gringotts to get involved with that much money changing hands. It seems Mr. Weasley was greatly in debt, and so demanded an additional payment of ten thousand Galleons —"</p>
 
 <p>" <i>Ten thousand</i> Galleons for a <i>Weasley?</i> You could buy the daughter of a Noble House for that!"</p>
 
-<p>"Excuse me," Harry said. "I really have to ask at this point, do people actually do that sort of thing around here -"</p>
+<p>"Excuse me," Harry said. "I really have to ask at this point, do people actually do that sort of thing around here —"</p>
 
 <p>"Rarely," said Professor Quirrell, with a frown on his face. "And not at all, I suspect, since the Dark Lord departed. I suppose that according to the newspaper, your father just paid it?"</p>
 
@@ -254,7 +254,7 @@
 
 <p>" <i>Give me that,</i>" said Professor Quirrell, and the newspaper leaped out of Harry's hand so fast that he got a paper cut.</p>
 
-<p>Harry automatically put the finger in his mouth to suck on, feeling rather shocked, and turned to remonstrate with Professor Quirrell -</p>
+<p>Harry automatically put the finger in his mouth to suck on, feeling rather shocked, and turned to remonstrate with Professor Quirrell —</p>
 
 <p>Professor Quirrell had stopped short in the middle of the street, and his eyes were flickering rapidly back and forth as an invisible force held the newspaper suspended before him.</p>
 
@@ -316,7 +316,7 @@
 
 <p>The time was just before noon, and Harry and Professor Quirrell were seated at the foot and head of a wide, long, flat table, in a sumptuously appointed private room with thoroughly cushioned couches and chairs along the walls, and soft curtains hanging everywhere.</p>
 
-<p>They were about to eat lunch in Mary's Place, which Professor Quirrell had said was known to him as one of the best restaurants in Diagon Alley, especially for - his voice had dropped meaningfully - <i>certain purposes.</i></p>
+<p>They were about to eat lunch in Mary's Place, which Professor Quirrell had said was known to him as one of the best restaurants in Diagon Alley, especially for — his voice had dropped meaningfully — <i>certain purposes.</i></p>
 
 <p>It was the nicest restaurant that Harry had ever been in, and it was really eating away at Harry that Professor Quirrell was treating <i>him</i> to the meal.</p>
 
@@ -364,7 +364,7 @@
 
 <p>Harry's lips were parted in anticipation. "It would be a waste to just sit here and eat lunch, then, without doing anything special."</p>
 
-<p>Professor Quirrell grinned, then took out his wand and flicked it in the direction of the door. "Of course," he said, "people who lead interesting lives take precautions more <i>thorough</i> than the dalliers. I have just sealed us in. Nothing will now pass in or out of this room - through the crack under the door, for example. And..."</p>
+<p>Professor Quirrell grinned, then took out his wand and flicked it in the direction of the door. "Of course," he said, "people who lead interesting lives take precautions more <i>thorough</i> than the dalliers. I have just sealed us in. Nothing will now pass in or out of this room — through the crack under the door, for example. And..."</p>
 
 <p>Professor Quirrell then spoke no fewer than four different Charms, none of which Harry recognized.</p>
 
@@ -384,13 +384,13 @@
 
 <p>Not in the slightest.</p>
 
-<p>But she would get fired from her job, <i>of course</i> she would be fired, she might have children going through Hogwarts for all Harry knew, and now it was worse, much worse -</p>
+<p>But she would get fired from her job, <i>of course</i> she would be fired, she might have children going through Hogwarts for all Harry knew, and now it was worse, much worse —</p>
 
 <p>"Is Lucius going to have her killed?" Harry said in a barely audible voice. Somewhere in his head, the Sorting Hat was screaming at him.</p>
 
 <p>Professor Quirrell smiled dryly. "If you have not dealt with journalists before, take it from me that the world gets a little brighter every time one dies."</p>
 
-<p>Harry jumped out of his chair with a convulsive movement, he had to find Rita Skeeter and warn her before it was too late -</p>
+<p>Harry jumped out of his chair with a convulsive movement, he had to find Rita Skeeter and warn her before it was too late —</p>
 
 <p>" <i>Sit down</i>," Professor Quirrell said sharply. " <i>No</i>, Lucius won't kill her. But Lucius makes life <i>extremely</i> unpleasant for those who serve him ill. Miss Skeeter will flee and start her life over with a new name. <i>Sit down,</i> Mr. Potter; there is nothing you can do at this point, and you have a lesson to learn."</p>
 
@@ -418,7 +418,7 @@
 
 <p>"Ah," said Professor Quirrell, who had been grinning a benevolent smile for the last few lines, "I see I have succeeded in catching your attention."</p>
 
-<p>That was true. And while Harry felt like he was being railroaded into something - no, that wasn't just a feeling, he <i>had</i> been railroaded - he couldn't deny that saying those things, and seeing Professor Quirrell's smile, <i>did</i> make him feel better.</p>
+<p>That was true. And while Harry felt like he was being railroaded into something — no, that wasn't just a feeling, he <i>had</i> been railroaded — he couldn't deny that saying those things, and seeing Professor Quirrell's smile, <i>did</i> make him feel better.</p>
 
 <p>Professor Quirrell reached into his robes, the gesture slow and deliberately significant, and drew forth...</p>
 
@@ -436,7 +436,7 @@
 
 <p>"Okay..."</p>
 
-<p>Professor Quirrell's expression became more serious. "Mr. Potter, one of the requisites for becoming a powerful wizard is an excellent memory. The key to a puzzle is often something you read twenty years ago in an old scroll, or a peculiar ring you saw on the finger of a man you met only once. I mention this to explain how I managed to remember this item, and the placard attached to it, after meeting you a good deal later. You see, Mr. Potter, over the course of my life, I have viewed a number of private collections held by individuals who are, perhaps, not quite deserving of all that they have -"</p>
+<p>Professor Quirrell's expression became more serious. "Mr. Potter, one of the requisites for becoming a powerful wizard is an excellent memory. The key to a puzzle is often something you read twenty years ago in an old scroll, or a peculiar ring you saw on the finger of a man you met only once. I mention this to explain how I managed to remember this item, and the placard attached to it, after meeting you a good deal later. You see, Mr. Potter, over the course of my life, I have viewed a number of private collections held by individuals who are, perhaps, not quite deserving of all that they have —"</p>
 
 <p>"You <i>stole</i> it?" Harry said incredulously.</p>
 
@@ -474,13 +474,13 @@
 
 <p>There came a knock at the door.</p>
 
-<p>The book vanished back into Professor Quirrell's robes, and he rose up from his chair. Professor Quirrell started to walk over to the door -</p>
+<p>The book vanished back into Professor Quirrell's robes, and he rose up from his chair. Professor Quirrell started to walk over to the door —</p>
 
 <p>- and staggered, suddenly lurching into the wall.</p>
 
 <p>"It's all right," said Professor Quirrell's voice, which suddenly sounded a lot weaker than usual. "Sit down, Mr. Potter, it's just a dizzy spell. Sit down."</p>
 
-<p>Harry's fingers gripped the edge of his chair, uncertain as to what he should do, what he <i>could</i> do. Harry couldn't even get too close to Professor Quirrell, not unless he wanted to defy that sense of Doom -</p>
+<p>Harry's fingers gripped the edge of his chair, uncertain as to what he should do, what he <i>could</i> do. Harry couldn't even get too close to Professor Quirrell, not unless he wanted to defy that sense of Doom —</p>
 
 <p>Professor Quirrell straightened, then, his breathing seeming a bit heavy, and opened the door.</p>
 
@@ -502,7 +502,7 @@
 
 <p>...blank?</p>
 
-<p>"Am I supposed to be seeing -"</p>
+<p>"Am I supposed to be seeing —"</p>
 
 <p>"Look nearer the beginning," said Professor Quirrell, and Harry (again with that helpless, ingrained care) turned a block of pages back.</p>
 
