--- a/027.htm
+++ b/027.htm
@@ -22,7 +22,7 @@
 
 <p>Then they turned a corner and their faces sagged.</p>
 
-<p>"I don't suppose Harry's guesses -"</p>
+<p>"I don't suppose Harry's guesses —"</p>
 
 <p>"- gave you any ideas?" they said to each other at the same time, and then their shoulders slumped further.</p>
 
@@ -78,7 +78,7 @@
 
 <p>But then human beings only understood each other in the first place by pretending. You didn't make predictions about people by modeling the hundred trillion synapses in their brain as separate objects. Ask the best social manipulator on Earth to build you an Artificial Intelligence from scratch, and they'd just give you a dumb look. You predicted people by telling <i>your</i> brain to act like theirs. You <i>put yourself in their place</i>. If you wanted to know what an angry person would do, you activated your own brain's anger circuitry, and whatever that circuitry output, that was your prediction. What did the neural circuitry for anger actually look like inside? Who knew? The best social manipulator on Earth might not know what neurons <i>were</i>, and neither might the best Legilimens.</p>
 
-<p>Anything a Legilimens could <i>understand</i>, an Occlumens could <i>pretend</i> to be. It was the same trick either way - probably implemented by the same neural circuitry in both cases, a single set of control circuits for reconfiguring your own brain to act as a model of someone else's.</p>
+<p>Anything a Legilimens could <i>understand</i>, an Occlumens could <i>pretend</i> to be. It was the same trick either way — probably implemented by the same neural circuitry in both cases, a single set of control circuits for reconfiguring your own brain to act as a model of someone else's.</p>
 
 <p>And so the race between telepathic offense and telepathic defense had been a decisive win for defense. Otherwise the entire magical world, maybe even the whole Earth, would have been a very different place...</p>
 
@@ -86,7 +86,7 @@
 
 <p>For <i>once,</i> just <i>once,</i> Harry hadn't gotten shortchanged in the mysterious powers department.</p>
 
-<p>After almost a month of work, and more on a whim than any real hunch, Harry had decided to make himself coldly angry and then try the book's Occlumency exercises again. At that point he'd mostly given up hope on that sort of thing, but it had still seemed worth a quick try -</p>
+<p>After almost a month of work, and more on a whim than any real hunch, Harry had decided to make himself coldly angry and then try the book's Occlumency exercises again. At that point he'd mostly given up hope on that sort of thing, but it had still seemed worth a quick try —</p>
 
 <p>He'd run through all the book's hardest exercises in two hours, and the next day he'd gone and told Professor Quirrell he was ready.</p>
 
@@ -132,7 +132,7 @@
 
 <p>" <i>Legilimens.</i>"</p>
 
-<p>There was a pause -</p>
+<p>There was a pause —</p>
 
 <hr />
 
@@ -256,7 +256,7 @@
 
 <p>Harry had collected stories about a man who routinely lost his temper in class and blew up at young children.</p>
 
-<p>...but this same man, when Harry had spoken of the Dark Lord still being alive, had responded instantly and perfectly - reacting in precisely the way that someone completely ignorant would react.</p>
+<p>...but this same man, when Harry had spoken of the Dark Lord still being alive, had responded instantly and perfectly — reacting in precisely the way that someone completely ignorant would react.</p>
 
 <p>The man stalked about Hogwarts with the air of an assassin, radiating danger...</p>
 
@@ -340,7 +340,7 @@
 
 <p>There is a main hallway running through the middle of Hogwarts's second floor on the north-south axis, and near the center of this hallway there is an opening into a short corridor which goes a dozen paces back before turning at a right angle, making an L-shape, and then goes a dozen paces more before it ends at a bright, wide window, looking out from three stories above upon the light drizzle falling over the east grounds of Hogwarts. Standing by the window you can hear nothing of the main hallway, and no one in the hallway would hear what went on by the window. If you think there is anything odd about this, you haven't been in Hogwarts very long.</p>
 
-<p>Four boys in red-trimmed robes are laughing, and a boy in green-trimmed robes is screaming and grabbing frantically onto the edges of the opened window with his hands, as the four boys make as though to push him out. It's just a joke, of course, and besides, a fall from that height wouldn't kill a wizard. All good fun. If you think there is anything odd about this -</p>
+<p>Four boys in red-trimmed robes are laughing, and a boy in green-trimmed robes is screaming and grabbing frantically onto the edges of the opened window with his hands, as the four boys make as though to push him out. It's just a joke, of course, and besides, a fall from that height wouldn't kill a wizard. All good fun. If you think there is anything odd about this —</p>
 
 <p>" <i>What are you doing?</i> " says a sixth boy's voice.</p>
 
@@ -348,7 +348,7 @@
 
 <p>"Oh," says the most handsome of the boys in red-trimmed robes, sounding relieved, "it's <i>you.</i> Hey, Lessy, you know who this is?"</p>
 
-<p>There isn't any answer from the boy on the floor, who's trying to get his sniffling under control, and the boy in the red-trimmed robes draws back his leg for a kick -</p>
+<p>There isn't any answer from the boy on the floor, who's trying to get his sniffling under control, and the boy in the red-trimmed robes draws back his leg for a kick —</p>
 
 <p>" <i>Stop it!</i> " shouts the sixth boy.</p>
 
@@ -370,7 +370,7 @@
 
 <p>" <i>Who</i> do you think you <i>are?</i> " said the handsome one, starting to sound angry.</p>
 
-<p><i>I am Neville, the last scion of the Noble and Most Ancient House of Longbottom -</i></p>
+<p><i>I am Neville, the last scion of the Noble and Most Ancient House of Longbottom —</i></p>
 
 <p>Neville couldn't say it.</p>
 
@@ -450,7 +450,7 @@
 
 <p>"So Lessy snarked to you," said the ringleader coldly.</p>
 
-<p>"Sure," said Harry Potter dryly, "and he also told me what you did today after you left Charms class, in a private secluded place where no one could see you, with a certain Hufflepuff girl wearing a white ribbon in her hair -"</p>
+<p>"Sure," said Harry Potter dryly, "and he also told me what you did today after you left Charms class, in a private secluded place where no one could see you, with a certain Hufflepuff girl wearing a white ribbon in her hair —"</p>
 
 <p>The ringleader's jaw dropped in shock.</p>
 
@@ -468,7 +468,7 @@
 
 <p>Even the ringleader flinched at that.</p>
 
-<p>Harry Potter raised his hand, fingers poised, and all three of the Gryffindors leaped backward, and one of them blurted "Don't - !"</p>
+<p>Harry Potter raised his hand, fingers poised, and all three of the Gryffindors leaped backward, and one of them blurted "Don't — !"</p>
 
 <p>"See," said Harry Potter, "this is where I snap my fingers and you become part of a hilariously amusing story that will be told with much nervous laughter at dinner tonight. But the thing is, people I trust keep telling me not to do that. Professor McGonagall told me I was taking the easy way out of everything and Professor Quirrell says I need to learn how to lose. So you remember that story where I let myself get beaten up by some older Slytherins? We could do that. You could bully me for a while and I could let you. Only you remember that part at the end where I tell my many, many friends inside this school not to do anything about it? This time we'll skip that part. So go ahead. Bully me."</p>
 
@@ -488,7 +488,7 @@
 
 <p>Neville knew that Harry Potter was just saying that, trying to make him feel good, and it still started a warm glow inside his chest.</p>
 
-<p>Harry turned toward Lesath Lestrange -</p>
+<p>Harry turned toward Lesath Lestrange —</p>
 
 <p>"Are you okay, Lestrange?" said Neville before Harry could open his mouth.</p>
 
@@ -496,7 +496,7 @@
 
 <p>Lesath Lestrange turned slowly, and stared at Neville, his face tight, no longer crying, tears glistening as they dried.</p>
 
-<p>"You think you know how it is?" said Lesath, his voice high and shaking. " <i>You think you know?</i> My parents are in <i>Azkaban,</i> I try not to think about it and they always remind me, they think it's <i>great</i> that Mother is there in the cold and the dark with the Dementors sucking away her life, I wish I was like Harry Potter, at least his parents aren't hurting, my parents are always hurting, every second of every day, I wish I was like you, at least you can see your parents sometimes, at least you know they loved you, if Mother ever loved me the Dementors will have eaten that thought by now -"</p>
+<p>"You think you know how it is?" said Lesath, his voice high and shaking. " <i>You think you know?</i> My parents are in <i>Azkaban,</i> I try not to think about it and they always remind me, they think it's <i>great</i> that Mother is there in the cold and the dark with the Dementors sucking away her life, I wish I was like Harry Potter, at least his parents aren't hurting, my parents are always hurting, every second of every day, I wish I was like you, at least you can see your parents sometimes, at least you know they loved you, if Mother ever loved me the Dementors will have eaten that thought by now —"</p>
 
 <p>Neville's eyes were wide with shock. He hadn't expected this.</p>
 
@@ -506,7 +506,7 @@
 
 <p>There was an awful silence. Neville couldn't think of a single thing to say, and from the naked shock on Harry's face, he couldn't think of anything either.</p>
 
-<p>"They say you can do anything, please, please my Lord, get my parents out of Azkaban, I'll be your loyal servant forever, my life will be yours and my death as well, only please -"</p>
+<p>"They say you can do anything, please, please my Lord, get my parents out of Azkaban, I'll be your loyal servant forever, my life will be yours and my death as well, only please —"</p>
 
 <p>"Lesath," Harry said, his voice breaking, "Lesath, I can't, I can't really do things like that, it's all just stupid tricks."</p>
 
@@ -536,7 +536,7 @@
 
 <p>"Wha?" said Harry, sounding totally confused.</p>
 
-<p>"I wasn't grateful when you helped me -"</p>
+<p>"I wasn't grateful when you helped me —"</p>
 
 <p>"Every single thing you said before was completely right," said the Boy-Who-Lived.</p>
 
@@ -566,13 +566,13 @@
 
 <p>The Boy-Who-Lived turned back and looked at Neville again. " <i>Do?</i> No. Feel guilty about not doing? Yes."</p>
 
-<p>Neville was having trouble finding words. "Once the Dark Lord died, Bellatrix Black was literally the most evil person in the entire world and that was <i>before</i> she went to Azkaban. She tortured my mother and father into insanity because she wanted to find out what happened to the Dark Lord -"</p>
+<p>Neville was having trouble finding words. "Once the Dark Lord died, Bellatrix Black was literally the most evil person in the entire world and that was <i>before</i> she went to Azkaban. She tortured my mother and father into insanity because she wanted to find out what happened to the Dark Lord —"</p>
 
-<p>"I know," Harry said quietly. "I get that, but -"</p>
+<p>"I know," Harry said quietly. "I get that, but —"</p>
 
 <p>"No! You <i>don't!</i> She had a <i>reason</i> for doing that, and my parents were both Aurors! It's not even <i>close</i> to the worst thing she's ever done!" Neville's voice was shaking.</p>
 
-<p>"Even so," said the Boy-Who-Lived, his eyes distant as they stared off into somewhere else, some other place that Neville couldn't imagine. "There might be some incredibly clever solution that makes it possible to save everyone and let them all live happily ever after, and if only I was smart enough I would have thought of it by now -"</p>
+<p>"Even so," said the Boy-Who-Lived, his eyes distant as they stared off into somewhere else, some other place that Neville couldn't imagine. "There might be some incredibly clever solution that makes it possible to save everyone and let them all live happily ever after, and if only I was smart enough I would have thought of it by now —"</p>
 
 <p>"You have problems," said Neville. "You think you ought to be what Lesath Lestrange thinks you are."</p>
 
@@ -622,7 +622,7 @@
 
 <p>"And you wanted to see the results of your test firsthand," said Harry. "So. Am I like my father?"</p>
 
-<p>A strange sad expression came over the man, one that looked foreign to his face. "I should sooner say, Harry Potter, that you resemble -"</p>
+<p>A strange sad expression came over the man, one that looked foreign to his face. "I should sooner say, Harry Potter, that you resemble —"</p>
 
 <p>Severus stopped short.</p>
 
@@ -690,7 +690,7 @@
 
 <p>Harry's mind finally made the connection.</p>
 
-<p>" <i>You</i> were that -"</p>
+<p>" <i>You</i> were that —"</p>
 
 <p>Harry's mouth snapped shut as the <i>almost died</i> part sank in, two seconds too late.</p>
 
@@ -762,7 +762,7 @@
 
 <p><i>No,</i> said the wisdom of Harry's books, <i>not if there's any other way, any other way at all.</i></p>
 
-<p>And unless the wizarding justice system was as perfect as their prisons - and that sounded rather improbable, all things considered - somewhere in Azkaban was a person who was entirely innocent, and probably more than one.</p>
+<p>And unless the wizarding justice system was as perfect as their prisons — and that sounded rather improbable, all things considered — somewhere in Azkaban was a person who was entirely innocent, and probably more than one.</p>
 
 <p>There was a burning sensation in Harry's throat, and moisture gathering in his eyes, and he wanted to teleport all of Azkaban's prisoners to safety and call down fire from the sky and blast that terrible place down to bedrock. But he couldn't, because he wasn't God.</p>
 
