--- a/028.htm
+++ b/028.htm
@@ -6,7 +6,7 @@
 
 <p>"Okay," Harry said, swallowing. "Okay, Hermione, it's enough, you can stop."</p>
 
-<p>The white sugar pill in front of Hermione still hadn't changed shape or color at all, even though she was concentrating harder than Harry had ever seen, her eyes squeezed shut, beads of sweat on her forehead, hand trembling as it gripped the wand -</p>
+<p>The white sugar pill in front of Hermione still hadn't changed shape or color at all, even though she was concentrating harder than Harry had ever seen, her eyes squeezed shut, beads of sweat on her forehead, hand trembling as it gripped the wand —</p>
 
 <p>"Hermione, <i>stop!</i> It's not going to work, Hermione, I don't think we can make things that don't exist yet!"</p>
 
@@ -20,11 +20,11 @@
 
 <p>Slowly, Harry took his mechanical pencil in his hand, and reached over to the sheet of paper with all the items crossed out, and drew a line through the item that said 'ALZHEIMER'S CURE'.</p>
 
-<p>They couldn't have fed anyone a Transfigured pill. But Transfiguration, at least the kind they could do, didn't enchant the targets - it wouldn't Transfigure a regular broomstick into a flying one. So if Hermione had been able to make a pill at all, it would have been a <i>nonmagical</i> pill, one that worked for ordinary material reasons. They could have secretly made pills for a Muggle science lab, let them <i>study</i> the pills and try to reverse-engineer them before the Transfiguration wore off... no one in either world would need to know that magic had been involved, it would just be another scientific breakthrough...</p>
+<p>They couldn't have fed anyone a Transfigured pill. But Transfiguration, at least the kind they could do, didn't enchant the targets — it wouldn't Transfigure a regular broomstick into a flying one. So if Hermione had been able to make a pill at all, it would have been a <i>nonmagical</i> pill, one that worked for ordinary material reasons. They could have secretly made pills for a Muggle science lab, let them <i>study</i> the pills and try to reverse-engineer them before the Transfiguration wore off... no one in either world would need to know that magic had been involved, it would just be another scientific breakthrough...</p>
 
 <p>It hadn't been the sort of thing a wizard would think of, either. They didn't respect mere <i>patterns of atoms</i> that much, they didn't think of unenchanted <i>material</i> things as objects of power. If it wasn't magical, it wasn't interesting.</p>
 
-<p>Earlier, Harry had <i>very</i> secretly - he hadn't even told Hermione - tried to Transfigure nanotechnology a la Eric Drexler. (He'd tried to produce a desktop nanofactory, of course, not tiny self-replicating assemblers, Harry wasn't insane.) It would have been godhood in a single shot if it'd worked.</p>
+<p>Earlier, Harry had <i>very</i> secretly — he hadn't even told Hermione — tried to Transfigure nanotechnology a la Eric Drexler. (He'd tried to produce a desktop nanofactory, of course, not tiny self-replicating assemblers, Harry wasn't insane.) It would have been godhood in a single shot if it'd worked.</p>
 
 <p>"That was it for today, right?" said Hermione. She was slumped back in her chair, leaning her head against the back; and her face showed her tiredness, which was very unusual for Hermione. She liked to pretend she was limitless, at least when Harry was around.</p>
 
@@ -40,7 +40,7 @@
 
 <p>Hermione was frowning again. "Is this stuff <i>safe?</i> "</p>
 
-<p>"I don't see why it wouldn't be," Harry said. "A buckytube is just a graphite sheet wrapped into a circular tube, basically, and graphite is the same stuff used in pencils -"</p>
+<p>"I don't see why it wouldn't be," Harry said. "A buckytube is just a graphite sheet wrapped into a circular tube, basically, and graphite is the same stuff used in pencils —"</p>
 
 <p>"I <i>know</i> what graphite is, Harry," Hermione said. She brushed her hair back absentmindedly, her eyebrows furrowed as she stared at the sheet of paper.</p>
 
@@ -58,7 +58,7 @@
 
 <p>Harry felt a bit deflated by his research partner's lack of passion, but did his best not to show it; maybe the same process would work in reverse to cheer her up. "Now I test it to see if it holds weight."</p>
 
-<p>There was an A-frame Harry had rigged up to do an earlier experiment with diamond rods - you could make solid diamond objects easily, using Transfiguration, they just wouldn't last. The earlier experiment had measured whether Transfiguring a long diamond rod into a shorter diamond rod would allow it to lift a suspended heavy weight as it contracted, i.e., could you Transfigure against tension, which you in fact could.</p>
+<p>There was an A-frame Harry had rigged up to do an earlier experiment with diamond rods — you could make solid diamond objects easily, using Transfiguration, they just wouldn't last. The earlier experiment had measured whether Transfiguring a long diamond rod into a shorter diamond rod would allow it to lift a suspended heavy weight as it contracted, i.e., could you Transfigure against tension, which you in fact could.</p>
 
 <p>Harry carefully looped one circle of glittering diamond over the thick metal hook at the top of the rig, then attached a thick metal hanger to the bottom ring, and then started attaching weights to the hanger.</p>
 
@@ -72,7 +72,7 @@
 
 <p>"But it's not really <i>useful</i>, Harry, is it?" Hermione said from where she was sitting with her head resting in her hands. "I mean, even if we gave it to a scientist they couldn't learn how to make lots of buckytubes from studying ours."</p>
 
-<p>"They might be able to learn <i>something,</i>" Harry said. "Hermione, <i>look</i> at it, that little tiny thread holding up all that weight, we just made something that no Muggle laboratory could make -"</p>
+<p>"They might be able to learn <i>something,</i>" Harry said. "Hermione, <i>look</i> at it, that little tiny thread holding up all that weight, we just made something that no Muggle laboratory could make —"</p>
 
 <p>"But any other witch could make it," Hermione said. Her exhaustion was coming into her voice, now. "Harry, I don't think this is working out."</p>
 
@@ -100,7 +100,7 @@
 
 <p>Hermione started to look a little scared, and Harry knew that his own expression had gotten colder.</p>
 
-<p>It might not have hurt so much if the same thought hadn't already come to Harry - that, while thirty might be old for a scientific revolutionary and twenty about right, while there were people who got doctorates when they were seventeen and fourteen-year-old heirs who'd been great kings or generals, there wasn't really anyone who'd made the history books at eleven.</p>
+<p>It might not have hurt so much if the same thought hadn't already come to Harry — that, while thirty might be old for a scientific revolutionary and twenty about right, while there were people who got doctorates when they were seventeen and fourteen-year-old heirs who'd been great kings or generals, there wasn't really anyone who'd made the history books at eleven.</p>
 
 <p>"All right," Harry said. "Figure out how to do something a grownup can't. Is that your challenge?"</p>
 
@@ -110,7 +110,7 @@
 
 <p>There was more silence.</p>
 
-<p>"Okay," said Hermione, her voice wavering a little. She pushed herself up out of her chair, and went over to the door of the abandoned classroom they'd been working in. Her hand went onto the doorknob. "We're still friends, right? And if you can't figure out anything -"</p>
+<p>"Okay," said Hermione, her voice wavering a little. She pushed herself up out of her chair, and went over to the door of the abandoned classroom they'd been working in. Her hand went onto the doorknob. "We're still friends, right? And if you can't figure out anything —"</p>
 
 <p>Her voice halted.</p>
 
@@ -244,7 +244,7 @@
 
 <p>Human beings modeled the world using stratified levels of organization, they had <i>separate thoughts</i> about how countries worked, how people worked, how organs worked, how cells worked, how molecules worked, how quarks worked.</p>
 
-<p>When Harry's brain needed to think about the eraser, it would think about the rules that governed erasers, like "erasers can get rid of pencil-marks". Only if Harry's brain needed to predict what would happen on the lower chemical level, only then would Harry's brain start thinking - as though it were a separate fact - about rubber molecules.</p>
+<p>When Harry's brain needed to think about the eraser, it would think about the rules that governed erasers, like "erasers can get rid of pencil-marks". Only if Harry's brain needed to predict what would happen on the lower chemical level, only then would Harry's brain start thinking — as though it were a separate fact — about rubber molecules.</p>
 
 <p>But that was all in the <i>mind.</i></p>
 
@@ -264,7 +264,7 @@
 
 <p>Reality wasn't atoms, it wasn't a set of tiny billiard balls bopping around. That was just another lie. The notion of atoms as little dots was just another convenient hallucination that people clung to because they didn't want to confront the inhumanly alien shape of the underlying reality. No wonder, then, that his attempts to Transfigure based on that hadn't worked. If he wanted power, he had to abandon his humanity, and force his thoughts to conform to the true math of quantum mechanics.</p>
 
-<p>There <i>were no particles,</i> there were just <i>clouds of amplitude</i> in a <i>multiparticle configuration space</i> and what his brain fondly imagined to be an eraser was nothing except a gigantic <i>factor</i> in a wavefunction that <i>happened to factorize</i>, it didn't have a separate existence any more than there was a particular solid factor of 3 hidden inside the number 6, if his wand was capable of <i>altering factors in an approximately factorizable wavefunction</i> then it should damn well be able to alter the slightly <i>smaller</i> factor that Harry's brain visualized as a patch of material on the eraser -</p>
+<p>There <i>were no particles,</i> there were just <i>clouds of amplitude</i> in a <i>multiparticle configuration space</i> and what his brain fondly imagined to be an eraser was nothing except a gigantic <i>factor</i> in a wavefunction that <i>happened to factorize</i>, it didn't have a separate existence any more than there was a particular solid factor of 3 hidden inside the number 6, if his wand was capable of <i>altering factors in an approximately factorizable wavefunction</i> then it should damn well be able to alter the slightly <i>smaller</i> factor that Harry's brain visualized as a patch of material on the eraser —</p>
 
 <hr />
 
@@ -276,15 +276,15 @@
 
 <p><i>What had they been doing?</i></p>
 
-<p>She came to the classroom and her fingers slipped on the doorknob at first, too sweaty, she grabbed harder and the door opened -</p>
+<p>She came to the classroom and her fingers slipped on the doorknob at first, too sweaty, she grabbed harder and the door opened —</p>
 
-<p>- in a single flash of perception she saw Harry staring at a small pink rectangle on the table in front of him -</p>
+<p>- in a single flash of perception she saw Harry staring at a small pink rectangle on the table in front of him —</p>
 
-<p>- as a few paces away the tiny black thread, almost invisible from this distance, supported all that weight -</p>
+<p>- as a few paces away the tiny black thread, almost invisible from this distance, supported all that weight —</p>
 
 <p><i>"Harry get out of the classroom!"</i></p>
 
-<p>Pure shock crossed Harry's face, and he stood up so fast he almost fell over, stopping only to grab the small pink rectangle from the table, and he tore out of the door, she'd already stepped aside, her wand was already in her hand coming up pointing at the thread -</p>
+<p>Pure shock crossed Harry's face, and he stood up so fast he almost fell over, stopping only to grab the small pink rectangle from the table, and he tore out of the door, she'd already stepped aside, her wand was already in her hand coming up pointing at the thread —</p>
 
 <p>" <i>Finite Incantatem!</i> "</p>
 
@@ -300,7 +300,7 @@
 
 <p>"...are you, feeling, healthy..."</p>
 
-<p>Harry started looking even more frightened as the question sank in. "I, I don't think I have any symptoms -"</p>
+<p>Harry started looking even more frightened as the question sank in. "I, I don't think I have any symptoms —"</p>
 
 <p>Hermione closed her eyes for a moment. "Good," she whispered. "Catch, breath."</p>
 
@@ -312,7 +312,7 @@
 
 <p>"We broke the rules, Harry," she said in a hoarse voice. "We broke the rules."</p>
 
-<p>"I..." Harry swallowed. "I still don't see how, I've been <i>thinking</i> but -"</p>
+<p>"I..." Harry swallowed. "I still don't see how, I've been <i>thinking</i> but —"</p>
 
 <p>"I asked if the Transfiguration was safe and <i>you answered me!</i> "</p>
 
@@ -340,7 +340,7 @@
 
 <p>Hermione stared at it, puzzled.</p>
 
-<p>"Quantum mechanics wasn't enough," Harry said. "I had to go all the way down to timeless physics before it took. Had to see the wand as enforcing a <i>relation</i> between separate past and future realities, instead of <i>changing</i> anything over time - but I did it, Hermione, I saw past the illusion of objects, and I bet there's not a single other wizard in the world who could have. Even if some Muggleborn knew about timeless formulations of quantum mechanics, it would just be a weird belief about strange distant quantum stuff, they wouldn't <i>see</i> that it was <i>reality</i>, accept that the world they knew was just a hallucination. I Transfigured <i>part</i> of the eraser without changing the <i>whole thing.</i>"</p>
+<p>"Quantum mechanics wasn't enough," Harry said. "I had to go all the way down to timeless physics before it took. Had to see the wand as enforcing a <i>relation</i> between separate past and future realities, instead of <i>changing</i> anything over time — but I did it, Hermione, I saw past the illusion of objects, and I bet there's not a single other wizard in the world who could have. Even if some Muggleborn knew about timeless formulations of quantum mechanics, it would just be a weird belief about strange distant quantum stuff, they wouldn't <i>see</i> that it was <i>reality</i>, accept that the world they knew was just a hallucination. I Transfigured <i>part</i> of the eraser without changing the <i>whole thing.</i>"</p>
 
 <p>Hermione raised her wand again, pointed it at the eraser.</p>
 
@@ -352,7 +352,7 @@
 
 <p>"And we still have to stop," said Hermione.</p>
 
-<p>" <i>Why?</i> " said Harry. "Don't you see what this <i>means</i>, Hermione? Wizards <i>don't</i> know everything! There's too few of them, even fewer who know any science, they haven't exhausted the low-hanging fruit -"</p>
+<p>" <i>Why?</i> " said Harry. "Don't you see what this <i>means</i>, Hermione? Wizards <i>don't</i> know everything! There's too few of them, even fewer who know any science, they haven't exhausted the low-hanging fruit —"</p>
 
 <p>"It's not <i>safe</i>," Hermione said. "If we <i>can</i> find out new things it's even <i>less</i> safe! We're <i>too young!</i> We made one big mistake already, next time we could just <i>die!</i> "</p>
 
@@ -384,7 +384,7 @@
 
 <p>Hermione nodded. Yes. Lunch sounded good. For real, this time.</p>
 
-<p>She carefully began to push herself off the stone floor, wincing as her body screamed at her -</p>
+<p>She carefully began to push herself off the stone floor, wincing as her body screamed at her —</p>
 
 <p>Harry pointed his wand at her and said " <i>Wingardium Leviosa.</i>"</p>
 
@@ -456,7 +456,7 @@
 
 <p>Harry swallowed and nodded.</p>
 
-<p>And a few minutes later, Harry was strapped into the safety chair and resting his wand against a metal ball - one that, based on his current test scores, should have been too large for him to Transfigure in less than thirty minutes.</p>
+<p>And a few minutes later, Harry was strapped into the safety chair and resting his wand against a metal ball — one that, based on his current test scores, should have been too large for him to Transfigure in less than thirty minutes.</p>
 
 <p>And a few minutes after <i>that,</i> Minerva was leaning against the wall, feeling faint.</p>
 
@@ -494,7 +494,7 @@
 
 <p>There was silence.</p>
 
-<p>"Um..." Harry said. "I don't want to turn anyone over to the Inquisition, but I did tell one other student -"</p>
+<p>"Um..." Harry said. "I don't want to turn anyone over to the Inquisition, but I did tell one other student —"</p>
 
 <p>The word almost exploded from Professor McGonagall's lips. " <i>What?</i> You discussed a completely novel form of Transfiguration with a <i>student</i> before consulting a recognized authority? Do you have any idea how <i>irresponsible</i> that was?"</p>
 
@@ -564,7 +564,7 @@
 
 <p><i>Aftermath, 2:</i></p>
 
-<p>Alissa Cornfoot's eyes were slightly glazed as she gazed upon the Potions Master giving her class a stern lecture, holding up a tiny bronze bean and saying something about screaming puddles of human flesh. Ever since the start of this year she'd been having trouble listening in Potions. She kept staring at their awful, mean, greasy professor and fantasizing about special detentions. There was probably something really <i>wrong</i> with her but she just couldn't seem to stop doing it -</p>
+<p>Alissa Cornfoot's eyes were slightly glazed as she gazed upon the Potions Master giving her class a stern lecture, holding up a tiny bronze bean and saying something about screaming puddles of human flesh. Ever since the start of this year she'd been having trouble listening in Potions. She kept staring at their awful, mean, greasy professor and fantasizing about special detentions. There was probably something really <i>wrong</i> with her but she just couldn't seem to stop doing it —</p>
 
 <p>"Ow!" Alissa said then.</p>
 
