--- a/029.htm
+++ b/029.htm
@@ -126,21 +126,21 @@
 
 <p>"It was right after the Dark Lord's defeat," Harry said, his voice serious as he said it. "Things were incredibly chaotic, and when the Aurors tracked down Black he was standing there laughing in a street ankle-deep in blood, with twenty eyewitnesses to recount how he'd killed a friend of my father's named Peter Pettigrew plus twelve bystanders. I'm not saying I approve of Black not getting a trial. But these are wizards we're talking about here, so it's not really any more suspicious than, I don't know, the sort of thing people point to when they want to argue over who shot John F. Kennedy. So anyway, Sirius Black is the wizarding Lee Harvey Oswald. There's all sorts of conspiracy theories about who <i>really</i> betrayed my parents instead of him, and one of the favorites is Peter Pettigrew, and this is where it starts getting complicated."</p>
 
-<p>Hermione listened, fascinated. "But how do you go from there to the Weasleys' <i>pet rat</i> -"</p>
+<p>Hermione listened, fascinated. "But how do you go from there to the Weasleys' <i>pet rat</i> —"</p>
 
-<p>"Hold on," said Harry, "I'm getting there. Now, after Pettigrew's death it came out that he'd been a spy for the Light - not a double agent, just someone who snuck around and found things out. He'd been good at that since he was a teenager, even in Hogwarts he had a reputation for finding out all sorts of secrets. So the conspiracy theory is that Pettigrew became an unregistered Animagus while he was still in Hogwarts, an Animagus of something small that could scurry around and listen to conversations. The main problem being that successful Animagi are rare and doing it as a teenager would be really unlikely, so of course the conspiracy theory says that my father and Black were unregistered Animagi too. And in that conspiracy theory, Pettigrew himself killed the twelve bystanders, turned into his small Animagus form, and ran. So Michael Shermer says there are four additional problems with this. One, Black was the only one who knew where my parents were." (Harry's voice was a little hard as he said that.) "Two, Black was a more likely suspect to start with than Pettigrew, there's a rumor Black deliberately tried to get a student killed during his time at Hogwarts, and he was from this really nasty pureblood family, Bellatrix Black was literally his cousin. Three, Black was twenty times the fighting wizard that Pettigrew was, even if he wasn't as smart. The duel between them would have been like Professor Quirrell versus Professor Sprout. Pettigrew probably didn't even get a chance to draw his wand, let alone fake all the evidence the conspiracy theory requires. And four, Black was standing in the street <i>laughing.</i>"</p>
+<p>"Hold on," said Harry, "I'm getting there. Now, after Pettigrew's death it came out that he'd been a spy for the Light — not a double agent, just someone who snuck around and found things out. He'd been good at that since he was a teenager, even in Hogwarts he had a reputation for finding out all sorts of secrets. So the conspiracy theory is that Pettigrew became an unregistered Animagus while he was still in Hogwarts, an Animagus of something small that could scurry around and listen to conversations. The main problem being that successful Animagi are rare and doing it as a teenager would be really unlikely, so of course the conspiracy theory says that my father and Black were unregistered Animagi too. And in that conspiracy theory, Pettigrew himself killed the twelve bystanders, turned into his small Animagus form, and ran. So Michael Shermer says there are four additional problems with this. One, Black was the only one who knew where my parents were." (Harry's voice was a little hard as he said that.) "Two, Black was a more likely suspect to start with than Pettigrew, there's a rumor Black deliberately tried to get a student killed during his time at Hogwarts, and he was from this really nasty pureblood family, Bellatrix Black was literally his cousin. Three, Black was twenty times the fighting wizard that Pettigrew was, even if he wasn't as smart. The duel between them would have been like Professor Quirrell versus Professor Sprout. Pettigrew probably didn't even get a chance to draw his wand, let alone fake all the evidence the conspiracy theory requires. And four, Black was standing in the street <i>laughing.</i>"</p>
 
-<p>"But the <i>rat</i> -" said Hermione.</p>
+<p>"But the <i>rat</i> —" said Hermione.</p>
 
-<p>"Right," Harry said. "Well, to make a long story short, Bill Weasley decided that his little brother Percy's pet rat was Pettigrew's Animagus form -"</p>
+<p>"Right," Harry said. "Well, to make a long story short, Bill Weasley decided that his little brother Percy's pet rat was Pettigrew's Animagus form —"</p>
 
 <p>Hermione's jaw dropped.</p>
 
-<p>"Yes," Harry said, "you wouldn't exactly expect Evil Pettigrew to be living a sad and furtive life as the pet rat of an enemy wizarding family, he'd either be with the Malfoys or, more likely, off in the Carribean after a bit of plastic surgery. Anyway, Bill knocks out his little brother Percy, stuns and grabs the rat, sends out all these emergency owl messages -"</p>
+<p>"Yes," Harry said, "you wouldn't exactly expect Evil Pettigrew to be living a sad and furtive life as the pet rat of an enemy wizarding family, he'd either be with the Malfoys or, more likely, off in the Carribean after a bit of plastic surgery. Anyway, Bill knocks out his little brother Percy, stuns and grabs the rat, sends out all these emergency owl messages —"</p>
 
 <p>"Oh, <i>no!</i> " Hermione said, the words torn out of her.</p>
 
-<p>"- and somehow manages to gather Dumbledore, the Minister of Magic, and the Head Auror -"</p>
+<p>"- and somehow manages to gather Dumbledore, the Minister of Magic, and the Head Auror —"</p>
 
 <p>"He <i>didn't!</i> " said Hermione.</p>
 
@@ -156,7 +156,7 @@
 
 <p>Hermione had to agree with that.</p>
 
-<p>Soon Harry was done with his book while Hermione was only halfway through hers - hers was a much more difficult book than Harry's, but she still felt embarrassed about that. And then she had to put <i>Magical Mnemonics</i> back on the shelf and drag herself away, because it was time for her to face the most dreaded class in Hogwarts, BROOMSTICK RIDING.</p>
+<p>Soon Harry was done with his book while Hermione was only halfway through hers — hers was a much more difficult book than Harry's, but she still felt embarrassed about that. And then she had to put <i>Magical Mnemonics</i> back on the shelf and drag herself away, because it was time for her to face the most dreaded class in Hogwarts, BROOMSTICK RIDING.</p>
 
 <p>Harry tagged along as she walked there, even though his own class wasn't until an hour and a half later, like a fighter jet escorting a sad little propeller plane on its way to its own funeral.</p>
 
@@ -190,7 +190,7 @@
 
 <p>Hermione didn't think she'd quite caught all the problems. "Can you all try it again?"</p>
 
-<p>An hour later Hermione had concluded that (1), Leanne and Megan were sort of sloppy, but if you asked them to keep practicing something, they would, (2) Hannah and Susan were focused and driven to the point where you had to keep telling them to <i>slow down</i> and <i>relax</i> and <i>think</i> about things instead of <i>trying</i> so hard - it was odd to think that those two would soon be <i>hers</i> - and (3) she liked helping Hufflepuffs, the whole study hall had a very cheerful atmosphere.</p>
+<p>An hour later Hermione had concluded that (1), Leanne and Megan were sort of sloppy, but if you asked them to keep practicing something, they would, (2) Hannah and Susan were focused and driven to the point where you had to keep telling them to <i>slow down</i> and <i>relax</i> and <i>think</i> about things instead of <i>trying</i> so hard — it was odd to think that those two would soon be <i>hers</i> — and (3) she liked helping Hufflepuffs, the whole study hall had a very cheerful atmosphere.</p>
 
 <p>When she left for dinner, she found the Boy-Who-Lived reading a book while he waited to escort her. It made her feel flattered, and also a little worried because Harry didn't seem to really talk to <i>anyone</i> besides her.</p>
 
@@ -222,11 +222,11 @@
 
 <p>But she couldn't find the words, and she knew that Harry would never believe her.</p>
 
-<p>"Hermione, I've talked to older students," Harry said. "Professor Quirrell could be the <i>only</i> competent Defense Professor we get in all seven years at Hogwarts. Anything else we can learn later. If we want to study Defense, we have to do it <i>this year.</i> The students who sign up for the extracurricular stuff are going to be learning huge amounts, way beyond what the Ministry thinks first-years are supposed to study - did you know we're going to be learning the Patronus Charm? In <i>January?</i> "</p>
+<p>"Hermione, I've talked to older students," Harry said. "Professor Quirrell could be the <i>only</i> competent Defense Professor we get in all seven years at Hogwarts. Anything else we can learn later. If we want to study Defense, we have to do it <i>this year.</i> The students who sign up for the extracurricular stuff are going to be learning huge amounts, way beyond what the Ministry thinks first-years are supposed to study — did you know we're going to be learning the Patronus Charm? In <i>January?</i> "</p>
 
 <p>"The <i>Patronus Charm?</i> " Hermione said, her voice going up in surprise.</p>
 
-<p>Her books said that was one of the brightest magics known, a weapon against the Darkest creatures, cast with pure positive emotions. It wasn't something she'd expect the evil Professor Quirrell to teach - or arrange to be taught, since Hermione couldn't imagine he could do the spell himself.</p>
+<p>Her books said that was one of the brightest magics known, a weapon against the Darkest creatures, cast with pure positive emotions. It wasn't something she'd expect the evil Professor Quirrell to teach — or arrange to be taught, since Hermione couldn't imagine he could do the spell himself.</p>
 
 <p>"Yes," Harry said. "Students don't usually learn the Patronus Charm until their fifth years or even later! But Professor Quirrell says the Ministry schedules were made up by talking Flobberworms, and the ability to cast the Patronus Charm depends on emotions more than magical strength. Professor Quirrell says that he thinks most students do <i>way</i> less than they can, and this year he's going to prove it."</p>
 
@@ -238,7 +238,7 @@
 
 <p>Besides, she didn't want to <i>lose</i>, and if she wanted to win she had to learn.</p>
 
-<p>"So you <i>will</i> be in the armies, then?" Harry's voice was suddenly enthusiastic. "That's awesome, Hermione! I've already gotten my list of soldiers, but I'm sure Professor Quirrell will let me add one more, or trade -"</p>
+<p>"So you <i>will</i> be in the armies, then?" Harry's voice was suddenly enthusiastic. "That's awesome, Hermione! I've already gotten my list of soldiers, but I'm sure Professor Quirrell will let me add one more, or trade —"</p>
 
 <p>"I'm not joining <i>your</i> army." Hermione's voice was sharp. She knew it was a reasonable assumption but it <i>still</i> annoyed her.</p>
 
@@ -300,11 +300,11 @@
 
 <p>Professor Quirrell looked at Draco. "Because, Mr. Malfoy, no matter how hard he tries, he'll never be able to keep up with you or Mr. Potter."</p>
 
-<p>The shock of it staggered Draco. "You can't believe <i>Granger</i> is going to -"</p>
+<p>The shock of it staggered Draco. "You can't believe <i>Granger</i> is going to —"</p>
 
 <p>"He's gambling on her," Harry said quietly. "It's not guaranteed. The odds aren't even good. She'll probably never give us a good fight, and even if she does, it may take her months to learn. But she's the only one in our year with any chance at all of growing to beat us."</p>
 
-<p>Draco's hands twitched but didn't clench into fists. Showing up as your supporter and then backing out was a classic undermining tactic, so Harry Potter <i>was</i> in it with Granger and <i>that</i> implied -</p>
+<p>Draco's hands twitched but didn't clench into fists. Showing up as your supporter and then backing out was a classic undermining tactic, so Harry Potter <i>was</i> in it with Granger and <i>that</i> implied —</p>
 
 <p>"But Professor," Harry went on smoothly, "I'm worried Hermione will be <i>miserable</i> as the general of an army. I'm speaking as her friend now, Professor Quirrell. The competition might be good for Draco and me, but what you're asking her to do isn't good for <i>her!</i> "</p>
 
@@ -478,7 +478,7 @@
 
 <p>It was probably time to change the subject.</p>
 
-<p>"Anyway, are you doing anything special for tomorrow?" said Hermione. "It's -"</p>
+<p>"Anyway, are you doing anything special for tomorrow?" said Hermione. "It's —"</p>
 
 <p>Her voice cut off abruptly as she realized.</p>
 
