--- a/030.htm
+++ b/030.htm
@@ -48,7 +48,7 @@
 
 <p>And lo, Harry smiled, because he understood what this part of Professor Quirrell's master plan was about; and Harry was taking full advantage of it for his <i>own</i> purposes, too.</p>
 
-<p>There was a legendary episode in social psychology called the Robbers Cave experiment. It had been set up in the bewildered aftermath of World War II, with the intent of investigating the causes and remedies of conflicts between groups. The scientists had set up a summer camp for 22 boys from 22 different schools, selecting them to all be from stable middle-class families. The first phase of the experiment had been intended to investigate what it took to <i>start</i> a conflict between groups. The 22 boys had been divided into two groups of 11 -</p>
+<p>There was a legendary episode in social psychology called the Robbers Cave experiment. It had been set up in the bewildered aftermath of World War II, with the intent of investigating the causes and remedies of conflicts between groups. The scientists had set up a summer camp for 22 boys from 22 different schools, selecting them to all be from stable middle-class families. The first phase of the experiment had been intended to investigate what it took to <i>start</i> a conflict between groups. The 22 boys had been divided into two groups of 11 —</p>
 
 <p>- and this had been quite sufficient.</p>
 
@@ -154,17 +154,17 @@
 
 <hr />
 
-<p>The tension rose and rose, as Harry and the nineteen other soldiers who remained waited for the aerial warriors to report back. It shouldn't take long, broomsticks were fast and the distances in the forest were not great -</p>
+<p>The tension rose and rose, as Harry and the nineteen other soldiers who remained waited for the aerial warriors to report back. It shouldn't take long, broomsticks were fast and the distances in the forest were not great —</p>
 
 <p>Two broomsticks approached, at speed, from the direction of Draco's camp, and all the soldiers tensed. They weren't executing the maneuvers that were today's code for a <i>friendly</i> broomstick.</p>
 
-<p>" <i>Scatter and fire!</i> " roared General Potter, and then suited action to words, scurrying off at top speed toward the forest cover; and then as soon as Harry was among the trees, he spun back, raised his wand, tried to seek out the broomstick in the sky -</p>
+<p>" <i>Scatter and fire!</i> " roared General Potter, and then suited action to words, scurrying off at top speed toward the forest cover; and then as soon as Harry was among the trees, he spun back, raised his wand, tried to seek out the broomstick in the sky —</p>
 
 <p>"Clear!" shouted a voice. "They're heading back!"</p>
 
 <p>Harry gave a mental shrug. There'd been no way to prevent Draco from obtaining that information, and he'd only learn that they'd been standing still.</p>
 
-<p>And the Chaotics slowly emerged from the forest -</p>
+<p>And the Chaotics slowly emerged from the forest —</p>
 
 <p>"Broomstick approaching from Granger's direction!" yelled another voice. "I think it's Green Leader, he did the dip and roll!"</p>
 
@@ -172,7 +172,7 @@
 
 <p>"Granger has divided her forces in two!" yelled Nott as he hovered on his broomstick. There was sweat staining his uniform, and all the reserve was gone from his voice. "She's attacking both armies! Two brooms covering each force, they pursued me halfway here!"</p>
 
-<p><i>Divided her army, what on Earth -</i></p>
+<p><i>Divided her army, what on Earth —</i></p>
 
 <p>A large force concentrating fire on a small force could deplete that force rapidly without taking much damage in return. If twenty soldiers faced ten soldiers, twenty sleep spells would be aimed at the ten soldiers with only ten sleep spells going the other way, so unless every one of those first sleep spells hit its target, the smaller force would lose more people than they could manage to take down with them. <i>Defeated in detail</i> was the military term for what happened when you divided your forces like that. What could Hermione <i>possibly</i> be thinking...</p>
 
@@ -260,7 +260,7 @@
 
 <p>Neville's comrades moved away from him. They would still support each other, but if you clustered together, the enemy would have a much easier time hitting you; fire aimed at one of your comrades might miss and get you instead. You would be a lot harder to hit if you spread out and moved as fast as you could.</p>
 
-<p>The first thing General Potter had done, during their training session, was get them to fire on each other when both sides were running fast, or both stood still and took time to aim, or one was moving and one was standing still - the reverse charm to the Sleep Hex was simple, though you weren't allowed to use it during real battles. General Potter had carefully recorded everything that happened, done some figuring and ciphering, and then announced that it made more sense for them to focus, not on slowing down to aim carefully, but on moving fast so they wouldn't get hit.</p>
+<p>The first thing General Potter had done, during their training session, was get them to fire on each other when both sides were running fast, or both stood still and took time to aim, or one was moving and one was standing still — the reverse charm to the Sleep Hex was simple, though you weren't allowed to use it during real battles. General Potter had carefully recorded everything that happened, done some figuring and ciphering, and then announced that it made more sense for them to focus, not on slowing down to aim carefully, but on moving fast so they wouldn't get hit.</p>
 
 <p>It still bothered Neville a little not to be marching side-by-side with his comrades, but the scary battlecries they'd learned were already thundering in his head and that made up for a lot.</p>
 
@@ -270,9 +270,9 @@
 
 <p>" <i>Contego,</i>" murmured the army, and the circular screens sprang into existence before their heads and chests.</p>
 
-<p>A sharp taste filled Neville's mouth. General Potter wouldn't have ordered them to cast shields unless they were almost in range. Neville could see the uniformed shapes of Dragons moving through the dense screens of trees, and the Dragons would be seeing them as well -</p>
+<p>A sharp taste filled Neville's mouth. General Potter wouldn't have ordered them to cast shields unless they were almost in range. Neville could see the uniformed shapes of Dragons moving through the dense screens of trees, and the Dragons would be seeing them as well —</p>
 
-<p>" <i>Attack!</i> " came a cry from the distance, the voice of Draco Malfoy, and General Potter bellowed, " <i>Charge -</i>"</p>
+<p>" <i>Attack!</i> " came a cry from the distance, the voice of Draco Malfoy, and General Potter bellowed, " <i>Charge —</i>"</p>
 
 <p>All the adrenaline in Neville's blood was unleashed, and his legs took over, sending him flying faster than he'd ever run before, straight toward the enemy, knowing without needing to look that all his comrades were doing the same.</p>
 
@@ -280,13 +280,13 @@
 
 <p>There was a soundless impact as a sleep spell wasted itself against Neville's shield. If there'd been other spells fired, they hadn't hit.</p>
 
-<p>Neville saw the brief look of fear on Wayne Hopkins's face, as he stood besides two Gryffindors Neville didn't recognize, and then -</p>
+<p>Neville saw the brief look of fear on Wayne Hopkins's face, as he stood besides two Gryffindors Neville didn't recognize, and then —</p>
 
-<p>- Neville dropped the Simple Shield and fired at Wayne -</p>
+<p>- Neville dropped the Simple Shield and fired at Wayne —</p>
 
-<p>- missed -</p>
+<p>- missed —</p>
 
-<p>- his racing legs went <i>straight</i> past the enemy grouping and toward another three Dragons, their wands coming up on him, their mouths opening -</p>
+<p>- his racing legs went <i>straight</i> past the enemy grouping and toward another three Dragons, their wands coming up on him, their mouths opening —</p>
 
 <p>- not even thinking about it, Neville dived down to the forest floor just as three voices cried " <i>Somnium!</i> "</p>
 
@@ -312,13 +312,13 @@
 
 <p>Neville's ears heard the two Dragons actually jump over his prone body as they ran off.</p>
 
-<p>Neville opened his eyes, pushed himself to his feet a bit painfully, and then pointed his wand and said the new charm that General Potter had taught them all. They couldn't do real illusion spells to confuse the enemy, but even at their age they could -</p>
+<p>Neville opened his eyes, pushed himself to his feet a bit painfully, and then pointed his wand and said the new charm that General Potter had taught them all. They couldn't do real illusion spells to confuse the enemy, but even at their age they could —</p>
 
 <p>" <i>Ventriliquo,</i>" whispered Neville, pointing the wand to one side of Justin and the other boy, and then yelled, " <i>For Cthulhu and glory!</i> "</p>
 
 <p>Justin and the other boy stopped abruptly, turning their shields toward where Neville had moved his battlecry, and that was when multiple cries of " <i>Somnium!</i> " filled the air and the other boy dropped before Neville was finished aiming.</p>
 
-<p>" <i>The last one's mine!</i> " yelled Neville, and then he started sprinting straight toward Justin, who'd been mean to him until the older Hufflepuffs straightened him out. Neville was surrounded by his comrades and <i>that</i> meant -</p>
+<p>" <i>The last one's mine!</i> " yelled Neville, and then he started sprinting straight toward Justin, who'd been mean to him until the older Hufflepuffs straightened him out. Neville was surrounded by his comrades and <i>that</i> meant —</p>
 
 <p>" <i>Special attack, Chaotic Leap!</i> " howled Neville as he ran, and felt his body lighten, then lighten twice again, as his comrades got their wands turned toward him and quietly cast the Hover Charm, and Neville raised his left hand and snapped his fingers and then used his legs to push off the ground as hard as he could and <i>soared</i> through the air. Sheer shock painted Justin's face as Neville went <i>over</i> the other boy's shield and pointed his wand down at the form passing beneath him and cried " <i>Somnium!</i> "</p>
 
@@ -326,7 +326,7 @@
 
 <p>Neville didn't quite get his feet turned around properly and rather plowed into the ground as he landed, but two out of three of the other Chaos Legionnaires had managed to hold their wands on him throughout and he didn't hit very hard.</p>
 
-<p>And Neville got to his feet, panting. He knew he should be moving, people were yelling "Somnium!" all over the place -</p>
+<p>And Neville got to his feet, panting. He knew he should be moving, people were yelling "Somnium!" all over the place —</p>
 
 <p>" <i>I am Neville, the last scion of Longbottom!</i> " screamed Neville to the sky above, holding his wand pointed straight up as though to challenge the blazing blue heaven itself, knowing that nothing after this day would ever be the same again. " <i>Neville of Chaos! Face me if you da-</i>"</p>
 
@@ -346,7 +346,7 @@
 
 <p><i>It's a game. You're not trying to</i> kill <i>him. Don't throw away all your future plans for a game...</i></p>
 
-<p>Harry could <i>see</i> the pattern, he could <i>see</i> how Mr. Goyle was weaving, he could <i>see</i> how and when they all needed to fire in order to create a web of shots that Mr. Goyle wouldn't be able to dodge, but he just hadn't been able to <i>explain</i> it fast enough to his soldiers, they couldn't coordinate their shots well enough, and now they didn't have enough people left to do it -</p>
+<p>Harry could <i>see</i> the pattern, he could <i>see</i> how Mr. Goyle was weaving, he could <i>see</i> how and when they all needed to fire in order to create a web of shots that Mr. Goyle wouldn't be able to dodge, but he just hadn't been able to <i>explain</i> it fast enough to his soldiers, they couldn't coordinate their shots well enough, and now they didn't have enough people left to do it —</p>
 
 <p><i>I refuse to lose, not like this, not my whole army to one soldier!</i></p>
 
@@ -354,7 +354,7 @@
 
 <p><i>SCREW THIS.</i></p>
 
-<p>Harry's wand came up, focusing on Mr. Goyle, Harry's mind visualized the pattern, and Harry's lips opened and his voice screamed -</p>
+<p>Harry's wand came up, focusing on Mr. Goyle, Harry's mind visualized the pattern, and Harry's lips opened and his voice screamed —</p>
 
 <p> " <i>Luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>luminos</i> <i>-"<br /></i></p>
 
@@ -406,7 +406,7 @@
 
 <p>It developed that Draco's shield was a version of the standard <i>Protego</i> which had several disadvantages, the most important of which was that the shield couldn't move with the caster.</p>
 
-<p>The upside - or from Harry's perspective, downside - was that it was easier to learn, easier to cast, and much easier to sustain for long times.</p>
+<p>The upside — or from Harry's perspective, downside — was that it was easier to learn, easier to cast, and much easier to sustain for long times.</p>
 
 <p>They would need to hammer the shield with attack spells in order to bring it down.</p>
 
@@ -444,7 +444,7 @@
 
 <p>A thin, folded blanket came out of Harry's pouch.</p>
 
-<p>Harry sat down next to the shimmering shield, and pulled the blanket over his head so no one could see what he did - except Draco, of course.</p>
+<p>Harry sat down next to the shimmering shield, and pulled the blanket over his head so no one could see what he did — except Draco, of course.</p>
 
 <p>From Harry's pouch came a car battery and a set of jumper cables.</p>
 
@@ -482,11 +482,11 @@
 
 <p>" <i>Don't be frightened, don't be sad,<br /> We'll only hurt you if you're bad...</i>"</p>
 
-<p>" <i>Granger cheated!</i> " burst out Draco inside the shield. "She woke up her soldiers! Why doesn't Professor Quirrell -"</p>
+<p>" <i>Granger cheated!</i> " burst out Draco inside the shield. "She woke up her soldiers! Why doesn't Professor Quirrell —"</p>
 
 <p>"Let me guess," Harry said, the sickness already churning in his stomach. He really hated losing. "It was a very easy battle, right? They dropped like flies?"</p>
 
-<p>"Yes," Draco said. "We got them all on the first shot -"</p>
+<p>"Yes," Draco said. "We got them all on the first shot —"</p>
 
 <p>The look of horrified realization spread from Draco to the Chaos Legionnaires.</p>
 
