--- a/032.htm
+++ b/032.htm
@@ -1,12 +1,12 @@
-<p>"But Headmaster," Harry argued, some of his desperation leaking into his voice, "leaving all of my assets in one undiversified vault full of gold coins - it's crazy, Headmaster! It's like, I don't know, doing Transfiguration experiments without consulting a recognized authority! You just don't do that with money!"</p>
+<p>"But Headmaster," Harry argued, some of his desperation leaking into his voice, "leaving all of my assets in one undiversified vault full of gold coins — it's crazy, Headmaster! It's like, I don't know, doing Transfiguration experiments without consulting a recognized authority! You just don't do that with money!"</p>
 
-<p>From the lined face of the old wizard - underneath a festive holiday hat like a catastrophic automobile collision between cars of green and red cloth - a grave, sad look peered out at Harry.</p>
+<p>From the lined face of the old wizard — underneath a festive holiday hat like a catastrophic automobile collision between cars of green and red cloth — a grave, sad look peered out at Harry.</p>
 
 <p>"I'm sorry, Harry," said Dumbledore, "and I do apologize, but allowing you control over your own finances would give you far too much independence of action."</p>
 
 <p>Harry's mouth opened and no sound came out. He was, literally, speechless.</p>
 
-<p>"I will permit you to withdraw five Galleons for Christmas presents," said Dumbledore, "which is more than any boy your age should spend, but poses no threat, I think -"</p>
+<p>"I will permit you to withdraw five Galleons for Christmas presents," said Dumbledore, "which is more than any boy your age should spend, but poses no threat, I think —"</p>
 
 <p>" <i>I can't believe you just said that!</i> " the words burst out of Harry's mouth. "You <i>admit</i> to being that manipulative?"</p>
 
@@ -36,7 +36,7 @@
 
 <p>That made Professor Quirrell smile. It went all the way to his eyes.</p>
 
-<p>"Well," said Harry, "at least you didn't suggest getting them a pet rat -" Harry's mouth snapped shut, and he was regretting the words almost as soon as they were out of his mouth.</p>
+<p>"Well," said Harry, "at least you didn't suggest getting them a pet rat —" Harry's mouth snapped shut, and he was regretting the words almost as soon as they were out of his mouth.</p>
 
 <p>"Pardon me?" said Professor Quirrell.</p>
 
@@ -50,7 +50,7 @@
 
 <p>They walked on for a good way before Professor Quirrell spoke again, his voice practically dripping with distaste. "The Weasley twins are using secondhand wands, Mr. Potter. They would be reminded of your generosity with every Charm they cast."</p>
 
-<p>Harry clapped his hands together in involuntary excitement. Just put the money on account at Ollivander's, and tell Mr. Ollivander to never refund it - no, better yet, to send it to Lucius Malfoy if the Weasley twins didn't show up before the start of their next school year. "That's <i>brilliant</i>, Professor!"</p>
+<p>Harry clapped his hands together in involuntary excitement. Just put the money on account at Ollivander's, and tell Mr. Ollivander to never refund it — no, better yet, to send it to Lucius Malfoy if the Weasley twins didn't show up before the start of their next school year. "That's <i>brilliant</i>, Professor!"</p>
 
 <p>Professor Quirrell did not look like he appreciated the compliment. "I suppose I can tolerate Christmas in <i>that</i> spirit, Mr. Potter, though only barely." Then he smiled slightly. "Of course that will cost you fourteen Galleons, and you only have five."</p>
 
