--- a/035.htm
+++ b/035.htm
@@ -4,19 +4,19 @@
 
 <p>"I am trying," said Professor Quirrell quietly, "to make allowances for the fact that you are young. That I myself, at the same age, was a quite extraordinary fool. You speak with adult style and meddle in adult games, and sometimes I forget that you are only a meddler. I hope, Mr. Potter, that your childish meddling has not just killed you, ruined your country, and lost the next war."</p>
 
-<p>It was very hard for Harry to control his breathing. "Professor Quirrell, I said a good deal less than I wished to say, but I had to say something. Your proposals are extremely alarming to anyone who has the slightest familiarity with Muggle history over the last century. The Italian fascists, some very nasty people, got their name from the <i>fasces,</i> a bundle of rods bound together to symbolize the idea that unity is strength -"</p>
+<p>It was very hard for Harry to control his breathing. "Professor Quirrell, I said a good deal less than I wished to say, but I had to say something. Your proposals are extremely alarming to anyone who has the slightest familiarity with Muggle history over the last century. The Italian fascists, some very nasty people, got their name from the <i>fasces,</i> a bundle of rods bound together to symbolize the idea that unity is strength —"</p>
 
 <p>"So the nasty Italian fascists believed that unity is stronger than division," said Professor Quirrell. Sharpness was beginning to creep into his voice. "Perhaps they also believed that the sky is blue, and advocated a policy of not dropping rocks on your head."</p>
 
-<p><i>Reversed stupidity is not intelligence; the world's stupidest person may say the sun is shining, but that doesn't make it dark out...</i> "Fine, you're right, that was an ad hominem argument, it's not wrong <i>because</i> the fascists said it. But Professor Quirrell, you can't have everyone in a country take the Mark of one dictator! It's a single point of failure! Look, I'll put it this way. Suppose the enemy just Imperiuses whoever controls the Mark -"</p>
+<p><i>Reversed stupidity is not intelligence; the world's stupidest person may say the sun is shining, but that doesn't make it dark out...</i> "Fine, you're right, that was an ad hominem argument, it's not wrong <i>because</i> the fascists said it. But Professor Quirrell, you can't have everyone in a country take the Mark of one dictator! It's a single point of failure! Look, I'll put it this way. Suppose the enemy just Imperiuses whoever controls the Mark —"</p>
 
 <p>"Powerful wizards are not so easy to Imperius," said Professor Quirrell dryly. "And if you cannot find a worthy leader, you are in any case doomed. But worthy leaders do exist; the question is whether the people shall follow them."</p>
 
-<p>Harry raked his hands through his hair in frustration. He wanted to call a time-out and make Professor Quirrell read <i>The Rise and Fall of the Third Reich</i> and then start the conversation over again. "I don't suppose that if I suggested democracy was a better form of government than dictatorship -"</p>
+<p>Harry raked his hands through his hair in frustration. He wanted to call a time-out and make Professor Quirrell read <i>The Rise and Fall of the Third Reich</i> and then start the conversation over again. "I don't suppose that if I suggested democracy was a better form of government than dictatorship —"</p>
 
 <p>"I see," said Professor Quirrell. His eyes closed briefly, then opened. "Mr. Potter, the stupidity of Quidditch is transparent to you because you did not grow up revering the game. If you had never heard of elections, Mr. Potter, and you simply <i>saw what is there</i>, what you saw would not please you. Look to our elected Minister of Magic. Is he the wisest, the strongest, the greatest of our nation? No; he is a buffoon who is owned in fee simple by Lucius Malfoy. Wizards went to the polls and chose between Cornelius Fudge and Tania Leach, who had competed with each other in a grand and entertaining contest after the <i>Daily Prophet,</i> which Lucius Malfoy also controls, decided that they were the only serious candidates. That Cornelius Fudge was genuinely selected as the best leader our country could offer is not a suggestion anyone could make with a straight face. It is no different in the Muggle world, from what I have heard and seen; the last Muggle newspaper I read mentioned that the previous President of the United States had been a retired movie actor. If you had not grown up with elections, Mr. Potter, they would be as transparently silly to you as Quidditch."</p>
 
-<p>Harry sat there with his mouth open, struggling for words. "The point of elections isn't to produce the one best leader, it's to keep politicians scared enough of the voters that they don't go completely evil like dictators do -"</p>
+<p>Harry sat there with his mouth open, struggling for words. "The point of elections isn't to produce the one best leader, it's to keep politicians scared enough of the voters that they don't go completely evil like dictators do —"</p>
 
 <p>"The last war, Mr. Potter, was fought between the Dark Lord and Dumbledore. And while Dumbledore was a flawed leader who was losing the war, it is <i>ridiculous</i> to suggest that <i>any</i> of the Ministers of Magic elected during that period could have taken Dumbledore's place! Strength flows from powerful wizards and their followers, not from elections and the fools they elect. That is the lesson of magical Britain's recent history; and I doubt that the next war will teach you a lesson any different. <i>If</i> you survive it, Mr. Potter, which you will <i>not</i> do unless you abandon the enthusiastic illusions of childhood!"</p>
 
@@ -36,11 +36,11 @@
 
 <p>"Blaise Zabini," said the Defense Professor, straightening; his eyes were set like dark stones within his face, and his voice sent a shiver of fear down Blaise's spine.</p>
 
-<p><i>He can't do anything against me, I just have to remember that -</i></p>
+<p><i>He can't do anything against me, I just have to remember that —</i></p>
 
 <p>"I believe," said Professor Quirrell, in a clear, cold voice, "that I have already guessed the name of your employer. But I would hear it from your own lips, and tell me also the price that bought you."</p>
 
-<p>Blaise knew he was sweating under his robes, and that the moisture would be already visible on his forehead. "I got a chance to show I was better than all three generals, and I took it. A lot of people hate me now, but there're also plenty of Slytherins who'll love me for it. What makes you think I'm -"</p>
+<p>Blaise knew he was sweating under his robes, and that the moisture would be already visible on his forehead. "I got a chance to show I was better than all three generals, and I took it. A lot of people hate me now, but there're also plenty of Slytherins who'll love me for it. What makes you think I'm —"</p>
 
 <p>"You did not devise the plan of today's battle, Mr. Zabini. Tell me who did."</p>
 
@@ -130,7 +130,7 @@
 
 <p><i>Aftermath: Blaise Zabini.</i></p>
 
-<p>Blaise strolled through the hallways with careful, self-imposed slowness, his heart beating wildly as he tried to calm down -</p>
+<p>Blaise strolled through the hallways with careful, self-imposed slowness, his heart beating wildly as he tried to calm down —</p>
 
 <p>"Ahem," said a dry, whispering voice from a shadowy alcove as he passed.</p>
 
@@ -176,7 +176,7 @@
 
 <p>But then Mum hadn't betrayed seven different husbands at the <i>same time.</i> When you looked at it <i>that</i> way, he was still doing better than her.</p>
 
-<p>And Blaise Zabini went on walking toward the Headmaster's office, smiling, content to be a quintuple agent -</p>
+<p>And Blaise Zabini went on walking toward the Headmaster's office, smiling, content to be a quintuple agent —</p>
 
 <p>For a moment the boy stumbled, but then straightened, shaking off the odd feeling of disorientation.</p>
 
@@ -202,9 +202,9 @@
 
 <p>By the time Hermione had got to the office of her favorite professor, her mind was all a-whirl with speculations. Was there something wrong with her Transfiguration scores? But then why would Professor McGonagall say not to tell anyone? It was probably about Harry practicing his partial Transfiguration...</p>
 
-<p>Professor McGonagall's face looked worried, not stern, as Hermione seated herself in front of the desk - trying to keep her eyes from going to the nest of cubbyholes containing Professor McGonagall's homework, she'd always wondered what sort of work grownups had to do to keep the school running and whether they could use any help from her...</p>
+<p>Professor McGonagall's face looked worried, not stern, as Hermione seated herself in front of the desk — trying to keep her eyes from going to the nest of cubbyholes containing Professor McGonagall's homework, she'd always wondered what sort of work grownups had to do to keep the school running and whether they could use any help from her...</p>
 
-<p>"Miss Granger," said Professor McGonagall, "let me start by saying that I already know about the Headmaster asking you to make that wish -"</p>
+<p>"Miss Granger," said Professor McGonagall, "let me start by saying that I already know about the Headmaster asking you to make that wish —"</p>
 
 <p>"He <i>told</i> you?" blurted Hermione in startlement. The Headmaster had said no one else was supposed to know!</p>
 
@@ -226,7 +226,7 @@
 
 <p>"But it's <i>good</i> for students to be strong and have courage," said Hermione. "That's why you suggested Gryffindor for me, wasn't it?"</p>
 
-<p>Professor McGonagall smiled wryly. "Perhaps I was only being selfish, wanting you for my own House. Did the Sorting Hat offer you - no, I should not have asked."</p>
+<p>Professor McGonagall smiled wryly. "Perhaps I was only being selfish, wanting you for my own House. Did the Sorting Hat offer you — no, I should not have asked."</p>
 
 <p>"It told me I might go anywhere but Slytherin," said Hermione. She'd <i>almost</i> asked why she wasn't good enough for Slytherin, before she'd managed to stop herself... "So I <i>have</i> courage, Professor!"</p>
 
@@ -240,21 +240,21 @@
 
 <p><i>Aftermath, Draco Malfoy:</i></p>
 
-<p>Neither of them really wanted to do anything complicated that Saturday, not after fighting a battle earlier. So Draco was just sitting in an unused classroom and trying to read a book called <i>Thinking Physics.</i> It was one of the most fascinating things that Draco had ever read in his life, at least the parts he could understand, at least when the <i>accursed idiot</i> who refused to let his books out of his sight could manage to <i>shut up</i> and let Draco <i>concentrate</i> -</p>
+<p>Neither of them really wanted to do anything complicated that Saturday, not after fighting a battle earlier. So Draco was just sitting in an unused classroom and trying to read a book called <i>Thinking Physics.</i> It was one of the most fascinating things that Draco had ever read in his life, at least the parts he could understand, at least when the <i>accursed idiot</i> who refused to let his books out of his sight could manage to <i>shut up</i> and let Draco <i>concentrate</i> —</p>
 
 <p>"Hermione Granger is a <i>muuudbloood,</i>" sang Harry Potter from where he sat at a nearby desk, reading a far more advanced book of his own.</p>
 
 <p>"I know what you're trying to do," said Draco calmly without looking up from the pages. "It's not going to work. We're still ganging up and crushing you."</p>
 
-<p>"A <i>Maaaalfoy</i> is working with a <i>muuudbloood,</i> what will all your father's <i>frieeeends</i> think -"</p>
+<p>"A <i>Maaaalfoy</i> is working with a <i>muuudbloood,</i> what will all your father's <i>frieeeends</i> think —"</p>
 
 <p>"They'll think Malfoys aren't as easily manipulated as <i>you</i> seem to believe, <i>Potter!</i> "</p>
 
 <p>The Defense Professor was crazier than Dumbledore, no future saviour of the world could ever be this <i>childish</i> and <i>undignified</i> at any age.</p>
 
-<p>"Hey, Draco, you know what's really going to suck? <i>You</i> know that Hermione Granger has two copies of the magical allele, just like you and just like me, but all your classmates in Slytherin don't know that and <i>yooouuu're</i> not allowed to <i>explaaaaain</i> -"</p>
+<p>"Hey, Draco, you know what's really going to suck? <i>You</i> know that Hermione Granger has two copies of the magical allele, just like you and just like me, but all your classmates in Slytherin don't know that and <i>yooouuu're</i> not allowed to <i>explaaaaain</i> —"</p>
 
-<p>Draco's fingers were whitening where they gripped the book. Being beaten and spat upon couldn't possibly require this much self-control, and if he didn't get back at Harry soon, he was going to do something incriminating -</p>
+<p>Draco's fingers were whitening where they gripped the book. Being beaten and spat upon couldn't possibly require this much self-control, and if he didn't get back at Harry soon, he was going to do something incriminating —</p>
 
 <p>"So what <i>did</i> you wish the first time?" said Draco.</p>
 
