--- a/036.htm
+++ b/036.htm
@@ -40,7 +40,7 @@
 
 <p>"Excuse me," Harry said, his voice trembling, "I'm going to break down and cry now, it doesn't mean there was anything wrong at school."</p>
 
-<p>Harry started to move forward, and then stopped, torn between hugging his father and hugging his mother, he didn't want either one to feel slighted or that Harry loved them more than the other -</p>
+<p>Harry started to move forward, and then stopped, torn between hugging his father and hugging his mother, he didn't want either one to feel slighted or that Harry loved them more than the other —</p>
 
 <p>"You," said his father, "are a very silly boy, Mr. Verres," and he gently took Harry by the shoulders and pushed him into the arms of his mother, who was kneeling down, tears already streaking her cheek.</p>
 
@@ -110,7 +110,7 @@
 
 <p>And then the door opened to reveal a genial man, of fat and rosy cheeks and thinning hair, in a blue button-down shirt straining slightly at the seams.</p>
 
-<p>"Dr. Granger?" Harry's father said briskly, before Harry could even speak. "I'm Michael, and this is Petunia and our son Harry. The food's in the magical trunk," and Dad made a vague gesture behind him - not quite in the direction of the trunk, as it happened.</p>
+<p>"Dr. Granger?" Harry's father said briskly, before Harry could even speak. "I'm Michael, and this is Petunia and our son Harry. The food's in the magical trunk," and Dad made a vague gesture behind him — not quite in the direction of the trunk, as it happened.</p>
 
 <p>"Yes, please, come in," said Leo Granger. He stepped forward and took the wine bottle from the Professor's outstretched hands, with a muttered "Thank you," and then stepped back and waved at the living room. "Have a seat. And," his head turning down to address Harry, "all the toys are downstairs in the basement, I'm sure Herm will be down shortly, it's the first door on your right," and pointed toward a hallway.</p>
 
@@ -148,9 +148,9 @@
 
 <p>There was the sound of footsteps entering the house, and then the same bright voice said, "Gosh! This is a big house! I hope I don't get lost in here!"</p>
 
-<p>Roberta closed up the oven, smiling. She'd been a bit worried about the way Hermione's letters had described the Boy-Who-Lived - though certainly her daughter hadn't said anything indicating that Harry Potter was <i>dangerous;</i> nothing like the dark hints written in the books Roberta had bought, supposedly for Hermione, during their trip to Diagon Alley. Her daughter hadn't said much at all, only that Harry talked like he came out of a book, and Hermione was studying harder than she ever had in her life just to stay ahead of him in class. But from the sound of it, Harry Potter was an ordinary eleven-year-old boy.</p>
+<p>Roberta closed up the oven, smiling. She'd been a bit worried about the way Hermione's letters had described the Boy-Who-Lived — though certainly her daughter hadn't said anything indicating that Harry Potter was <i>dangerous;</i> nothing like the dark hints written in the books Roberta had bought, supposedly for Hermione, during their trip to Diagon Alley. Her daughter hadn't said much at all, only that Harry talked like he came out of a book, and Hermione was studying harder than she ever had in her life just to stay ahead of him in class. But from the sound of it, Harry Potter was an ordinary eleven-year-old boy.</p>
 
-<p>She got to the front door just as her daughter came clattering frantically down the stairs at a speed that didn't look safe at all, Hermione had claimed that witches were more resistant to falls but Roberta wasn't quite sure she believed that -</p>
+<p>She got to the front door just as her daughter came clattering frantically down the stairs at a speed that didn't look safe at all, Hermione had claimed that witches were more resistant to falls but Roberta wasn't quite sure she believed that —</p>
 
 <p>Roberta took in her first sight of Professor and Mrs. Verres, who were both looking rather nervous, just as the boy with the legendary scar on his forehead turned to her daughter and said, now in a lower voice, "Well met on this fairest of evenings, Miss Granger." His hand stretched back, as though offering his parents on a silver platter. "I present to you my father, Professor Michael Verres-Evans, and my mother, Mrs. Petunia Evans-Verres."</p>
 
@@ -160,7 +160,7 @@
 
 <p>The boy swiveled again to regard Hermione. "I'm afraid, Miss Granger," the boy said gravely, "that you and I have been exiled to the labyrinthine recesses of the basement. Let us leave them to their adult conversations, which would no doubt soar far above our own childish intellects, and resume our ongoing discussion of the implications of Humean projectivism for Transfiguration."</p>
 
-<p>"Excuse us, please," said her daughter in a very firm tone, and grabbed the boy by his left sleeve, and dragged him into the hallway - Roberta swiveled helplessly to track them as they went past her, the boy gave her a cheery wave - and then Hermione pulled the boy into the basement access and slammed the door behind her.</p>
+<p>"Excuse us, please," said her daughter in a very firm tone, and grabbed the boy by his left sleeve, and dragged him into the hallway — Roberta swiveled helplessly to track them as they went past her, the boy gave her a cheery wave — and then Hermione pulled the boy into the basement access and slammed the door behind her.</p>
 
 <p>"I, ah, I apologize for..." said Mrs. Verres in a faltering voice.</p>
 
@@ -172,13 +172,13 @@
 
 <p>Her possible future son-in-law.</p>
 
-<p>Roberta had been increasingly apprehensive about giving her daughter over to witchcraft - especially after she'd read the books, put the dates together, and realized that her magical mother had probably been killed at the height of Grindelwald's terror, <i>not</i> died giving birth to her as her father had always claimed. But Professor McGonagall had made other visits after her first trip, to "see how Miss Granger is doing"; and Roberta couldn't help but think that if Hermione said her parents were being troublesome about her witching career, something would be done to <i>fix</i> them...</p>
+<p>Roberta had been increasingly apprehensive about giving her daughter over to witchcraft — especially after she'd read the books, put the dates together, and realized that her magical mother had probably been killed at the height of Grindelwald's terror, <i>not</i> died giving birth to her as her father had always claimed. But Professor McGonagall had made other visits after her first trip, to "see how Miss Granger is doing"; and Roberta couldn't help but think that if Hermione said her parents were being troublesome about her witching career, something would be done to <i>fix</i> them...</p>
 
 <p>Roberta put her best smile on her face, and did what she could to spread some pretended Christmas cheer.</p>
 
 <hr />
 
-<p>The dining room table was much longer than six people - er, four people and two children - really needed, but all of it was draped with a tablecloth of fine white linen, and the dishes had been needlessly transferred to fancy serving plates, which at least were of stainless steel rather than real silver.</p>
+<p>The dining room table was much longer than six people — er, four people and two children — really needed, but all of it was draped with a tablecloth of fine white linen, and the dishes had been needlessly transferred to fancy serving plates, which at least were of stainless steel rather than real silver.</p>
 
 <p>Harry was having a bit of trouble concentrating on the turkey.</p>
 
@@ -254,7 +254,7 @@
 
 <p>Harry had been expecting a rather severe lecture from Hermione.</p>
 
-<p>But after Hermione pulled them into the basement access and closed the door behind them, she'd turned around -</p>
+<p>But after Hermione pulled them into the basement access and closed the door behind them, she'd turned around —</p>
 
 <p>- and was smiling, genuinely so far as Harry could tell.</p>
 
@@ -264,7 +264,7 @@
 
 <p>Hermione shrugged, and said, "Because that's the way parents <i>should</i> be?"</p>
 
-<p>"No," Harry said, his voice low and intense, "it's not, my father <i>never</i> puts me down - well, he <i>does</i>, but never like that -"</p>
+<p>"No," Harry said, his voice low and intense, "it's not, my father <i>never</i> puts me down — well, he <i>does</i>, but never like that —"</p>
 
 <p>Hermione held up a single finger, and Harry waited, watching her search for words. It took her a while before she said, "Harry... Professor McGonagall and Professor Flitwick like me because I'm the most talented witch of my generation and the brightest star of Hogwarts. And Mum and Dad don't know that, and you'll never be able to tell them, but they love me anyway. Which means that everything is just the way it should be, at Hogwarts and at home. And since they're <i>my</i> parents, Mr. Potter, <i>you</i> don't get to argue." She was once again smiling her mysterious smile from dinnertime, and looking at Harry very fondly. " <i>Is</i> that clear, Mr. Potter?"</p>
 
