--- a/037.htm
+++ b/037.htm
@@ -24,11 +24,11 @@
 
 <p>"No one's supposed to know where I am!" said Harry, still keeping the shriek quiet. "Even owls are supposed to deliver my mail to Hogwarts, not here!" Harry had agreed to that willingly; it would be silly if a Death Eater could win the whole war at any time just by owling him a magically triggered hand grenade.</p>
 
-<p>Professor Quirrell was grinning, from where he stood in the backyard beyond the window. "Oh, I shouldn't worry, Mr. Potter. You <i>are</i> well protected against locating Charms, and no blood purist is likely to think of consulting a phone book." His grin grew wider. "And it did take considerable effort to cross the wards that the Headmaster put around this house - though of course anyone who knew your address could simply wait outside and attack you the next time you left."</p>
+<p>Professor Quirrell was grinning, from where he stood in the backyard beyond the window. "Oh, I shouldn't worry, Mr. Potter. You <i>are</i> well protected against locating Charms, and no blood purist is likely to think of consulting a phone book." His grin grew wider. "And it did take considerable effort to cross the wards that the Headmaster put around this house — though of course anyone who knew your address could simply wait outside and attack you the next time you left."</p>
 
 <p>Harry stared at Professor Quirrell for a while. "What are you <i>doing</i> here?" Harry said finally.</p>
 
-<p>The smile left Professor Quirrell's face. "I've come to apologize, Mr. Potter," the Defense Professor said quietly. "I should not have spoken to you so harshly as I -"</p>
+<p>The smile left Professor Quirrell's face. "I've come to apologize, Mr. Potter," the Defense Professor said quietly. "I should not have spoken to you so harshly as I —"</p>
 
 <p>"Don't," Harry said. He looked down at the blanket that he was clutching around his pajamas. "Just don't."</p>
 
@@ -44,7 +44,7 @@
 
 <p>"But," Harry said, still quietly, "you and I really must speak further on politics, at some point."</p>
 
-<p>Professor Quirrell sighed. "I know you dislike condescension, Mr. Potter -"</p>
+<p>Professor Quirrell sighed. "I know you dislike condescension, Mr. Potter —"</p>
 
 <p>That was a bit of an understatement.</p>
 
