--- a/038.htm
+++ b/038.htm
@@ -26,23 +26,23 @@
 
 <p>" <i>Harry Potter?</i> " gasped the vendor.</p>
 
-<p>"No, Mr. Durian," said Harry, eyes dipping briefly to the man's nametag, "just an amazing imitation -"</p>
+<p>"No, Mr. Durian," said Harry, eyes dipping briefly to the man's nametag, "just an amazing imitation —"</p>
 
 <p>And then Harry's voice stopped in his throat, as he caught sight of the top fold of the <i>Quibbler.</i></p>
 
 <p style="text-align:center;"> <i>SLOSHED SEER SPILLS SECRETS:<br /> DARK LORD TO RETURN,</i></p>
 
-<p>For just an instant, Harry tried to clamp down on his face, before realizing that <i>not</i> being shocked could be just as revealing, in a sense -</p>
+<p>For just an instant, Harry tried to clamp down on his face, before realizing that <i>not</i> being shocked could be just as revealing, in a sense —</p>
 
 <p>"Excuse me," Harry said. His voice sounded a little alarmed, and he didn't even know whether that was too revealing, or just what his normal reaction <i>would</i> be if he didn't know anything. He'd spent too much time around Slytherins, he was forgetting how to keep secrets from ordinary people. Four Knuts hit the counter. "One copy of the <i>Quibbler,</i> please."</p>
 
-<p>"Oh, no worries, Mr. Potter!" said the vendor hastily, waving his hands. "It's - never mind, just -"</p>
+<p>"Oh, no worries, Mr. Potter!" said the vendor hastily, waving his hands. "It's — never mind, just —"</p>
 
 <p>A newspaper flew through the air and hit Harry's fingers, and he unfolded it.</p>
 
 <p style="text-align:center;"> <i>SLOSHED SEER SPILLS SECRETS:<br /> DARK LORD TO RETURN,<br /> WED DRACO MALFOY</i></p>
 
-<p>"It's free," said the vendor, "for <i>you</i>, I mean -"</p>
+<p>"It's free," said the vendor, "for <i>you</i>, I mean —"</p>
 
 <p>"No," Harry said, "I was going to buy one anyway."</p>
 
@@ -82,7 +82,7 @@
 
 <p>And besides the obvious craziness (heaven help them all if any of <i>that</i> was real) there was a good deal of snide romantic gossip; but nothing that would really be all that <i>important</i> if it was true.</p>
 
-<p>Harry was just reading about the Ministry's proposed marriage law, to ban all marriages, when -</p>
+<p>Harry was just reading about the Ministry's proposed marriage law, to ban all marriages, when —</p>
 
 <p>"Harry Potter," said a silken voice that sent a shock of adrenaline jolting through Harry's blood.</p>
 
@@ -122,13 +122,13 @@
 
 <p>Lucius was leaning upon his cane with both hands now, and both those hands white, and his bodyguards had suddenly tensed.</p>
 
-<p>Some instinct within Harry claimed that it would be a very bad idea to show his fear, to let Lucius see that he could be intimidated. They were in a public train station anyway -</p>
+<p>Some instinct within Harry claimed that it would be a very bad idea to show his fear, to let Lucius see that he could be intimidated. They were in a public train station anyway —</p>
 
 <p>"I find it interesting," Harry said, putting steel into his own voice, "that you think I could benefit from doing Draco harm. But it is irrelevant, Lucius. <i>He</i> is my friend, and I do not betray my friends."</p>
 
 <p>" <i>What?</i> " whispered Lucius. His face showed sheer shock.</p>
 
-<p>Then -</p>
+<p>Then —</p>
 
 <p>"Company," said one of the minions, and Harry thought, from the voice, that it must be the senior Crabbe.</p>
 
@@ -150,7 +150,7 @@
 
 <p>" <i>What?</i> " blurted Neville.</p>
 
-<p>"I was under the <i>Imperius,</i> young man," said Lucius, now sounding tired. "The Dark Lord could hardly have begun recruiting among pureblood families without the support of House Malfoy. I demurred, and he simply made sure of me. His own Death Eaters did not know it until afterward, hence the false Mark I bear; though since I did not truly consent, it does not bind me. Some of the Death Eaters still believe I was foremost among their number, and for the peace of this nation I let them believe it, to keep them controlled. But I was not such a fool as to support that ill-fated adventurer of my own choice -"</p>
+<p>"I was under the <i>Imperius,</i> young man," said Lucius, now sounding tired. "The Dark Lord could hardly have begun recruiting among pureblood families without the support of House Malfoy. I demurred, and he simply made sure of me. His own Death Eaters did not know it until afterward, hence the false Mark I bear; though since I did not truly consent, it does not bind me. Some of the Death Eaters still believe I was foremost among their number, and for the peace of this nation I let them believe it, to keep them controlled. But I was not such a fool as to support that ill-fated adventurer of my own choice —"</p>
 
 <p>"Ignore him," Madam Longbottom said, the instruction addressed to Harry as well as Neville. "He must spend the rest of his life pretending, for fear of your testimony under Veritaseum." Said with malicious satisfaction.</p>
 
@@ -200,7 +200,7 @@
 
 <p>"I will take your opinion under advisement," Harry said mildly.</p>
 
-<p>"I dearly hope that you do," said Madam Longbottom, and turned back to her grandson. "Do I still need to -"</p>
+<p>"I dearly hope that you do," said Madam Longbottom, and turned back to her grandson. "Do I still need to —"</p>
 
 <p>"It's okay for you to go, Granma," said Neville. "I'll be fine on my own, this time."</p>
 
@@ -226,11 +226,11 @@
 
 <p>" <i>What</i> did you talk about?" demanded Draco.</p>
 
-<p>Harry leaned back wearily in the small folding chair that sat at the bottom of his trunk's cavern. "You know, Draco, just as the fundamental question of rationality is 'What do I think I know and how do I think I know it?', there's also a cardinal sin, a way of thinking that's the opposite of that. Like the ancient Greek philosophers. They had no clue what was going on, so they'd go around saying things like 'All is water' or 'All is fire', and they never asked themselves, 'Wait a minute, even if everything <i>is</i> water, how could I possibly <i>know</i> that?' They didn't ask themselves if they had evidence which discriminated <i>that</i> possibility from all the <i>other</i> possibilities you could imagine, evidence they'd be very unlikely to encounter if the theory <i>wasn't</i> true -"</p>
+<p>Harry leaned back wearily in the small folding chair that sat at the bottom of his trunk's cavern. "You know, Draco, just as the fundamental question of rationality is 'What do I think I know and how do I think I know it?', there's also a cardinal sin, a way of thinking that's the opposite of that. Like the ancient Greek philosophers. They had no clue what was going on, so they'd go around saying things like 'All is water' or 'All is fire', and they never asked themselves, 'Wait a minute, even if everything <i>is</i> water, how could I possibly <i>know</i> that?' They didn't ask themselves if they had evidence which discriminated <i>that</i> possibility from all the <i>other</i> possibilities you could imagine, evidence they'd be very unlikely to encounter if the theory <i>wasn't</i> true —"</p>
 
 <p>" <i>Harry</i>," Draco said, his voice strained, " <i>What did you talk about with Father?</i> "</p>
 
-<p>"I don't know, actually," said Harry, "so it's very important that I <i>not</i> just make stuff up -"</p>
+<p>"I don't know, actually," said Harry, "so it's very important that I <i>not</i> just make stuff up —"</p>
 
 <p>Harry had never heard Draco shriek in horror in quite that high a pitch before.</p>
 
