--- a/041.htm
+++ b/041.htm
@@ -16,7 +16,7 @@
 
 <p>The battle had been ridiculously difficult, for the enemy being outnumbered two-to-one. It should have been easy, Dragon Army and the Sunshine Regiment had melded together easily in practice sessions, they'd fought each other long enough to know each other very well indeed. Morale was high, both armies knowing that this time they weren't just fighting to win for themselves, but fighting for a world free of traitors. Despite the surprised protests of both generals, the soldiers of the combined army had insisted on calling themselves Dramione's Sungon Argiment, and produced patches for their insignia of a smiling face wreathed in flames.</p>
 
-<p>But Harry's soldiers had all blackened their own insignia - it didn't look like paint, more like they'd <i>burned</i> that part of their uniforms - and they'd fought all through the upper levels of Hogwarts with a desperate fury. The cold rage that Draco sometimes saw in Harry had seemed to trickle down into his soldiers, and they'd fought like it hadn't been play. And Harry had emptied out his entire bag of tricks, there'd been tiny metal balls (Granger had identified them as "ball bearings") on floors and staircases, rendering them impassable until cleared, only Harry's army had already practiced coordinated Hover Charms and they could fly their own people <i>right over</i> the obstacles they'd made...</p>
+<p>But Harry's soldiers had all blackened their own insignia — it didn't look like paint, more like they'd <i>burned</i> that part of their uniforms — and they'd fought all through the upper levels of Hogwarts with a desperate fury. The cold rage that Draco sometimes saw in Harry had seemed to trickle down into his soldiers, and they'd fought like it hadn't been play. And Harry had emptied out his entire bag of tricks, there'd been tiny metal balls (Granger had identified them as "ball bearings") on floors and staircases, rendering them impassable until cleared, only Harry's army had already practiced coordinated Hover Charms and they could fly their own people <i>right over</i> the obstacles they'd made...</p>
 
 <p>You couldn't bring devices into the game from outside, but you could Transfigure anything you wanted <i>during</i> the game, so long as it was safe. And that just wasn't fair when you were fighting a boy raised by scientists, who knew about things like ball bearings and skateboards and bungee cords.</p>
 
@@ -120,7 +120,7 @@
 
 <p>It was inevitable, in retrospect, in real life you couldn't <i>actually</i> run across icy slanted rooftops at a high rate of speed.</p>
 
-<p>And also inevitably, because it happened without the slightest thought, Draco spun and grabbed for Granger's right arm, and he <i>caught</i> her, only she was already too far off balance, she was falling and pulling Draco with her, it all happened so quickly -</p>
+<p>And also inevitably, because it happened without the slightest thought, Draco spun and grabbed for Granger's right arm, and he <i>caught</i> her, only she was already too far off balance, she was falling and pulling Draco with her, it all happened so quickly —</p>
 
 <p>There was a hard, painful impact, not just Draco's weight hitting the rooftop but some of Granger's weight too, and if she'd hit just a little bit closer to the edge they could have made it, but instead her body tipped again and her legs slipped off and her other hand grabbed frantically...</p>
 
@@ -190,9 +190,9 @@
 
 <p>Daphne lowered her voice. "In fact... what if Malfoy's the one who made Hermione, I mean General Granger, slip in the first place? What if he's out to make <i>all</i> the Muggleborns trip and fall?"</p>
 
-<p>"You mean - ?" gasped Tracey.</p>
+<p>"You mean — ?" gasped Tracey.</p>
 
-<p>"That's right!" Daphne said dramatically. "What if Malfoy is - <i>the heir of Slipperin?</i> "</p>
+<p>"That's right!" Daphne said dramatically. "What if Malfoy is — <i>the heir of Slipperin?</i> "</p>
 
 <p>"The next Drop Lord!" said Tracey.</p>
 
