--- a/043.htm
+++ b/043.htm
@@ -46,7 +46,7 @@
 
 <p>"What thought were you using to cast it?" said Remus.</p>
 
-<p>"My father," Harry said, his voice trembling. "I asked him to buy me some books before I came to Hogwarts, and he did, and they were expensive, and then he asked me if they were enough -"</p>
+<p>"My father," Harry said, his voice trembling. "I asked him to buy me some books before I came to Hogwarts, and he did, and they were expensive, and then he asked me if they were enough —"</p>
 
 <p>Harry didn't try to explain about the Verres family motto.</p>
 
@@ -176,7 +176,7 @@
 
 <p>Then there were gasps of shock, even from the Aurors.</p>
 
-<p>Harry spun around to look -</p>
+<p>Harry spun around to look —</p>
 
 <p>There was a brilliant silver bird standing between Anthony Goldstein and the cage. The bird reared its head and let out a cry, and the cry was also silver, as bright and hard and beautiful as metal.</p>
 
@@ -242,7 +242,7 @@
 
 <p>The Headmaster's phoenix winked out of existence.</p>
 
-<p>And Hermione gave a tiny, pathetic shriek, flinched -</p>
+<p>And Hermione gave a tiny, pathetic shriek, flinched —</p>
 
 <p>- took a step back, Harry could see her wand moving, and then she brandished it and said "Expecto Patronum!"</p>
 
@@ -258,7 +258,7 @@
 
 <p>Even after Harry had shoved the chocolate into Hermione's mouth and she'd chewed and swallowed, she was still breathing in great gasps and crying, her eyes still seemed unfocused.</p>
 
-<p><i>She can't have been permanently Demented,</i> Harry thought desperately at the confusion inside him, the horrible fear and deathly fury beginning to twist around each other, <i>she can't have been, she wasn't exposed for even ten seconds let alone forty -</i></p>
+<p><i>She can't have been permanently Demented,</i> Harry thought desperately at the confusion inside him, the horrible fear and deathly fury beginning to twist around each other, <i>she can't have been, she wasn't exposed for even ten seconds let alone forty —</i></p>
 
 <p>But she could be <i>temporarily</i> Demented, as Harry realized in that moment, there wasn't any rule that you couldn't be <i>temporarily</i> injured by a Dementor in just ten seconds if you were sensitive enough.</p>
 
@@ -270,7 +270,7 @@
 
 <p>" <i>Don't go near it!"</i> said Hermione. Her hand reached out, grabbed him by the lapel of his robes. "You mustn't go near it, Harry! <i>It spoke to me, Harry, it knows you, it knows you're here!</i> "</p>
 
-<p>"What -" Harry said, and then cursed himself for asking.</p>
+<p>"What —" Harry said, and then cursed himself for asking.</p>
 
 <p>" <i>The Dementor!</i> " said Hermione. Her voice rose to a shriek. " <i>Professor Quirrell wants it to eat you!</i> "</p>
 
@@ -286,7 +286,7 @@
 
 <p>"Did the Dementor say <i>how</i> it would get to Harry?" said the Headmaster.</p>
 
-<p>"All his tastiest parts first," said Hermione, "it would - it would eat -"</p>
+<p>"All his tastiest parts first," said Hermione, "it would — it would eat —"</p>
 
 <p>Hermione blinked. Some sanity seemed to come back into her eyes.</p>
 
@@ -308,7 +308,7 @@
 
 <p>(The Headmaster had said nothing to the other students, told no one else to be less brave; but Professor Quirrell had calmly observed that if you made the mistake <i>after</i> being warned, that was when ignorance became stupidity.)</p>
 
-<p>"Professor Quirrell?" Harry said in a low voice, having come as close to the Defense Professor as he dared. "What do <i>you</i> see when you -"</p>
+<p>"Professor Quirrell?" Harry said in a low voice, having come as close to the Defense Professor as he dared. "What do <i>you</i> see when you —"</p>
 
 <p>"Don't ask." The voice was very flat.</p>
 
@@ -392,7 +392,7 @@
 
 <p>There was an instant when the two forces clashed head-on, when the peaceful starlit memory held its own against the fear, even as Harry's fingers began the wand motions, practiced until they had become automatic. They weren't warm and happy, those blazing points of light in perfect blackness; but it was an image the Dementor could not easily pierce. For the silent burning stars were vast and unafraid, and to shine in the cold and darkness was their natural state.</p>
 
-<p>But there was a flaw, a crack, a fault-line in the immovable object trying to resist that irresistible force. Harry felt a twinge of anger at the Dementor for trying to feed on him, and it was like slipping on wet ice. Harry's mind began to slide sideways, into bitterness, black fury, deathly hatred -</p>
+<p>But there was a flaw, a crack, a fault-line in the immovable object trying to resist that irresistible force. Harry felt a twinge of anger at the Dementor for trying to feed on him, and it was like slipping on wet ice. Harry's mind began to slide sideways, into bitterness, black fury, deathly hatred —</p>
 
 <p>Harry's wand came up in the final brandish.</p>
 
@@ -444,7 +444,7 @@
 
 <p><i>A blinding flare of green marked the end of Lily Potter.</i></p>
 
-<p><i>And the boy in the crib saw it, the eyes, those two crimson eyes, seeming to glow bright red, to blaze like miniature suns, filling Harry's whole vision as they locked to his own -</i></p>
+<p><i>And the boy in the crib saw it, the eyes, those two crimson eyes, seeming to glow bright red, to blaze like miniature suns, filling Harry's whole vision as they locked to his own —</i></p>
 
 <hr />
 
@@ -452,13 +452,13 @@
 
 <p>There was a brilliant silver flash as the Headmaster bellowed " <i>Expecto Patronum!</i> " and the blazing phoenix returned to being.</p>
 
-<p>But Harry Potter's horrible scream went on and on and on, even as the Headmaster scooped up the boy in his arms and bore him away from the Dementor, even as Neville Longbottom and Professor Flitwick both went for the chocolate at the same time and -</p>
+<p>But Harry Potter's horrible scream went on and on and on, even as the Headmaster scooped up the boy in his arms and bore him away from the Dementor, even as Neville Longbottom and Professor Flitwick both went for the chocolate at the same time and —</p>
 
 <p>Hermione knew it, she knew it as she saw it, she knew that her nightmare had been real, it was coming true, somehow it was coming true.</p>
 
 <p>"Get him chocolate!" demanded the voice of Professor Quirrell, pointlessly, because Professor Flitwick's tiny form was already cannonballing toward where the Headmaster was racing toward the students.</p>
 
-<p>Hermione was moving forward herself, though she didn't know what else she meant to do -</p>
+<p>Hermione was moving forward herself, though she didn't know what else she meant to do —</p>
 
 <p>" <i>Cast Patronuses!</i> " shouted the Headmaster, as he brought Harry behind the Aurors. " <i>Everyone who can! Get them between Harry and the Dementor! It's still feeding on him!</i> "</p>
 
@@ -468,7 +468,7 @@
 
 <p>Hermione couldn't cast a Patronus Charm, so she ran toward where Harry lay. In her mind, something tried to guess how long it had been already. Was it twenty seconds? More?</p>
 
-<p>There was a dreadful agony and bewilderment on the face of Albus Dumbledore. His long black wand was in his hand, but he spoke no spells, only looked down at Harry's convulsing body in horror -</p>
+<p>There was a dreadful agony and bewilderment on the face of Albus Dumbledore. His long black wand was in his hand, but he spoke no spells, only looked down at Harry's convulsing body in horror —</p>
 
 <p>Hermione didn't know what to do, she didn't know what to do, she didn't understand what was happening, and the most powerful wizard in the world seemed equally at a loss.</p>
 
@@ -488,7 +488,7 @@
 
 <p>Seconds ticked past, uncounted.</p>
 
-<p>She couldn't remember it, she couldn't remember the nightmare clearly, she couldn't remember why she had thought it was possible, why she had been afraid -</p>
+<p>She couldn't remember it, she couldn't remember the nightmare clearly, she couldn't remember why she had thought it was possible, why she had been afraid —</p>
 
 <p>Hermione realized then what she ought to do, and it was the hardest decision of her life.</p>
 
@@ -496,7 +496,7 @@
 
 <p>All her limbs cold as death, her vision gone dark, fear overwhelming everything; she'd seen Harry dying, Mum and Dad dying, all her friends dying, everyone dying, so that in the end, when she died, she would be alone. That was her secret nightmare she'd never talked about with anyone, that had given the Dementor its power over her, the loneliest thing was to die alone.</p>
 
-<p>She didn't want to go to that place again, she, she didn't, she didn't want to stay there forever -</p>
+<p>She didn't want to go to that place again, she, she didn't, she didn't want to stay there forever —</p>
 
 <p><i>You have courage enough for Gryffindor,</i> said the calm voice of the Sorting Hat in her memory, <i>but you will do what is right in any House I give you. You will learn, you will stand by your friends, in any House you choose. So don't be afraid, Hermione Granger, just decide where you belong...</i></p>
 
