--- a/045.htm
+++ b/045.htm
@@ -36,7 +36,7 @@
 
 <p>The boy and the girl gazed into each other's eyes.</p>
 
-<p>"Sorry," Harry said. "About what happens next. If there's anything I can do -"</p>
+<p>"Sorry," Harry said. "About what happens next. If there's anything I can do —"</p>
 
 <p>"No," Hermione said back. "There isn't. It's all right, though." Then she turned from Harry and walked away, toward the path that led back to the gates of Hogwarts.</p>
 
@@ -76,7 +76,7 @@
 
 <p>"Yep," Harry said. "Still alive."</p>
 
-<p>Again that silence, again the absence of cheering; no one seemed to know how to respond -</p>
+<p>Again that silence, again the absence of cheering; no one seemed to know how to respond —</p>
 
 <p>"It is good to know you are fully recovered, Mr. Potter," Professor Quirrell said firmly, as though to deny any other possibility. "Now, I believe Miss Ransom was up next?"</p>
 
@@ -256,7 +256,7 @@
 
 <p>A figure with two arms, two legs, and a head, standing upright; the animal <i>Homo sapiens,</i> the shape of a human being.</p>
 
-<p>Glowing brighter and brighter as Harry poured all his strength into his spell, blazing with incandescent light brighter than the fading sunset, the Aurors and Professor Quirrell shielding their eyes in shock -</p>
+<p>Glowing brighter and brighter as Harry poured all his strength into his spell, blazing with incandescent light brighter than the fading sunset, the Aurors and Professor Quirrell shielding their eyes in shock —</p>
 
 <p><i>And someday when the descendants of humanity have spread from star to star, they won't tell the children about the history of Ancient Earth until they're old enough to bear it; and when they learn they'll weep to hear that such a thing as Death had ever once existed!</i></p>
 
