--- a/049.htm
+++ b/049.htm
@@ -40,9 +40,9 @@
 
 <p>"I shall have a bowl of green lentil soup, with soy sauce," Professor Quirrell said to the waitress. "And for Mr. Potter, a plate of Tenorman's family chili."</p>
 
-<p>Harry hesitated in sudden dismay. He'd resolved to stick to vegetarian dishes for the moment, but he'd forgotten in his deliberations that Professor Quirrell did the <i>actual ordering</i> - and it would be awkward if he protested now -</p>
+<p>Harry hesitated in sudden dismay. He'd resolved to stick to vegetarian dishes for the moment, but he'd forgotten in his deliberations that Professor Quirrell did the <i>actual ordering</i> — and it would be awkward if he protested now —</p>
 
-<p>The waitress bowed to them, and turned to go -</p>
+<p>The waitress bowed to them, and turned to go —</p>
 
 <p>"Erm, excuse me, any meat in that from snakes or flying squirrels?"</p>
 
@@ -54,7 +54,7 @@
 
 <p>Harry kept his face steady. "I was looking up some facts about the Patronus Charm earlier," he said. "According to <i>The Patronus Charm: Wizards Who Could and Couldn't,</i> it turns out that Godric couldn't and Salazar could. I was surprised, so I looked up the reference, in <i>Four Lives of Power.</i> And <i>then</i> I discovered that Salazar Slytherin could supposedly talk to snakes." (Temporal sequence wasn't the same as causation, it wasn't Harry's fault if Professor Quirrell missed that.) "Further research turned up an old story about a mother goddess type who could talk to flying squirrels. I was a bit worried about the prospect of eating something that could talk."</p>
 
-<p>And Harry took a casual sip of his water -</p>
+<p>And Harry took a casual sip of his water —</p>
 
 <p>- just as Professor Quirrell said, "Mr. Potter, would I be correct in guessing that you are also a Parselmouth?"</p>
 
@@ -64,7 +64,7 @@
 
 <p>"I'm not buying this anymore," Harry said. "There's no <i>way</i> you came to that conclusion based on that evidence."</p>
 
-<p>"Of course not," Professor Quirrell said equably. "I had planned to ask you that question today in any case, and simply chose an opportune moment. I have suspected since December, in fact -"</p>
+<p>"Of course not," Professor Quirrell said equably. "I had planned to ask you that question today in any case, and simply chose an opportune moment. I have suspected since December, in fact —"</p>
 
 <p>" <i>December?</i> " said Harry. "I found out <i>yesterday!</i> "</p>
 
@@ -72,13 +72,13 @@
 
 <p>The Defense Professor had timed it exactly right the second time, too, just as Harry was taking a gulp of water to clear out his throat from the first coughing fit.</p>
 
-<p>Harry <i>hadn't</i> realized, not until just now. Of course it was obvious the instant Professor Quirrell said it. Right, Professor McGonagall had even <i>told</i> him not to talk to snakes where anyone could see him, but he'd thought she'd meant not to be seen talking to any statues or architectural features in Hogwarts that looked like snakes. Double illusion of transparency, he'd thought he understood her, she'd thought he understood her - but <i>how</i> the <i>hell -</i></p>
+<p>Harry <i>hadn't</i> realized, not until just now. Of course it was obvious the instant Professor Quirrell said it. Right, Professor McGonagall had even <i>told</i> him not to talk to snakes where anyone could see him, but he'd thought she'd meant not to be seen talking to any statues or architectural features in Hogwarts that looked like snakes. Double illusion of transparency, he'd thought he understood her, she'd thought he understood her — but <i>how</i> the <i>hell —</i></p>
 
-<p>"So," Harry said, "you performed Legilimency on me during my first Defense class, to find out what happened with the Sorting Hat -"</p>
+<p>"So," Harry said, "you performed Legilimency on me during my first Defense class, to find out what happened with the Sorting Hat —"</p>
 
 <p>"Then I would not have found out in December." Professor Quirell leaned back, smiling. "This is not a puzzle you can solve on your own, Mr. Potter, so I will reveal the answer. Over the winter holiday, I was alerted to the fact that the Headmaster had filed a request for a closed judicial panel to review the case of one Mr. Rubeus Hagrid, whom you know as the Keeper of Keys and Grounds at Hogwarts, and who was accused of the murder of Abigail Myrtle in 1943."</p>
 
-<p>"Oh, of course," said Harry, "that makes it downright <i>obvious</i> that I'm a Parselmouth. Professor, <i>what</i> the sweet slithering snakes -"</p>
+<p>"Oh, of course," said Harry, "that makes it downright <i>obvious</i> that I'm a Parselmouth. Professor, <i>what</i> the sweet slithering snakes —"</p>
 
 <p>"The <i>other</i> suspect for that murder was Slytherin's Monster, the legendary inhabitant of Slytherin's Chamber of Secrets. Which is why certain sources alerted me to the fact, and why it caught my attention sufficiently that I spent a good deal of bribe money to learn the details of the case. Now in point of fact, Mr. Potter, Mr. Hagrid is innocent. Ridiculously obviously innocent. He is the most blatantly innocent bystander to be convicted by the magical British legal system since Grindelwald's Confunding of Neville Chamberlain was pinned on Amanda Knox. Headmaster Dippet prompted a student puppet to accuse Mr. Hagrid because Dippet needed a scapegoat to take the blame for the death of Miss Myrtle, and our marvelous justice system agreed that this was plausible enough to warrant Mr. Hagrid's expulsion and the snapping of his wand. Our current Headmaster needs merely provide some new item of evidence significant enough to reconvene the case; and with Dumbledore applying pressure instead of Dippet, the result is a foregone conclusion. Lucius Malfoy has no particular reason to fear Mr. Hagrid's vindication; thus Lucius Malfoy will only resist to the extent that he can do so costlessly in order to impose costs on Dumbledore, and Dumbledore is clearly willing to prosecute the case regardless."</p>
 
@@ -94,11 +94,11 @@
 
 <p>Professor Quirrell sipped from his own waterglass again. "Well then, Mr. Potter, I shall freely tell you what I know or suspect. First, I believe the Chamber of Secrets is real, as is Slytherin's Monster. Miss Myrtle's death was not discovered until hours after her demise, even though the wards should have alerted the Headmaster instantly. Therefore her murder was performed either by Headmaster Dippet, which is unlikely, or by some entity which Salazar Slytherin keyed into his wards at a higher level than the Headmaster himself. Second, I suspect that contrary to popular legend, the purpose of Slytherin's Monster was <i>not</i> to rid Hogwarts of Muggleborns. Unless Slytherin's Monster were powerful enough to defeat the Headmaster of Hogwarts and all the teachers, it could not triumph by force. Multiple murders in secrecy would result in the school's closure, as nearly happened in 1943, or in the placing of new wards. So why Slytherin's Monster, Mr. Potter? What true purpose does it serve?"</p>
 
-<p>"Ah..." Harry dropped his gaze to his waterglass and tried to think. "To kill anyone who got into the Chamber and didn't belong there -"</p>
+<p>"Ah..." Harry dropped his gaze to his waterglass and tried to think. "To kill anyone who got into the Chamber and didn't belong there —"</p>
 
 <p>"A monster powerful enough to defeat a team of wizards that had broken past the best wards Salazar could place on his Chamber? Unlikely."</p>
 
-<p>Harry was feeling a bit pressured now. "Well, it's called the Chamber of Secrets, so maybe the Monster has a secret, or <i>is</i> a secret?" For that matter, just what sort of secrets were in the Chamber of Secrets in the first place? Harry hadn't done a lot of research on the subject, in part because he'd gotten the impression that nobody knew anything -</p>
+<p>Harry was feeling a bit pressured now. "Well, it's called the Chamber of Secrets, so maybe the Monster has a secret, or <i>is</i> a secret?" For that matter, just what sort of secrets were in the Chamber of Secrets in the first place? Harry hadn't done a lot of research on the subject, in part because he'd gotten the impression that nobody knew anything —</p>
 
 <p>Professor Quirrell was smiling. "Why not just write the secret down?"</p>
 
@@ -110,7 +110,7 @@
 
 <p>Salazar Slytherin had been very cunning indeed. Cunning enough to come up with a way to bypass the Interdict of Merlin.</p>
 
-<p>Powerful wizardries couldn't be transmitted through books or ghosts, but if you could create a long-lived enough sentient creature with a good enough memory -</p>
+<p>Powerful wizardries couldn't be transmitted through books or ghosts, but if you could create a long-lived enough sentient creature with a good enough memory —</p>
 
 <p>"It seems very probable to me," said Professor Quirrell, "that He-Who-Must-Not-Be-Named began his climb to power with secrets obtained from Slytherin's Monster. That Salazar's lost knowledge is the source of You-Know-Who's extraordinarily powerful wizardry. Hence my interest in the Chamber of Secrets and the case of Mr. Hagrid."</p>
 
@@ -120,19 +120,19 @@
 
 <p>Add in Harry's superior intelligence and some original magical research and some Muggle rocket launchers, and the resulting fight would be completely one-sided, which was exactly how Harry wanted it.</p>
 
-<p>Harry was grinning now, a very evil grin. <i>New priority: Find everything in Hogwarts that looks remotely like a snake and try speaking to it. Starting with everything you've already tried, only this time be sure to use Parseltongue instead of English - get Draco to let you into the Slytherin dorms -</i></p>
+<p>Harry was grinning now, a very evil grin. <i>New priority: Find everything in Hogwarts that looks remotely like a snake and try speaking to it. Starting with everything you've already tried, only this time be sure to use Parseltongue instead of English — get Draco to let you into the Slytherin dorms —</i></p>
 
 <p>"Don't become too excited, Mr. Potter," said Professor Quirrell. His own face had become expressionless, now. "You must <i>continue</i> thinking. What were the Dark Lord's parting words to Slytherin's Monster?"</p>
 
 <p>" <i>What?</i> " Harry said. "How could either of us possibly know that?"</p>
 
-<p>"Visualize the scene, Mr. Potter. Let your imagination fill in the details. Slytherin's Monster - probably some great serpent, so that only a Parselmouth may speak to it - has finished imparting all of the knowledge it possesses to He-Who-Must-Not-Be-Named. It conveys to him Salazar's final benediction, and warns him that the Chamber of Secrets must now remain closed until the next descendant of Salazar should prove cunning enough to open it. And he who will become the Dark Lord nods, and says to it -"</p>
+<p>"Visualize the scene, Mr. Potter. Let your imagination fill in the details. Slytherin's Monster — probably some great serpent, so that only a Parselmouth may speak to it — has finished imparting all of the knowledge it possesses to He-Who-Must-Not-Be-Named. It conveys to him Salazar's final benediction, and warns him that the Chamber of Secrets must now remain closed until the next descendant of Salazar should prove cunning enough to open it. And he who will become the Dark Lord nods, and says to it —"</p>
 
 <p>"Avada Kedavra," said Harry, suddenly feeling sick to his stomach.</p>
 
 <p>"Rule Twelve," Professor Quirrell said quietly. "Never leave the source of your power lying around where someone else can find it."</p>
 
-<p>Harry's gaze dropped to the tablecloth, which had decorated itself in a mournful pattern of black flowers and shadows. Somehow that seemed... too sad to be imagined, Slytherin's great snake had only wanted to help Lord Voldemort, and Lord Voldemort had just... there was something unbearably sorrowful about it, what sort of person would <i>do</i> that to a being who'd offered them nothing but friendship... " <i>Do</i> you think the Dark Lord would have -"</p>
+<p>Harry's gaze dropped to the tablecloth, which had decorated itself in a mournful pattern of black flowers and shadows. Somehow that seemed... too sad to be imagined, Slytherin's great snake had only wanted to help Lord Voldemort, and Lord Voldemort had just... there was something unbearably sorrowful about it, what sort of person would <i>do</i> that to a being who'd offered them nothing but friendship... " <i>Do</i> you think the Dark Lord would have —"</p>
 
 <p>"Yes," Professor Quirrell said flatly. "He-Who-Must-Not-Be-Named left quite a trail of bodies behind him, Mr. Potter; I doubt he would have omitted that one. If there were any artifacts left there that could be moved, the Dark Lord would have taken those with him as well. There might still be something worth seeing in the Chamber of Secrets, and to find it would prove yourself the true Heir of Slytherin. But do not raise your hopes too high. I suspect that all you will find is the remains of Slytherin's Monster resting quietly in its grave."</p>
 
@@ -148,7 +148,7 @@
 
 <p>There was another silence. Professor Quirrell was looking at Harry as though waiting for him to ask something.</p>
 
-<p>"Well," said Harry, "so long as we're on the topic, can I ask how you think the whole Parselmouth business actually -"</p>
+<p>"Well," said Harry, "so long as we're on the topic, can I ask how you think the whole Parselmouth business actually —"</p>
 
 <p>There came a knock at the door, then. Professor Quirrell raised a cautionary finger, then opened the door with a wave. The waitress entered, balancing a huge platter with their meals as though the whole assembly weighed nothing (which was in fact probably the case). She gave Professor Quirrell his bowl of green soup, and a glass of his usual Chianti; and set down before Harry a plate of small meat strips smothered in a heavy-looking sauce, plus a glass of his accustomed treacle soda. Then she bowed, managing to make it seem like sincere respect rather than perfunctory acknowledgment, and departed.</p>
 
@@ -156,15 +156,15 @@
 
 <p>And then Professor Quirrell began performing a certain series of incantations that Harry recognized, making him take a sharp breath. It was the series and ordering that Mr. Bester had used, the full set of twenty-seven spells that you would perform before discussing anything of truly great import.</p>
 
-<p>If the discussion of the Chamber of Secrets <i>hadn't</i> counted as important -</p>
+<p>If the discussion of the Chamber of Secrets <i>hadn't</i> counted as important —</p>
 
-<p>When Professor Quirrell was done - he'd performed <i>thirty</i> spells, three of which Harry hadn't heard before - the Defense Professor said, "Now we shall not be interrupted for a time. Can you keep a secret, Mr. Potter?"</p>
+<p>When Professor Quirrell was done — he'd performed <i>thirty</i> spells, three of which Harry hadn't heard before — the Defense Professor said, "Now we shall not be interrupted for a time. Can you keep a secret, Mr. Potter?"</p>
 
 <p>Harry nodded.</p>
 
 <p>"A serious secret, Mr. Potter," Professor Quirrell said. His eyes were intent, his face grave. "One which could potentially send me to Azkaban. Think about it before you reply."</p>
 
-<p>For a moment Harry didn't even see why the question should be hard, given his growing collection of secrets. Then -</p>
+<p>For a moment Harry didn't even see why the question should be hard, given his growing collection of secrets. Then —</p>
 
 <p><i>If this secret could send Professor Quirrell to Azkaban, that means he's done something illegal...</i></p>
 
@@ -184,7 +184,7 @@
 
 <p>The constant sense of doom had diminished, ironically enough, after the Defense Professor of Hogwarts had turned into a venomous snake.</p>
 
-<p>Harry swallowed hard and said, "Greetings - ah, hssss, no, ah, <i>greetingss.</i>"</p>
+<p>Harry swallowed hard and said, "Greetings — ah, hssss, no, ah, <i>greetingss.</i>"</p>
 
 <p>" <i>Sso,</i>" hissed the snake. " <i>You sspeak, I hear. I sspeak, you hear?</i> "</p>
 
@@ -196,17 +196,17 @@
 
 <p>" <i>Not unlesss heir of Sslytherin willss.</i>" The snake gave a series of short hisses which Harry's brain translated as sardonic laughter. " <i>Sslytherin not sstupid. Ssnake Animaguss not ssame as Parsselmouth. Would be huge flaw in sscheme.</i>"</p>
 
-<p>Well <i>that</i> definitely argued that Parseltongue was personal magic, not snakes being sentient beings with a learnable language -</p>
+<p>Well <i>that</i> definitely argued that Parseltongue was personal magic, not snakes being sentient beings with a learnable language —</p>
 
 <p>" <i>I am not regisstered,</i>" hissed the snake. The dark pits of its eyes stared at Harry. " <i>Animaguss musst be regisstered. Penalty is two yearss imprissonment. Will you keep my ssecret, boy?</i> "</p>
 
 <p>" <i>Yess,</i>" hissed Harry. " <i>Would never break promisse.</i>"</p>
 
-<p>The snake seemed to hold still, as though in shock, and then began to sway again. " <i>We come here next in sseven dayss. Bring cloak to passs unsseen, bring hourglasss to move through time -</i>"</p>
+<p>The snake seemed to hold still, as though in shock, and then began to sway again. " <i>We come here next in sseven dayss. Bring cloak to passs unsseen, bring hourglasss to move through time —</i>"</p>
 
-<p>" <i>You know?</i> " hissed Harry in shock. " <i>How -</i>"</p>
+<p>" <i>You know?</i> " hissed Harry in shock. " <i>How —</i>"</p>
 
-<p>Again the series of short quick hisses that translated as sardonic laughter. " <i>You arrive in my firsst classs while sstill in other classs, sstrike down enemy with pie, two ballss of memory -</i>"</p>
+<p>Again the series of short quick hisses that translated as sardonic laughter. " <i>You arrive in my firsst classs while sstill in other classs, sstrike down enemy with pie, two ballss of memory —</i>"</p>
 
 <p>" <i>Never mind,</i>" hissed Harry. " <i>Sstupid question, forgot you were ssmart.</i>"</p>
 
@@ -224,7 +224,7 @@
 
 <p>" <i>Will do as I ssaid?</i> "</p>
 
-<p>" <i>Yess. But,"</i> Harry gave a wobbling rasp that was how his mind had translated a hesitant 'Ahhh' into snakish, " <i>I do not promisse to do whatever thiss iss, you have not ssaid -</i>"</p>
+<p>" <i>Yess. But,"</i> Harry gave a wobbling rasp that was how his mind had translated a hesitant 'Ahhh' into snakish, " <i>I do not promisse to do whatever thiss iss, you have not ssaid —</i>"</p>
 
 <p>The snake performed a shiver that Harry's mind translated as a severe glare. " <i>Of coursse not. Will disscusss sspecificss at next meeting.</i>"</p>
 
@@ -258,5 +258,5 @@
 
 <p>Harry just nodded. Not quite exact, but true.</p>
 
-<p>"Then here is what I might have done at your age, if there had been anyone to do it for -"</p>
+<p>"Then here is what I might have done at your age, if there had been anyone to do it for —"</p>
 
