--- a/054.htm
+++ b/054.htm
@@ -8,23 +8,23 @@
 
 <p>"It's real?" said Bellatrix. Tonality had returned into her voice, no longer a dead mutter, it rose up at the end to form the question. "It's real?"</p>
 
-<p><i>Yes,</i> thought the part of Harry simulating the Dark Lord, <i>now be silent</i> -</p>
+<p><i>Yes,</i> thought the part of Harry simulating the Dark Lord, <i>now be silent</i> —</p>
 
 <p>He couldn't make those words pass his lips, he just couldn't.</p>
 
-<p>"I knew - you would - come to me - someday," Bellatrix's voice quavered and fractured as she drew breath for quiet sobs, "I knew - you were alive - that you would come - to me - my Lord..." there was a long inhalation like a huge gasp, "and that even - when you came - you still wouldn't love me - never - you would never love me back - that was why - they couldn't take - my love from me - even though I can't remember - can't remember so many other things - though I don't know what I forgot - but I remember how much I love you, Lord -"</p>
+<p>"I knew — you would — come to me — someday," Bellatrix's voice quavered and fractured as she drew breath for quiet sobs, "I knew — you were alive — that you would come — to me — my Lord..." there was a long inhalation like a huge gasp, "and that even — when you came — you still wouldn't love me — never — you would never love me back — that was why — they couldn't take — my love from me — even though I can't remember — can't remember so many other things — though I don't know what I forgot — but I remember how much I love you, Lord —"</p>
 
 <p>There was a knife stabbing through Harry's heart, he'd never heard anything so terrible, he wanted to hunt down the Dark Lord and kill him just for this...</p>
 
-<p>"Do you still - have use for me - my Lord?"</p>
+<p>"Do you still — have use for me — my Lord?"</p>
 
 <p>"No," hissed Harry's voice, without him even thinking, it just seemed to be operating on automatic, "I entered Azkaban on a whim. Of course I have use for you! Don't ask foolish questions."</p>
 
-<p>"But - I'm weak," said Bellatrix's voice, and a full sob escaped her, it sounded much too loud in the corridors of Azkaban, "I can't kill for you, my Lord, I'm sorry, they ate it all, ate me all up, I'm too weak to fight, what good am I to you now -"</p>
+<p>"But — I'm weak," said Bellatrix's voice, and a full sob escaped her, it sounded much too loud in the corridors of Azkaban, "I can't kill for you, my Lord, I'm sorry, they ate it all, ate me all up, I'm too weak to fight, what good am I to you now —"</p>
 
 <p>Harry's brain cast about desperately for some way to reassure her, from the lips of a Dark Lord who would never speak a single word of caring.</p>
 
-<p>"Ugly," said Bellatrix. Her voice said that word like it was the final nail in her coffin, the last despair. "I'm ugly, they ate that too, I'm, I'm not pretty any more, you won't even, be able, to use me, as a reward, for your servants - even the Lestranges, won't want, to hurt me, any more -"</p>
+<p>"Ugly," said Bellatrix. Her voice said that word like it was the final nail in her coffin, the last despair. "I'm ugly, they ate that too, I'm, I'm not pretty any more, you won't even, be able, to use me, as a reward, for your servants — even the Lestranges, won't want, to hurt me, any more —"</p>
 
 <p>The brilliant silver figure stopped walking.</p>
 
@@ -46,11 +46,11 @@
 
 <p>It was the saddest thing Harry had ever heard.</p>
 
-<p>The bright silver shape of Harry's Patronus flickered -</p>
+<p>The bright silver shape of Harry's Patronus flickered —</p>
 
-<p>Wavered -</p>
+<p>Wavered —</p>
 
-<p>Brightened -</p>
+<p>Brightened —</p>
 
 <p>The fury that was rising in Harry, his rage against the Dark Lord who had done this, the rage against the Dementors, against Azkaban, against the world that allowed such horror, it all seemed to be pouring straight through his arm and into his wand without there being any way of blocking it, he tried willing it to stop and nothing happened.</p>
 
@@ -72,7 +72,7 @@
 
 <p>The words went unheard.</p>
 
-<p><i>They were far from him, the Dementors in their pit, but Harry knew that they could be destroyed even at this distance if the light blazed bright enough, he knew that Death itself could not face him if he stopped holding back, so he unsealed all the gates inside him and sank the wells of his spell into all the deepest parts of his spirit, all his mind and all his will, and gave over absolutely everything to the spell -</i></p>
+<p><i>They were far from him, the Dementors in their pit, but Harry knew that they could be destroyed even at this distance if the light blazed bright enough, he knew that Death itself could not face him if he stopped holding back, so he unsealed all the gates inside him and sank the wells of his spell into all the deepest parts of his spirit, all his mind and all his will, and gave over absolutely everything to the spell —</i></p>
 
 <p>And in the interior of the Sun, an only slightly dimmer shadow moved forward, reaching out an entreating hand.</p>
 
@@ -88,7 +88,7 @@
 
 <p>Within the darkness of that moonlight stood a sallow man with his hand outstretched in entreaty, and the skeleton of a woman, lying upon the floor, a puzzled look upon her face.</p>
 
-<p>And Harry, still invisible, fallen to his knees. The greater danger had passed, and now Harry was just trying not to collapse, to keep the spell going at the lower level. He'd drained something, hopefully not lost something <i>-</i> he should have known, should have remembered, that it wasn't mere magic that fueled the Patronus Charm -</p>
+<p>And Harry, still invisible, fallen to his knees. The greater danger had passed, and now Harry was just trying not to collapse, to keep the spell going at the lower level. He'd drained something, hopefully not lost something <i>-</i> he should have known, should have remembered, that it wasn't mere magic that fueled the Patronus Charm —</p>
 
 <p>"Thank you, my Lord," whispered the sallow man.</p>
 
@@ -96,7 +96,7 @@
 
 <p>Professor Quirrell's eyes did not widen, of course.</p>
 
-<p>"Yes, my Lord, I understand," said the Dark Lord's servant in a faltering voice, and turned to Bellatrix -</p>
+<p>"Yes, my Lord, I understand," said the Dark Lord's servant in a faltering voice, and turned to Bellatrix —</p>
 
 <p>She was already pushing herself off the floor, slowly, like an old, old Muggle woman. "How funny," Bellatrix whispered, "you were almost killed by a Patronus Charm..." A giggle that sounded like it was blowing dust out of her giggle pipes. "I could punish you, maybe, if my Lord froze you in place and I had knives... maybe I can be useful after all? Oh, I feel a little better now, how strange..."</p>
 
@@ -132,7 +132,7 @@
 
 <p>The sinking feeling came over Li's stomach with surprising speed.</p>
 
-<p>If his seven of hearts got hit by a Dementor Modifier and turned into a six, he was going straight down to two pair and McCusker might beat that -</p>
+<p>If his seven of hearts got hit by a Dementor Modifier and turned into a six, he was going straight down to two pair and McCusker might beat that —</p>
 
 <p>"Mike," said McCusker, "what's with your Patronus?"</p>
 
@@ -172,7 +172,7 @@
 
 <p>His shining Patronus followed after him, and lay down beside him on the step just beneath him; for it too must not be seen.</p>
 
-<p>There was a faint sound as of wind or whooshing, and then the sound of Bellatrix's invisible body coming to rest on a stair further below, she had no place in this except -</p>
+<p>There was a faint sound as of wind or whooshing, and then the sound of Bellatrix's invisible body coming to rest on a stair further below, she had no place in this except —</p>
 
 <p>"Stay still," said the cold high whisper, "stay silent."</p>
 
@@ -192,9 +192,9 @@
 
 <p>The Auror was protected by a blue shimmer, it was hard to see the details but Harry could see that much, the Auror had shields already raised and strengthened.</p>
 
-<p><i>Crap,</i> thought Harry. According to the Defense Professor, the essential art of dueling consisted of trying to put up defenses that would block whatever someone was likely to throw at you, while trying in turn to attack in ways that were likely to go past their current set of defenses. And by far the easiest way to win any sort of real fight - Professor Quirrell had said this over and over - was to shoot the enemy before they raised a shield in the first place, either from behind or from close enough range that they couldn't dodge or counter in time.</p>
+<p><i>Crap,</i> thought Harry. According to the Defense Professor, the essential art of dueling consisted of trying to put up defenses that would block whatever someone was likely to throw at you, while trying in turn to attack in ways that were likely to go past their current set of defenses. And by far the easiest way to win any sort of real fight — Professor Quirrell had said this over and over — was to shoot the enemy before they raised a shield in the first place, either from behind or from close enough range that they couldn't dodge or counter in time.</p>
 
-<p>Though Professor Quirrell might still be able to get in a shot from behind, if -</p>
+<p>Though Professor Quirrell might still be able to get in a shot from behind, if —</p>
 
 <p>But the Auror halted after taking three steps into the corridor.</p>
 
@@ -208,11 +208,11 @@
 
 <p>There was a long pause.</p>
 
-<p>"Look, whoever you are," said the hard voice. "You seem confused about how this works. I don't care if that's Lucius Malfoy behind you or Albus bloody Dumbledore. You <i>all</i> come out, I scan the whole lot of you, and <i>then</i> we talk about how much this is going to cost you -"</p>
+<p>"Look, whoever you are," said the hard voice. "You seem confused about how this works. I don't care if that's Lucius Malfoy behind you or Albus bloody Dumbledore. You <i>all</i> come out, I scan the whole lot of you, and <i>then</i> we talk about how much this is going to cost you —"</p>
 
-<p>"Two thousand Galleons, final offer," said the gravelly voice, taking on a warning undertone. "That's ten times the going rate and more than you make in a year. And believe me, if you see something you shouldn't, you're going to regret not taking that -"</p>
+<p>"Two thousand Galleons, final offer," said the gravelly voice, taking on a warning undertone. "That's ten times the going rate and more than you make in a year. And believe me, if you see something you shouldn't, you're going to regret not taking that —"</p>
 
-<p>"Shut it!" said the hard voice. "You've got exactly five seconds to drop that wand before I drop you. Five, four -"</p>
+<p>"Shut it!" said the hard voice. "You've got exactly five seconds to drop that wand before I drop you. Five, four —"</p>
 
 <p><i>What are you doing, Professor Quirrell?</i> Harry thought frantically. <i>Attack first! Cast a shield at least!</i></p>
 
@@ -226,13 +226,13 @@
 
 <p>"My offer has gone back down to five hundred Galleons," said the man in a colder, more formal voice. He smiled dryly, and the smile looked wrong on that bearded face. "And you shall need to accept a Memory Charm."</p>
 
-<p>Bahry had already swapped the harmonics on his shields so that his own stunner couldn't pass back through, already tilted his wand back into a defensive position, already raised his hardened artificial hand into position to block anything blockable, and was already thinking wordless spells to put more layers on his shields -</p>
+<p>Bahry had already swapped the harmonics on his shields so that his own stunner couldn't pass back through, already tilted his wand back into a defensive position, already raised his hardened artificial hand into position to block anything blockable, and was already thinking wordless spells to put more layers on his shields —</p>
 
 <p>The man wasn't looking at Bahry. Instead he was poking curiously at Bahry's stunner where it still wavered on the end of his wand, drawing out red sparks and flicking them away with his fingers, slowly disassembling the hex like a child's rod puzzle.</p>
 
 <p>The man hadn't raised any shields of his own.</p>
 
-<p>"Tell me," the man said in a disinterested voice that didn't seem to quite fit the rough throat - Polyjuice, Bahry would have called it, if he'd thought that anyone could possibly do magic that delicate from inside someone else's body - "what did you do in the last war? Put yourself in harm's way, or stay out of trouble?"</p>
+<p>"Tell me," the man said in a disinterested voice that didn't seem to quite fit the rough throat — Polyjuice, Bahry would have called it, if he'd thought that anyone could possibly do magic that delicate from inside someone else's body — "what did you do in the last war? Put yourself in harm's way, or stay out of trouble?"</p>
 
 <p>"Harm's way," said Bahry. His voice kept the iron calm of an Auror with nearly a hundred full years on the force, seven months short of mandatory retirement, Mad-Eye Moody couldn't have said it with any more hardness.</p>
 
@@ -242,7 +242,7 @@
 
 <p>"Did you kill them?" The man sounded idly curious, and he continued to draw threads of fire out of the much-diminished stunbolt still captive on the end of his wand, his fingers now weaving small patterns of Bahry's own magic before flicking to disperse them.</p>
 
-<p>Sweat broke out on Bahry's skin beneath his robes. His metal hand flashed downward, ripped the mirror from his belt - "Bahry to Mike, I need backup!"</p>
+<p>Sweat broke out on Bahry's skin beneath his robes. His metal hand flashed downward, ripped the mirror from his belt — "Bahry to Mike, I need backup!"</p>
 
 <p>There was a pause, and silence.</p>
 
@@ -270,7 +270,7 @@
 
 <p>The Auror spat something unspeakable.</p>
 
-<p>"In that case," said the voice, " <i>Avada</i> -"</p>
+<p>"In that case," said the voice, " <i>Avada</i> —"</p>
 
 <p>Time seemed to move very slowly, like there was time to hear the individual syllables, <i>Ke,</i> and <i>Da,</i> and <i>Vra,</i> time to watch the Auror starting to throw himself desperately aside; and even though it was all happening so slowly, somehow there wasn't time to <i>do</i> anything, no time for Harry to open his lips and scream <i>NO</i>, no time to move, maybe even not any time to think.</p>
 
@@ -282,17 +282,17 @@
 
 <hr />
 
-<p>Bahry was twisting frantically aside, not knowing if he was going to make it -</p>
+<p>Bahry was twisting frantically aside, not knowing if he was going to make it —</p>
 
-<p>His eyes were focused on his opponent and his onrushing death, so Bahry only briefly saw the outline of the brilliant silhouette, the Patronus brighter than any he'd ever seen, saw it just barely long enough to recognize the impossible shape, before the green and the silver light collided and both lights vanished, <i>both</i> lights vanished, <i>the Killing Curse had been blocked</i>, and then Bahry's ears were pierced as he saw his terrible opponent screaming, screaming, screaming, clutching at his head and screaming, starting to fall as Bahry was already falling -</p>
+<p>His eyes were focused on his opponent and his onrushing death, so Bahry only briefly saw the outline of the brilliant silhouette, the Patronus brighter than any he'd ever seen, saw it just barely long enough to recognize the impossible shape, before the green and the silver light collided and both lights vanished, <i>both</i> lights vanished, <i>the Killing Curse had been blocked</i>, and then Bahry's ears were pierced as he saw his terrible opponent screaming, screaming, screaming, clutching at his head and screaming, starting to fall as Bahry was already falling —</p>
 
 <p>Bahry hit the ground, falling from his own frantic lunge, and his dislocated left shoulder and broken rib screamed in protest. Bahry ignored the pain, managed to scramble back to his knees, brought up his wand to stun his opponent, he didn't understand what was happening but he knew that this was his only chance.</p>
 
 <p>" <i>Stupefy!</i> "</p>
 
-<p>The red bolt struck out toward the man's falling body, and was torn apart in midair and dissipated - and not by any shield. Bahry could <i>see</i> it, the wavering in the air that surrounded his fallen and screaming opponent.</p>
+<p>The red bolt struck out toward the man's falling body, and was torn apart in midair and dissipated — and not by any shield. Bahry could <i>see</i> it, the wavering in the air that surrounded his fallen and screaming opponent.</p>
 
-<p>Bahry could feel it like a deadly pressure on his skin, the flux of magic building and building and building toward some terrible breaking point. His instincts screamed at him to run before the explosion came, this was no Charm, no Curse, this was wizardry run wild, but before Bahry could even finish getting to his feet -</p>
+<p>Bahry could feel it like a deadly pressure on his skin, the flux of magic building and building and building toward some terrible breaking point. His instincts screamed at him to run before the explosion came, this was no Charm, no Curse, this was wizardry run wild, but before Bahry could even finish getting to his feet —</p>
 
 <p>The man threw his wand away from himself (he threw away his wand!) and a second later, his form blurred and vanished entirely.</p>
 
@@ -316,7 +316,7 @@
 
 <p>"Come out," said Bahry, making his voice harder, "or I start using area-effect curses." He probably couldn't have managed one if he'd tried.</p>
 
-<p>"Wait," said a boy's voice, a <i>young</i> boy's voice, high and thin and wavering, like someone was holding back exhaustion or tears. The voice now seemed to be coming from closer to hand. "Please wait. I'm - coming out -"</p>
+<p>"Wait," said a boy's voice, a <i>young</i> boy's voice, high and thin and wavering, like someone was holding back exhaustion or tears. The voice now seemed to be coming from closer to hand. "Please wait. I'm — coming out —"</p>
 
 <p>"Drop the invisibility," growled Bahry. He was too tired to bother with anti-Disillusionment Charms.</p>
 
@@ -338,7 +338,7 @@
 
 <p>"Sorry," whispered the eleven-year-old boy, "here," and he held out the wand toward Bahry.</p>
 
-<p>Bahry barely stopped himself from snarling at the traumatized boy who'd just saved his life. Instead he overrode the impulse with a sigh, and just stretched out a hand to take the wand. "Look, son, you're <i>really</i> not supposed to point a wand at -"</p>
+<p>Bahry barely stopped himself from snarling at the traumatized boy who'd just saved his life. Instead he overrode the impulse with a sigh, and just stretched out a hand to take the wand. "Look, son, you're <i>really</i> not supposed to point a wand at —"</p>
 
 <p>The wand's end twisted lightly beneath Bahry's hand just as the boy whispered, " <i>Somnium</i>."</p>
 
@@ -356,7 +356,7 @@
 
 <p>He didn't dare use magic on Professor Quirrell.</p>
 
-<p>Harry had felt it, the burning, tearing pain in his head, like his brain was about to split in half. He'd felt it, his magic and Professor Quirrell's magic, matched and anti-harmonized in a fulfillment of doom. That was the mysterious terrible thing that would happen if Harry and Professor Quirrell ever got too close to each other, or if they ever cast magic on each other, or if <i>their spells ever touched,</i> their magic would resonate out of control -</p>
+<p>Harry had felt it, the burning, tearing pain in his head, like his brain was about to split in half. He'd felt it, his magic and Professor Quirrell's magic, matched and anti-harmonized in a fulfillment of doom. That was the mysterious terrible thing that would happen if Harry and Professor Quirrell ever got too close to each other, or if they ever cast magic on each other, or if <i>their spells ever touched,</i> their magic would resonate out of control —</p>
 
 <p>Harry stared at the snake, he couldn't tell if it was breathing.</p>
 
