--- a/055.htm
+++ b/055.htm
@@ -20,7 +20,7 @@
 
 <p><i>It might not be too late,</i> whispered a voice inside him. <i>You might still be able to fix your mistake. The Auror saw you, he remembers that you stunned him... but if he were dead, if Professor Quirrell were dead, if Bellatrix were dead, there would be no one to contradict your story.</i></p>
 
-<p>Slowly, Harry's hand started to rise, pointing his wand at the police officer and -</p>
+<p>Slowly, Harry's hand started to rise, pointing his wand at the police officer and —</p>
 
 <p>Harry's hand halted.</p>
 
@@ -46,7 +46,7 @@
 
 <p>That was odd, it had been something very important, he really ought to be able to remember it... something to do with death? But that wasn't happy...</p>
 
-<p>His body was shivering, Azkaban hadn't seemed so cold before, and it seemed to be getting colder even as he thought. It was too late for him, he'd already sunk too far, he'd never be able to cast the Patronus Charm now -</p>
+<p>His body was shivering, Azkaban hadn't seemed so cold before, and it seemed to be getting colder even as he thought. It was too late for him, he'd already sunk too far, he'd never be able to cast the Patronus Charm now —</p>
 
 <p><i>That may be the Dementation talking rather than an accurate estimate,</i> observed the logical part of himself, habits that had been encoded into sheer reflex, requiring no energy to activate. <i>Think of the Dementors' fear as a cognitive bias, and try to overcome it the way you would overcome any other cognitive bias. Your hopeless feelings may not indicate that the situation is actually hopeless. It may only indicate that you are in the presence of Dementors. All negative emotions and pessimistic estimates must now be considered suspect, fallacious until proven valid.</i></p>
 
@@ -136,7 +136,7 @@
 
 <p><i>Rationalization,</i> said Slytherin. <i>So why</i> did <i>Professor Quirrell do it, then?</i></p>
 
-<p>And Harry thought with a tinge of desperation - knowing, even as he thought it, that he was motivated in part by a desire to reject reality, and that wasn't how the technique was meant to be wielded - <i>I notice that I am confused.</i></p>
+<p>And Harry thought with a tinge of desperation — knowing, even as he thought it, that he was motivated in part by a desire to reject reality, and that wasn't how the technique was meant to be wielded — <i>I notice that I am confused.</i></p>
 
 <p>There was internal silence. None of the parts of himself seemed to have anything to add to that.</p>
 
@@ -174,7 +174,7 @@
 
 <p>Harry turned and strode quickly toward where Bellatrix was waiting on the stairs. He could feel his spirits reviving a little. It <i>was</i> starting to look like a good plan, and there was no time to waste in going about it.</p>
 
-<p>What to do with Professor Quirrell, or for that matter Bellatrix, after the portkey took them to where they were supposed to hand Bellatrix over to the psychiatric healer... well, Harry could work that out along the way. Harry would probably have to bamboozle the healer into doing something - which was going to take one hell of a bamboozling, and Harry wasn't even sure what he <i>wanted</i> done - but he and Bellatrix had to get moving <i>now.</i></p>
+<p>What to do with Professor Quirrell, or for that matter Bellatrix, after the portkey took them to where they were supposed to hand Bellatrix over to the psychiatric healer... well, Harry could work that out along the way. Harry would probably have to bamboozle the healer into doing something — which was going to take one hell of a bamboozling, and Harry wasn't even sure what he <i>wanted</i> done — but he and Bellatrix had to get moving <i>now.</i></p>
 
 <p>The main problem Harry saw, as he quickly ran the whole process forward in his imagination, would come when they reached the roof. Professor Quirrell had been supposed to sneak around invisibly and Confund the monitors that would notice visitors in the aerial surroundings of Azkaban, causing them to see a repeating loop of scenery for a few minutes. Professor Quirrell had said that he couldn't Disillusion Harry's Patronus; and if they switched <i>off</i> the Patronus, the Dementors would notice Bellatrix was missing, and alert the Aurors...</p>
 
@@ -186,7 +186,7 @@
 
 <p>Li's hands were sure despite the adrenaline, as he unlocked the bars on the Vanishing Cabinet that linked Azkaban to a well-guarded room in the interior of the Department of Magical Law Enforcement. (A one-way Vanishing Cabinet, of course. The wards permitted a few fast ways <i>into</i> Azkaban, all of them highly restricted, and <i>no</i> fast ways out.)</p>
 
-<p>Li stepped well back, pointed his wand at the Cabinet, spoke the incantation " <i>Harmonia Nectere Passus</i>", and not a second later -</p>
+<p>Li stepped well back, pointed his wand at the Cabinet, spoke the incantation " <i>Harmonia Nectere Passus</i>", and not a second later —</p>
 
 <p>The door of the Cabinet burst open with a bang, and into the room strode a heavy-set, square-jawed witch with greyed hair cropped close around her head. She wore no rank signs as she wore no jewelry or other ornamentation, it was only an ordinary Auror's robes that she deemed fit to grace herself: Director Amelia Bones, head of the Department of Magical Law Enforcement and said to be the only witch in the DMLE who could take Mad-Eye Moody in a fair fight (not that either of those two were the sort to fight fairly). Li had heard rumors that Amelia could Apparate within the bounds of the DMLE, and this was the sort of thing that gave rise to rumors like that, he'd called in the alarm not fifty seconds ago.</p>
 
@@ -246,7 +246,7 @@
 
 <p>Bellatrix paused, and then said, hesitantly, "I think so, my Lord."</p>
 
-<p>"Eliminate that Auror's last half-hour of memory," Harry commanded. He'd thought a bit about whether he wanted to provide any justification for that, what he would say if Bellatrix asked why they weren't just killing him, in which case Harry would explain that they were pretending to be a different power group and then tell her to shut up -</p>
+<p>"Eliminate that Auror's last half-hour of memory," Harry commanded. He'd thought a bit about whether he wanted to provide any justification for that, what he would say if Bellatrix asked why they weren't just killing him, in which case Harry would explain that they were pretending to be a different power group and then tell her to shut up —</p>
 
 <p>But Bellatrix simply pointed her wand at the Auror, stood silently for a time, and finally whispered, " <i>Obliviate.</i>"</p>
 
@@ -272,7 +272,7 @@
 
 <p>Someone would <i>burn</i> for this.</p>
 
-<p>The Dementor still hovered outside the window, casting its useless shadow of dread over their operations; all the creature could do was gurgle its lack of knowledge or fail to reply at all, when asked questions like 'Did Bellatrix Black escape?' and 'Why can't you find her?' and 'How is she being hidden?' Amelia was starting to worry that the criminals were already gone, when -</p>
+<p>The Dementor still hovered outside the window, casting its useless shadow of dread over their operations; all the creature could do was gurgle its lack of knowledge or fail to reply at all, when asked questions like 'Did Bellatrix Black escape?' and 'Why can't you find her?' and 'How is she being hidden?' Amelia was starting to worry that the criminals were already gone, when —</p>
 
 <p>"We found a hole in the roof over C spiral!" someone shouted from the doorway. "Still open, ward circumventions still active!"</p>
 
@@ -342,7 +342,7 @@
 
 <p><i>Um...</i> said Hufflepuff. <i>Did you seriously just think, 'You ought to work for me,</i> I <i>would appreciate you?'</i></p>
 
-<p><i>A stone would respond to that kind of loyalty,</i> Harry thought. <i>Even if I'm only getting it by mistake, I can't help but -</i></p>
+<p><i>A stone would respond to that kind of loyalty,</i> Harry thought. <i>Even if I'm only getting it by mistake, I can't help but —</i></p>
 
 <p><i>She's the Dark Lord's loyal killer and torturer, and the supposed reason she's loyal is because an innocent girl was broken into pieces and used as raw material to make her,</i> said Hufflepuff. <i>Did you forget?</i></p>
 
@@ -406,7 +406,7 @@
 
 <p>And...</p>
 
-<p><i>Now unlock the door -</i></p>
+<p><i>Now unlock the door —</i></p>
 
 <p>...Harry kept walking...</p>
 
@@ -418,11 +418,11 @@
 
 <p>The portkey Harry was carrying could transport two humans, only two, plus or minus a snake. If they'd had Professor Quirrell's portkey too... but they <i>didn't</i>, Professor Quirrell's human form was carrying that, there was no way to get it... Harry could only save one person today, and there was only one person on the lowest level of Azkaban, in the most desperate need...</p>
 
-<p>"DON'T GO!" The voice came in a scream from behind the metal door. "No, no, no, don't go, don't take it away, don't don't don't -"</p>
+<p>"DON'T GO!" The voice came in a scream from behind the metal door. "No, no, no, don't go, don't take it away, don't don't don't —"</p>
 
 <p>There was a light in the corridor and it grew brighter.</p>
 
-<p>"Please," sobbed the woman's voice, "please, I can't remember my children's names any more -"</p>
+<p>"Please," sobbed the woman's voice, "please, I can't remember my children's names any more —"</p>
 
 <p>"Sit down, Bella," Harry's voice said, somehow he kept his voice in a cold whisper, "I must deal with this," the Hover Charm diminishing and switching off even as Bella obediently sat down, her skeletal form dark against the brightening air.</p>
 
@@ -438,7 +438,7 @@
 
 <p><i>If I wipe out the Dementors, then even if I live, they'll know it was me, that I was the one who did this... I'll lose my support, lose the war...</i></p>
 
-<p><i>Yeah?</i> said the inner voice that was urging him on. <i>After you destroy all the Dementors in Azkaban? I'd think that'd tend to prove your credentials as a Light Lord, actually, so SAVE HER SAVE HER YOU HAVE TO SAVE HER -</i></p>
+<p><i>Yeah?</i> said the inner voice that was urging him on. <i>After you destroy all the Dementors in Azkaban? I'd think that'd tend to prove your credentials as a Light Lord, actually, so SAVE HER SAVE HER YOU HAVE TO SAVE HER —</i></p>
 
 <p>The humanoid shape could no longer be seen as a separate entity.</p>
 
@@ -458,7 +458,7 @@
 
 <p><i>There are other Dementors, probably other Azkabans... if I'm going to do this, I should do it when I'm closer to the central pit, it will take less of my life that way, which increases the probability that I'll survive to destroy other Dementors... even assuming this is the optimal thing to do, if there's a right time and place to do this, it isn't now and here, IT ISN'T NOW AND HERE!</i></p>
 
-<p><i>What?</i> said the other part of him indignantly, as it searched for a counterargument that didn't exist -</p>
+<p><i>What?</i> said the other part of him indignantly, as it searched for a counterargument that didn't exist —</p>
 
 <p>Slowly the light died back down, as Harry concentrated on that one indisputable fact, the one obvious truth that they weren't in the optimal place, the time <i>couldn't</i> be <i>now...</i></p>
 
@@ -492,7 +492,7 @@
 
 <p>Director Bones wasn't Crouch.</p>
 
-<p>But they were hunting Bellatrix Black now, who had been a Death Eater, and who was certainly being rescued by Death Eaters. Their Patronuses were behaving oddly - all the bright creatures stopping and staring off downward, before they'd gone back to following their masters. And the Dementors couldn't find their target.</p>
+<p>But they were hunting Bellatrix Black now, who had been a Death Eater, and who was certainly being rescued by Death Eaters. Their Patronuses were behaving oddly — all the bright creatures stopping and staring off downward, before they'd gone back to following their masters. And the Dementors couldn't find their target.</p>
 
 <p>It seemed to her that this would be an extremely good time to consult Albus Dumbledore.</p>
 
