--- a/056.htm
+++ b/056.htm
@@ -1,6 +1,6 @@
 <p>Silent, it was thankfully silent, the metal door on the next level down. Either there wasn't someone behind there, or they were hurting quietly, maybe they were screaming but their voice had given out already, or they were just muttering quietly to themselves in the dark...</p>
 
-<p><i>I'm not sure I can do this,</i> Harry thought, and he couldn't blame the despairing thought on the Dementors either. It would be better to be lower, safer to be lower, his plan would take time to implement and the Aurors were probably already working their way down. But if Harry had to pass any more of those metal doors while staying silent and keeping his breathing perfectly regular, he might go mad; if he had to leave a piece of himself behind at each one, soon there wouldn't be anything left of him -</p>
+<p><i>I'm not sure I can do this,</i> Harry thought, and he couldn't blame the despairing thought on the Dementors either. It would be better to be lower, safer to be lower, his plan would take time to implement and the Aurors were probably already working their way down. But if Harry had to pass any more of those metal doors while staying silent and keeping his breathing perfectly regular, he might go mad; if he had to leave a piece of himself behind at each one, soon there wouldn't be anything left of him —</p>
 
 <p>A luminous moonlit cat leaped into existence and landed in front of Harry's Patronus. Harry almost screamed, which wouldn't have helped his image with Bellatrix.</p>
 
@@ -24,13 +24,13 @@
 
 <hr />
 
-<p>As their team prepared to eat another bite of territory out of C spiral, shielding and scanning before dispelling the previous shield to their rear, Amelia was tapping her fingers on her hip and wondering if she ought to consult the obvious expert. If only he wasn't so -</p>
+<p>As their team prepared to eat another bite of territory out of C spiral, shielding and scanning before dispelling the previous shield to their rear, Amelia was tapping her fingers on her hip and wondering if she ought to consult the obvious expert. If only he wasn't so —</p>
 
 <p>Amelia heard the familiar crack of fire and knew what she would see as she turned.</p>
 
 <p>A third of her Aurors were spinning around and leveling their wands on the old wizard in half-moon glasses and a long silver beard who had appeared directly within their midst, a bright red-golden phoenix on his shoulder.</p>
 
-<p>"Hold your fire!" Polyjuice made it easy to forge the face, but faking the phoenix travel would have been rather more difficult - the wards permitted it as one of the fast ways into Azkaban, though there were no fast ways out.</p>
+<p>"Hold your fire!" Polyjuice made it easy to forge the face, but faking the phoenix travel would have been rather more difficult — the wards permitted it as one of the fast ways into Azkaban, though there were no fast ways out.</p>
 
 <p>The old witch and the old wizard stared at each other for a long moment.</p>
 
@@ -72,7 +72,7 @@
 
 <p>They hadn't even gotten to the end of that corridor before Harry's Patronus raised its hand, politely, as though in a classroom.</p>
 
-<p>Harry thought quickly. The question was how to - no, that was also obvious.</p>
+<p>Harry thought quickly. The question was how to — no, that was also obvious.</p>
 
 <p>"It seems," Harry said in a coldly amused voice, "that someone has instructed this Patronus to speak its message only to me." He chuckled. "Well then. Pardon me, dear Bella. <i>Quietus.</i>"</p>
 
@@ -84,7 +84,7 @@
 
 <hr />
 
-<p>No sooner did Amelia and the other Aurors finish recasting their Patronus Charms, when -</p>
+<p>No sooner did Amelia and the other Aurors finish recasting their Patronus Charms, when —</p>
 
 <p>The blazing silver phoenix flew off, and the true red-golden phoenix followed it, and the old wizard calmly strode after both of them with his long wand gripped low.</p>
 
@@ -162,7 +162,7 @@
 
 <p>But...</p>
 
-<p>But uncomfortable thoughts weren't always <i>true</i>, and this one didn't sound exactly right. Like there was a grain of truth, but it wasn't hiding <i>where</i> the hypothesis said it was -</p>
+<p>But uncomfortable thoughts weren't always <i>true</i>, and this one didn't sound exactly right. Like there was a grain of truth, but it wasn't hiding <i>where</i> the hypothesis said it was —</p>
 
 <p>And that was when Harry realized.</p>
 
@@ -174,9 +174,9 @@
 
 <p>Harry asked his dark side what it thought of death.</p>
 
-<p>And Harry's Patronus wavered, dimmed, almost went out upon the instant, for that desperate, sobbing, screaming terror, an unutterable fear that would do anything not to die, throw everything aside not to die, that couldn't think straight or feel straight in the presence of that absolute horror, that couldn't look into the abyss of nonexistence any more than it could have stared straight into the Sun, a blind terrified thing that only wanted to find a dark corner and hide and not have to think about it any more -</p>
+<p>And Harry's Patronus wavered, dimmed, almost went out upon the instant, for that desperate, sobbing, screaming terror, an unutterable fear that would do anything not to die, throw everything aside not to die, that couldn't think straight or feel straight in the presence of that absolute horror, that couldn't look into the abyss of nonexistence any more than it could have stared straight into the Sun, a blind terrified thing that only wanted to find a dark corner and hide and not have to think about it any more —</p>
 
-<p>The silver figure had darkened to moonlight, was flickering like a failing candle -</p>
+<p>The silver figure had darkened to moonlight, was flickering like a failing candle —</p>
 
 <p><i>It's all right,</i> thought Harry, <i>it's all right.</i></p>
 
@@ -234,13 +234,13 @@
 
 <p>The old wizard strode back into the midst of the Aurors, the silver and the red-golden phoenixes now following behind.</p>
 
-<p>" <i>You -</i>" Amelia began to bellow.</p>
+<p>" <i>You —</i>" Amelia began to bellow.</p>
 
 <p>"They have dismissed their Patronus," said Dumbledore. The old wizard didn't seem to raise his voice but his calm words somehow overrode her own. "I cannot find them now."</p>
 
 <p>Amelia gritted her teeth, and put a number of scathing remarks on hold, and turned to the communications officer. "Tell the duty room to ask the Dementors <i>again</i> if they can sense Bellatrix Black."</p>
 
-<p>The communications specialist spoke to her mirror for a moment, and a few seconds later, looked up, surprised. "No -"</p>
+<p>The communications specialist spoke to her mirror for a moment, and a few seconds later, looked up, surprised. "No —"</p>
 
 <p>Amelia was already cursing violently in her mind.</p>
 
