--- a/062.htm
+++ b/062.htm
@@ -64,7 +64,7 @@
 
 <p>She didn't need to wait at all, actually; if he had done it, then it had already happened...</p>
 
-<p>Minerva knew, then, that she was delaying because she was nervous, and the realization saddened her. Mischief, yes, unspeakable unthinkable mischief with all the prudence and foresight of a falling rock - she didn't know how the boy had tricked the Hat into not Sorting him to Gryffindor where he obviously belonged - but nothing dark or harmful, not ever. Beneath that mischief his goodness ran as deep and as true as the Weasley twins', though not even the Cruciatus Curse could have gotten her to say that out loud.</p>
+<p>Minerva knew, then, that she was delaying because she was nervous, and the realization saddened her. Mischief, yes, unspeakable unthinkable mischief with all the prudence and foresight of a falling rock — she didn't know how the boy had tricked the Hat into not Sorting him to Gryffindor where he obviously belonged — but nothing dark or harmful, not ever. Beneath that mischief his goodness ran as deep and as true as the Weasley twins', though not even the Cruciatus Curse could have gotten her to say that out loud.</p>
 
 <p>" <i>Expecto Patronum</i>," she said, and then, "Go to Professor Flitwick, and bear back his reply after you ask him this: 'Did Mr. Potter give you a message from me, what was that message, and when did you receive it?'"</p>
 
@@ -126,7 +126,7 @@
 
 <p>Even Harry's dark side was feeling the exhaustion by the time the spiraling staircase had delivered him to the great oaken door that was the final gate to Dumbledore's office; but since Harry was now <i>legally</i> four hours past his natural bedtime, it was safe to let some of the fatigue show, the physical if not the emotional.</p>
 
-<p>The oaken door swung open -</p>
+<p>The oaken door swung open —</p>
 
 <p>Harry's eyes had already been focused in the direction of the great desk, the throne behind it; so it took a moment to register that the throne was empty, the desk barren but for a single leatherbound volume; and then Harry shifted his gaze to see the wizard standing among his fiddly things, the mysterious unknown devices in their scores. Fawkes and the Sorting Hat occupied their respective perches, a bright cheerful blaze crackled in a nook that Harry had not before realized was a fireplace, and there were the two umbrellas and three red slippers for left feet. All things in their place and in their customary appearance except the old wizard himself, standing tall and dressed in robes of the most formal black. It came as a shock to the eyes, those robes on that person, it was as if Harry had seen his father wearing a business suit.</p>
 
@@ -144,9 +144,9 @@
 
 <p>Neither part of Harry could think of anything to say to that, at least not for the few seconds before the old wizard continued.</p>
 
-<p>"It need change little for you, for now," said the old wizard. "I have begun reconstituting the Order of the Phoenix that will serve you, I have alerted the few souls who can and should understand: Amelia Bones, Alastor Moody, Bartemius Crouch, certain others. Of the prophecy - yes, there is a prophecy - I have not told them, but they know that Voldemort is returned, and they know that you are to play some vital role. They and I shall fight your war in its lesser beginnings, while you grow stronger, and perhaps wiser, here at Hogwarts." The old wizard's hand came up, as though beseeching. "So to you, for now, there is but one change, and I implore you to understand its necessity. Do you recognize the book on my desk, Harry?"</p>
+<p>"It need change little for you, for now," said the old wizard. "I have begun reconstituting the Order of the Phoenix that will serve you, I have alerted the few souls who can and should understand: Amelia Bones, Alastor Moody, Bartemius Crouch, certain others. Of the prophecy — yes, there is a prophecy — I have not told them, but they know that Voldemort is returned, and they know that you are to play some vital role. They and I shall fight your war in its lesser beginnings, while you grow stronger, and perhaps wiser, here at Hogwarts." The old wizard's hand came up, as though beseeching. "So to you, for now, there is but one change, and I implore you to understand its necessity. Do you recognize the book on my desk, Harry?"</p>
 
-<p>The inner part of Harry was screaming and banging its head against imaginary walls, while the outer Harry turned and stared at what proved to be -</p>
+<p>The inner part of Harry was screaming and banging its head against imaginary walls, while the outer Harry turned and stared at what proved to be —</p>
 
 <p>There was a rather long pause.</p>
 
@@ -164,7 +164,7 @@
 
 <p>"Er..." said Harry, "not exactly..." There was something about Dumbledore when he was like this, which made it hard to stay properly cold; his dark side had trouble with weird.</p>
 
-<p>"Then I will spell it out," said the old wizard. His voice was stern, his eyes were sad. "Frodo should have been moved to Rivendell at once by Gandalf himself - and Frodo should never have left Rivendell without guard. There should have been no night of terror in Bree, no Barrow-downs, no Weathertop where Frodo was wounded, they could have lost their entire war any of those times, for Gandalf's folly! Do you understand now what I am saying to you, son of Michael and Petunia?"</p>
+<p>"Then I will spell it out," said the old wizard. His voice was stern, his eyes were sad. "Frodo should have been moved to Rivendell at once by Gandalf himself — and Frodo should never have left Rivendell without guard. There should have been no night of terror in Bree, no Barrow-downs, no Weathertop where Frodo was wounded, they could have lost their entire war any of those times, for Gandalf's folly! Do you understand now what I am saying to you, son of Michael and Petunia?"</p>
 
 <p>And the Harry who knew nothing did understand.</p>
 
@@ -210,33 +210,33 @@
 
 <p>His hand reached to the door-handle.</p>
 
-<p>A piercing cry split the air -</p>
+<p>A piercing cry split the air —</p>
 
 <p>As though in slow motion, as Harry spun, he saw the phoenix already launched through the air and winging toward him.</p>
 
-<p>From the true Harry, the one who knew his own guilt, came a flash of panic, he hadn't thought of that, hadn't anticipated it, he'd prepared to face Dumbledore but he'd forgotten about <i>Fawkes -</i></p>
+<p>From the true Harry, the one who knew his own guilt, came a flash of panic, he hadn't thought of that, hadn't anticipated it, he'd prepared to face Dumbledore but he'd forgotten about <i>Fawkes —</i></p>
 
 <p>Flap, flap, and flap, three times the phoenix's wings flapped like the flaring up and dying down of a fire, duration seemed to pass too slowly as Fawkes soared over the mysterious devices toward where Harry stood.</p>
 
 <p>And the red-golden bird was hovering in front of him with gentle wing-sweeps, bobbing in the air like a candle-flame.</p>
 
-<p>"What is it, Fawkes?" said the false Harry in puzzlement, looking the phoenix in the eyes, as he would if he were innocent. The real Harry, feeling the same awful sickness inside as when Professor McGonagall had expressed her trust in him, thought, <i>Did I turn evil today, Fawkes? I didn't think I was evil... Do you hate me now? If I've become something a phoenix hates, maybe I should just give it up now, give up everything now and confess -</i></p>
+<p>"What is it, Fawkes?" said the false Harry in puzzlement, looking the phoenix in the eyes, as he would if he were innocent. The real Harry, feeling the same awful sickness inside as when Professor McGonagall had expressed her trust in him, thought, <i>Did I turn evil today, Fawkes? I didn't think I was evil... Do you hate me now? If I've become something a phoenix hates, maybe I should just give it up now, give up everything now and confess —</i></p>
 
 <p>Fawkes screamed, the most terrible cry Harry had ever heard, a scream that set all the devices vibrating and made all the sleeping figures start within their portraits.</p>
 
-<p>It pierced through all of Harry's defenses like a white-hot sword through butter, collapsed all his layers like a punctured balloon popping, reshuffled his priorities in an instant as he remembered the one most important thing; the tears began pouring freely from Harry's eyes, down his cheeks, his voice choked as the words came out of his throat like coughing up lava -</p>
+<p>It pierced through all of Harry's defenses like a white-hot sword through butter, collapsed all his layers like a punctured balloon popping, reshuffled his priorities in an instant as he remembered the one most important thing; the tears began pouring freely from Harry's eyes, down his cheeks, his voice choked as the words came out of his throat like coughing up lava —</p>
 
-<p>"Fawkes says," Harry's voice said, "he wants me, to do, something, about, the prisoners, in Azkaban -"</p>
+<p>"Fawkes says," Harry's voice said, "he wants me, to do, something, about, the prisoners, in Azkaban —"</p>
 
 <p>"Fawkes, <i>no!</i> " said the old wizard. Dumbledore strode forward, reaching out to the phoenix with a pleading hand. The old wizard's voice was almost as desperate as the phoenix's scream had been. "You cannot ask that of him, Fawkes, he's only a boy still!"</p>
 
-<p>"You went to Azkaban," Harry whispered, "you took Fawkes with you, he saw - <i>you</i> saw - you were <i>there</i>, you saw - <i>WHY DIDN'T YOU DO ANYTHING? WHY DIDN'T YOU LET THEM OUT?</i> "</p>
+<p>"You went to Azkaban," Harry whispered, "you took Fawkes with you, he saw — <i>you</i> saw — you were <i>there</i>, you saw — <i>WHY DIDN'T YOU DO ANYTHING? WHY DIDN'T YOU LET THEM OUT?</i> "</p>
 
 <p>When the instruments stopped vibrating, Harry realized that Fawkes had screamed at the same time as his own scream, that the phoenix was now flying next to Harry and facing Dumbledore at his side, the red-golden head level with his own.</p>
 
 <p>"Can you," whispered the old wizard, "can you truly hear the voice of the phoenix so clearly?"</p>
 
-<p>Harry was sobbing almost too hard to speak, for all the metal doors he'd passed, the voices he'd heard, the worst memories, the desperate begging as he walked away, all of it had burst into his mind like fire at the phoenix's scream, all the inner bulwarks smashed. Harry didn't know whether he could truly hear the voice of the phoenix so clearly, whether he would have understood Fawkes without already knowing. All Harry knew was that he had a plausible excuse to say the things Professor Quirrell had told him he must <i>never</i> raise in conversation from this day forth; because this was just what an innocent Harry would have said, would have done, if he <i>had</i> heard so clearly. "They're hurting - we have to help them -"</p>
+<p>Harry was sobbing almost too hard to speak, for all the metal doors he'd passed, the voices he'd heard, the worst memories, the desperate begging as he walked away, all of it had burst into his mind like fire at the phoenix's scream, all the inner bulwarks smashed. Harry didn't know whether he could truly hear the voice of the phoenix so clearly, whether he would have understood Fawkes without already knowing. All Harry knew was that he had a plausible excuse to say the things Professor Quirrell had told him he must <i>never</i> raise in conversation from this day forth; because this was just what an innocent Harry would have said, would have done, if he <i>had</i> heard so clearly. "They're hurting — we have to help them —"</p>
 
 <p>"I <i>can't!</i> " cried Albus Dumbledore. "Harry, Fawkes, I <i>can't</i>, there's nothing I can do!"</p>
 
@@ -244,7 +244,7 @@
 
 <p>" <i>WHY NOT? JUST GO IN AND TAKE THEM OUT!"</i></p>
 
-<p>The old wizard wrenched his gaze from the phoenix, his eyes meeting Harry's instead. "Harry, tell Fawkes for me! Tell him it's not that simple! Phoenixes aren't mere animals but they <i>are</i> animals, Harry, they can't understand -"</p>
+<p>The old wizard wrenched his gaze from the phoenix, his eyes meeting Harry's instead. "Harry, tell Fawkes for me! Tell him it's not that simple! Phoenixes aren't mere animals but they <i>are</i> animals, Harry, they can't understand —"</p>
 
 <p>"I don't understand either," Harry said, his voice trembling. "I don't understand why you're <i>feeding people to Dementors! Azkaban isn't a prison, it's a torture chamber and you're torturing those people to DEATH!</i> "</p>
 
@@ -252,25 +252,25 @@
 
 <p>CAW!</p>
 
-<p>There was a pause, and Harry's trembling voice said, "Fawkes doesn't know anything about governments, he just wants you - to take the prisoners out - of their cells - and he'll help you fight, if anyone stands in your way - and - and so will I, Headmaster! I'll go with you and destroy any Dementor that comes near! We'll worry about the political fallout afterward, I bet that you and I together could get away with it -"</p>
+<p>There was a pause, and Harry's trembling voice said, "Fawkes doesn't know anything about governments, he just wants you — to take the prisoners out — of their cells — and he'll help you fight, if anyone stands in your way — and — and so will I, Headmaster! I'll go with you and destroy any Dementor that comes near! We'll worry about the political fallout afterward, I bet that you and I together could get away with it —"</p>
 
 <p>"Harry," whispered the old wizard, "phoenixes do not understand how winning a battle can lose a war." Tears were streaming down the old wizard's cheeks, dripping into his silver beard. "The battle is all they know. They are good, but not wise. That is why they choose wizards to be their masters."</p>
 
-<p>"Can you bring out the Dementors to where I can get at them?" Harry's voice was begging, now. "Bring them out in groups of fifteen - I think I could destroy that many at a time without hurting myself -"</p>
+<p>"Can you bring out the Dementors to where I can get at them?" Harry's voice was begging, now. "Bring them out in groups of fifteen — I think I could destroy that many at a time without hurting myself —"</p>
 
-<p>The old wizard shook his head. "It was hard enough to pass off the loss of one - they might give me one more, but never two - they are considered national possessions, Harry, weapons in case of war -"</p>
+<p>The old wizard shook his head. "It was hard enough to pass off the loss of one — they might give me one more, but never two — they are considered national possessions, Harry, weapons in case of war —"</p>
 
 <p>Fury blazed in Harry then, blazed up like fire, it might have come from where a phoenix now rested on his own shoulder, and it might have come from his own dark side, and the two angers mixed within him, the cold and the hot, and it was a strange voice that said from his throat, "Tell me something. What does a government have to do, what do the voters have to do with their democracy, what do the <i>people</i> of a <i>country</i> have to do, before I ought to decide that I'm not on their side any more?"</p>
 
-<p>The old wizard's eyes widened where he stared at the boy with a phoenix upon his shoulder. "Harry... are those your words, or the Defense Professor's -"</p>
+<p>The old wizard's eyes widened where he stared at the boy with a phoenix upon his shoulder. "Harry... are those your words, or the Defense Professor's —"</p>
 
 <p>"Because there has to be <i>some</i> point, doesn't there? And if it's not Azkaban, where is it, then?"</p>
 
-<p>"Harry, listen, please, hear me! Wizards could not live together if they each declared rebellion against the whole, every time they differed! Always there will be <i>something</i> -"</p>
+<p>"Harry, listen, please, hear me! Wizards could not live together if they each declared rebellion against the whole, every time they differed! Always there will be <i>something</i> —"</p>
 
 <p>" <i>Azkaban is not just something! It's evil!</i> "</p>
 
-<p>"Yes, even evil! Even some evils, Harry, for wizards are not perfectly good! And yet it is better that we live in peace, than in chaos; and for you and I to break Azkaban by force would be the beginning of <i>chaos</i>, can you not see it?" The old wizard's voice was pleading. "And it is possible to oppose the will of your fellows openly or in secret, without <i>hating</i> them, without declaring them evil and enemy! I do not think the people of this country deserve that of you, Harry! And even if some of them did - what of the children, what of the students in Hogwarts, what of the many good people mixed in with the bad?"</p>
+<p>"Yes, even evil! Even some evils, Harry, for wizards are not perfectly good! And yet it is better that we live in peace, than in chaos; and for you and I to break Azkaban by force would be the beginning of <i>chaos</i>, can you not see it?" The old wizard's voice was pleading. "And it is possible to oppose the will of your fellows openly or in secret, without <i>hating</i> them, without declaring them evil and enemy! I do not think the people of this country deserve that of you, Harry! And even if some of them did — what of the children, what of the students in Hogwarts, what of the many good people mixed in with the bad?"</p>
 
 <p>Harry looked on his shoulder at where Fawkes had perched, saw the phoenix's eyes gazing back at him, they did not glow and yet they blazed, red flames in a sea of golden fire.</p>
 
@@ -280,13 +280,13 @@
 
 <p>Fawkes didn't understand the conversation.</p>
 
-<p>The young boy looked at the old wizard, and said in a thick voice, "Or maybe the phoenixes are wiser than us, smarter than us, maybe they follow us around hoping that someday we'll <i>listen</i> to them, someday we'll <i>get</i> it, someday we'll just <i>take</i>, the prisoners, <i>out,</i> of their <i>cells -</i>"</p>
+<p>The young boy looked at the old wizard, and said in a thick voice, "Or maybe the phoenixes are wiser than us, smarter than us, maybe they follow us around hoping that someday we'll <i>listen</i> to them, someday we'll <i>get</i> it, someday we'll just <i>take</i>, the prisoners, <i>out,</i> of their <i>cells —</i>"</p>
 
 <p>Harry spun and pulled open the oaken door and stepped onto the staircase and slammed the door behind him.</p>
 
 <p>The stairwell began rotating, Harry began descending, and he put his face in his hands, and began to weep.</p>
 
-<p>It wasn't until he was halfway to the bottom that he noticed the difference, noticed the warmth still spreading through him, and realized that -</p>
+<p>It wasn't until he was halfway to the bottom that he noticed the difference, noticed the warmth still spreading through him, and realized that —</p>
 
 <p>"Fawkes?" Harry whispered.</p>
 
@@ -298,7 +298,7 @@
 
 <p>Caw!</p>
 
-<p>"Oh," Harry said, his voice trembling a little, "I'm glad to hear that, Fawkes, because I don't think - the Headmaster - I don't think he deserves -"</p>
+<p>"Oh," Harry said, his voice trembling a little, "I'm glad to hear that, Fawkes, because I don't think — the Headmaster — I don't think he deserves —"</p>
 
 <p>Harry stopped, took a breath.</p>
 
