--- a/064.htm
+++ b/064.htm
@@ -26,15 +26,15 @@
 
 <p>There were doubtful glances exchanged within the council; Glóin and Gimli and Boromir were now looking at the Elves more skeptically than before, like they had awoken out of a dream of words.</p>
 
-<p>"The Enemy is very wise," said Gandalf, "and weighs all things to a nicety in the scales of his malice. But the only measure that he knows is desire, desire for power; and so he judges all hearts. Into his heart the thought will not enter that any will refuse it, that having the Ring we may seek to destroy it -"</p>
+<p>"The Enemy is very wise," said Gandalf, "and weighs all things to a nicety in the scales of his malice. But the only measure that he knows is desire, desire for power; and so he judges all hearts. Into his heart the thought will not enter that any will refuse it, that having the Ring we may seek to destroy it —"</p>
 
-<p>"He <i>will</i> think of it!" cried Frodo. He struggled for words, trying to convey things that had once seemed perfect in his comprehension, and then faded like melting snow. "If the Enemy thought that all his foes were moved by desire for power alone - he would guess wrongly, over and over, and the Maker of this Ring would <i>see</i> that, he would <i>know</i> that somewhere he had made a mistake!" Frodo's hands stretched forth pleadingly.</p>
+<p>"He <i>will</i> think of it!" cried Frodo. He struggled for words, trying to convey things that had once seemed perfect in his comprehension, and then faded like melting snow. "If the Enemy thought that all his foes were moved by desire for power alone — he would guess wrongly, over and over, and the Maker of this Ring would <i>see</i> that, he would <i>know</i> that somewhere he had made a mistake!" Frodo's hands stretched forth pleadingly.</p>
 
 <p>Boromir stirred, and his voice was doubtful. "You speak fair of the Enemy," said Boromir, "for one of his foes."</p>
 
 <p>Frodo's mouth opened and shut in desperate bewilderment; for Frodo knew, he knew the Man was mad, but he could think of nothing to say.</p>
 
-<p>Then Bilbo spoke, and his withered voice silenced the whole room, even Elrond who had been about to speak. "Frodo is right, I fear," whispered the old hobbit. "I remember, I remember what it was like. To see with the Black Sight. I remember. The Enemy will think that we might not trust one another, that the weaker among us will propose to destroy the Ring so that the stronger may not have it. He knows that even one not truly good might still cry to destroy the Ring, to make a show of pretended goodness. And the Enemy will <i>not</i> think it impossible that such a decision be made by this council, for you see, he does not trust us to be wise." A whispering chuckle rose from the ancient hobbit's throat. "And if he did - why, he would <i>still</i> guard the Cracks of Doom. It would cost him little."</p>
+<p>Then Bilbo spoke, and his withered voice silenced the whole room, even Elrond who had been about to speak. "Frodo is right, I fear," whispered the old hobbit. "I remember, I remember what it was like. To see with the Black Sight. I remember. The Enemy will think that we might not trust one another, that the weaker among us will propose to destroy the Ring so that the stronger may not have it. He knows that even one not truly good might still cry to destroy the Ring, to make a show of pretended goodness. And the Enemy will <i>not</i> think it impossible that such a decision be made by this council, for you see, he does not trust us to be wise." A whispering chuckle rose from the ancient hobbit's throat. "And if he did — why, he would <i>still</i> guard the Cracks of Doom. It would cost him little."</p>
 
 <p>Now foreboding was on the faces even of the Elves, and the Wise; Elrond had frowned, and the sharp eyebrows of Gandalf furrowed.</p>
 
@@ -58,7 +58,7 @@
 
 <p>Only they had no way to destroy the Ring.</p>
 
-<p>The Shadow had foreseen every move they could make. Had <i>almost</i> - Frodo still could not imagine how it had been done, how the Shadow had arranged such a thing - had <i>almost</i> maneuvered the Council into sending the Ring straight into Mordor with only a tiny guard set on it, as they would have done if Frodo and Bilbo had not been there.</p>
+<p>The Shadow had foreseen every move they could make. Had <i>almost</i> — Frodo still could not imagine how it had been done, how the Shadow had arranged such a thing — had <i>almost</i> maneuvered the Council into sending the Ring straight into Mordor with only a tiny guard set on it, as they would have done if Frodo and Bilbo had not been there.</p>
 
 <p>And having foregone that swiftest of all possible defeats, the only question remaining was how long it would take to lose. Gandalf had delayed too long, delayed far too long to set this march in motion. It could have been so easy, if only Bilbo had set out eighty years earlier, if only Bilbo had been told what Gandalf had already suspected, if only Gandalf's heart had not silently flinched away from the prospect of being embarrassingly wrong...</p>
 
@@ -66,7 +66,7 @@
 
 <p>All he had to do was put on the Ring.</p>
 
-<p>Just that, and all would become clear to him, once more the slowness and mud would leave his thoughts, all possibilities and futures transparent to him, he would see through the Shadow's plans and devise an irresistible counterstroke -</p>
+<p>Just that, and all would become clear to him, once more the slowness and mud would leave his thoughts, all possibilities and futures transparent to him, he would see through the Shadow's plans and devise an irresistible counterstroke —</p>
 
 <p>- and he would never be able to take off the Ring, not again, not by any will that would be left to him. All Frodo had of those moments were fading memories, but he knew that it had felt like dying, to let all his towers of thought collapse and become only Frodo once more. It had felt like dying, he remembered that much of Weathertop even if he remembered little else. And if he did wear the Ring again, it would be better to die with it on his finger, to end his life while he was still himself; for Frodo knew that he could not withstand the effects of wearing the Ring a second time, not afterward when the limitless clarity was lost to him...</p>
 
@@ -78,7 +78,7 @@
 
 <p>It all happened before even Gandalf's staff could point, before Aragorn could level the hilt-shard of his sword; the Dwarves shouted in shock, and the Elves were dismayed.</p>
 
-<p>"Of course," said Bilbo's voice, as Frodo began to weep, "I see it now, I understand everything at last. Listen, listen and swiftly, here is what you must do -"</p>
+<p>"Of course," said Bilbo's voice, as Frodo began to weep, "I see it now, I understand everything at last. Listen, listen and swiftly, here is what you must do —"</p>
 
 <hr />
 
@@ -104,7 +104,7 @@
 
 <p style="text-align:center;">MY LITTLE PONY: FRIENDSHIP IS SCIENCE</p>
 
-<p>"Applejack, who told me outright that I was mistaken, represents the spirit of... <i>honesty!</i> " The dusky pony raised her head even higher, her mane blowing like a wind about the night sky of her long neck, her eyes blazing like stars. "Fluttershy, who approached the manticore to find out about the thorn in its paw, represents the spirit of... <i>investigation!</i> Pinkie Pie, who realized that the awful faces were just trees, represents the spirit of... <i>formulating alternative hypotheses!</i> Rarity, who solved the serpent's problem represents the spirit of... <i>creativity!</i> Rainbow Dash, who saw through the false offer of her heart's desire, represents the spirit of... <i>analysis!</i> Marie-Susan, who made us convince her of our theories before she funded our expedition, represents the spirit of... <i>peer review!</i> And when those Elements are ignited by the spark of curiosity that resides in the heart of all of us, it creates the seventh element - the Element of Sci-"</p>
+<p>"Applejack, who told me outright that I was mistaken, represents the spirit of... <i>honesty!</i> " The dusky pony raised her head even higher, her mane blowing like a wind about the night sky of her long neck, her eyes blazing like stars. "Fluttershy, who approached the manticore to find out about the thorn in its paw, represents the spirit of... <i>investigation!</i> Pinkie Pie, who realized that the awful faces were just trees, represents the spirit of... <i>formulating alternative hypotheses!</i> Rarity, who solved the serpent's problem represents the spirit of... <i>creativity!</i> Rainbow Dash, who saw through the false offer of her heart's desire, represents the spirit of... <i>analysis!</i> Marie-Susan, who made us convince her of our theories before she funded our expedition, represents the spirit of... <i>peer review!</i> And when those Elements are ignited by the spark of curiosity that resides in the heart of all of us, it creates the seventh element — the Element of Sci-"</p>
 
 <p>The blast of power that came forth was like a wind of brilliant lava, it caught Marie-Susan before the pony could even flinch, and stripped her flesh from her bones and crumbled her bones to ash before any of them had the chance to rear in shock.</p>
 
@@ -142,7 +142,7 @@
 
 <p>"The adults already know," Sasuke said emotionlessly. "It is the obvious explanation for their treatment of Naruto. No, the real question is how this fits into the outwitting of the Uchiha..."</p>
 
-<p>"I don't see how it fits at all -" began Sakura.</p>
+<p>"I don't see how it fits at all —" began Sakura.</p>
 
 <p>"It <i>must</i> fit!" A tinge of frantic emotion flickered in Sasuke's voice. "I asked that man <i>why</i> he did it, and he told me that when I knew the answer to that, it would explain <i>everything!</i> Surely <i>this</i> must also be part of what is to be explained!"</p>
 
@@ -160,13 +160,13 @@
 
 <p>"I'm the <i>head of her institute</i>," Richard growled. I could feel the waves of science radiating off him; he was angry. "I <i>have</i> to work with Sylvie, it doesn't mean anything! I thought our own research was special, Anita!"</p>
 
-<p>"It <i>is,</i>" I said, feeling helpless about my inability to explain things to Richard. He didn't understand the thrill of being a polymath, the new worlds that were opening up to me. "I didn't share <i>our</i> research with anyone -"</p>
+<p>"It <i>is,</i>" I said, feeling helpless about my inability to explain things to Richard. He didn't understand the thrill of being a polymath, the new worlds that were opening up to me. "I didn't share <i>our</i> research with anyone —"</p>
 
 <p>"But you wanted to," said Richard.</p>
 
 <p>I didn't say anything, but I knew that the look on my face said it all.</p>
 
-<p>"God, Anita, you've changed," said Richard. He seemed to slump in on himself. "Do you realize that the monsters are joking about Blake numbers, now? I used to be your partner in everything, and now - I'm just another werewolf with a Blake number of 1."</p>
+<p>"God, Anita, you've changed," said Richard. He seemed to slump in on himself. "Do you realize that the monsters are joking about Blake numbers, now? I used to be your partner in everything, and now — I'm just another werewolf with a Blake number of 1."</p>
 
 <hr />
 
@@ -190,11 +190,11 @@
 
 <p style="text-align:center;">THE NAME OF THE RATIONALITY</p>
 
-<p>The eleven-year-old boy who would someday become legend - slayer of dragons, killer of kings - had but one thought upon his mind, as he approached the Sorting Hat to enter into the study of mysteries.</p>
+<p>The eleven-year-old boy who would someday become legend — slayer of dragons, killer of kings — had but one thought upon his mind, as he approached the Sorting Hat to enter into the study of mysteries.</p>
 
 <p><i>Anywhere but Ravenclaw anywhere but Ravenclaw oh please anywhere but Ravenclaw...</i></p>
 
-<p>But no sooner the brim of the ancient felted device slipped over his forehead -</p>
+<p>But no sooner the brim of the ancient felted device slipped over his forehead —</p>
 
 <p>"RAVENCLAW!"</p>
 
@@ -216,11 +216,11 @@
 
 <p>"Edward," said Isabella tenderly. She reached up a hand and stroked his cold, sparkling cheek. "You don't have to protect me from anything. I've listed out all the upsides and all the downsides, assigned them consistent relative weights, and it's just really obvious that the benefits of becoming a vampire outweigh the drawbacks."</p>
 
-<p>"Bella," Edward said, and swallowed desperately. "Bella -"</p>
+<p>"Bella," Edward said, and swallowed desperately. "Bella —"</p>
 
 <p>"Immortality. Perfect health. Awakening psychic powers. Easy enough to survive on animal blood once you do it. Even the beauty, Edward, there are people who would give their lives to be pretty, and don't you dare call them shallow until you've tried being ugly. Do you think I'm scared of the word 'vampire'? I'm tired of your arbitrary deontological constraints, Edward. The whole human species ought to be in on your fun, and people are dying by the thousands even as you hesitate."</p>
 
-<p>The gun in his lover's hand was cold against his forehead. It wouldn't kill him, but it would disable him for long enough -</p>
+<p>The gun in his lover's hand was cold against his forehead. It wouldn't kill him, but it would disable him for long enough —</p>
 
 <hr />
 
@@ -300,7 +300,7 @@
 
 <p style="text-align:center;">(thanks to <b>dsummerstay</b> for reminding me to post this one)</p>
 
-<p>MORPHEUS: For the longest time, I wouldn't believe it. But then I saw the fields with my own eyes, watched them liquefy the dead so they could be fed intravenously to the living -</p>
+<p>MORPHEUS: For the longest time, I wouldn't believe it. But then I saw the fields with my own eyes, watched them liquefy the dead so they could be fed intravenously to the living —</p>
 
 <p>NEO <i>(politely)</i>: Excuse me, please.</p>
 
