--- a/067.htm
+++ b/067.htm
@@ -1,4 +1,4 @@
-<p>In the high reaches of Hogwarts where rooms and corridors changed on a daily basis, where the territory itself was uncertain and not just the map, where the stability of the castle began to fray into dreams and chaos without changing its architectural style or apparent solidity - in the high reaches of Hogwarts, a battle would soon be fought.</p>
+<p>In the high reaches of Hogwarts where rooms and corridors changed on a daily basis, where the territory itself was uncertain and not just the map, where the stability of the castle began to fray into dreams and chaos without changing its architectural style or apparent solidity — in the high reaches of Hogwarts, a battle would soon be fought.</p>
 
 <p>The presence of so many students would stabilize the corridors for a time, by dint of constant observation. The rooms and corridors of Hogwarts sometimes <i>moved</i> even while people looked directly at them, but they wouldn't <i>change</i>. Even after eight centuries, Hogwarts was still a little shy about changing in front of people.</p>
 
@@ -50,9 +50,9 @@
 
 <p>The Sunshine Soldiers were striding through a long, wide corridor with their wands out and pointed. They couldn't use the Prismatic Shield while they were maneuvering, but Parvati Patil and Jenny Rustad were currently maintaining <i>Contegos</i> around the officer group, who would be the first targets of any ambush.</p>
 
-<p>Their tactic for the next battle, she and her officers had decided, would be to mix directly in with the enemy soldiers as fast as possible - after having practiced among <i>themselves</i> how to support one another, avoid hitting each other, and get into positions where enemy soldiers would hesitate to fire. They'd only gotten in four hours practice, but she thought her troops would already be better at that kind of mixed-in fighting than soldiers who hadn't practiced at all. It seemed like the sort of tactic Chaos would use, but they hadn't actually used it yet.</p>
+<p>Their tactic for the next battle, she and her officers had decided, would be to mix directly in with the enemy soldiers as fast as possible — after having practiced among <i>themselves</i> how to support one another, avoid hitting each other, and get into positions where enemy soldiers would hesitate to fire. They'd only gotten in four hours practice, but she thought her troops would already be better at that kind of mixed-in fighting than soldiers who hadn't practiced at all. It seemed like the sort of tactic Chaos would use, but they hadn't actually used it yet.</p>
 
-<p>It was a good strategy, she believed. And yet still, no matter how much she'd lectured her soldiers, they'd persisted in whispering fearful rumors about what Harry and Neville were learning to do. Finally she'd gone off and talked with Captain Goldstein, who understood things like Troop Morale, and Anthony had suggested -</p>
+<p>It was a good strategy, she believed. And yet still, no matter how much she'd lectured her soldiers, they'd persisted in whispering fearful rumors about what Harry and Neville were learning to do. Finally she'd gone off and talked with Captain Goldstein, who understood things like Troop Morale, and Anthony had suggested —</p>
 
 <p>"That's weird," Captain Macmillan spoke up suddenly, frowning at the fiery and iridescent compasses he held in either hand. (Ernie was, as Harry would have termed it, "good at spatial visualization", and so had been designated to hold both compasses and try to figure out what their enemies were doing.) "I think... Dragon's not moving fast anymore... I think they got on the other side of Chaos from us first... and it looks like Chaos is moving to attack them instead of trying to maneuver out from in between?"</p>
 
@@ -68,7 +68,7 @@
 
 <p>"We getting close to them?" said Ron.</p>
 
-<p>"Not yet -"</p>
+<p>"Not yet —"</p>
 
 <p>That was when the huge black-wooden doors at the end of the corridor flew open and crashed into the wall, revealing two figures almost completely enveloped in grey cloaks, grey cloth stretched over the faces beneath the grey hoods, one of those figures already raising a wand and pointing it directly at her.</p>
 
@@ -76,13 +76,13 @@
 
 <p>" <i>Stupefy!</i> "</p>
 
-<p>The dueling-grade stunner blasted toward her, she was so shocked that she didn't start to move until almost too late, as the red jet of light <i>smashed</i> right through the <i>Contego</i> shield to their front and she just barely dodged, there was a tingle on her arm as the red light went past her, and she saw out of the corner of her eye Susan getting hit and blown off her feet into Ron -</p>
+<p>The dueling-grade stunner blasted toward her, she was so shocked that she didn't start to move until almost too late, as the red jet of light <i>smashed</i> right through the <i>Contego</i> shield to their front and she just barely dodged, there was a tingle on her arm as the red light went past her, and she saw out of the corner of her eye Susan getting hit and blown off her feet into Ron —</p>
 
 <p>" <i>Somnium!</i> " bellowed Anthony's voice, followed a moment later by a dozen voices crying " <i>Somnium!</i> "</p>
 
 <p>Hermione frantically pushed herself to her feet, and as she rose, she saw the two figures in the grey cloaks just standing there.</p>
 
-<p>You couldn't <i>see</i> Sleep Hexes, the spell was too weak -</p>
+<p>You couldn't <i>see</i> Sleep Hexes, the spell was too weak —</p>
 
 <p>But there was no way they all could've <i>missed</i>.</p>
 
@@ -100,9 +100,9 @@
 
 <p>The two boys in their grey cloaks and robes, grey cloth over their faces, stood facing Sunshine's entire army, seemingly unfazed by a dozen Sleep Hexes.</p>
 
-<p>Daphne heard a soft sigh from beside her, and when her head turned she saw that Hannah's lips were parted, and the Hufflepuff girl's eyes were huge, and she was staring at -</p>
+<p>Daphne heard a soft sigh from beside her, and when her head turned she saw that Hannah's lips were parted, and the Hufflepuff girl's eyes were huge, and she was staring at —</p>
 
-<p>It would have been hard to describe the jumble of thoughts that flashed through Daphne's mind as she realized that Hannah was staring at Neville rather than Harry, which in turn seemed to trigger some part of her into noticing that in point of fact Neville <i>had</i> been getting pretty interesting lately as boys went, in fact right now the Last Scion of Longbottom was seeming downright <i>cool,</i> and something woke up inside her and her own lips parted and everything the Lady her Mother had ever instructed her about demure demeanors and flattery and scented shampoo blew straight out of her mind so hard it should have fluffed her hair about her ears, because she'd watched Hermione and Harry and she knew how she wanted <i>her</i> own courtship to go -</p>
+<p>It would have been hard to describe the jumble of thoughts that flashed through Daphne's mind as she realized that Hannah was staring at Neville rather than Harry, which in turn seemed to trigger some part of her into noticing that in point of fact Neville <i>had</i> been getting pretty interesting lately as boys went, in fact right now the Last Scion of Longbottom was seeming downright <i>cool,</i> and something woke up inside her and her own lips parted and everything the Lady her Mother had ever instructed her about demure demeanors and flattery and scented shampoo blew straight out of her mind so hard it should have fluffed her hair about her ears, because she'd watched Hermione and Harry and she knew how she wanted <i>her</i> own courtship to go —</p>
 
 <p>Her Lady Mother had also recently instructed her on a few spells it might be embarrassing not to know if you belonged to the Noble and Most Ancient House of Greengrass.</p>
 
@@ -130,13 +130,13 @@
 
 <p>But you still had to give them extra credit for using lightsabers at all.</p>
 
-<p>"Point of order," said Harry's voice. "I know the Defense Professor is watching, but I still have to ask, does anyone know whether they'll slice each other in half if they actually hit -"</p>
+<p>"Point of order," said Harry's voice. "I know the Defense Professor is watching, but I still have to ask, does anyone know whether they'll slice each other in half if they actually hit —"</p>
 
 <p>"No," Hermione said absently. This had been in one of her history books, though she'd had no idea the magical dueling sword looked like <i>that</i>. "They cast it so it'll only stun if it touches."</p>
 
 <p>"You <i>know</i> that spell?"</p>
 
-<p>"Oh, no, it's the Charm of the Most Ancient Blade, it's only legal for Noble and Most Ancient Houses to use -"</p>
+<p>"Oh, no, it's the Charm of the Most Ancient Blade, it's only legal for Noble and Most Ancient Houses to use —"</p>
 
 <p>Hermione stopped talking and looked at Harry, or Harry's grey hood rather.</p>
 
@@ -156,7 +156,7 @@
 
 <p>The tip of Hermione's own wand began making small motions in the air, a diamond within a circle, a diamond within a circle, rehearsing the gesture to match exactly what she remembered seeing in the book. It would be a difficult feat even for her, but she <i>had</i> to cast the spell right on the first try, she couldn't afford any failed castings that would sap her energy.</p>
 
-<p>"You know," said Hermione Granger, "I understand that it's not really your fault, but I'm getting tired of hearing people talk about the Boy-Who-Lived like you're - like you're some kind of <i>god</i> or something."</p>
+<p>"You know," said Hermione Granger, "I understand that it's not really your fault, but I'm getting tired of hearing people talk about the Boy-Who-Lived like you're — like you're some kind of <i>god</i> or something."</p>
 
 <p>"Same here, I must say," said Harry Potter. "It's sad how people keep underestimating me."</p>
 
@@ -190,15 +190,15 @@
 
 <p>" <i>Somnium!</i> " shrieked Draco, and then after only a few seconds to recharge, " <i>SOMNIUM, CURSE YOU!</i> "</p>
 
-<p>He <i>knew</i> he was hitting Theodore, the other boy wasn't even trying to dodge, but the scion of Nott only grinned as evilly as his father and leveled his wand -</p>
+<p>He <i>knew</i> he was hitting Theodore, the other boy wasn't even trying to dodge, but the scion of Nott only grinned as evilly as his father and leveled his wand —</p>
 
 <p>Draco managed to leap aside just as Theodore said " <i>Somnium!</i> " but Draco was getting winded, he couldn't keep this up, Theodore wasn't bothering to dodge at all while Draco had to keep moving, this was <i>crazy.</i></p>
 
-<p>He had enough strength now to fire again, but -</p>
+<p>He had enough strength now to fire again, but —</p>
 
-<p><i>Stupidity is doing the same thing and expecting a different result,</i> Harry had said, this was <i>Harry's</i> work somehow, it couldn't be a Muggle artifact anymore but Draco couldn't figure out what it <i>could</i> be, and he should be thinking of hypotheses and ways to test them but he was too busy frantically dodging as Theodore laughed and shot another Sleep Hex at him, Draco felt a little numbness in his side that time as he twisted, that had been a very very near miss and finally Draco couldn't take it anymore, he didn't bother working out what theory he was testing or why as he just -</p>
+<p><i>Stupidity is doing the same thing and expecting a different result,</i> Harry had said, this was <i>Harry's</i> work somehow, it couldn't be a Muggle artifact anymore but Draco couldn't figure out what it <i>could</i> be, and he should be thinking of hypotheses and ways to test them but he was too busy frantically dodging as Theodore laughed and shot another Sleep Hex at him, Draco felt a little numbness in his side that time as he twisted, that had been a very very near miss and finally Draco couldn't take it anymore, he didn't bother working out what theory he was testing or why as he just —</p>
 
-<p>" <i>Luminos!</i> " shouted Draco, and Theodore was haloed in red light, " <i>Dulak!</i> " and it went out again (so Theodore <i>was</i> still being affected by magic), " <i>Expelliarmus!</i> " and Theodore's wand went flying (that had been a good spell to cast anyway now that Draco realized it) but Theodore was rushing toward Draco with his arms outstretched to grapple so Draco yelled " <i>Flipendo!</i> " and the other boy's feet were abruptly yanked up -</p>
+<p>" <i>Luminos!</i> " shouted Draco, and Theodore was haloed in red light, " <i>Dulak!</i> " and it went out again (so Theodore <i>was</i> still being affected by magic), " <i>Expelliarmus!</i> " and Theodore's wand went flying (that had been a good spell to cast anyway now that Draco realized it) but Theodore was rushing toward Draco with his arms outstretched to grapple so Draco yelled " <i>Flipendo!</i> " and the other boy's feet were abruptly yanked up —</p>
 
 <p>- and Theodore's back hit the ground with a surprisingly loud and <i>metallic</i>-sounding crash.</p>
 
@@ -210,7 +210,7 @@
 
 <p>And there was a pause, as everyone looked at the huge Prismatic Sphere protecting the remnants of Dragon Army.</p>
 
-<p>Casting that fifth spell had sent Draco to his hands and knees, but he looked up and managed to say, as clearly as he could, "If the Sleep Hex - doesn't work - aim for the face - I think the Lieutenants are wearing metal shirts."</p>
+<p>Casting that fifth spell had sent Draco to his hands and knees, but he looked up and managed to say, as clearly as he could, "If the Sleep Hex — doesn't work — aim for the face — I think the Lieutenants are wearing metal shirts."</p>
 
 <p>"You've already lost too many soldiers," Finnigan said loudly from across the barrier, "we'll beat you anyway," and then the Gryffindor boy laughed evilly. He did the evil laughter almost as well as Harry Potter by now, and the other Chaotic Legionnaires started laughing with him soon afterward.</p>
 
