--- a/069.htm
+++ b/069.htm
@@ -1,6 +1,6 @@
 <p>It was out of the corner of her eye that Hermione Granger saw it, a reflection on the polished metal of a statue at the junction of two corridors, a flash of gold, a flash of red, something like an image of fire; just for a moment she saw it, and then it was gone.</p>
 
-<p>She paused, puzzled, and she <i>almost</i> walked away, but there had been something familiar about that brief glow -</p>
+<p>She paused, puzzled, and she <i>almost</i> walked away, but there had been something familiar about that brief glow —</p>
 
 <p>Hermione walked forward to where the statue had stood, looked at the corridor from which she thought the fiery reflection might have come.</p>
 
@@ -18,15 +18,15 @@
 
 <p>The Sunshine General didn't even think about it, people who stopped to think didn't spring very good ambushes.</p>
 
-<p>Her wand was in her hand, her fingers did the twist and her lips said " <i>Somnium!</i> " and the largest bully fell over, the Hufflepuff boy dropped out of the air with a <i>thump</i> and the other two bullies were trying to aim their wands at her and she said " <i>Somnium!</i> " again and another huge boy keeled over - the one who'd been aiming his wand faster, that was who she'd fired at.</p>
+<p>Her wand was in her hand, her fingers did the twist and her lips said " <i>Somnium!</i> " and the largest bully fell over, the Hufflepuff boy dropped out of the air with a <i>thump</i> and the other two bullies were trying to aim their wands at her and she said " <i>Somnium!</i> " again and another huge boy keeled over — the one who'd been aiming his wand faster, that was who she'd fired at.</p>
 
-<p>Unfortunately casting two Sleep Hexes in a row like that was hard even for her, and she couldn't get off a third before -</p>
+<p>Unfortunately casting two Sleep Hexes in a row like that was hard even for her, and she couldn't get off a third before —</p>
 
 <p>The last bully shouted " <i>Protego!</i> " and was surrounded by a shimmering blue glow.</p>
 
 <p>Twenty-four hours ago, Hermione would have panicked at that, a <i>real</i> Shielding Charm would let the bully-boy cast spells on her even while he was protected.</p>
 
-<p><i>Now</i> she -</p>
+<p><i>Now</i> she —</p>
 
 <p>" <i>Stupefy!</i> " shouted the bully-boy.</p>
 
@@ -36,11 +36,11 @@
 
 <p>" <i>Stupefy!</i> " shouted the bully-boy again. " <i>Expelliarmus! Stupefy!</i> "</p>
 
-<p>Anyway, <i>now</i> she'd just spent a whole hour thinking of all the <i>other</i> spells she could've cast on Harry and Neville -</p>
+<p>Anyway, <i>now</i> she'd just spent a whole hour thinking of all the <i>other</i> spells she could've cast on Harry and Neville —</p>
 
 <p>" <i>Jellyfy!</i> " yelled the bully-boy, a wide-beam jinx with no visible bolt to dodge, and her knees suddenly felt almost too weak to support her. And then, with an angry roar producing an even brighter blaze of crimson, " <i>Stupefy!</i> "</p>
 
-<p>She dodged that one by deliberately falling, and by then she'd recovered enough for her next spell, which was -</p>
+<p>She dodged that one by deliberately falling, and by then she'd recovered enough for her next spell, which was —</p>
 
 <p>" <i>Glisseo,</i>" said Hermione, directing her remark to the floor.</p>
 
@@ -58,7 +58,7 @@
 
 <p>"Yeah," she said. "That's <i>(gasp)</i> me." If the Hufflepuff boy said anything about her being Harry Potter's love interest, she decided, he was going to die.</p>
 
-<p>"Wow," said the Hufflepuff boy. "That was - you just - I mean I saw you on the screens before Christmas but - wow! I can't believe you just did that!"</p>
+<p>"Wow," said the Hufflepuff boy. "That was — you just — I mean I saw you on the screens before Christmas but — wow! I can't believe you just did that!"</p>
 
 <p>There was a pause.</p>
 
@@ -82,7 +82,7 @@
 
 <p>Had she really thought she needed <i>permission</i> from someone, or that heroes sat around waiting for someone else to give them quests? It was very simple actually, you just went where the evil was, that was all it ever took to be a hero. She should've remembered, she shouldn't have needed a phoenix to tell her, that bad things sometimes happened right here in Hogwarts.</p>
 
-<p>Then Hermione glanced nervously back at where the three older boys were lying unconscious as the realization hit that they'd <i>seen</i> her, they might <i>know</i> who she was, they might sneak up on her and take <i>her</i> by surprise and - and they could really hurt her -</p>
+<p>Then Hermione glanced nervously back at where the three older boys were lying unconscious as the realization hit that they'd <i>seen</i> her, they might <i>know</i> who she was, they might sneak up on her and take <i>her</i> by surprise and — and they could really hurt her —</p>
 
 <p>Hermione stopped.</p>
 
@@ -108,7 +108,7 @@
 
 <p>She sat down across from Harry Potter who looked <i>extremely</i> nervous, probably because she was still smiling.</p>
 
-<p>"Uh -" said Harry, as she served herself freshly toasted bread, butter, cinnamon, no fruits or vegetables whatsoever, and three helpings of chocolate brownies. "Uh -"</p>
+<p>"Uh —" said Harry, as she served herself freshly toasted bread, butter, cinnamon, no fruits or vegetables whatsoever, and three helpings of chocolate brownies. "Uh —"</p>
 
 <p>She let him go on like that until she'd finished pouring herself a glass of grapefruit juice, and then she said, "I've got a question for you, Mr. Potter. How do you think people fail to become themselves?"</p>
 
@@ -146,11 +146,11 @@
 
 <p>"I know," said Hermione.</p>
 
-<p>"It's hard and it's painful and you've got to make decisions where there isn't any good answer -"</p>
+<p>"It's hard and it's painful and you've got to make decisions where there isn't any good answer —"</p>
 
 <p>"Yes, Harry, I read those books too."</p>
 
-<p>"No," said Harry, "you don't understand, even if the books warn you there's no way you <i>can</i> understand until -"</p>
+<p>"No," said Harry, "you don't understand, even if the books warn you there's no way you <i>can</i> understand until —"</p>
 
 <p>"That doesn't stop you," said Hermione. "It doesn't stop you even a little. I bet you never even <i>considered</i> not being a hero because of that. So why d'you think it'll stop me?"</p>
 
@@ -166,7 +166,7 @@
 
 <p><i>Aftermath:</i></p>
 
-<p>"...and Professor Flitwick says her determination seems unshakeable," Minerva said tightly, staring at the silver-bearded old wizard who was responsible for this. Albus Dumbledore was just sitting silently and listening to her with a distant sad look in his eyes. "Miss Granger didn't even blink when Professor Flitwick threatened to have her transferred to Gryffindor, just said that if she left she would take all the books with her. Hermione Granger has decided she's going to be a hero and she's not taking no for an answer. I doubt you could have pushed her into this any harder if you had <i>tried</i> to -"</p>
+<p>"...and Professor Flitwick says her determination seems unshakeable," Minerva said tightly, staring at the silver-bearded old wizard who was responsible for this. Albus Dumbledore was just sitting silently and listening to her with a distant sad look in his eyes. "Miss Granger didn't even blink when Professor Flitwick threatened to have her transferred to Gryffindor, just said that if she left she would take all the books with her. Hermione Granger has decided she's going to be a hero and she's not taking no for an answer. I doubt you could have pushed her into this any harder if you had <i>tried</i> to —"</p>
 
 <p>It took all of five full seconds for Minerva's brain to process the realization.</p>
 
@@ -174,7 +174,7 @@
 
 <p>"My dear," said the old wizard, "after you have dealt with your thirtieth hero or so, you will realize that they react quite predictably to certain things; such as being told that they are too young, or that they are not destined to be heroes, or that being a hero is unpleasant; and if you truly wish to be sure you should tell them all three. Although," with a brief sigh, "it does not do to be <i>too</i> blatant, or your Deputy Headmistress might catch you."</p>
 
-<p>"Albus," Minerva said, her voice even tighter, "if she is hurt, I swear this time I'll -"</p>
+<p>"Albus," Minerva said, her voice even tighter, "if she is hurt, I swear this time I'll —"</p>
 
 <p>"She would have come to that same place in due time," Albus said, the distant sad look still in his eyes. "If someone is meant to become a hero then they will not listen to our warnings, Minerva, no matter how hard we try. And given that, it is better for Harry if Miss Granger does not fall too far behind him." Albus produced, as though from nowhere, a tin which flipped open to reveal small yellow lumps, she'd never been able to figure out where he kept it and she'd never been able to detect the magic involved. "Lemon drop?"</p>
 
@@ -218,7 +218,7 @@
 
 <p><i>Thunk-thunk, thunk-thunk-thunk, thunk.</i></p>
 
-<p>Daphne looked up, surprised; that was a Sunshine code-signal -</p>
+<p>Daphne looked up, surprised; that was a Sunshine code-signal —</p>
 
 <p>" <i>I hight someone knocking!</i> " bellowed Mr. Goyle. " <i>Knocking of the door!</i> "</p>
 
@@ -226,11 +226,11 @@
 
 <p>There was a moment of complete surprise.</p>
 
-<p>"I've come to have a word with Miss Greengrass," said the Sunshine General, sounding like she was trying to sound confident. "Could someone please -"</p>
+<p>"I've come to have a word with Miss Greengrass," said the Sunshine General, sounding like she was trying to sound confident. "Could someone please —"</p>
 
 <p>From the look on Hermione's face she had just noticed Daphne sparkling.</p>
 
-<p>And <i>that</i> was when Millicent Bulstrode raced up from the lower dorms and shouted, "Hey, everyone, guess what, now <i>Granger</i> went and beat up Derrick and what's left of his crew, and his father owled him and said that if he didn't -"</p>
+<p>And <i>that</i> was when Millicent Bulstrode raced up from the lower dorms and shouted, "Hey, everyone, guess what, now <i>Granger</i> went and beat up Derrick and what's left of his crew, and his father owled him and said that if he didn't —"</p>
 
 <p>Millicent caught sight of Hermione standing in the doorway.</p>
 
@@ -242,7 +242,7 @@
 
 <p>There was another silence.</p>
 
-<p>"This," said Daphne, "was probably <i>not</i> the best time to ask me that question -"</p>
+<p>"This," said Daphne, "was probably <i>not</i> the best time to ask me that question —"</p>
 
 <p>" <i>I'll take it!</i> " shouted Tracey Davis, leaping off her sofa.</p>
 
