--- a/076.htm
+++ b/076.htm
@@ -2,7 +2,7 @@
 
 <p>She came to the empty rock cavern pierced by many dark openings, lit by a torch of ancient style that fired as she entered.</p>
 
-<p>There was no one else there, as yet, and after long minutes of nervous standing, she began the spell to Transfigure a cushioned sofa large enough for two people to sit, or maybe even lie down on. A simple wooden stool would have been easier, she could have done that in fifteen seconds, but - well -</p>
+<p>There was no one else there, as yet, and after long minutes of nervous standing, she began the spell to Transfigure a cushioned sofa large enough for two people to sit, or maybe even lie down on. A simple wooden stool would have been easier, she could have done that in fifteen seconds, but — well —</p>
 
 <p>Even when the sofa was fully conjured, Professor Snape still hadn't arrived, and she sat down on the left side of her sofa with her pulse hammering in her throat. Somehow she was only becoming more nervous, not less, as the delay stretched.</p>
 
@@ -28,27 +28,27 @@
 
 <p>She slowly turned to look at Professor Snape, and saw that his head was leaning back against the sofa, and his eyes were closed. Not sleeping, though. His face appeared tense, unrelaxed, bearing pain.</p>
 
-<p>She knew - she was suddenly certain - that she was only allowed to see this sight because she wouldn't remember it afterward; and that nobody before her had ever been allowed to see it.</p>
+<p>She knew — she was suddenly certain — that she was only allowed to see this sight because she wouldn't remember it afterward; and that nobody before her had ever been allowed to see it.</p>
 
-<p>The frantic conversation going on inside Rianne Felthorne's mind sounded something like this: <i>I could just lean over and kiss him, you are completely out of your tiny mind, his eyes are closed I bet he wouldn't stop me in time, I bet it would be years before anyone found your body -</i></p>
+<p>The frantic conversation going on inside Rianne Felthorne's mind sounded something like this: <i>I could just lean over and kiss him, you are completely out of your tiny mind, his eyes are closed I bet he wouldn't stop me in time, I bet it would be years before anyone found your body —</i></p>
 
 <p>But Professor Snape opened his eyes then (to her inner disappointment and relief), and said, in a more normal voice, "Your payment, Miss Felthorne." From his robe he took a ruby, cut to Gringotts standard, and held it out toward her. "Fifty facets. I will not mind if you count them."</p>
 
-<p>She held out a trembling hand, hoping that Snape would press the ruby into her fingers, that she would feel a touch of his skin alive against hers -</p>
+<p>She held out a trembling hand, hoping that Snape would press the ruby into her fingers, that she would feel a touch of his skin alive against hers —</p>
 
 <p>But instead Snape raised his hand slightly and dropped the ruby into her hand, then leaned back against the couch. "You will remember finding it lying on the ground of this cavern, where you came exploring," said Snape. "And since nobody except you will actually believe that, you will remember thinking that it would be less troublesome if you deposited the money into a separate box in Gringotts."</p>
 
 <p>For a stretch there was only the faint crackling of the torch.</p>
 
-<p>"Why -" Rianne Felthorne said. <i>He knows I won't remember.</i> "Why <i>did</i> you do it? I mean - you said to tell you where bullies would be, and who they would be, but not whether Granger would be there. And I know, the way the Time-Turner works, if you want to <i>make</i> Granger be there, you can't be told whether it's already happened. So I did work out that <i>we</i> were the ones telling her where to go. We were, weren't we?"</p>
+<p>"Why —" Rianne Felthorne said. <i>He knows I won't remember.</i> "Why <i>did</i> you do it? I mean — you said to tell you where bullies would be, and who they would be, but not whether Granger would be there. And I know, the way the Time-Turner works, if you want to <i>make</i> Granger be there, you can't be told whether it's already happened. So I did work out that <i>we</i> were the ones telling her where to go. We were, weren't we?"</p>
 
 <p>Snape nodded without speaking. He had closed his eyes again.</p>
 
-<p>"But," said Rianne, "I didn't understand <i>why</i> you were helping her. And now - after what you did to Granger in the Great Hall - I just don't understand at all." Rianne had never thought of herself as particularly nice. She'd taken little notice of the controversy over the Sunshine General. But something about <i>helping</i> Granger fight bullies had... well, she'd gotten used to thinking of that as the good side, and thinking of <i>herself</i> as being on the good side. And she'd found she actually liked it. It was hard, to just let that go. "Why'd you do that, Professor Snape?"</p>
+<p>"But," said Rianne, "I didn't understand <i>why</i> you were helping her. And now — after what you did to Granger in the Great Hall — I just don't understand at all." Rianne had never thought of herself as particularly nice. She'd taken little notice of the controversy over the Sunshine General. But something about <i>helping</i> Granger fight bullies had... well, she'd gotten used to thinking of that as the good side, and thinking of <i>herself</i> as being on the good side. And she'd found she actually liked it. It was hard, to just let that go. "Why'd you do that, Professor Snape?"</p>
 
 <p>Snape shook his head, his face tightened.</p>
 
-<p>"Is -" Rianne said falteringly. "I mean - so long as we're here - is there anything you do want to talk about?" There was something <i>she</i> wanted to say, but she couldn't make the words pass her own lips.</p>
+<p>"Is —" Rianne said falteringly. "I mean — so long as we're here — is there anything you do want to talk about?" There was something <i>she</i> wanted to say, but she couldn't make the words pass her own lips.</p>
 
 <p>"I can think of one matter," Snape said after a pause. "If you are interested, Miss Felthorne."</p>
 
@@ -60,7 +60,7 @@
 
 <p>"Please tell me the honest truth, Miss Felthorne. What do you think of that boy?"</p>
 
-<p>"Well -" she said. She was stumbling over her words. "I think - to never even ask for one kiss - would be -"</p>
+<p>"Well —" she said. She was stumbling over her words. "I think — to never even ask for one kiss — would be —"</p>
 
 <p><i>Sad.</i></p>
 
@@ -70,7 +70,7 @@
 
 <p>"I agree," said Snape. "Suppose that boy had helped you, though. Would you think that you owed him a kiss, if he asked?"</p>
 
-<p>She inhaled sharply -</p>
+<p>She inhaled sharply —</p>
 
 <p>"Or would you think," Snape continued, his eyes still closed, "that he was just being bothersome?"</p>
 
@@ -112,7 +112,7 @@
 
 <p>"Then what <i>does</i> it mean to have the power to vanquish someone?"</p>
 
-<p>Rianne considered the puzzle. (Wishing, not for the first time in her life, that she had chosen Ravenclaw and to perdition with her parents' disapproval; but the Sorting Hat had never offered her Gryffindor.) "Well..." Rianne said. She was having trouble putting her thoughts into words. "It means you've got the <i>power</i>, but you don't <i>have</i> to do it. It means you could do it if you tried -"</p>
+<p>Rianne considered the puzzle. (Wishing, not for the first time in her life, that she had chosen Ravenclaw and to perdition with her parents' disapproval; but the Sorting Hat had never offered her Gryffindor.) "Well..." Rianne said. She was having trouble putting her thoughts into words. "It means you've got the <i>power</i>, but you don't <i>have</i> to do it. It means you could do it if you tried —"</p>
 
 <p>"Choice," the Potions Master said in the same faraway voice, as though he wasn't really talking to her at all. "There will be a choice. That is what the riddle seems to imply. And that choice is not a foregone conclusion to the chooser, for the riddle does not say, <i>will vanquish,</i> but rather <i>the power to vanquish.</i> How would a grown man mark a baby as his equal?"</p>
 
@@ -142,13 +142,13 @@
 
 <p>"Perhaps," Snape finally said, after they'd sat on the sofa in awful silence for what seemed like minutes. "It would explain the word <i>must</i>. Thank you, Miss Felthorne. Once again you have been most helpful."</p>
 
-<p>"I -" she said, "I was glad to -" and the words stuck in her throat. The Potions Master had thanked her with a tone of finality, and she knew that the time of the Rianne Felthorne who remembered these moments was drawing to an end. "I wish I didn't have to forget this, Professor Snape!"</p>
+<p>"I —" she said, "I was glad to —" and the words stuck in her throat. The Potions Master had thanked her with a tone of finality, and she knew that the time of the Rianne Felthorne who remembered these moments was drawing to an end. "I wish I didn't have to forget this, Professor Snape!"</p>
 
 <p>"I wish," Severus Snape said in a whisper so low she could hardly hear it, "that everything had been different..."</p>
 
 <p>The Potions Master stood up from the sofa, the weight of his presence vanishing from beside her. He turned and drew his wand from his robes, pointing it at her.</p>
 
-<p>"Wait -" she said. "Before that -"</p>
+<p>"Wait —" she said. "Before that —"</p>
 
 <p>Somehow it was unbelievably hard to take the first step from fantasy to reality, from imagining to doing. Even if it was only one step and would never go any further. The gap stretched like the distance between two mountains.</p>
 
@@ -156,7 +156,7 @@
 
 <p>...was it fair that thus a woman's life be judged?</p>
 
-<p><i>If you can't</i> <i>say it now, when you won't even remember it afterward - when nothing will continue from this moment, just as if you were to die - then when will you ever say it, to anyone?</i></p>
+<p><i>If you can't</i> <i>say it now, when you won't even remember it afterward — when nothing will continue from this moment, just as if you were to die — then when will you ever say it, to anyone?</i></p>
 
 <p>"Can I have a kiss first?" said Rianne Felthorne.</p>
 
@@ -164,11 +164,11 @@
 
 <p>"Why not," the Potions Master said quietly, and he leaned his head down over the sofa and kissed her.</p>
 
-<p>It was nothing like she'd imagined. In her fantasies Snape's kisses were fierce, seized from her, but this was - it was just <i>awkward,</i> actually. Snape's lips pressed down too hard on hers, forcing them back against her teeth, and the angle wasn't right and their noses were sort of bending and his lips were too <i>tight</i> and -</p>
+<p>It was nothing like she'd imagined. In her fantasies Snape's kisses were fierce, seized from her, but this was — it was just <i>awkward,</i> actually. Snape's lips pressed down too hard on hers, forcing them back against her teeth, and the angle wasn't right and their noses were sort of bending and his lips were too <i>tight</i> and —</p>
 
 <p>Only as the Potions Master straightened back up again, raising his wand once more, did she realize.</p>
 
-<p>"That wasn't -" she said in a wondering voice, looking up at him. "That wasn't - was it - your <i>first</i> -"</p>
+<p>"That wasn't —" she said in a wondering voice, looking up at him. "That wasn't — was it — your <i>first</i> —"</p>
 
 <p>Rianne Felthorne blinked at the stone cavern she'd discovered, still holding the extraordinary ruby she'd found embedded in the dirt of one corner. It was an incredible windfall, and she didn't know why looking at the ruby made her feel so sad, like she'd forgotten something, something that had been precious to her.</p>
 
