--- a/001.htm
+++ b/001.htm
@@ -6,9 +6,9 @@
 
 <p>* Easy email notification system, RSS feed, and Twitter feed for new chapters;<br /> * Current Author's Notes and progress updates;<br /> * Lovely fan-made book-style PDF version;<br /> * Ad-free mirror of the text;<br /> * ePUB and MOBI e-texts;<br /> * Ongoing podcast of the story;<br /> * Fan art in vast quantities;<br /> * Cameo list (characters named after fan artists);<br /> * Fan-fanfiction of this fanfiction;<br /> * Fan music, songs, and animations;<br /> * Fan translations;<br /> * The OKCupid keyword for HPMOR readers;<br /> * Links to TV Tropes page and discussion forum;<br /> * Trigger warnings page (warnings about possible traumatic associations for some readers; to avoid spoilers for most readers, there are <i>no</i> warnings inside the main story);<br /> * How to learn everything the main character knows;<br /> * Open job positions at a related nonprofit;<br /> * And ever so much more.</p>
 
-<p>Reviews make me happy. You can leave reviews on any chapter, no login required, and there's no need to finish reading it all before you start reviewing chapters - but do please leave at most <i>one</i> review per chapter.</p>
+<p>Reviews make me happy. You can leave reviews on any chapter, no login required, and there's no need to finish reading it all before you start reviewing chapters — but do please leave at most <i>one</i> review per chapter.</p>
 
-<p>This is <i>not</i> a strict single-point-of-departure fic - there exists a primary point of departure, at some point in the past, but also other alterations. The best term I've heard for this fic is "parallel universe".</p>
+<p>This is <i>not</i> a strict single-point-of-departure fic — there exists a primary point of departure, at some point in the past, but also other alterations. The best term I've heard for this fic is "parallel universe".</p>
 
 <p>The text contains many clues: obvious clues, not-so-obvious clues, truly obscure hints which I was shocked to see some readers successfully decode, and massive evidence left out in plain sight. This is a rationalist story; its mysteries are solvable, and meant to be solved.</p>
 
@@ -40,33 +40,33 @@
 
 <p>"My sister was a witch," Petunia repeated. She looked frightened, but stood her ground. "Her husband was a wizard."</p>
 
-<p>"This is absurd!" Michael said sharply. "They were at our wedding - they visited for Christmas -"</p>
+<p>"This is absurd!" Michael said sharply. "They were at our wedding — they visited for Christmas —"</p>
 
-<p>"I told them you weren't to know," Petunia whispered. "But it's true. I've seen things -"</p>
+<p>"I told them you weren't to know," Petunia whispered. "But it's true. I've seen things —"</p>
 
-<p>The Professor rolled his eyes. "Dear, I understand that you're not familiar with the sceptical literature. You may not realise how easy it is for a trained magician to fake the seemingly impossible. Remember how I taught Harry to bend spoons? If it seemed like they could always guess what you were thinking, that's called cold reading -"</p>
+<p>The Professor rolled his eyes. "Dear, I understand that you're not familiar with the sceptical literature. You may not realise how easy it is for a trained magician to fake the seemingly impossible. Remember how I taught Harry to bend spoons? If it seemed like they could always guess what you were thinking, that's called cold reading —"</p>
 
-<p>"It wasn't bending spoons -"</p>
+<p>"It wasn't bending spoons —"</p>
 
 <p>"What was it, then?"</p>
 
-<p>Petunia bit her lip. "I can't just tell you. You'll think I'm -" She swallowed. "Listen. Michael. I wasn't - always like this -" She gestured at herself, as though to indicate her lithe form. "Lily did this. Because I - because I <i>begged</i> her. For years, I begged her. Lily had <i>always</i> been prettier than me, and I'd... been mean to her, because of that, and then she got <i>magic,</i> can you imagine how I felt? And I <i>begged</i> her to use some of that magic on me so that I could be pretty too, even if I couldn't have her magic, at least I could be pretty."</p>
+<p>Petunia bit her lip. "I can't just tell you. You'll think I'm —" She swallowed. "Listen. Michael. I wasn't — always like this —" She gestured at herself, as though to indicate her lithe form. "Lily did this. Because I — because I <i>begged</i> her. For years, I begged her. Lily had <i>always</i> been prettier than me, and I'd... been mean to her, because of that, and then she got <i>magic,</i> can you imagine how I felt? And I <i>begged</i> her to use some of that magic on me so that I could be pretty too, even if I couldn't have her magic, at least I could be pretty."</p>
 
 <p>Tears were gathering in Petunia's eyes.</p>
 
-<p>"And Lily would tell me no, and make up the most ridiculous excuses, like the world would end if she were nice to her sister, or a centaur told her not to - the most ridiculous things, and I hated her for it. And when I had just graduated from university, I was going out with this boy, Vernon Dursley, he was fat and he was the only boy who would talk to me. And he said he wanted children, and that his first son would be named Dudley. And I thought to myself, <i>what kind of parent names their child Dudley Dursley?</i> It was like I saw my whole future life stretching out in front of me, and I couldn't stand it. And I wrote to my sister and told her that if she didn't help me I'd rather just -"</p>
+<p>"And Lily would tell me no, and make up the most ridiculous excuses, like the world would end if she were nice to her sister, or a centaur told her not to — the most ridiculous things, and I hated her for it. And when I had just graduated from university, I was going out with this boy, Vernon Dursley, he was fat and he was the only boy who would talk to me. And he said he wanted children, and that his first son would be named Dudley. And I thought to myself, <i>what kind of parent names their child Dudley Dursley?</i> It was like I saw my whole future life stretching out in front of me, and I couldn't stand it. And I wrote to my sister and told her that if she didn't help me I'd rather just —"</p>
 
 <p>Petunia stopped.</p>
 
-<p>"Anyway," Petunia said, her voice small, "she gave in. She told me it was dangerous, and I said I didn't care any more, and I drank this potion and I was sick for weeks, but when I got better my skin cleared up and I finally filled out and... I was beautiful, people were <i>nice</i> to me," her voice broke, "and after that I couldn't hate my sister any more, especially when I learned what her magic brought her in the end -"</p>
+<p>"Anyway," Petunia said, her voice small, "she gave in. She told me it was dangerous, and I said I didn't care any more, and I drank this potion and I was sick for weeks, but when I got better my skin cleared up and I finally filled out and... I was beautiful, people were <i>nice</i> to me," her voice broke, "and after that I couldn't hate my sister any more, especially when I learned what her magic brought her in the end —"</p>
 
-<p>"Darling," Michael said gently, "you got sick, you gained some weight while resting in bed, and your skin cleared up on its own. Or being sick made you change your diet -"</p>
+<p>"Darling," Michael said gently, "you got sick, you gained some weight while resting in bed, and your skin cleared up on its own. Or being sick made you change your diet —"</p>
 
 <p>"She was a witch," Petunia repeated. "I saw it."</p>
 
 <p>"Petunia," Michael said. The annoyance was creeping into his voice. "You <i>know</i> that can't be true. Do I really have to explain why?"</p>
 
-<p>Petunia wrung her hands. She seemed to be on the verge of tears. "My love, I know I can't win arguments with you, but please, you have to trust me on this -"</p>
+<p>Petunia wrung her hands. She seemed to be on the verge of tears. "My love, I know I can't win arguments with you, but please, you have to trust me on this —"</p>
 
 <p>" <i>Dad! Mum!</i> "</p>
 
@@ -78,19 +78,19 @@
 
 <p>"Then no one in your family knew about magic when Lily got her letter. How did <i>they</i> get convinced?"</p>
 
-<p>"Ah..." Petunia said. "They didn't just send a letter. They sent a professor from Hogwarts. He -" Petunia's eyes flicked to Michael. "He showed us some magic."</p>
+<p>"Ah..." Petunia said. "They didn't just send a letter. They sent a professor from Hogwarts. He —" Petunia's eyes flicked to Michael. "He showed us some magic."</p>
 
 <p>"Then you don't have to fight over this," Harry said firmly. Hoping against hope that this time, just this once, they would listen to him. "If it's true, we can just get a Hogwarts professor here and see the magic for ourselves, and Dad will admit that it's true. And if not, then Mum will admit that it's false. That's what the experimental method is for, so that we don't have to resolve things just by arguing."</p>
 
 <p>The Professor turned and looked down at him, dismissive as usual. "Oh, come now, Harry. Really, <i>magic?</i> I thought <i>you'd</i> know better than to take this seriously, son, even if you're only ten. Magic is just about the most unscientific thing there is!"</p>
 
-<p>Harry's mouth twisted bitterly. He was treated well, probably better than most genetic fathers treated their own children. Harry had been sent to the best primary schools - and when that didn't work out, he was provided with tutors from the endless pool of starving students. Always Harry had been encouraged to study whatever caught his attention, bought all the books that caught his fancy, sponsored in whatever maths or science competitions he entered. He was given anything reasonable that he wanted, except, maybe, the slightest shred of respect. A Doctor teaching biochemistry at Oxford could hardly be expected to listen to the advice of a little boy. You would listen to Show Interest, of course; that's what a Good Parent would do, and so, if you conceived of yourself as a Good Parent, you would do it. But take a ten-year-old <i>seriously?</i> Hardly.</p>
+<p>Harry's mouth twisted bitterly. He was treated well, probably better than most genetic fathers treated their own children. Harry had been sent to the best primary schools — and when that didn't work out, he was provided with tutors from the endless pool of starving students. Always Harry had been encouraged to study whatever caught his attention, bought all the books that caught his fancy, sponsored in whatever maths or science competitions he entered. He was given anything reasonable that he wanted, except, maybe, the slightest shred of respect. A Doctor teaching biochemistry at Oxford could hardly be expected to listen to the advice of a little boy. You would listen to Show Interest, of course; that's what a Good Parent would do, and so, if you conceived of yourself as a Good Parent, you would do it. But take a ten-year-old <i>seriously?</i> Hardly.</p>
 
 <p>Sometimes Harry wanted to scream at his father.</p>
 
-<p>"Mum," Harry said. "If you want to win this argument with Dad, look in chapter two of the first book of the Feynman Lectures on Physics. There's a quote there about how philosophers say a great deal about what science absolutely requires, and it is all wrong, because the only rule in science is that the final arbiter is observation - that you just have to look at the world and report what you see. Um... off the top of my head I can't think of where to find something about how it's an ideal of science to settle things by experiment instead of arguments -"</p>
+<p>"Mum," Harry said. "If you want to win this argument with Dad, look in chapter two of the first book of the Feynman Lectures on Physics. There's a quote there about how philosophers say a great deal about what science absolutely requires, and it is all wrong, because the only rule in science is that the final arbiter is observation — that you just have to look at the world and report what you see. Um... off the top of my head I can't think of where to find something about how it's an ideal of science to settle things by experiment instead of arguments —"</p>
 
-<p>His mother looked down at him and smiled. "Thank you, Harry. But -" her head rose back up to stare at her husband. "I don't want to win an argument with your father. I want my husband to, to listen to his wife who loves him, and trust her just this once -"</p>
+<p>His mother looked down at him and smiled. "Thank you, Harry. But —" her head rose back up to stare at her husband. "I don't want to win an argument with your father. I want my husband to, to listen to his wife who loves him, and trust her just this once —"</p>
 
 <p>Harry closed his eyes briefly. <i>Hopeless.</i> Both of his parents were just hopeless.</p>
 
@@ -110,7 +110,7 @@
 
 <p>Harry rubbed his forehead, grimacing. <i>Don't believe everything you think,</i> one of his books had said.</p>
 
-<p>But this bizarre certainty... Harry was finding himself just <i>expecting</i> that, yes, a Hogwarts professor would show up and wave a wand and magic would come out. The strange certainty was making no effort to guard itself against falsification - wasn't making excuses in advance for why there wouldn't be a professor, or the professor would only be able to bend spoons.</p>
+<p>But this bizarre certainty... Harry was finding himself just <i>expecting</i> that, yes, a Hogwarts professor would show up and wave a wand and magic would come out. The strange certainty was making no effort to guard itself against falsification — wasn't making excuses in advance for why there wouldn't be a professor, or the professor would only be able to bend spoons.</p>
 
 <p><i>Where do you come from, strange little prediction?</i> Harry directed the thought at his brain. <i>Why do I believe what I believe?</i></p>
 
@@ -144,7 +144,7 @@
 
 <p>"Mum," Harry said into the unnerving silence, "I'm going to test the hypothesis. According to your theory, how do I send an owl to Hogwarts?"</p>
 
-<p>His mother turned from the kitchen sink to stare at him, looking shocked. "I - I don't know, I think you just have to own a magic owl."</p>
+<p>His mother turned from the kitchen sink to stare at him, looking shocked. "I — I don't know, I think you just have to own a magic owl."</p>
 
 <p>That should've sounded highly suspicious, <i>oh, so there's no way to test your theory then,</i> but the peculiar certainty in Harry seemed willing to stick its neck out even further.</p>
 
@@ -154,7 +154,7 @@
 
 <p>Only as Harry stumped out the back door, into the back garden, did it occur to him that if an owl <i>did</i> come down and snatch the letter, he was going to have some trouble telling Dad about it.</p>
 
-<p><i>But - well - that can't</i> really <i>happen, can it? No matter what my brain seems to believe. If an owl really comes down and grabs this envelope, I'm going to have worries a lot more important than what Dad thinks.</i></p>
+<p><i>But — well — that can't</i> really <i>happen, can it? No matter what my brain seems to believe. If an owl really comes down and grabs this envelope, I'm going to have worries a lot more important than what Dad thinks.</i></p>
 
 <p>Harry took a deep breath, and raised the envelope into the air.</p>
 
@@ -164,7 +164,7 @@
 
 <p><i>No. I'm better than Dad. I will use the scientific method even if it makes me feel stupid.</i></p>
 
-<p>"Letter -" Harry said, but it actually came out as more of a whispered croak.</p>
+<p>"Letter —" Harry said, but it actually came out as more of a whispered croak.</p>
 
 <p>Harry steeled his will, and shouted into the empty sky, " <i>Letter for Hogwarts! Can I get an owl?</i> "</p>
 
@@ -174,13 +174,13 @@
 
 <p>An old woman's face peered out from above the neighbouring fence, grizzled grey hair escaping from her hairnet. Mrs. Figg, the occasional babysitter. "What are you doing, Harry?"</p>
 
-<p>"Nothing," Harry said in a strangled voice. "Just - testing a really silly theory -"</p>
+<p>"Nothing," Harry said in a strangled voice. "Just — testing a really silly theory —"</p>
 
 <p>"Did you get your acceptance letter from Hogwarts?"</p>
 
 <p>Harry froze in place <i>.</i></p>
 
-<p>"Yes," Harry's lips said a little while later. "I got a letter from Hogwarts. They say they want my owl by the 31st of July, but -"</p>
+<p>"Yes," Harry's lips said a little while later. "I got a letter from Hogwarts. They say they want my owl by the 31st of July, but —"</p>
 
 <p>"But you don't <i>have</i> an owl. Poor dear! I can't imagine <i>what</i> someone must have been thinking, sending you just the standard letter."</p>
 
