--- a/002.htm
+++ b/002.htm
@@ -28,7 +28,7 @@
 
 <p>His father was lowered carefully to the ground.</p>
 
-<p>Harry ruffled a hand through his own hair. Maybe it was just that strange part of him which had <i>already</i> been convinced, but... "That's a bit of an anticlimax," Harry said. "You'd think there'd be some kind of more dramatic mental event associated with updating on an observation of infinitesimal probability -" Harry stopped himself. Mum, the witch, and even his Dad were giving him <i>that look</i> again. "I mean, with finding out that everything I believe is false."</p>
+<p>Harry ruffled a hand through his own hair. Maybe it was just that strange part of him which had <i>already</i> been convinced, but... "That's a bit of an anticlimax," Harry said. "You'd think there'd be some kind of more dramatic mental event associated with updating on an observation of infinitesimal probability —" Harry stopped himself. Mum, the witch, and even his Dad were giving him <i>that look</i> again. "I mean, with finding out that everything I believe is false."</p>
 
 <p>Seriously, it should have been more dramatic. His brain ought to have been flushing its entire current stock of hypotheses about the universe, none of which allowed this to happen. But instead his brain just seemed to be going, <i>All right, I saw the Hogwarts Professor wave her wand and make your father rise into the air, now what?</i></p>
 
@@ -54,7 +54,7 @@
 
 <p>Professor McGonagall blinked. "That's the first time I've ever been called <i>that.</i>"</p>
 
-<p>A blur was coming over Harry's vision, as his brain started to comprehend what had just broken. The whole idea of a unified universe with mathematically regular laws, that was what had been flushed down the toilet; the whole notion of <i>physics</i>. Three thousand years of resolving big complicated things into smaller pieces, discovering that the music of the planets was the same tune as a falling apple, finding that the true laws were perfectly universal and had no exceptions anywhere and took the form of simple maths governing the smallest parts, <i>not to mention</i> that the mind was the brain and the brain was made of neurons, a brain was what a person <i>was</i> -</p>
+<p>A blur was coming over Harry's vision, as his brain started to comprehend what had just broken. The whole idea of a unified universe with mathematically regular laws, that was what had been flushed down the toilet; the whole notion of <i>physics</i>. Three thousand years of resolving big complicated things into smaller pieces, discovering that the music of the planets was the same tune as a falling apple, finding that the true laws were perfectly universal and had no exceptions anywhere and took the form of simple maths governing the smallest parts, <i>not to mention</i> that the mind was the brain and the brain was made of neurons, a brain was what a person <i>was</i> —</p>
 
 <p>And then a woman turned into a cat, so much for all that.</p>
 
@@ -74,7 +74,7 @@
 
 <p>"One of the reasons," said his mother. Harry shot her a glare.</p>
 
-<p>McGonagall gave a long <i>hmmmmm.</i> "I can't recall hearing about such a condition before..." she said slowly. "I'll check with Madam Pomfrey to see if she knows any remedies." Then her face brightened. "No, I'm sure this won't be a problem - I'll find a solution in time. Now," and her gaze sharpened again, "what are these <i>other</i> reasons?"</p>
+<p>McGonagall gave a long <i>hmmmmm.</i> "I can't recall hearing about such a condition before..." she said slowly. "I'll check with Madam Pomfrey to see if she knows any remedies." Then her face brightened. "No, I'm sure this won't be a problem — I'll find a solution in time. Now," and her gaze sharpened again, "what are these <i>other</i> reasons?"</p>
 
 <p>Harry sent his parents a glare. "I am a conscientious objector to child conscription, on grounds that I should not have to suffer for a disintegrating school system's failure to provide teachers or study materials of even minimally adequate quality."</p>
 
