--- a/009.htm
+++ b/009.htm
@@ -42,7 +42,7 @@
 
 <p>"RAVENCLAW!"</p>
 
-<p>At the lectern before the huge Head Table stood Professor McGonagall, looking sharp and looking sharply around, as she called out one name after another, though she had smiled only for Hermione and a few others. Behind her, in the tallest chair at the table - really more of a golden throne - sat a wizened and bespectacled ancient, with a silver-white beard that looked like it would go almost to the floor if it were visible, watching over the Sorting with a benevolent expression; as stereotypical in appearance as a Wise Old Man could possibly be, without actually being Oriental. (Though Harry had learned to be wary of stereotypical appearances from the first time he'd met Professor McGonagall and thought that she ought to cackle.) The ancient wizard had applauded every student Sorted, with an unwavering smile that somehow seemed freshly delighted for each.</p>
+<p>At the lectern before the huge Head Table stood Professor McGonagall, looking sharp and looking sharply around, as she called out one name after another, though she had smiled only for Hermione and a few others. Behind her, in the tallest chair at the table — really more of a golden throne — sat a wizened and bespectacled ancient, with a silver-white beard that looked like it would go almost to the floor if it were visible, watching over the Sorting with a benevolent expression; as stereotypical in appearance as a Wise Old Man could possibly be, without actually being Oriental. (Though Harry had learned to be wary of stereotypical appearances from the first time he'd met Professor McGonagall and thought that she ought to cackle.) The ancient wizard had applauded every student Sorted, with an unwavering smile that somehow seemed freshly delighted for each.</p>
 
 <p>To the golden throne's left side was a man with sharp eyes and a dour face who had applauded no-one, and who somehow managed to be looking straight back at Harry every time Harry looked at him. Further to the left, the pale-faced man Harry had seen in the Leaky Cauldron, whose eyes darted around as though in panic at the surrounding crowd, and who seemed to occasionally jerk and twitch in his seat; for some reason Harry kept finding himself staring at him. To that man's left, a string of three older witches who didn't seem much interested in the students. Then to the right side of the tall golden chair, a round-faced middle-aged witch with a yellow hat, who had applauded every student except the Slytherins. A tiny man standing on his chair, with a poofy white beard, who had applauded every student, but smiled only upon the Ravenclaws. And on the farthest right, occupying the same space as three lesser beings, the mountainous entity who'd greeted them all after they'd disembarked from the train, naming himself Hagrid, Keeper of Keys and Grounds.</p>
 
@@ -50,23 +50,23 @@
 
 <p>For once Hermione didn't answer this instantly; she was shifting constantly from side to side, staring at the Sorting Hat, and fidgeting so energetically that Harry thought her feet might be leaving the floor.</p>
 
-<p>"Yes, he is," said one of the prefects who'd accompanied them, a young woman wearing the blue of Ravenclaw. Miss Clearwater, if Harry recalled correctly. Her voice was quiet, but conveyed a tinge of pride. "That is the Charms Professor of Hogwarts, Filius Flitwick, the most knowledgeable Charms Master alive, and a past Duelling Champion -"</p>
+<p>"Yes, he is," said one of the prefects who'd accompanied them, a young woman wearing the blue of Ravenclaw. Miss Clearwater, if Harry recalled correctly. Her voice was quiet, but conveyed a tinge of pride. "That is the Charms Professor of Hogwarts, Filius Flitwick, the most knowledgeable Charms Master alive, and a past Duelling Champion —"</p>
 
 <p>"Why's he so <i>short?</i> " hissed a student whose name Harry didn't recall. "Is he a <i>halfbreed?</i> "</p>
 
-<p>A chill glance from the young lady prefect. "The Professor does indeed have goblin ancestry -"</p>
+<p>A chill glance from the young lady prefect. "The Professor does indeed have goblin ancestry —"</p>
 
 <p>"What?" Harry said involuntarily, causing Hermione and four other students to hush him.</p>
 
 <p>Now Harry was getting a surprisingly intimidating glare from the Ravenclaw prefect.</p>
 
-<p>"I mean -" Harry whispered. "Not that I have a <i>problem</i> with that - it's just - I mean - how's that <i>possible?</i> You can't just mix two different species together and get viable offspring! It ought to scramble the genetic instructions for every organ that's different between the two species - it'd be like trying to build," they didn't have cars so he couldn't use a scrambled-engine-blueprints analogy, "a half-carriage half-boat or something..."</p>
+<p>"I mean —" Harry whispered. "Not that I have a <i>problem</i> with that — it's just — I mean — how's that <i>possible?</i> You can't just mix two different species together and get viable offspring! It ought to scramble the genetic instructions for every organ that's different between the two species — it'd be like trying to build," they didn't have cars so he couldn't use a scrambled-engine-blueprints analogy, "a half-carriage half-boat or something..."</p>
 
 <p>The Ravenclaw prefect was still looking at Harry severely. "Why <i>couldn't</i> you have a half-carriage half-boat?"</p>
 
 <p>" <i>Hssh!</i> " hsshed another prefect, though the Ravenclaw witch had still spoken quietly.</p>
 
-<p>"I mean -" Harry said even more quietly, trying to figure out how to ask whether goblins had evolved from humans, or evolved from a common ancestor of humans like <i>Homo erectus</i>, or if goblins had been <i>made</i> out of humans somehow - if, say, they were still genetically human under a heritable enchantment whose magical effect was diluted if only one parent was a 'goblin', which would explain how interbreeding was possible, and in which case goblins would <i>not</i> be an incredibly valuable second data point for how intelligence had evolved in other species besides <i>Homo sapiens</i> - now that Harry thought about it, the goblins in Gringotts <i>hadn't</i> seemed very much like genuinely alien, nonhuman intelligences, nothing like Dirdir or Puppeteers - "I mean, where did goblins <i>come</i> from, anyway?"</p>
+<p>"I mean —" Harry said even more quietly, trying to figure out how to ask whether goblins had evolved from humans, or evolved from a common ancestor of humans like <i>Homo erectus</i>, or if goblins had been <i>made</i> out of humans somehow — if, say, they were still genetically human under a heritable enchantment whose magical effect was diluted if only one parent was a 'goblin', which would explain how interbreeding was possible, and in which case goblins would <i>not</i> be an incredibly valuable second data point for how intelligence had evolved in other species besides <i>Homo sapiens</i> — now that Harry thought about it, the goblins in Gringotts <i>hadn't</i> seemed very much like genuinely alien, nonhuman intelligences, nothing like Dirdir or Puppeteers — "I mean, where did goblins <i>come</i> from, anyway?"</p>
 
 <p>"Lithuania," Hermione whispered absently, her eyes still fixed firmly on the Sorting Hat.</p>
 
@@ -102,7 +102,7 @@
 
 <p>"Malfoy, Draco!" went to Slytherin, and Harry breathed a small sigh of relief. It had <i>seemed</i> like a sure thing, but you never did know what tiny event might upset the course of your master plan.</p>
 
-<p>Professor McGonagall called "Perks, Sally-Anne!", and from the gathered children detached a pale waifish girl who looked oddly ethereal - like she might mysteriously disappear the moment you stopped looking at her, and never be seen again or even remembered.</p>
+<p>Professor McGonagall called "Perks, Sally-Anne!", and from the gathered children detached a pale waifish girl who looked oddly ethereal — like she might mysteriously disappear the moment you stopped looking at her, and never be seen again or even remembered.</p>
 
 <p>And then (with a note of trepidation so firmly kept from her voice and face that you'd have needed to know her very well indeed to notice) Minerva McGonagall inhaled deeply, and called out, "Potter, Harry!"</p>
 
@@ -114,7 +114,7 @@
 
 <p>For the first time in his entire life, Harry felt like he might be having an opportunity to experience stage fright.</p>
 
-<p>Harry immediately stomped down this feeling. Whole room-fulls of people staring at him was something he'd have to accustom himself to, if he wanted to live in magical Britain, or for that matter do anything else interesting with his life. Affixing a confident and false smile to his face, he raised a foot to step forwards -</p>
+<p>Harry immediately stomped down this feeling. Whole room-fulls of people staring at him was something he'd have to accustom himself to, if he wanted to live in magical Britain, or for that matter do anything else interesting with his life. Affixing a confident and false smile to his face, he raised a foot to step forwards —</p>
 
 <p>"Harry Potter!" cried the voice of either Fred or George Weasley, and then "Harry Potter!" cried the other Weasley twin, and a moment later the entire Gryffindor table, and soon after a good portion of Ravenclaw and Hufflepuff, had taken up the cry.</p>
 
@@ -136,7 +136,7 @@
 
 <p>Minerva's lips set in a white line. She would have words with the Weasley Horrors about that last part, if they thought she was powerless because it was the first day of school and Gryffindor had no points to take away. If they didn't care about detentions then she would find something else.</p>
 
-<p>Then, with a sudden gasp of horror, she looked in Severus's direction, <i>surely</i> he realized the Potter boy must have no idea who that was talking about -</p>
+<p>Then, with a sudden gasp of horror, she looked in Severus's direction, <i>surely</i> he realized the Potter boy must have no idea who that was talking about —</p>
 
 <p>Severus's face had gone beyond rage into a kind of pleasant indifference. A faint smile played about his lips. He was looking in the direction of Harry Potter, not the Gryffindor table, and his hands held the crumpled remains of a former wine goblet.</p>
 
@@ -150,7 +150,7 @@
 
 <p>And Harry would protect them again. If there was in fact a prophecy and that was what it said. Well, actually regardless of what any darn prophecy said.</p>
 
-<p>All those people believing in him and cheering him - Harry couldn't stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind <i>how</i> he'd gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfill their expectations. And then go on to <i>exceed</i> those expectations, so that people wondered, looking back, that they had once asked so little of him.</p>
+<p>All those people believing in him and cheering him — Harry couldn't stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind <i>how</i> he'd gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfill their expectations. And then go on to <i>exceed</i> those expectations, so that people wondered, looking back, that they had once asked so little of him.</p>
 
 <p><i>"HARRY POTTER! HARRY POTTER! HARRY POTTER!"</i></p>
 
