--- a/011.htm
+++ b/011.htm
@@ -8,15 +8,15 @@
 
 <p style="text-align:center;">(A.k.a. "What Happens If You Change Harry But Leave All Other Characters Constant")</p>
 
-<p>Dumbledore peered over his desk at young Harry, twinkling in a kindly sort of way. The boy had come to him with a terribly intense look on his childish face - Dumbledore hoped that whatever this matter was, it wasn't <i>too</i> serious. Harry was far too young for his life trials to be starting already. "What was it you wished to speak to me about, Harry?"</p>
+<p>Dumbledore peered over his desk at young Harry, twinkling in a kindly sort of way. The boy had come to him with a terribly intense look on his childish face — Dumbledore hoped that whatever this matter was, it wasn't <i>too</i> serious. Harry was far too young for his life trials to be starting already. "What was it you wished to speak to me about, Harry?"</p>
 
-<p>Harry James Potter-Evans-Verres leaned forward in his chair, smiling grimly. "Headmaster, I got a sharp pain in my scar during the Sorting Feast. Considering how and where I got this scar, it didn't seem like the sort of thing I should just ignore. I thought at first it was because of Professor Snape, but I followed the Baconian experimental method which is to find the conditions for both the presence and the absence of the phenomenon, and I've determined that my scar hurts if and only if I'm facing the back of Professor Quirrell's head, whatever's under his turban. While it <i>could</i> be something more innocuous, I think we should provisionally assume the worst, that it's You-Know-Who - wait, don't look so horrified, this is actually a priceless opportunity -"</p>
+<p>Harry James Potter-Evans-Verres leaned forward in his chair, smiling grimly. "Headmaster, I got a sharp pain in my scar during the Sorting Feast. Considering how and where I got this scar, it didn't seem like the sort of thing I should just ignore. I thought at first it was because of Professor Snape, but I followed the Baconian experimental method which is to find the conditions for both the presence and the absence of the phenomenon, and I've determined that my scar hurts if and only if I'm facing the back of Professor Quirrell's head, whatever's under his turban. While it <i>could</i> be something more innocuous, I think we should provisionally assume the worst, that it's You-Know-Who — wait, don't look so horrified, this is actually a priceless opportunity —"</p>
 
 <hr />
 
 <p style="text-align:center;"><u>OMAKE FILES #2: I Ain't Afraid of Dark Lords</u></p>
 
-<p>This was the original version of Chapter 9. It was replaced because - while many readers did enjoy it - many other readers had <i>massive</i> allergies to songs in fanfics, for reasons that should not much need belaboring. I didn't want to drive readers away before they got to Ch. 10.</p>
+<p>This was the original version of Chapter 9. It was replaced because — while many readers did enjoy it — many other readers had <i>massive</i> allergies to songs in fanfics, for reasons that should not much need belaboring. I didn't want to drive readers away before they got to Ch. 10.</p>
 
 <p>Lee Jordan is the fellow prankster of Fred and George (in canon). "Lee Jordan" had sounded like a Muggleborn name to me, implying that he would be capable of instructing Fred and George on a tune that Harry would know. This was not as obvious to some readers as it was to your author.</p>
 
@@ -30,17 +30,17 @@
 
 <p><i>"What if he doesn't like it?"</i></p>
 
-<p><i>"He's got no right to not like it -</i></p>
+<p><i>"He's got no right to not like it —</i></p>
 
-<p><i>"- not after the prank he played on -"</i></p>
+<p><i>"- not after the prank he played on —"</i></p>
 
-<p><i>"- Neville Longbottom, his name was -"</i></p>
+<p><i>"- Neville Longbottom, his name was —"</i></p>
 
 <p><i>"- he's as fair a fair target now as fair can be."</i></p>
 
 <p><i>"All right. Just make sure you don't forget your parts."</i></p>
 
-<p><i>"We've rehearsed it often enough -"</i></p>
+<p><i>"We've rehearsed it often enough —"</i></p>
 
 <p><i>"- over the last three hours."</i></p>
 
@@ -92,7 +92,7 @@
 
 <p>Minerva's lips set in a white line. She would have words with Them about that last verse, if They thought she was powerless because it was the first day of school and Gryffindor had no points to take away. If They didn't care about detentions then she would find something else.</p>
 
-<p>Then, with a sudden gasp of horror, she looked in Snape's direction, <i>surely</i> he realised the Potter boy must have no idea who that was talking about -</p>
+<p>Then, with a sudden gasp of horror, she looked in Snape's direction, <i>surely</i> he realised the Potter boy must have no idea who that was talking about —</p>
 
 <p>Snape's face had gone beyond rage into a kind of pleasant indifference. A faint smile played about his lips. He was looking in the direction of Harry Potter, not the Gryffindor table, and his hands held the crumpled remains of a former wine goblet...</p>
 
@@ -106,7 +106,7 @@
 
 <p>And Harry would protect them again. If there was in fact a prophecy and that was what it said. Well, actually regardless of what any darn prophecy said.</p>
 
-<p>All those people believing in him and cheering him - Harry couldn't stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind <i>how</i> he'd gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfill their expectations. And then go on to <i>exceed</i> those expectations, so that people wondered, looking back, that they had once asked so little of him.</p>
+<p>All those people believing in him and cheering him — Harry couldn't stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind <i>how</i> he'd gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfill their expectations. And then go on to <i>exceed</i> those expectations, so that people wondered, looking back, that they had once asked so little of him.</p>
 
 <p>And he shouted out the lie that he'd invented because it scanned well and the song called for it:</p>
 
@@ -136,7 +136,7 @@
 
 <p><i>What?</i></p>
 
-<p><i>"I'm allergic to your hair shampoo -"</i></p>
+<p><i>"I'm allergic to your hair shampoo —"</i></p>
 
 <p>And then the Sorting Hat sneezed, with a mighty "A-CHOO!" that echoed around the Great Hall.</p>
 
@@ -182,7 +182,7 @@
 
 <p><i>What options</i> are <i>available at my user level?</i></p>
 
-<p>After that it didn't take long -</p>
+<p>After that it didn't take long —</p>
 
 <p>"ROOT!"</p>
 
@@ -192,7 +192,7 @@
 
 <p><i>What?</i></p>
 
-<p><i>"I've had to tell students before that they were mothers - it would break your heart to know what I saw in their minds - but this is the first time I've ever had to tell someone they were a father."</i></p>
+<p><i>"I've had to tell students before that they were mothers — it would break your heart to know what I saw in their minds — but this is the first time I've ever had to tell someone they were a father."</i></p>
 
 <p><i>WHAT?</i></p>
 
@@ -202,11 +202,11 @@
 
 <p><i>"To repeat: Draco Malfoy is carrying your baby."</i></p>
 
-<p><i>But we're only eleven -</i></p>
+<p><i>But we're only eleven —</i></p>
 
 <p><i>"Actually, Draco is secretly thirteen years old."</i></p>
 
-<p><i>B-b-but men can't get pregnant -</i></p>
+<p><i>B-b-but men can't get pregnant —</i></p>
 
 <p><i>"And a girl under those clothes."</i></p>
 
@@ -224,7 +224,7 @@
 
 <p>Huh? Harry remembered Draco mentioning a 'House Elf', but what was that exactly?</p>
 
-<p>Judging by the appalled looks dawning on the faces around him, it wasn't anything good -</p>
+<p>Judging by the appalled looks dawning on the faces around him, it wasn't anything good —</p>
 
 <hr />
 
@@ -268,13 +268,13 @@
 
 <p>But what was the <i>worst</i> that could happen?</p>
 
-<p>Well... in the <i>worst-case scenario,</i> the Hat would assign Harry to a whole new House. Dumbledore would insist that she do it - create a whole new House just for him - and she'd have to rearrange all the class schedules on the first day of term. And Dumbledore would remove her as Head of House Gryffindor, and give her beloved House over to... Professor Binns, the History ghost; and she would be assigned as Head of Harry's House of Doom; and she would futilely try to give the child orders, deducting point after point without effect, while disaster after disaster was blamed on her.</p>
+<p>Well... in the <i>worst-case scenario,</i> the Hat would assign Harry to a whole new House. Dumbledore would insist that she do it — create a whole new House just for him — and she'd have to rearrange all the class schedules on the first day of term. And Dumbledore would remove her as Head of House Gryffindor, and give her beloved House over to... Professor Binns, the History ghost; and she would be assigned as Head of Harry's House of Doom; and she would futilely try to give the child orders, deducting point after point without effect, while disaster after disaster was blamed on her.</p>
 
 <p>Was that the worst-case scenario?</p>
 
 <p>Minerva honestly didn't see how it could be any worse than that.</p>
 
-<p>And even in the very worst case - no matter <i>what</i> happened with Harry - it would all be over in seven years.</p>
+<p>And even in the very worst case — no matter <i>what</i> happened with Harry — it would all be over in seven years.</p>
 
 <p>Minerva felt her knuckles slowly relax their white-knuckled grip on the podium. Harry had been right, there was a kind of comfort in staring directly into the furthest depths of the darkness, knowing that you had confronted your worst fears and were now prepared.</p>
 
@@ -284,5 +284,5 @@
 
 <p>At the Head Table, Dumbledore rose, his face puzzled. "Yes?" he addressed the Hat. "What is it?"</p>
 
-<p>"I wasn't talking to you," said the Hat. "I was Sorting Harry Potter into the place in Hogwarts where he most belongs, namely the Headmaster's office -"</p>
+<p>"I wasn't talking to you," said the Hat. "I was Sorting Harry Potter into the place in Hogwarts where he most belongs, namely the Headmaster's office —"</p>
 
