--- a/016.htm
+++ b/016.htm
@@ -8,7 +8,7 @@
 
 <p>As soon as he walked into the Defence classroom on Wednesday, Harry knew that <i>this</i> subject was going to be <i>different</i>.</p>
 
-<p>It was, for a start, the largest classroom he had yet seen at Hogwarts, akin to a major university classroom, with layered tiers of desks facing a gigantic flat stage of white marble. The classroom was high up in the castle - on the fifth floor - and Harry knew that was as much explanation as he'd get for where a room like this was supposed to fit. It was becoming clear that Hogwarts simply did not <i>have</i> a geometry, Euclidean or otherwise; it had connections, not directions.</p>
+<p>It was, for a start, the largest classroom he had yet seen at Hogwarts, akin to a major university classroom, with layered tiers of desks facing a gigantic flat stage of white marble. The classroom was high up in the castle — on the fifth floor — and Harry knew that was as much explanation as he'd get for where a room like this was supposed to fit. It was becoming clear that Hogwarts simply did not <i>have</i> a geometry, Euclidean or otherwise; it had connections, not directions.</p>
 
 <p>Unlike a university hall, there weren't rows of folding seats; instead there were quite ordinary Hogwarts wooden desks and wooden chairs, lined up in a curve across each level of the classroom. Except that each desk had a flat, white, rectangular, mysterious object propped up on it.</p>
 
@@ -18,7 +18,7 @@
 
 <p>Harry had arrived at the lesson so early that no other students were there yet. (The English language was defective when it came to describing time travel; in particular, English lacked any words capable of expressing how convenient it was.) Quirrell didn't seem to be... functional... at the moment, and Harry didn't particularly feel like approaching Quirrell anyway.</p>
 
-<p>Harry selected a desk, climbed up to it, sat down, and retrieved the Defence textbook. He was around seven-eighths of the way through - he'd planned on finishing the book before this lesson, actually, but he was running behind schedule and had already used the Time-Turner twice today.</p>
+<p>Harry selected a desk, climbed up to it, sat down, and retrieved the Defence textbook. He was around seven-eighths of the way through — he'd planned on finishing the book before this lesson, actually, but he was running behind schedule and had already used the Time-Turner twice today.</p>
 
 <p>Soon there were sounds as the classroom began to fill up. Harry ignored them.</p>
 
@@ -36,7 +36,7 @@
 
 <p>"You have <i>minions!</i> " Harry repeated. "Where do <i>I</i> get minions?"</p>
 
-<p>Draco's smirk grew wider. "I'm afraid, Potter, that the first step is to be Sorted into Slytherin -"</p>
+<p>Draco's smirk grew wider. "I'm afraid, Potter, that the first step is to be Sorted into Slytherin —"</p>
 
 <p>"What? That's not fair!"</p>
 
@@ -52,13 +52,13 @@
 
 <p>"And," said Harry, "Lucius insisted that you were <i>not</i> to grow up knowing your bodyguards, and that you were only to meet them on your first day of school."</p>
 
-<p>That wiped the grin from Draco's face. "Yes, Potter, we all know you're brilliant, the whole school knows by now, you can stop showing off -"</p>
+<p>That wiped the grin from Draco's face. "Yes, Potter, we all know you're brilliant, the whole school knows by now, you can stop showing off —"</p>
 
-<p>"So they've been told their <i>whole lives</i> that they're going to be your minions and they've spent <i>years</i> imagining what minions are supposed to be like -"</p>
+<p>"So they've been told their <i>whole lives</i> that they're going to be your minions and they've spent <i>years</i> imagining what minions are supposed to be like —"</p>
 
 <p>Draco winced.</p>
 
-<p>"- and what's worse, they <i>do</i> know <i>each other</i> and they've been <i>practising</i> -"</p>
+<p>"- and what's worse, they <i>do</i> know <i>each other</i> and they've been <i>practising</i> —"</p>
 
 <p>"The boss told ya to shut it," rumbled Mr. Crabbe. Mr. Goyle bit down on his toothpick, holding it between his teeth, and used one hand to crack the knuckles on the other.</p>
 
@@ -136,7 +136,7 @@
 
 <p><i>Oh, this is going to be</i> so <i>much fun to juggle, I can already tell.</i></p>
 
-<p>The classroom was filling up rapidly now with all four colors of trim: green, red, yellow, and blue. Draco and his two friends seemed to be in the midst of trying to acquire three contiguous front-row seats - already occupied, of course. Mr. Crabbe and Mr. Goyle were looming vigorously, but it didn't seem to be having much effect.</p>
+<p>The classroom was filling up rapidly now with all four colors of trim: green, red, yellow, and blue. Draco and his two friends seemed to be in the midst of trying to acquire three contiguous front-row seats — already occupied, of course. Mr. Crabbe and Mr. Goyle were looming vigorously, but it didn't seem to be having much effect.</p>
 
 <p>Harry bent over his Defence textbook and continued reading.</p>
 
@@ -154,7 +154,7 @@
 
 <p>Many students sat straight up at that, looking rather shocked.</p>
 
-<p>Professor Quirrell was smiling thinly. "Those of you who have wasted time by reading your useless first-year Defence textbooks -"</p>
+<p>Professor Quirrell was smiling thinly. "Those of you who have wasted time by reading your useless first-year Defence textbooks —"</p>
 
 <p>Someone made a choking sound. Harry wondered if it was Hermione.</p>
 
@@ -166,7 +166,7 @@
 
 <p>There were gasps from the students.</p>
 
-<p>"The Mountain Troll is more dangerous than the Hungarian Horntail! It is strong enough to bite through steel! Its hide is resistant enough to withstand Stunning Hexes and Cutting Charms! Its sense of smell is so acute that it can tell from afar whether its prey is part of a pack, or alone and vulnerable! Most fearsome of all, the troll is unique among magical creatures in continuously maintaining a form of Transfiguration on itself - it is always transforming into its own body. If you somehow succeed in ripping off its arm it will grow another within seconds! Fire and acid will produce scar tissue which can temporarily confuse a troll's regenerative powers - for an hour or two! They are smart enough to use clubs as tools! The mountain troll is the third most perfect killing machine in all Nature! One Killing Curse will bring it down."</p>
+<p>"The Mountain Troll is more dangerous than the Hungarian Horntail! It is strong enough to bite through steel! Its hide is resistant enough to withstand Stunning Hexes and Cutting Charms! Its sense of smell is so acute that it can tell from afar whether its prey is part of a pack, or alone and vulnerable! Most fearsome of all, the troll is unique among magical creatures in continuously maintaining a form of Transfiguration on itself — it is always transforming into its own body. If you somehow succeed in ripping off its arm it will grow another within seconds! Fire and acid will produce scar tissue which can temporarily confuse a troll's regenerative powers — for an hour or two! They are smart enough to use clubs as tools! The mountain troll is the third most perfect killing machine in all Nature! One Killing Curse will bring it down."</p>
 
 <p>The students were looking rather shocked.</p>
 
@@ -180,7 +180,7 @@
 
 <p>Once Harry started clapping there was some scattered response from Gryffindor, and more from Slytherin, but most students simply seemed too stunned to react.</p>
 
-<p>Professor Quirrell made a cutting gesture, and the applause died instantly. "Thank you very much," said Professor Quirrell. "Now to practicalities. I have combined all my first-year Battle classes into one, which allows me to offer you twice as much classroom time as Doubles sessions -"</p>
+<p>Professor Quirrell made a cutting gesture, and the applause died instantly. "Thank you very much," said Professor Quirrell. "Now to practicalities. I have combined all my first-year Battle classes into one, which allows me to offer you twice as much classroom time as Doubles sessions —"</p>
 
 <p>There were gasps of horror.</p>
 
@@ -202,11 +202,11 @@
 
 <p>...wow. Why didn't the other professors use a system like that?</p>
 
-<p>"What good are Quirrell points, you wonder? For a start, ten Quirrell points will be worth one House point. But they will earn you other favors as well. Would you like to take your exam at an unusual time? Is there a particular session you would very much prefer to skip? You will find that I can be very flexible on behalf of students who have accumulated enough Quirrell points. Quirrell points will control the generalship of the armies. And for Christmas - just before the Christmas break - I will grant someone a wish. Any school-related feat that lies within my power, my influence, or above all, my ingenuity. Yes, I was in Slytherin and I am offering to formulate a cunning plot on your behalf, if that is what it takes to accomplish your desire. This wish will go to whoever has earned the most Quirrell points within all seven years."</p>
+<p>"What good are Quirrell points, you wonder? For a start, ten Quirrell points will be worth one House point. But they will earn you other favors as well. Would you like to take your exam at an unusual time? Is there a particular session you would very much prefer to skip? You will find that I can be very flexible on behalf of students who have accumulated enough Quirrell points. Quirrell points will control the generalship of the armies. And for Christmas — just before the Christmas break — I will grant someone a wish. Any school-related feat that lies within my power, my influence, or above all, my ingenuity. Yes, I was in Slytherin and I am offering to formulate a cunning plot on your behalf, if that is what it takes to accomplish your desire. This wish will go to whoever has earned the most Quirrell points within all seven years."</p>
 
 <p>That would be Harry.</p>
 
-<p>"Now leave your books and loose items at your desks - they will be safe, the screens will watch over them for you - and come down onto this platform. It's time to play a game called Who's the Most Dangerous Student in the Classroom."</p>
+<p>"Now leave your books and loose items at your desks — they will be safe, the screens will watch over them for you — and come down onto this platform. It's time to play a game called Who's the Most Dangerous Student in the Classroom."</p>
 
 <hr />
 
@@ -238,7 +238,7 @@
 
 <p>Professor Quirrell was standing on the raised dais in the center of the platform, leaning slightly on his teacher's desk with one hand.</p>
 
-<p>"I told you," Professor Quirrell said, "that we would play a game called Who's the Most Dangerous Student in the Classroom. There is one student in this classroom who mastered the Sumerian Simple Strike Hex faster than anyone else -"</p>
+<p>"I told you," Professor Quirrell said, "that we would play a game called Who's the Most Dangerous Student in the Classroom. There is one student in this classroom who mastered the Sumerian Simple Strike Hex faster than anyone else —"</p>
 
 <p>Oh blah blah blah.</p>
 
@@ -282,7 +282,7 @@
 
 <p>Hermione walked back towards the Ravenclaw cluster. Her face looked peaceful and Harry, for some odd reason, wanted to start clapping. Even though Professor Quirrell had been <i>right</i>.</p>
 
-<p>"So," Professor Quirrell said. "It becomes clear that Hermione Granger is not the most dangerous student in the classroom. Who do you think might actually be the most dangerous person here? - besides me, of course."</p>
+<p>"So," Professor Quirrell said. "It becomes clear that Hermione Granger is not the most dangerous student in the classroom. Who do you think might actually be the most dangerous person here? — besides me, of course."</p>
 
 <p>Without even thinking, Harry turned to look at the Slytherin contingent.</p>
 
@@ -324,7 +324,7 @@
 
 <p>A jolt of adrenaline poured into Harry's system, making him stand up straighter. He didn't know what conclusion Professor Quirrell had come to, but that couldn't be good.</p>
 
-<p>"Ah, Professor Quirrell -" Harry started to say.</p>
+<p>"Ah, Professor Quirrell —" Harry started to say.</p>
 
 <p>Professor Quirrell looked amused. "You're thinking that I've come up with a wrong answer, aren't you, Mr. Potter? You will learn to expect better of <i>me</i>." Professor Quirrell straightened from where he had leaned on the desk. "Mr. Potter, all things have their accustomed uses. Give me ten unaccustomed uses of objects in this room for combat!"</p>
 
@@ -338,11 +338,11 @@
 
 <p>"That's three. You need ten. The rest of the class thinks that you've already used up the whole contents of the classroom."</p>
 
-<p>" <i>Ha!</i> The floor can be removed to create a spike pit to fall into, the ceiling can be collapsed on someone, the walls can serve as raw material for Transfiguration into any number of deadly things - knives, say."</p>
+<p>" <i>Ha!</i> The floor can be removed to create a spike pit to fall into, the ceiling can be collapsed on someone, the walls can serve as raw material for Transfiguration into any number of deadly things — knives, say."</p>
 
 <p>"That's six. But surely you're scraping the bottom of the barrel now?"</p>
 
-<p>"I haven't even started! Just look at all the people! Having a Gryffindor attack the enemy is an <i>ordinary</i> use, of course -"</p>
+<p>"I haven't even started! Just look at all the people! Having a Gryffindor attack the enemy is an <i>ordinary</i> use, of course —"</p>
 
 <p>"I will not count that one."</p>
 
@@ -352,7 +352,7 @@
 
 <p>"That's ten, though I'm being generous in counting the Ravenclaw one. Now, for extra credit, one Quirrell point for each use of objects in this room which you have not yet named." Professor Quirrell favored Harry with a companionable smile. "The rest of your class thinks you are in trouble now, since you've named everything except the targets and you have no idea what may be done with those."</p>
 
-<p>"Bah! I've named all the people, but not my robes, which can be used to suffocate an enemy if wrapped around their head enough times, or Hermione Granger's robes, which can be torn into strips and tied into a rope and used to hang someone, or Draco Malfoy's robes, which can be used to start a fire -"</p>
+<p>"Bah! I've named all the people, but not my robes, which can be used to suffocate an enemy if wrapped around their head enough times, or Hermione Granger's robes, which can be torn into strips and tied into a rope and used to hang someone, or Draco Malfoy's robes, which can be used to start a fire —"</p>
 
 <p>"Three points," said Professor Quirrell, "no more clothing now."</p>
 
@@ -360,7 +360,7 @@
 
 <p>"Four points, no more wands."</p>
 
-<p>"My wristwatch could suffocate someone if jammed down their throat -"</p>
+<p>"My wristwatch could suffocate someone if jammed down their throat —"</p>
 
 <p>"Five points, and enough."</p>
 
@@ -392,11 +392,11 @@
 
 <p>What? Wait, that couldn't be true... Harry had a sudden sense of vertigo as he tried to remember what exactly he'd suggested, surely there had to be a counterexample...</p>
 
-<p>"And that," Professor Quirrell said, "is why Mr. Potter's ideas were so strange and useless - because he had to reach far into the impractical in order to meet his standard of <i>killing the enemy.</i> To him, any idea which fell short of that was not worth considering. This reflects a quality that we might call <i>intent to kill</i>. I have it. Harry Potter has it, which is how he could stare down five older Slytherins. Draco Malfoy does not have it, not yet. Mr. Malfoy would hardly shrink from talk of ordinary murder, but even he was shocked - yes you were Mr. Malfoy, I was watching your face - when Mr. Potter described how to use his classmates' bodies as raw material. There are censors inside your mind which make you flinch away from thoughts like that. Mr. Potter thinks <i>purely</i> of killing the enemy, he will grasp at any means to do so, he does not flinch, his censors are off. Even though his youthful genius is so undisciplined and impractical as to be useless, his <i>intent to kill</i> makes Harry Potter the Most Dangerous Student in the Classroom. One final point to him - no, let us make that a point to Ravenclaw - for this indispensable requisite of a true fighting wizard."</p>
+<p>"And that," Professor Quirrell said, "is why Mr. Potter's ideas were so strange and useless — because he had to reach far into the impractical in order to meet his standard of <i>killing the enemy.</i> To him, any idea which fell short of that was not worth considering. This reflects a quality that we might call <i>intent to kill</i>. I have it. Harry Potter has it, which is how he could stare down five older Slytherins. Draco Malfoy does not have it, not yet. Mr. Malfoy would hardly shrink from talk of ordinary murder, but even he was shocked — yes you were Mr. Malfoy, I was watching your face — when Mr. Potter described how to use his classmates' bodies as raw material. There are censors inside your mind which make you flinch away from thoughts like that. Mr. Potter thinks <i>purely</i> of killing the enemy, he will grasp at any means to do so, he does not flinch, his censors are off. Even though his youthful genius is so undisciplined and impractical as to be useless, his <i>intent to kill</i> makes Harry Potter the Most Dangerous Student in the Classroom. One final point to him — no, let us make that a point to Ravenclaw — for this indispensable requisite of a true fighting wizard."</p>
 
 <p>Harry's mouth gaped open in speechless shock as he searched frantically for something to say to this. <i>That is so completely not what I am about!</i></p>
 
-<p>But he could see that the other students were starting to believe it. Harry's mind was flipping through possible denials and not finding anything that could stand up against the authoritative voice of Professor Quirrell. The best Harry had come up with was "I'm not a psychopath, I'm just very creative" and that sounded kind of ominous. He needed to say something unexpected, something that would make people stop and reconsider -</p>
+<p>But he could see that the other students were starting to believe it. Harry's mind was flipping through possible denials and not finding anything that could stand up against the authoritative voice of Professor Quirrell. The best Harry had come up with was "I'm not a psychopath, I'm just very creative" and that sounded kind of ominous. He needed to say something unexpected, something that would make people stop and reconsider —</p>
 
 <p>"And now," Professor Quirrell said. "Mr. Potter. Fire."</p>
 
@@ -432,11 +432,11 @@
 
 <p>There was silence for a brief moment after that, a sound of people thinking, and then the murmurs started and rapidly rose to a roar of conversation.</p>
 
-<p>Harry turned towards Professor Quirrell, the two of them needed to talk -</p>
+<p>Harry turned towards Professor Quirrell, the two of them needed to talk —</p>
 
 <p>Quirrell had slumped over and was trudging back to his chair.</p>
 
-<p>No. Not acceptable. They <i>really</i> needed to talk. Stuff the zombie act, Professor Quirrell would probably wake up if Harry poked him a couple of times. Harry started forward -</p>
+<p>No. Not acceptable. They <i>really</i> needed to talk. Stuff the zombie act, Professor Quirrell would probably wake up if Harry poked him a couple of times. Harry started forward —</p>
 
 <p><i>WRONG<br /> DON'T<br /> BAD IDEA</i></p>
 
