--- a/024.htm
+++ b/024.htm
@@ -20,7 +20,7 @@
 
 <p>The churning in Draco's stomach got worse.</p>
 
-<p>Harry Potter came into sight. His face was carefully neutral, but his blue-trimmed robes looked oddly askew, as if they hadn't been put on quite right -</p>
+<p>Harry Potter came into sight. His face was carefully neutral, but his blue-trimmed robes looked oddly askew, as if they hadn't been put on quite right —</p>
 
 <p>" <i>Your hand,</i>" Draco said without thinking about it at all.</p>
 
@@ -92,7 +92,7 @@
 
 <p>Father had warned Draco against people like this, people who could ruin you and still be so likable that it was hard to hate them properly.</p>
 
-<p>"After which," Harry said, "the Headmaster told Professor Flitwick that this was, indeed, a secret and delicate matter of which he had already been informed, and that he did not think pressing it at this time would help me or anyone. Professor Flitwick started to say something about the Headmaster's usual plotting going much too far, and I had to interrupt at that point and explain that it had been my <i>own</i> idea and not anything the Headmaster forced me into, so Professor Flitwick spun around and started lecturing <i>me</i>, and the Headmaster interrupted <i>him</i> and said that as the Boy-Who-Lived I was doomed to have weird and dangerous adventures so I was safer if I got into them on purpose instead of waiting for them to happen by accident, and that was when Professor Flitwick threw up his little hands and started shrieking in a high-pitched voice at <i>both</i> of us about how he didn't care what we were cooking up together, but this wasn't ever to happen again for as long as I was in Ravenclaw House or he would have me thrown out and I could go to Gryffindor which was where all this <i>Dumbledoring</i> belonged -"</p>
+<p>"After which," Harry said, "the Headmaster told Professor Flitwick that this was, indeed, a secret and delicate matter of which he had already been informed, and that he did not think pressing it at this time would help me or anyone. Professor Flitwick started to say something about the Headmaster's usual plotting going much too far, and I had to interrupt at that point and explain that it had been my <i>own</i> idea and not anything the Headmaster forced me into, so Professor Flitwick spun around and started lecturing <i>me</i>, and the Headmaster interrupted <i>him</i> and said that as the Boy-Who-Lived I was doomed to have weird and dangerous adventures so I was safer if I got into them on purpose instead of waiting for them to happen by accident, and that was when Professor Flitwick threw up his little hands and started shrieking in a high-pitched voice at <i>both</i> of us about how he didn't care what we were cooking up together, but this wasn't ever to happen again for as long as I was in Ravenclaw House or he would have me thrown out and I could go to Gryffindor which was where all this <i>Dumbledoring</i> belonged —"</p>
 
 <p>Harry was making it <i>very</i> hard for Draco to hate him.</p>
 
@@ -134,13 +134,13 @@
 
 <p>"You <i>planned</i> what you did to me!" Draco said, managing to put a note of accusation in his voice. "You didn't do it because you got angry, you did it because you <i>wanted</i> to!"</p>
 
-<p><i>Fool,</i> Harry Potter would say, <i>of course I planned it, and now you're mine -</i></p>
+<p><i>Fool,</i> Harry Potter would say, <i>of course I planned it, and now you're mine —</i></p>
 
 <p>Harry turned back toward Draco. "What happened yesterday <i>wasn't</i> the plan," Harry said, his voice seeming stuck in his throat. "The <i>plan</i> was that I would teach you why you were always better off knowing the truth, and then we would try together to discover the truth about blood, and whatever the answer was we would accept it. Yesterday I... rushed things."</p>
 
 <p>"Always better off knowing the truth," Draco said coldly. "Like you did me a <i>favor.</i>"</p>
 
-<p>Harry nodded, blowing Draco's mind completely, and said, "What if Lucius comes up with the same idea I did, that the problem is stronger wizards having fewer children? He might start a program to pay the strongest purebloods to have more children. In fact, if blood purism <i>were</i> right, that's just what Lucius <i>should</i> be doing - addressing the problem on <i>his</i> side, where he can make things happen right away. Right now, Draco, you're the only friend Lucius has who would try to stop him from wasting the effort, because you're the only one who knows the <i>real</i> truth and can predict the real results."</p>
+<p>Harry nodded, blowing Draco's mind completely, and said, "What if Lucius comes up with the same idea I did, that the problem is stronger wizards having fewer children? He might start a program to pay the strongest purebloods to have more children. In fact, if blood purism <i>were</i> right, that's just what Lucius <i>should</i> be doing — addressing the problem on <i>his</i> side, where he can make things happen right away. Right now, Draco, you're the only friend Lucius has who would try to stop him from wasting the effort, because you're the only one who knows the <i>real</i> truth and can predict the real results."</p>
 
 <p>The thought came to Draco that Harry Potter had been raised in a place so strange that he was now effectively a magical creature rather than a wizard. Draco simply couldn't guess what Harry would say or do next.</p>
 
@@ -148,7 +148,7 @@
 
 <p>"Well," Harry said, "you're Lucius's heir, and believe it or not, Dumbledore thinks I belong to him. So we could grow up and fight their battles with each other. Or we could do something else."</p>
 
-<p>Slowly, Draco's mind wrapped around this. "You want to provoke a fight to the finish between them, then seize power after they're both exhausted." Draco felt cold dread in his chest. He would <i>have</i> to try and stop that no matter the cost to himself -</p>
+<p>Slowly, Draco's mind wrapped around this. "You want to provoke a fight to the finish between them, then seize power after they're both exhausted." Draco felt cold dread in his chest. He would <i>have</i> to try and stop that no matter the cost to himself —</p>
 
 <p>But Harry shook his head. "Stars above, <i>no!</i> "</p>
 
@@ -220,7 +220,7 @@
 
 <p>"We study again next Saturday?"</p>
 
-<p>"It better not go like the last one -"</p>
+<p>"It better not go like the last one —"</p>
 
 <p>"Don't worry, it won't," said Harry. "A few more Saturdays like <i>that</i> and you'd be ahead of <i>me.</i>"</p>
 
@@ -230,23 +230,23 @@
 
 <p>"Okay," Draco said, still a bit distracted by that last statement.</p>
 
-<p>Harry's eyes grew intent. "Buying that pouch for Granger used up most of the gold I managed to steal from my Gringotts vault -"</p>
+<p>Harry's eyes grew intent. "Buying that pouch for Granger used up most of the gold I managed to steal from my Gringotts vault —"</p>
 
 <p>What.</p>
 
-<p>"- and McGonagall has the vault key, or Dumbledore does now, maybe. And I was just about to launch a plot that might take some money, so I was wondering if you know how I can get access -"</p>
+<p>"- and McGonagall has the vault key, or Dumbledore does now, maybe. And I was just about to launch a plot that might take some money, so I was wondering if you know how I can get access —"</p>
 
 <p>"I'll loan you the money," said Draco's mouth in sheer existential reflex.</p>
 
-<p>Harry looked taken aback, but in a pleased way. "Draco, you don't have to -"</p>
+<p>Harry looked taken aback, but in a pleased way. "Draco, you don't have to —"</p>
 
 <p>"How much?"</p>
 
-<p>Harry named the amount and Draco couldn't quite keep the shock from showing on his face. That was almost all the spending money Father had given Draco to last out the whole year, Draco would be left with just a few Galleons -</p>
+<p>Harry named the amount and Draco couldn't quite keep the shock from showing on his face. That was almost all the spending money Father had given Draco to last out the whole year, Draco would be left with just a few Galleons —</p>
 
 <p>Then Draco mentally kicked himself. All he had to do was write Father and explain that the money was gone because he had managed to <i>loan it to Harry Potter,</i> and Father would send him a special congratulatory note written in golden ink, a giant Chocolate Frog that would take two weeks to eat, and ten times as many Galleons just in case Harry Potter needed another loan.</p>
 
-<p>"It's way too much, isn't it," said Harry. "I'm sorry, I shouldn't have asked -"</p>
+<p>"It's way too much, isn't it," said Harry. "I'm sorry, I shouldn't have asked —"</p>
 
 <p>"Excuse me, I <i>am</i> a Malfoy, you know," said Draco. "I was just surprised you <i>wanted</i> that much."</p>
 
@@ -290,7 +290,7 @@
 
 <p>And he did.</p>
 
-<p><i>People stuff,</i> Harry had said. Seizing control of the Conspiracy probably wouldn't even be difficult. And afterward, he would kill Harry Potter just to be sure -</p>
+<p><i>People stuff,</i> Harry had said. Seizing control of the Conspiracy probably wouldn't even be difficult. And afterward, he would kill Harry Potter just to be sure —</p>
 
 <p>The memory rose up in Draco of how sick inside it had felt last night, knowing Harry was screaming.</p>
 
@@ -298,7 +298,7 @@
 
 <p>Fine. He <i>wouldn't</i> kill Harry. Harry had been raised by Muggles, it wasn't his fault he was insane.</p>
 
-<p>Instead, Harry would live on, just so that Draco could tell him that it had all been for Harry's own good, really, he ought to be grateful -</p>
+<p>Instead, Harry would live on, just so that Draco could tell him that it had all been for Harry's own good, really, he ought to be grateful —</p>
 
 <p>And with a sudden twitch of surprised pleasure, Draco realized that it actually <i>was</i> for Harry's own good. If Harry tried to carry out his plan of playing Dumbledore and Father for fools, he would <i>die.</i></p>
 
@@ -318,13 +318,13 @@
 
 <p><i>Just pretend to be pretending to be a scientist,</i> Harry had told him.</p>
 
-<p>Draco didn't have words to describe exactly what was wrong with Harry's mind -</p>
+<p>Draco didn't have words to describe exactly what was wrong with Harry's mind —</p>
 
 <p>(since Draco had never heard the term <i>depth of recursion</i>)</p>
 
 <p>- but he could guess what sort of plots it implied.</p>
 
-<p>...unless all that was exactly what Harry <i>wanted</i> Draco to do as part of some even <i>larger</i> plot which Draco would play <i>right into</i> by trying to foil this one, Harry might even <i>know</i> that his plan was unworkable, it might have no purpose <i>except</i> luring Draco to thwart it -</p>
+<p>...unless all that was exactly what Harry <i>wanted</i> Draco to do as part of some even <i>larger</i> plot which Draco would play <i>right into</i> by trying to foil this one, Harry might even <i>know</i> that his plan was unworkable, it might have no purpose <i>except</i> luring Draco to thwart it —</p>
 
 <p>No. That way lay <i>madness.</i> There <i>had</i> to be a limit. The Dark Lord himself hadn't been <i>that</i> twisty. That sort of thing didn't happen in real life, only in Father's silly bedtime stories about foolish gargoyles who always ended up furthering the hero's plans every time they tried to stop him.</p>
 
@@ -346,7 +346,7 @@
 
 <p>...though it hadn't taken very long after that for Nikkie to form an alliance with the defeated Yeroen, overthrow Luit, and become the <i>new</i> new alpha.</p>
 
-<p>It really made you appreciate what millions of years of hominids trying to outwit <i>each other</i> - an evolutionary arms race without limit - had led to in the way of increased mental capacity.</p>
+<p>It really made you appreciate what millions of years of hominids trying to outwit <i>each other</i> — an evolutionary arms race without limit — had led to in the way of increased mental capacity.</p>
 
 <p>'Cause, y'know, a human would have totally seen that one coming.</p>
 
@@ -360,5 +360,5 @@
 
 <p>But of course if you were a Malfoy, you would be a more powerful scientist than anyone who wasn't.</p>
 
-<p>So Draco would learn all of Harry Potter's methods of rationality, and then when the time was ripe -</p>
+<p>So Draco would learn all of Harry Potter's methods of rationality, and then when the time was ripe —</p>
 
