--- a/031.htm
+++ b/031.htm
@@ -16,7 +16,7 @@
 
 <p>Harry was missing something here, something really important, and his mind went around and around in circles, and he still couldn't figure it out.</p>
 
-<p>Finally Harry sighed. He wasn't getting anywhere on this, and he had to go learn the Breaking Drill Hex from Hermione or someone before the next battle - Professor Quirrell had explained to Harry, his voice amused but with a sharp undertone of warning, that "no magical items except the ones I give you" included Muggle technology no matter how much that <i>wasn't magic.</i> Plus Harry also needed to figure out how to bring down Mr. Goyle next time...</p>
+<p>Finally Harry sighed. He wasn't getting anywhere on this, and he had to go learn the Breaking Drill Hex from Hermione or someone before the next battle — Professor Quirrell had explained to Harry, his voice amused but with a sharp undertone of warning, that "no magical items except the ones I give you" included Muggle technology no matter how much that <i>wasn't magic.</i> Plus Harry also needed to figure out how to bring down Mr. Goyle next time...</p>
 
 <p>Battles counted for a lot of Quirrell points if you were a general, and Harry needed to get cracking if he wanted to win Professor Quirrell's Christmas wish.</p>
 
@@ -34,7 +34,7 @@
 
 <p>What he should have done after the first time he met with Granger.</p>
 
-<p>What Harry Potter had <i>told</i> him to do, <i>trained</i> him to do, and yet Harry had also warned Draco that it would take time to make his brain realize that the methods applied to real life, and Draco hadn't <i>understood</i> that until today. He could have avoided every single one of his mistakes if he'd just <i>applied</i> the things Harry had already <i>told</i> him -</p>
+<p>What Harry Potter had <i>told</i> him to do, <i>trained</i> him to do, and yet Harry had also warned Draco that it would take time to make his brain realize that the methods applied to real life, and Draco hadn't <i>understood</i> that until today. He could have avoided every single one of his mistakes if he'd just <i>applied</i> the things Harry had already <i>told</i> him —</p>
 
 <p>Draco said out loud, "I notice that I am confused."</p>
 
@@ -58,7 +58,7 @@
 
 <p><i>Curse</i> Professor Quirrell!</p>
 
-<p>Draco had <i>read</i> it and he still hadn't <i>seen</i> it -</p>
+<p>Draco had <i>read</i> it and he still hadn't <i>seen</i> it —</p>
 
 <hr />
 
@@ -80,7 +80,7 @@
 
 <p>It was kind of sad, actually. Harry had grown up very, very alone. It wasn't that he went around thinking in words that only geniuses had a right to exist. It just wouldn't <i>occur</i> to him that anyone in Hermione's army besides Hermione could have any good ideas.</p>
 
-<p>"Anyhow," Hermione said. "Captains Goldstein and Weasley, you're on duty for thinking up strategic ideas for our next battle. Captains Macmillan and Susan - sorry, I mean Macmillan and Bones - try to come up with some tactics we can use, also any training you think we should try. Oh, and congratulations on your marching song, Captain Goldstein, I think it was a big plus for <i>esprit de corps</i>."</p>
+<p>"Anyhow," Hermione said. "Captains Goldstein and Weasley, you're on duty for thinking up strategic ideas for our next battle. Captains Macmillan and Susan — sorry, I mean Macmillan and Bones — try to come up with some tactics we can use, also any training you think we should try. Oh, and congratulations on your marching song, Captain Goldstein, I think it was a big plus for <i>esprit de corps</i>."</p>
 
 <p>"What're you doing?" said Susan. "And Colonel Zabini?"</p>
 
