--- a/034.htm
+++ b/034.htm
@@ -16,7 +16,7 @@
 
 <p>"And what do <i>you</i> two intend to do about it?" snapped Harry Potter. "Professor Quirrell already said he wouldn't ban spies!"</p>
 
-<p>"We'll ban them <i>for</i> him," said Draco grimly. He hadn't even understood what he meant by the words as he said them, but the very act of speaking seemed to crystallize a plan -</p>
+<p>"We'll ban them <i>for</i> him," said Draco grimly. He hadn't even understood what he meant by the words as he said them, but the very act of speaking seemed to crystallize a plan —</p>
 
 <hr />
 
@@ -30,7 +30,7 @@
 
 <p>"I suppose you are all wondering what I will do?" said Professor Quirrell. "There is nothing for it; I shall have to do what is fair. Although first there was a little speech I wanted to make, and before even that, it appears to me that Mr. Malfoy and Miss Granger have something they wish to share."</p>
 
-<p>Draco blinked, and then he and Granger traded rapid glances - <i>may I?</i> - <i>yes, go ahead -</i> and Draco raised his voice.</p>
+<p>Draco blinked, and then he and Granger traded rapid glances — <i>may I?</i> — <i>yes, go ahead —</i> and Draco raised his voice.</p>
 
 <p>"General Granger and I would both like to say," Draco said in his most formal voice, knowing it was being amplified and heard, "that we will no longer accept the help of any traitors. And if, in any battle, we find that Potter has accepted traitors from either of our armies, we will join forces to crush him."</p>
 
@@ -42,7 +42,7 @@
 
 <p>"Very good," said their Defense Professor, smiling. "It took the two of you long enough, but you are still to be congratulated on having thought of it before any other generals."</p>
 
-<p>It took a moment for this to soak in -</p>
+<p>It took a moment for this to soak in —</p>
 
 <p>"In the future, Mr. Malfoy, Miss Granger, before you come to my office with any request, consider whether there is a way for you to accomplish it without my help. I will not deduct Quirrell points on this occasion, but next time you may expect to lose the full fifty." Professor Quirrell wore an amused grin. "And what do you have to say about that, Mr. Potter?"</p>
 
@@ -58,13 +58,13 @@
 
 <p>" <i>Harry!</i> " gasped Granger, looking absolutely aghast, and there were gasps from the audience as well.</p>
 
-<p>Draco controlled the anger flushing through him. That had been a <i>stupid</i> move on Harry's part, saying that in public. If Harry had simply <i>done</i> it, it might have worked, Draco hadn't even thought about that, but <i>now</i> if Father did that it would look like he was playing into Harry's hands -</p>
+<p>Draco controlled the anger flushing through him. That had been a <i>stupid</i> move on Harry's part, saying that in public. If Harry had simply <i>done</i> it, it might have worked, Draco hadn't even thought about that, but <i>now</i> if Father did that it would look like he was playing into Harry's hands —</p>
 
 <p>"If you think my father, Lord Malfoy, can be manipulated by <i>you</i> that easily," Draco said coldly, "you have a surprise coming, Harry Potter."</p>
 
 <p>And Draco realized as the words finished leaving his mouth that he'd just backed <i>his own father</i> squarely into the corner, more or less without even meaning to. Father probably <i>wasn't</i> going to like this, not the tiniest bit, but now it would be impossible for him to say so... Draco would have to apologize for that, it <i>had</i> been an honest accident, but it was strange to think that he'd done it at all.</p>
 
-<p>"Then go ahead and defeat the evil General Chaos," Harry said, still looking amused. "I can't win against both your armies - not if you <i>really</i> work together. But I wonder if perhaps I could break you up before then."</p>
+<p>"Then go ahead and defeat the evil General Chaos," Harry said, still looking amused. "I can't win against both your armies — not if you <i>really</i> work together. But I wonder if perhaps I could break you up before then."</p>
 
 <p>"You won't, and we'll <i>crush</i> you!" said Draco Malfoy.</p>
 
@@ -108,7 +108,7 @@
 
 <p>The Headmaster rose from his seat, his face now stern, saying no word as yet; but the command was clear.</p>
 
-<p>"I do not say <i>what</i> threat will come," said Professor Quirrell. "But you will not live all your lives in peace, not if the past history of the world is any guide at all to its future. And if you do in the future as you have seen three armies do this day, if you cannot throw aside your petty bickering and take the Mark of a single leader, then indeed you might wish that the Dark Lord had lived to rule over you, and regret the day that ever Harry Potter was born -"</p>
+<p>"I do not say <i>what</i> threat will come," said Professor Quirrell. "But you will not live all your lives in peace, not if the past history of the world is any guide at all to its future. And if you do in the future as you have seen three armies do this day, if you cannot throw aside your petty bickering and take the Mark of a single leader, then indeed you might wish that the Dark Lord had lived to rule over you, and regret the day that ever Harry Potter was born —"</p>
 
 <p>" <i>Enough!</i> " bellowed Albus Dumbledore.</p>
 
@@ -134,11 +134,11 @@
 
 <p>And even stranger, the obvious implication: Professor Quirrell believed that <i>Harry</i> could. The Defense Professor claimed to have made no recommendation, but he'd mentioned Harry Potter over and over in his speech; others would already be thinking the same thing as Draco.</p>
 
-<p>It was ridiculous. The boy who had covered a stuffed chair in glitter and called it a throne -</p>
+<p>It was ridiculous. The boy who had covered a stuffed chair in glitter and called it a throne —</p>
 
-<p><i>The boy who faced down Snape and won,</i> whispered a traitorous voice, <i>that boy could grow into a Lord strong enough to rule, strong enough to save us all -</i></p>
+<p><i>The boy who faced down Snape and won,</i> whispered a traitorous voice, <i>that boy could grow into a Lord strong enough to rule, strong enough to save us all —</i></p>
 
-<p>Harry had been <i>raised</i> by Muggles! He was practically a mudblood himself, he wouldn't fight against his adopted family -</p>
+<p>Harry had been <i>raised</i> by Muggles! He was practically a mudblood himself, he wouldn't fight against his adopted family —</p>
 
 <p><i>He knows their arts, their secrets and their methods; he can take all of the Muggles' science and use it against them, alongside our own power as wizards.</i></p>
 
@@ -152,11 +152,11 @@
 
 <p>There was a puzzled pause from the watching audience.</p>
 
-<p>"Yes, Professor," said Draco in a clear voice, knowing that it was once again being amplified. "If you can't do that, then something else for Slytherin -"</p>
+<p>"Yes, Professor," said Draco in a clear voice, knowing that it was once again being amplified. "If you can't do that, then something else for Slytherin —"</p>
 
 <p>"I will not award House points unfairly," said Professor Quirrell. He tapped a cheek, looking thoughtful. "Which makes your wish difficult enough to be interesting. Would you like to say anything about why, Mr. Malfoy?"</p>
 
-<p>Draco turned from the Defense Professor, gazed out at the crowd from against that backdrop of platinum and emeralds. Not all of Slytherin had cheered for Dragon Army, there were anti-Malfoy factions who had expressed that dissatisfaction by supporting the Boy-Who-Lived, or even Granger; and those factions would be encouraged greatly by what Zabini had done. He needed to remind them that Slytherin meant Malfoy and Malfoy meant Slytherin -</p>
+<p>Draco turned from the Defense Professor, gazed out at the crowd from against that backdrop of platinum and emeralds. Not all of Slytherin had cheered for Dragon Army, there were anti-Malfoy factions who had expressed that dissatisfaction by supporting the Boy-Who-Lived, or even Granger; and those factions would be encouraged greatly by what Zabini had done. He needed to remind them that Slytherin meant Malfoy and Malfoy meant Slytherin —</p>
 
 <p>"No," said Draco. "They're Slytherins, they'll understand."</p>
 
@@ -180,7 +180,7 @@
 
 <p>Granger's eyes flicked briefly toward the watching students and teachers, and she said nothing.</p>
 
-<p>Professor Quirrell nodded as though to himself, and then turned back to the podium, and took up and tore open the last envelope. Beside Draco, Harry Potter visibly tensed up as the Defense Professor drew forth the parchment. "And Mr. Potter wishes for -"</p>
+<p>Professor Quirrell nodded as though to himself, and then turned back to the podium, and took up and tore open the last envelope. Beside Draco, Harry Potter visibly tensed up as the Defense Professor drew forth the parchment. "And Mr. Potter wishes for —"</p>
 
 <p>There was a pause as Professor Quirrell looked at the parchment.</p>
 
@@ -196,7 +196,7 @@
 
 <p>There was another pause.</p>
 
-<p>Harry drew a deep breath. "I didn't," he said, "but I already thought of another one." Harry Potter turned to look out at the audience, and his voice firmed as he spoke. "People fear traitors because of the damage the traitor does directly, the soldiers they shoot or the secrets they tell. But that's only part of the danger. What people do because they're <i>afraid</i> of traitors also costs them. I used that strategy today against Sunshine and Dragon. I didn't tell my traitors to cause as much direct damage as possible. I told them to act in the way that would create the most distrust and confusion, and make the generals do the most costly things to try and stop them from doing it again. When there are just a few traitors and a whole country opposing them, it stands to reason that what a few traitors do might be less damaging than what a whole country does to stop them, that the cure might be worse than the disease -"</p>
+<p>Harry drew a deep breath. "I didn't," he said, "but I already thought of another one." Harry Potter turned to look out at the audience, and his voice firmed as he spoke. "People fear traitors because of the damage the traitor does directly, the soldiers they shoot or the secrets they tell. But that's only part of the danger. What people do because they're <i>afraid</i> of traitors also costs them. I used that strategy today against Sunshine and Dragon. I didn't tell my traitors to cause as much direct damage as possible. I told them to act in the way that would create the most distrust and confusion, and make the generals do the most costly things to try and stop them from doing it again. When there are just a few traitors and a whole country opposing them, it stands to reason that what a few traitors do might be less damaging than what a whole country does to stop them, that the cure might be worse than the disease —"</p>
 
 <p>"Mr. Potter," said the Defense Professor, his voice suddenly cutting, "the lesson of history is that you are simply wrong. Your parents' generation did too little to unify themselves, not too much! This whole country almost fell, Mr. Potter, though you were not there to see it. I suggest that you ask your dorm-mates in Ravenclaw how many of them have lost family to the Dark Lord. Or if you are wiser, do <i>not</i> ask! <i>Do</i> you have a wish to make, Mr. Potter?"</p>
 
@@ -212,7 +212,7 @@
 
 <p>" <i>WHAT?</i> " screamed a hundred voices in the crowd, as Draco's jaw dropped.</p>
 
-<p>"The Snitch ruins the whole game," said Harry Potter. "Everything the other players do ends up being irrelevant. It would make overwhelmingly more sense to just buy a clock. It's one of those incredibly stupid things you don't notice just because you grew up with it, that people only do because everyone else is doing it -"</p>
+<p>"The Snitch ruins the whole game," said Harry Potter. "Everything the other players do ends up being irrelevant. It would make overwhelmingly more sense to just buy a clock. It's one of those incredibly stupid things you don't notice just because you grew up with it, that people only do because everyone else is doing it —"</p>
 
 <p>But by that point Harry Potter's voice could no longer be heard, because the riot had started.</p>
 
@@ -224,7 +224,7 @@
 
 <p>Professor Quirrell was laughing, without pause. "So be it, Mr. Potter. Your will be done." The Defense Professor paused deliberately. "Of course, I only promised <i>one</i> cunning plot. And that is all that the three of you will get."</p>
 
-<p>Draco had been half-expecting the words earlier, but now they still came as a shock; Draco exchanged rapid glances with Granger, they would have been the obvious allies but their wishes were directly opposed -</p>
+<p>Draco had been half-expecting the words earlier, but now they still came as a shock; Draco exchanged rapid glances with Granger, they would have been the obvious allies but their wishes were directly opposed —</p>
 
 <p>"You mean," said Harry, "we have to all agree on a wish?"</p>
 
@@ -236,7 +236,7 @@
 
 <p>There was a confused silence.</p>
 
-<p>"You can't do that," Harry said flatly from beside Draco. "Not even <i>I</i> can do that. Two of those wishes are mutually incompatible. It's <i>logically impossible -</i>" and then Harry cut himself off.</p>
+<p>"You can't do that," Harry said flatly from beside Draco. "Not even <i>I</i> can do that. Two of those wishes are mutually incompatible. It's <i>logically impossible —</i>" and then Harry cut himself off.</p>
 
 <p>"You're a few years too young to tell me what I can't do, Mr. Potter," said Professor Quirrell, with a brief dry smile.</p>
 
