--- a/040.htm
+++ b/040.htm
@@ -32,7 +32,7 @@
 
 <p>"That's not actually an answer," Harry observed. He'd learned by now to notice that sort of thing when talking to Professor Quirrell.</p>
 
-<p>Professor Quirrell set down his teacup with a small, high-pitched tacking sound on his saucer. "Some of those wizards were reasonably intelligent, Mr. Potter, so you may take it that the existence of an afterlife is not obvious. I have looked into the matter myself. There have been many claims of the sort which hope and fear would be expected to produce. Among those reports whose veracity is not in doubt, there is nothing which could not be the result of mere wizardry. There are certain devices said to communicate with the dead, but these, I suspect, only project an image from the mind; the result seems indistinguishable from memory because it <i>is</i> memory. The alleged spirits tell no secrets they knew in life, nor could have learned after death, which are not known to the wielder -"</p>
+<p>Professor Quirrell set down his teacup with a small, high-pitched tacking sound on his saucer. "Some of those wizards were reasonably intelligent, Mr. Potter, so you may take it that the existence of an afterlife is not obvious. I have looked into the matter myself. There have been many claims of the sort which hope and fear would be expected to produce. Among those reports whose veracity is not in doubt, there is nothing which could not be the result of mere wizardry. There are certain devices said to communicate with the dead, but these, I suspect, only project an image from the mind; the result seems indistinguishable from memory because it <i>is</i> memory. The alleged spirits tell no secrets they knew in life, nor could have learned after death, which are not known to the wielder —"</p>
 
 <p>"Which is why the Resurrection Stone is not the most valuable magical artifact in the world," said Harry.</p>
 
@@ -76,7 +76,7 @@
 
 <p>Harry put his teacup back on the saucer, noting absently as he did so that the symbol he'd drawn had vanished. "If you happen to see a stone with that symbol," said Harry, "and it <i>does</i> talk to the afterlife, do let me know. I have a few questions for Merlin or anyone who was around in Atlantis."</p>
 
-<p>"Quite," said Professor Quirrell. Then the Defense Professor lifted up his teacup again, and tipped it back as though to finish the last of what was there. "By the way, Mr. Potter, I fear we shall have to cut short today's visit to Diagon Alley. I was hoping it would - but never mind. Let it stand that there is something else I must do this afternoon."</p>
+<p>"Quite," said Professor Quirrell. Then the Defense Professor lifted up his teacup again, and tipped it back as though to finish the last of what was there. "By the way, Mr. Potter, I fear we shall have to cut short today's visit to Diagon Alley. I was hoping it would — but never mind. Let it stand that there is something else I must do this afternoon."</p>
 
 <p>Harry nodded, and finished his own tea, then rose from his seat at the same time as Professor Quirrell.</p>
 
