--- a/042.htm
+++ b/042.htm
@@ -6,7 +6,7 @@
 
 <p>"That can't be right!" objected a Gryffindor girl, while Hermione was still trying to sort out what to say to that. "There wouldn't be any Muggle girls <i>left!</i> "</p>
 
-<p>She'd kept on reading quietly, and Harry Potter had kept on trying to apologize, and it had soon dawned on Hermione that Harry had realized, possibly for the first time in his life, that he'd done something annoying; and that Harry, definitely for the first time in his life, was <i>terrified</i> that he'd lost her as a friend; and she'd started to feel (a) guilty and (b) worried about the direction Harry's increasingly desperate offers were going. But she still had no idea what sort of apology was appropriate, so she'd said that the Ravenclaw girls should vote on it - and this time she wouldn't fix the outcome, though she hadn't mentioned that part - to which Harry had instantly agreed.</p>
+<p>She'd kept on reading quietly, and Harry Potter had kept on trying to apologize, and it had soon dawned on Hermione that Harry had realized, possibly for the first time in his life, that he'd done something annoying; and that Harry, definitely for the first time in his life, was <i>terrified</i> that he'd lost her as a friend; and she'd started to feel (a) guilty and (b) worried about the direction Harry's increasingly desperate offers were going. But she still had no idea what sort of apology was appropriate, so she'd said that the Ravenclaw girls should vote on it — and this time she wouldn't fix the outcome, though she hadn't mentioned that part — to which Harry had instantly agreed.</p>
 
 <p>The next day, practically every Ravenclaw girl over the age of thirteen had voted to have Draco drop Harry.</p>
 
@@ -40,7 +40,7 @@
 
 <p>There was a pause.</p>
 
-<p>Then -</p>
+<p>Then —</p>
 
 <p>"Yeah," said Draco. "I understand."</p>
 
@@ -66,9 +66,9 @@
 
 <p>There was a brief moment when Harry could feel the Feather-Falling Potion kicking in, starting to slow him, a sort of lurching, cushioning feeling.</p>
 
-<p>And then something <i>pulled</i> on Harry and he accelerated downward again <i>faster than gravity -</i></p>
+<p>And then something <i>pulled</i> on Harry and he accelerated downward again <i>faster than gravity —</i></p>
 
-<p>Harry's mouth had already opened and begun screaming while part of his brain tried to think of something creative he could do, part of his brain tried to calculate how much time he had left to be creative, and a tiny rump part of his brain noticed that he wasn't even going to finish the remaining-time calculation before he hit the ground -</p>
+<p>Harry's mouth had already opened and begun screaming while part of his brain tried to think of something creative he could do, part of his brain tried to calculate how much time he had left to be creative, and a tiny rump part of his brain noticed that he wasn't even going to finish the remaining-time calculation before he hit the ground —</p>
 
 <hr />
 
@@ -96,7 +96,7 @@
 
 <p>Professor Quirrell was already sitting up from where he'd fallen on the grass.</p>
 
-<p>"Good heavens!" gasped the man. "You shouldn't be -"</p>
+<p>"Good heavens!" gasped the man. "You shouldn't be —"</p>
 
 <p>"Mr. Lupin, your concerns are misplaced. No wizard, no matter how powerful, casts such a Charm by strength alone. You must do it by being <i>efficient.</i>"</p>
 
@@ -112,9 +112,9 @@
 
 <p>"Consider it a lesson in preparedness, Mr. Potter," said Professor Quirrell. "Had I not <i>insisted</i> that there be more than one adult witness to this little event, and that <i>both</i> of us have our wands out, Mr. Lupin would not have been available to slow your fall afterward, and you would have been gravely injured."</p>
 
-<p>" <i>Sir!</i> " said the man - Mr. Lupin, apparently. "You should not say such things to the boy!"</p>
+<p>" <i>Sir!</i> " said the man — Mr. Lupin, apparently. "You should not say such things to the boy!"</p>
 
-<p>"Who is -" Harry started to say.</p>
+<p>"Who is —" Harry started to say.</p>
 
 <p>"The only other person who was available to watch, besides myself," said Professor Quirrell. "I introduce you to Remus Lupin, who is here temporarily to instruct students in the Patronus Charm. Though I am told that the two of you have already met."</p>
 
@@ -128,7 +128,7 @@
 
 <p>Mr. Lupin's temporary office was a small stone room with a small wooden desk, and Harry couldn't see anything of what Mr. Lupin was sitting on, suggesting that it was a small stool just like the one in front of his desk. Harry guessed that Mr. Lupin wouldn't be at Hogwarts for long, or use this office much, and so he'd told the house elves not to waste the effort. It said something about a person that he tried not to bother house elves. Specifically, it said that he'd been Sorted into Hufflepuff, since, to the best of Harry's knowledge, Hermione was the only non-Hufflepuff who worried about bothering house elves. (Harry himself thought her qualms rather silly. Whoever had created house elves in the first place had been unspeakably evil, obviously; but that didn't mean Hermione was doing the right thing <i>now</i> by denying sentient beings the drudgery they had been shaped to enjoy.)</p>
 
-<p>"Please sit down, Harry," the man said quietly. His formal robes were of low quality, not quite tattered, but visibly worn by the passage of time in a way that simple Repair Charms couldn't fix; <i>shabby</i> was the word that came to mind. And despite that, somehow, there was a dignity about him that couldn't have been obtained by fine and expensive robes, that wouldn't have <i>fit</i> with fine robes, that was the exclusive property of the shabby. Harry had <i>heard</i> of humility, but he'd never seen the real thing before - only the satisfied modesty of people who thought it was part of their style and wanted you to notice.</p>
+<p>"Please sit down, Harry," the man said quietly. His formal robes were of low quality, not quite tattered, but visibly worn by the passage of time in a way that simple Repair Charms couldn't fix; <i>shabby</i> was the word that came to mind. And despite that, somehow, there was a dignity about him that couldn't have been obtained by fine and expensive robes, that wouldn't have <i>fit</i> with fine robes, that was the exclusive property of the shabby. Harry had <i>heard</i> of humility, but he'd never seen the real thing before — only the satisfied modesty of people who thought it was part of their style and wanted you to notice.</p>
 
 <p>Harry took a seat on the small wooden stool in front of Mr. Lupin's short desk.</p>
 
@@ -148,7 +148,7 @@
 
 <p>Harry wasn't sure Mr. Lupin's concern had been misplaced, considering his own first encounter with Dumbledore; but it had all turned out well enough, so he said nothing. "What about my..." Harry searched for a word that didn't raise them higher or put them lower... " <i>other</i> parents? I want to know, well, everything."</p>
 
-<p>"A tall order," Mr. Lupin said. He wiped a hand across his forehead. "Well, let us begin at the beginning. When you were born, James was so happy that he couldn't touch his wand without it glowing gold, for a whole week. And even after that, whenever he held you, or saw Lily holding you, or just thought of you, it would happen again -"</p>
+<p>"A tall order," Mr. Lupin said. He wiped a hand across his forehead. "Well, let us begin at the beginning. When you were born, James was so happy that he couldn't touch his wand without it glowing gold, for a whole week. And even after that, whenever he held you, or saw Lily holding you, or just thought of you, it would happen again —"</p>
 
 <hr />
 
@@ -156,9 +156,9 @@
 
 <p>Finally Harry screwed up enough courage to ask the critical question, while Remus was in the middle of an extended discourse on the wonders of James's Quidditch that Harry couldn't find the heart to squash more directly.</p>
 
-<p>"And that was when," Remus said, his eyes shining brightly, "James pulled off a <i>triple reverse Mulhanney Dive</i> with <i>extra backspin!</i> The whole crowd went wild, even some of the Hufflepuffs were cheering -"</p>
+<p>"And that was when," Remus said, his eyes shining brightly, "James pulled off a <i>triple reverse Mulhanney Dive</i> with <i>extra backspin!</i> The whole crowd went wild, even some of the Hufflepuffs were cheering —"</p>
 
-<p><i>I guess you had to be there,</i> Harry thought - not that being there would have helped in any way - and said, "Mr. Lupin?"</p>
+<p><i>I guess you had to be there,</i> Harry thought — not that being there would have helped in any way — and said, "Mr. Lupin?"</p>
 
 <p>Something about Harry's voice must have reached the man, because he stopped in mid-sentence.</p>
 
@@ -168,7 +168,7 @@
 
 <p>Harry didn't answer, he was trying to think of something true to say that would deflect suspicion, but he didn't think fast enough.</p>
 
-<p>"Never mind," said Remus, and sighed. "I can guess who." The faintly scarred face was pinched in disapproval. "What a thing to tell -"</p>
+<p>"Never mind," said Remus, and sighed. "I can guess who." The faintly scarred face was pinched in disapproval. "What a thing to tell —"</p>
 
 <p>"Did my father have any extenuating circumstances?" Harry said. "Poor home life, or something like that? Or was he just... being naturally nasty?" <i>Cold?</i></p>
 
@@ -180,19 +180,19 @@
 
 <p>"I want to know <i>why</i>," Harry said. "I want to <i>understand</i>, because to me, it seems like there isn't any possible excuse for that!" Voice shaking a bit. "Please tell me anything you know about why he did it, even if it doesn't sound nice." <i>So I don't fall into the same trap myself, whatever it is.</i></p>
 
-<p>"It was the thing to do if you were in Gryffindor," Remus said, slowly, reluctantly. "And... I didn't think so back then, I thought it was the other way around, but... it might have been <i>Black</i> who got <i>James</i> into it, really... Black wanted so much to show everyone that he was against Slytherin, you see, we all wanted to believe that blood wasn't destiny -"</p>
+<p>"It was the thing to do if you were in Gryffindor," Remus said, slowly, reluctantly. "And... I didn't think so back then, I thought it was the other way around, but... it might have been <i>Black</i> who got <i>James</i> into it, really... Black wanted so much to show everyone that he was against Slytherin, you see, we all wanted to believe that blood wasn't destiny —"</p>
 
 <hr />
 
-<p>"No, Harry," said Remus. "I don't know why Black went after Peter instead of running. It was as though Black was making tragedy for the sake of tragedy that day." The man's voice was unsteady. "There was no hint, no warning, we all thought - to think that he was to be -" Remus's voice cut off.</p>
+<p>"No, Harry," said Remus. "I don't know why Black went after Peter instead of running. It was as though Black was making tragedy for the sake of tragedy that day." The man's voice was unsteady. "There was no hint, no warning, we all thought — to think that he was to be —" Remus's voice cut off.</p>
 
 <p>Harry was crying, he couldn't help it, it hurt worse to hear it from Remus than anything he'd ever felt himself. Harry had lost two parents he didn't remember, knew only from stories. Remus Lupin had lost all four of his best friends in less than twenty-four hours; and for the loss of his last remaining one, Peter Pettigrew, there'd just been no reason at all.</p>
 
 <p>"Sometimes it still hurts to think of him in Azkaban," Remus finished, his voice almost a whisper. "I am glad, Harry, that Death Eaters are not allowed visitors. It means I do not have to feel ashamed of not going."</p>
 
-<p>Harry had to swallow hard several times before he could speak. "Can you tell me about Peter Pettigrew? He was my father's friend, and it seems - that I should know, that I should remember -"</p>
+<p>Harry had to swallow hard several times before he could speak. "Can you tell me about Peter Pettigrew? He was my father's friend, and it seems — that I should know, that I should remember —"</p>
 
-<p>Remus nodded, water glittering in his own eyes now. "I think, Harry, that if Peter had known it would end that way -" the man's voice choked up. "Peter was more afraid of the Dark Lord than any of us, and if he'd known it would end that way, I don't think he would have done it. But Peter knew the <i>risk</i>, Harry, he knew the risk was real, that it <i>could</i> happen, and yet he stayed by James and Lily's side. All through Hogwarts I used to wonder why Peter hadn't been sorted into Slytherin, or maybe Ravenclaw, because Peter so adored secrets, he couldn't resist them, he would find out things about people, things they wanted kept hidden -" A brief wry look crossed Remus's face. "But he didn't <i>use</i> those secrets, Harry. He just wanted to know. And then the Dark Lord's shadow fell over everything, and Peter stood by James and Lily and put his talents to good use, and I understood why the Hat had sent him to Gryffindor." Remus's voice was fierce now, and proud. "It's <i>easy</i> to stand by your friends if you're a hero like Godric, bold and strong like people think Gryffindors should be. But if Peter was more afraid than any of us, doesn't that also make him the most brave?"</p>
+<p>Remus nodded, water glittering in his own eyes now. "I think, Harry, that if Peter had known it would end that way —" the man's voice choked up. "Peter was more afraid of the Dark Lord than any of us, and if he'd known it would end that way, I don't think he would have done it. But Peter knew the <i>risk</i>, Harry, he knew the risk was real, that it <i>could</i> happen, and yet he stayed by James and Lily's side. All through Hogwarts I used to wonder why Peter hadn't been sorted into Slytherin, or maybe Ravenclaw, because Peter so adored secrets, he couldn't resist them, he would find out things about people, things they wanted kept hidden —" A brief wry look crossed Remus's face. "But he didn't <i>use</i> those secrets, Harry. He just wanted to know. And then the Dark Lord's shadow fell over everything, and Peter stood by James and Lily and put his talents to good use, and I understood why the Hat had sent him to Gryffindor." Remus's voice was fierce now, and proud. "It's <i>easy</i> to stand by your friends if you're a hero like Godric, bold and strong like people think Gryffindors should be. But if Peter was more afraid than any of us, doesn't that also make him the most brave?"</p>
 
 <p>"It does," Harry said. His own voice was choked to where he almost couldn't talk. "If you could, Mr. Lupin, if you have time, there's someone else who I think should hear Peter Pettigrew's story, a student in first-year Hufflepuff, named Neville Longbottom."</p>
 
