--- a/044.htm
+++ b/044.htm
@@ -1,4 +1,4 @@
-<p>"Fawkes," said Albus Dumbledore, his voice cracking, "help him, please -"</p>
+<p>"Fawkes," said Albus Dumbledore, his voice cracking, "help him, please —"</p>
 
 <p>A brilliant creature of red-gold shuffled into the field of vision, looking down quizzically; and it began to croon.</p>
 
@@ -6,7 +6,7 @@
 
 <p>"You're noisy," said the voice, "you should die."</p>
 
-<p>"Chocolate," Albus Dumbledore said, "you need chocolate, and your friends - but I dare not take you back -"</p>
+<p>"Chocolate," Albus Dumbledore said, "you need chocolate, and your friends — but I dare not take you back —"</p>
 
 <p>Then a shining raven came, and spoke in Professor Flitwick's voice; whereupon Albus Dumbledore gasped in sudden comprehension, and cursed aloud at his own stupidity.</p>
 
@@ -18,7 +18,7 @@
 
 <p>It was only a moment, it seemed, between when Flitwick's raven had flown to elsewhere, and when Albus Dumbledore reappeared in another crack of red and golden fire with Harry in his arms; but somehow in that time Hermione had already managed to fill her hands with chocolate.</p>
 
-<p>Before Hermione even got there, chocolate had zoomed off the table and straight into Harry's mouth, which a tiny part of her mind said was unfair, <i>he'd</i> gotten a chance to do it for <i>her -</i></p>
+<p>Before Hermione even got there, chocolate had zoomed off the table and straight into Harry's mouth, which a tiny part of her mind said was unfair, <i>he'd</i> gotten a chance to do it for <i>her —</i></p>
 
 <p>Harry spat the chocolate back out again.</p>
 
@@ -42,7 +42,7 @@
 
 <p>"What can we do?" said Dean in a trembling voice.</p>
 
-<p>"Back off and give him more space -" said the dry voice of Professor Quirrell.</p>
+<p>"Back off and give him more space —" said the dry voice of Professor Quirrell.</p>
 
 <p>"No!" interrupted the Headmaster. "Let him be surrounded by his friends."</p>
 
@@ -52,17 +52,17 @@
 
 <p>"He doesn't mean it, does he?" Seamus said it like he was begging.</p>
 
-<p>"You don't understand," Hermione said, her voice breaking, " <i>that's not Harry -</i>" and she shut up before she said anything more, but she <i>had</i> to say that much.</p>
+<p>"You don't understand," Hermione said, her voice breaking, " <i>that's not Harry —</i>" and she shut up before she said anything more, but she <i>had</i> to say that much.</p>
 
 <p>She saw from the look on his face that Neville understood, and she also saw that the others didn't. If Harry had really never thought anything like that, then being exposed to a Dementor for less than a minute wouldn't have made him say it. That's what they were probably thinking.</p>
 
 <p>Less than a minute of Dementor exposure couldn't create a whole new evil person inside you out of nothing.</p>
 
-<p>But if that person was <i>already there</i> -</p>
+<p>But if that person was <i>already there</i> —</p>
 
 <p><i>Does the Headmaster know?</i></p>
 
-<p>Hermione looked up at the Headmaster, and found that Albus Dumbledore was gazing at <i>her</i>, and that his blue eyes had grown suddenly piercing -</p>
+<p>Hermione looked up at the Headmaster, and found that Albus Dumbledore was gazing at <i>her</i>, and that his blue eyes had grown suddenly piercing —</p>
 
 <p>Words came into her mind.</p>
 
@@ -72,7 +72,7 @@
 
 <p><i>I know. But this is beyond even that. Fawkes's song cannot reach him, where he is lost.</i></p>
 
-<p><i>What can we -</i></p>
+<p><i>What can we —</i></p>
 
 <p><i>I have a plan,</i> sent the Headmaster. <i>Patience.</i></p>
 
@@ -80,19 +80,19 @@
 
 <p><i>It is better that you not know,</i> sent the Headmaster.</p>
 
-<p>Now Hermione was getting <i>really</i> nervous. She didn't know how <i>much</i> the Headmaster knew about Harry's dark side -</p>
+<p>Now Hermione was getting <i>really</i> nervous. She didn't know how <i>much</i> the Headmaster knew about Harry's dark side —</p>
 
-<p><i>A fair point,</i> sent the Headmaster. <i>I am about to tell you; steel yourself so as not to react. Are you ready? Good. I am going to pretend to cast the Killing Curse on Professor McGonagall - DO NOT REACT, Hermione!</i></p>
+<p><i>A fair point,</i> sent the Headmaster. <i>I am about to tell you; steel yourself so as not to react. Are you ready? Good. I am going to pretend to cast the Killing Curse on Professor McGonagall — DO NOT REACT, Hermione!</i></p>
 
-<p>That took work. The Headmaster really was crazy! That wouldn't bring Harry <i>out</i> of his dark side, Harry would go <i>completely berserk</i>, he'd <i>kill</i> the Headmaster -</p>
+<p>That took work. The Headmaster really was crazy! That wouldn't bring Harry <i>out</i> of his dark side, Harry would go <i>completely berserk</i>, he'd <i>kill</i> the Headmaster —</p>
 
 <p><i>But that is not true darkness,</i> sent Albus Dumbledore. <i>That is protectiveness, that is love. Fawkes will be able to reach him, then. And when Harry sees that Minerva is alive after all, it will return him fully.</i></p>
 
-<p>The thought came to Hermione -</p>
+<p>The thought came to Hermione —</p>
 
 <p><i>I doubt that will work,</i> sent the Headmaster, <i>and you may not like the way he reacts if you try. But you may try if you wish.</i></p>
 
-<p>She hadn't really meant that seriously! It was too -</p>
+<p>She hadn't really meant that seriously! It was too —</p>
 
 <p>Then her eyes moved, breaking gaze with the Headmaster, going to the boy looking around with empty, despising eyes as his mouth kept chewing and swallowing bar after bar of chocolate without effect. Her heart wrenched, and suddenly a lot of things didn't seem to matter, only that there was a chance.</p>
 
@@ -106,7 +106,7 @@
 
 <p>Killing all those people would be difficult. But many of them didn't trust Quirrell, who was strong. Finding exactly the right trigger could cause them all to kill each other.</p>
 
-<p>Then a person leaned over into the field of vision and did something completely strange, something that belonged to a foreign mode of thought, for which there was only a single response stored anywhere -</p>
+<p>Then a person leaned over into the field of vision and did something completely strange, something that belonged to a foreign mode of thought, for which there was only a single response stored anywhere —</p>
 
 <hr />
 
