--- a/046.htm
+++ b/046.htm
@@ -40,15 +40,15 @@
 
 <p>"Indeed," said Dumbledore. "Explain."</p>
 
-<p>Harry opened his mouth, and then, as realization hit him, rapidly snapped his mouth shut again. Godric hadn't told anyone, nor had Rowena if she'd known; there might have been any number of wizards who'd figured it out and kept their mouths shut. You couldn't forget if you <i>knew</i> that was what you were trying to do; once you realized <i>how</i> it worked, the animal form of the Patronus Charm would never work for you again - and most wizards didn't have the right upbringing to turn on Dementors and destroy them -</p>
+<p>Harry opened his mouth, and then, as realization hit him, rapidly snapped his mouth shut again. Godric hadn't told anyone, nor had Rowena if she'd known; there might have been any number of wizards who'd figured it out and kept their mouths shut. You couldn't forget if you <i>knew</i> that was what you were trying to do; once you realized <i>how</i> it worked, the animal form of the Patronus Charm would never work for you again — and most wizards didn't have the right upbringing to turn on Dementors and destroy them —</p>
 
 <p>"Erm, sorry about this," said Harry. "But I've just this instant realized that explaining would be an <i>incredibly</i> bad idea until you work some things out on your own."</p>
 
-<p>"Is that the truth, Harry?" Dumbledore said slowly. "Or are you just pretending to be wise -"</p>
+<p>"Is that the truth, Harry?" Dumbledore said slowly. "Or are you just pretending to be wise —"</p>
 
 <p>" <i>Headmaster!</i> " said Professor Quirrell, sounding genuinely shocked. "Mr. Potter has told you that this spell is not spoken of with those who cannot cast it! You do not press a wizard on such matters!"</p>
 
-<p>"If I told you -" Harry began.</p>
+<p>"If I told you —" Harry began.</p>
 
 <p>"No," Professor Quirrell said, sounding rather severe. "You don't tell us <i>why,</i> Mr. Potter, you simply tell us that we are not to know. If you wish to devise a hint, you do so carefully, at leisure, not in the midst of conversation."</p>
 
@@ -106,15 +106,15 @@
 
 <p>"I see," said Professor Quirrell. "And what would you have done about the threat to me if your spell <i>hadn't</i> worked for destroying the Dementor?"</p>
 
-<p>"Plan B," said Harry. "Encase the Dementor in dense metal with a high melting point, probably tungsten, drop it into an active volcano, and hope it ends up inside Earth's mantle. Ah, the whole planet is filled with molten lava under its surface -"</p>
+<p>"Plan B," said Harry. "Encase the Dementor in dense metal with a high melting point, probably tungsten, drop it into an active volcano, and hope it ends up inside Earth's mantle. Ah, the whole planet is filled with molten lava under its surface —"</p>
 
 <p>"Yes," said Professor Quirrell. "I know." The Defense Professor was wearing a very odd smile. "I really should have thought of that myself, all things considered. Tell me, Mr. Potter, if you wanted to lose something where no one would ever find it again, where would you put it?"</p>
 
-<p>Harry considered this question. "I suppose I shouldn't ask <i>what</i> you've found that needs losing -"</p>
+<p>Harry considered this question. "I suppose I shouldn't ask <i>what</i> you've found that needs losing —"</p>
 
 <p>"Quite," said Professor Quirrell, as Harry had expected; and then, "Perhaps you will be told when you are older," which Harry hadn't.</p>
 
-<p>"Well," said Harry, "besides trying to get it into the molten core of the planet, you could bury it in solid rock a kilometer underground in a randomly selected location - maybe teleport it in, if there's some way to do that blindly, or drill a hole and repair the hole afterward; the important thing would be not to leave any traces leading there, so it's just an anonymous cubic meter somewhere in the Earth's crust. You could drop it into the Mariana Trench, that's the deepest depth of ocean on the planet - or just pick some random other ocean trench, to make it less obvious. If you could make it buoyant and invisible, then you could throw it into the stratosphere. Or ideally you would launch it into space, with a cloak against detection, and a randomly fluctuating acceleration factor that would take it out of the Solar System. And afterward, of course, you'd Obliviate yourself, so even you didn't know exactly where it was."</p>
+<p>"Well," said Harry, "besides trying to get it into the molten core of the planet, you could bury it in solid rock a kilometer underground in a randomly selected location — maybe teleport it in, if there's some way to do that blindly, or drill a hole and repair the hole afterward; the important thing would be not to leave any traces leading there, so it's just an anonymous cubic meter somewhere in the Earth's crust. You could drop it into the Mariana Trench, that's the deepest depth of ocean on the planet — or just pick some random other ocean trench, to make it less obvious. If you could make it buoyant and invisible, then you could throw it into the stratosphere. Or ideally you would launch it into space, with a cloak against detection, and a randomly fluctuating acceleration factor that would take it out of the Solar System. And afterward, of course, you'd Obliviate yourself, so even you didn't know exactly where it was."</p>
 
 <p>The Defense Professor was laughing, and it sounded even odder than his smile.</p>
 
@@ -146,7 +146,7 @@
 
 <p>"Yes," said Pansy sourly, from where she was sitting with Gregory's feet in her lap, leaning back and reading what seemed to be a coloring book, "Millicent already told us."</p>
 
-<p><i>How -</i></p>
+<p><i>How —</i></p>
 
 <p>"Why didn't <i>you</i> kiss him first, Tracey?" said Flora and Hestia Carrow from their own chairs. "Now Potter's going to marry a mudblood girl! <i>You</i> could've been his true love and gotten into a rich Noble House and everything if you'd just kissed him first!"</p>
 
@@ -162,11 +162,11 @@
 
 <p>Everyone else was also looking at Daphne, now.</p>
 
-<p>"Oh, yeah," said Daphne, "Harry shoved her away and shouted, 'I told you, no kissing!' Then Harry screamed like he was dying and Fawkes started singing to him - I'm not sure which one of those happened first, actually -"</p>
+<p>"Oh, yeah," said Daphne, "Harry shoved her away and shouted, 'I told you, no kissing!' Then Harry screamed like he was dying and Fawkes started singing to him — I'm not sure which one of those happened first, actually —"</p>
 
 <p>"That doesn't sound like true love to <i>me,</i>" said the Carrow twins. "That sounds like the <i>wrong person</i> kissed him."</p>
 
-<p>"It was supposed to be <i>me</i>," whispered Tracey. Her face was still stunned. " <i>I</i> was supposed to be his true love. Harry Potter was <i>my</i> general. I should've, I should've fought Granger for him -"</p>
+<p>"It was supposed to be <i>me</i>," whispered Tracey. Her face was still stunned. " <i>I</i> was supposed to be his true love. Harry Potter was <i>my</i> general. I should've, I should've fought Granger for him —"</p>
 
 <p>Daphne spun on Tracey, incensed. " <i>You?</i> Take Harry away from Hermione?"</p>
 
@@ -210,11 +210,11 @@
 
 <p>The boy in her office took this in without changing expression. "I would prefer not to disturb the Headmaster over this matter," Harry Potter said calmly. "I <i>insist</i> on not disturbing him, in fact, and you did promise that our conversation would be kept private. So let me put it this way. I know that there was, in fact, a prophecy. I know that you are the one who originally heard it from Professor Trelawney. I know that the prophecy identified the child of James and Lily as someone dangerous to the Dark Lord. And I know who I am, indeed everyone now knows who I am, so you are revealing nothing new or dangerous, if you tell me only this: What was the <i>exact wording</i> which identified <i>me,</i> the child of James and Lily?"</p>
 
-<p>Trelawney's hollow voice echoed in her mind -</p>
+<p>Trelawney's hollow voice echoed in her mind —</p>
 
 <p><i>BORN TO THOSE WHO HAVE THRICE DEFIED HIM,<br /> BORN AS THE SEVENTH MONTH DIES...</i></p>
 
-<p>"Harry," said Professor McGonagall, "I can't possibly tell you that!" It chilled her to the bone that Harry knew so much already, she couldn't imagine how Harry had learned -</p>
+<p>"Harry," said Professor McGonagall, "I can't possibly tell you that!" It chilled her to the bone that Harry knew so much already, she couldn't imagine how Harry had learned —</p>
 
 <p>The boy looked at her with strange, sorrowful eyes. "Can you not sneeze without the Headmaster's permission, Professor McGonagall? For I do promise to you that I have good reason to ask, and good reason to keep the question private."</p>
 
@@ -222,13 +222,13 @@
 
 <p>"All right," Harry said. "One simple question. Please. Was the Potter family mentioned by <i>name?</i> Does the prophecy literally say 'Potter'?"</p>
 
-<p>She stared at Harry for a while. She couldn't have said why or where she got the sense that this was a critical point, that she could not lightly refuse the request, nor lightly accede to it -</p>
+<p>She stared at Harry for a while. She couldn't have said why or where she got the sense that this was a critical point, that she could not lightly refuse the request, nor lightly accede to it —</p>
 
 <p>"No," she finally said. "Please, Harry, don't ask any more."</p>
 
 <p>The boy smiled, a little sadly it seemed, and said, "Thank you, Minerva. You are a good woman and true."</p>
 
-<p>And while her mouth was still open in utter shock, Harry Potter got up and left the office; and only then did she realize that Harry had taken her refusal as an answer, and the true answer at that -</p>
+<p>And while her mouth was still open in utter shock, Harry Potter got up and left the office; and only then did she realize that Harry had taken her refusal as an answer, and the true answer at that —</p>
 
 <p>Harry closed the door behind himself.</p>
 
