--- a/048.htm
+++ b/048.htm
@@ -2,15 +2,15 @@
 
 <p>It <i>might</i> have been an overreaction. After he'd gotten over the raw shock, Harry's common sense had woken up and hypothesized that "Parseltongue" was probably just a linguistic user interface for controlling snakes...</p>
 
-<p>...after all, snakes couldn't <i>really</i> be human-level intelligent, <i>someone</i> would have noticed by now. The smallest-brained creatures Harry had ever heard of with anything like linguistic ability were the African grey parrots taught by Irene Pepperberg. And that was unstructured protolanguage, in a species that played complex games of adultery and needed to model other parrots. While according to what Draco had been able to remember, snakes spoke to Parselmouths in what sounded like normal human language - i.e., full-blown recursive syntactical grammar. That had taken <i>time</i> for hominids to evolve, with huge brains and strong social selection pressures. Snakes didn't have much society at all that Harry had ever heard. And with thousands upon thousands of different species of snakes all over the world, how could they all use the <i>same</i> version of their supposed language, "Parseltongue"?</p>
+<p>...after all, snakes couldn't <i>really</i> be human-level intelligent, <i>someone</i> would have noticed by now. The smallest-brained creatures Harry had ever heard of with anything like linguistic ability were the African grey parrots taught by Irene Pepperberg. And that was unstructured protolanguage, in a species that played complex games of adultery and needed to model other parrots. While according to what Draco had been able to remember, snakes spoke to Parselmouths in what sounded like normal human language — i.e., full-blown recursive syntactical grammar. That had taken <i>time</i> for hominids to evolve, with huge brains and strong social selection pressures. Snakes didn't have much society at all that Harry had ever heard. And with thousands upon thousands of different species of snakes all over the world, how could they all use the <i>same</i> version of their supposed language, "Parseltongue"?</p>
 
 <p>Of course that was all merely common sense, in which Harry was starting to lose faith entirely.</p>
 
-<p>But Harry was sure he'd heard snakes hissing on the TV at some point - after all, he knew what that sounded like from <i>somewhere</i> - and <i>that</i> hadn't sounded to him like language, which had seemed a good deal more reassuring...</p>
+<p>But Harry was sure he'd heard snakes hissing on the TV at some point — after all, he knew what that sounded like from <i>somewhere</i> — and <i>that</i> hadn't sounded to him like language, which had seemed a good deal more reassuring...</p>
 
 <p>...at first. The problem was that Draco had also asserted that Parselmouths could send snakes on extended complex missions. And if that was true, then Parselmouths had to <i>make snakes persistently intelligent</i> by talking to them. In the worst-case scenario that would make the snake self-aware, like what Harry had accidentally done to the Sorting Hat.</p>
 
-<p>And when Harry had offered <i>that</i> hypothesis, Draco had claimed that he could remember a story - Harry hoped to Cthulhu that <i>this one</i> story was just a fairy tale, it had that ring to it, but there <i>was</i> a story - about Salazar Slytherin sending a brave young viper on a mission to <i>gather information from other snakes.</i></p>
+<p>And when Harry had offered <i>that</i> hypothesis, Draco had claimed that he could remember a story — Harry hoped to Cthulhu that <i>this one</i> story was just a fairy tale, it had that ring to it, but there <i>was</i> a story — about Salazar Slytherin sending a brave young viper on a mission to <i>gather information from other snakes.</i></p>
 
 <p>If any snake a Parselmouth had talked to, could make <i>other</i> snakes self-aware by talking to <i>them,</i> then...</p>
 
@@ -44,31 +44,31 @@
 
 <p><i>You've got to eat something,</i> said his inner Slytherin. <i>And it's not all that much</i> more <i>likely that anyone sneezed self-awareness onto poultry than onto plants, so as long as you're eating food of questionable sentience either way, why not eat the delicious deep-fried Diracawl slices?</i></p>
 
-<p><i>I'm not quite sure that's valid utilitarian logic, there -</i></p>
+<p><i>I'm not quite sure that's valid utilitarian logic, there —</i></p>
 
 <p><i>Oh, you want utilitarian logic? One serving of utilitarian logic coming up: Even in the unlikely chance that some moron</i> did <i>manage to confer sentience on chickens, it's</i> your <i>research that stands the best chance of discovering the fact and doing something about it. If you can complete your work even slightly faster by</i> not <i>messing around with your diet, then, counterintuitive as it may seem, the</i> best <i>thing you can do to save the greatest number of possibly-sentient who-knows-whats is</i> not <i>wasting time on wild guesses about what might be intelligent. It's not like the house elves haven't prepared the food already, regardless of what you take onto your plate.</i></p>
 
-<p>Harry considered this for a moment. It was a rather seductive line of reasoning -</p>
+<p>Harry considered this for a moment. It was a rather seductive line of reasoning —</p>
 
-<p><i>Good!</i> said Slytherin. <i>I'm glad you see now that the most moral thing to do is to sacrifice the lives of sentient beings for your own convenience, to feed your dreadful appetites, for the sick pleasure of ripping them apart with your teeth -</i></p>
+<p><i>Good!</i> said Slytherin. <i>I'm glad you see now that the most moral thing to do is to sacrifice the lives of sentient beings for your own convenience, to feed your dreadful appetites, for the sick pleasure of ripping them apart with your teeth —</i></p>
 
 <p><i>What?</i> Harry thought indignantly. <i>Which side are you</i> on <i>here?</i></p>
 
 <p>His inner Slytherin's mental voice was grim. <i>You too will someday embrace the doctrine... that the end justifies the meats.</i> This was followed by some mental snickering.</p>
 
-<p>Ever since Harry had started worrying that plants might also be sentient, his non-Ravenclaw components had been having trouble taking his moral caution seriously. Hufflepuff was shouting <i>Cannibalism!</i> every time Harry tried to think about any food item whatsoever, and Gryffindor would visualize it screaming while he ate it, even if it was, say, a sandwich -</p>
+<p>Ever since Harry had started worrying that plants might also be sentient, his non-Ravenclaw components had been having trouble taking his moral caution seriously. Hufflepuff was shouting <i>Cannibalism!</i> every time Harry tried to think about any food item whatsoever, and Gryffindor would visualize it screaming while he ate it, even if it was, say, a sandwich —</p>
 
 <p><i>Cannibalism!</i></p>
 
-<p><i>AIIIEEEE DON'T EAT ME -</i></p>
+<p><i>AIIIEEEE DON'T EAT ME —</i></p>
 
-<p><i>Ignore the screams, eat it anyway! It's a safe place to compromise your ethics in the service of higher goals, everyone</i> else <i>thinks it's okay to eat sandwiches so you can't use your usual rationalization about a small probability of a large downside if you get caught -</i></p>
+<p><i>Ignore the screams, eat it anyway! It's a safe place to compromise your ethics in the service of higher goals, everyone</i> else <i>thinks it's okay to eat sandwiches so you can't use your usual rationalization about a small probability of a large downside if you get caught —</i></p>
 
 <p>Harry gave a mental sigh, and thought, <i>Just so long as you're okay with</i> us <i>being eaten by giant monsters that didn't do enough research into whether</i> we <i>were sentient.</i></p>
 
 <p><i>I'm okay with that,</i> said Slytherin. <i>Is everyone else okay with that?</i> (Internal mental nods.) <i>Great, can we go back to deep-fried Diracawl slices now?</i></p>
 
-<p><i>Not until I've done some more research into what's sentient and what isn't. Now shut up.</i> And Harry turned firmly away from his plate full of oh-so-tempting vegetables to head toward the library -</p>
+<p><i>Not until I've done some more research into what's sentient and what isn't. Now shut up.</i> And Harry turned firmly away from his plate full of oh-so-tempting vegetables to head toward the library —</p>
 
 <p><i>Just eat the students,</i> said Hufflepuff. <i>There's no doubt about whether</i> they're <i>sentient.</i></p>
 
@@ -90,7 +90,7 @@
 
 <p>"There are days," said Hermione Granger, "when I really, truly, have absolutely no idea what goes on inside that head of yours."</p>
 
-<p>"Look, it's a question of multiplication, okay? There's a <i>lot</i> of plants in the world, if they're <i>not</i> sentient then they're not important, but if plants <i>are</i> people then they've got more moral weight than all the human beings in the world put together. Now, of course your brain doesn't realize that on an intuitive level, but that's because the brain can't multiply. Like if you ask three separate groups of Canadian households how much they'll pay to save two thousand, twenty thousand, or two hundred thousand birds from dying in oil ponds, the three groups will respectively state that they're willing to pay seventy-eight, eighty-eight, and eighty dollars. No difference, in other words. It's called scope insensitivity. Your brain imagines a single bird struggling in an oil pond, and that image creates some amount of emotion that determines your willingness to pay. But no one can visualize even two thousand of anything, so the <i>quantity</i> just gets thrown straight out the window. Now try to <i>correct</i> that bias with respect to a <i>hundred trillion</i> sentient blades of grass, and you'll realize that this could be thousands of times more important than we used to think the whole human species was... oh thank Azathoth, this says it's just a few magical plants that can talk and they speak regular human language out loud, not that there's a spell you can use to talk with <i>any</i> plant -"</p>
+<p>"Look, it's a question of multiplication, okay? There's a <i>lot</i> of plants in the world, if they're <i>not</i> sentient then they're not important, but if plants <i>are</i> people then they've got more moral weight than all the human beings in the world put together. Now, of course your brain doesn't realize that on an intuitive level, but that's because the brain can't multiply. Like if you ask three separate groups of Canadian households how much they'll pay to save two thousand, twenty thousand, or two hundred thousand birds from dying in oil ponds, the three groups will respectively state that they're willing to pay seventy-eight, eighty-eight, and eighty dollars. No difference, in other words. It's called scope insensitivity. Your brain imagines a single bird struggling in an oil pond, and that image creates some amount of emotion that determines your willingness to pay. But no one can visualize even two thousand of anything, so the <i>quantity</i> just gets thrown straight out the window. Now try to <i>correct</i> that bias with respect to a <i>hundred trillion</i> sentient blades of grass, and you'll realize that this could be thousands of times more important than we used to think the whole human species was... oh thank Azathoth, this says it's just a few magical plants that can talk and they speak regular human language out loud, not that there's a spell you can use to talk with <i>any</i> plant —"</p>
 
 <p>"Ron came to me at breakfast yesterday morning," Hermione said. Now her voice sounded a little quiet, a little sad, maybe even a little scared. "He said he'd been dreadfully shocked to see me kiss you. That what you said while you were Demented should've shown me how much evil you were hiding inside. And that if I was going to be a follower of a Dark Wizard, then he wasn't sure he wanted to be in my army anymore."</p>
 
@@ -110,7 +110,7 @@
 
 <p>Hermione just shook her head, and turned another page.</p>
 
-<p>"Option two," Harry said. "Go to Fred and George and tell them to have a little talk with their wayward brother, <i>those</i> two are genuine good guys -"</p>
+<p>"Option two," Harry said. "Go to Fred and George and tell them to have a little talk with their wayward brother, <i>those</i> two are genuine good guys —"</p>
 
 <p>"It's not just Ron," Hermione said in almost a whisper. "Lots of people are saying it, Harry. Even Mandy is giving me worried looks when she thinks I'm not looking. Isn't it funny? I keep worrying that Professor Quirrell is sucking <i>you</i> into the darkness, and now people are warning me just the same way I try to warn you."</p>
 
@@ -132,7 +132,7 @@
 
 <p>"I don't know how to explain to you," Hermione said in a sad soft voice. "I'm not sure it's something you could ever understand, Harry. All I can think of to say is, how would you feel if <i>I</i> thought you were evil?"</p>
 
-<p>"Um..." Harry visualized it. "Yeah, that <i>would</i> hurt. A lot. But you're a good person who thinks about that sort of thing intelligently, you've <i>earned</i> that power over me, it would <i>mean</i> something if you thought I'd gone wrong. I can't think of a single other student, besides you, whose opinion I'd care about the same way -"</p>
+<p>"Um..." Harry visualized it. "Yeah, that <i>would</i> hurt. A lot. But you're a good person who thinks about that sort of thing intelligently, you've <i>earned</i> that power over me, it would <i>mean</i> something if you thought I'd gone wrong. I can't think of a single other student, besides you, whose opinion I'd care about the same way —"</p>
 
 <p>"You can live like that," whispered Hermione Granger. "I can't."</p>
 
@@ -148,7 +148,7 @@
 
 <p>"Okay," Hermione said. She closed the book and put it back on the shelf. "I can't concentrate right now, Harry, I'm sorry."</p>
 
-<p>"If there's <i>anything</i> else I can do -"</p>
+<p>"If there's <i>anything</i> else I can do —"</p>
 
 <p>"Be nicer to everyone."</p>
 
