--- a/050.htm
+++ b/050.htm
@@ -4,11 +4,11 @@
 
 <p>" <i>Padma Patil...</i>"</p>
 
-<p>She spun around quick as lightning, her wand already snatched up from a pocket of her robes and leaping into her hands, if Harry Potter thought he could sneak up on and scare <i>her</i> that easily -</p>
+<p>She spun around quick as lightning, her wand already snatched up from a pocket of her robes and leaping into her hands, if Harry Potter thought he could sneak up on and scare <i>her</i> that easily —</p>
 
 <p>There was no one there.</p>
 
-<p>Instantly Padma spun around and looked in the other direction, if it had been a Ventriloquism Charm -</p>
+<p>Instantly Padma spun around and looked in the other direction, if it had been a Ventriloquism Charm —</p>
 
 <p>There was no one there, either.</p>
 
@@ -50,7 +50,7 @@
 
 <p>"But you'll spread vicious rumors about an innocent girl," whispered the voice, "even though it will not help you attain any of your own ambitions, and without considering that she has powerful allies who might take offense. That is is not the proud Slytherin of the old days, Padma Patil, that is not the pride of Salazar, that is Slytherin gone rotten, Padma Parkinson not Padma Malfoy..."</p>
 
-<p>She was getting more creeped out than she ever had been in her life, and the possibility was starting to occur to her that this might <i>really</i> be a ghost. She hadn't ever heard that ghosts could hide themselves like this, but maybe they just didn't usually do it - not to mention that most ghosts weren't this <i>eerie,</i> they were just dead people after all - "Who <i>are</i> you? The Bloody Baron?"</p>
+<p>She was getting more creeped out than she ever had been in her life, and the possibility was starting to occur to her that this might <i>really</i> be a ghost. She hadn't ever heard that ghosts could hide themselves like this, but maybe they just didn't usually do it — not to mention that most ghosts weren't this <i>eerie,</i> they were just dead people after all — "Who <i>are</i> you? The Bloody Baron?"</p>
 
 <p>"When Harry Potter was bullied and beaten," the voice whispered, "he commanded all his allies to refrain from vengeance; do you remember that, Padma Patil? For Harry Potter is wavering, but not yet lost; he is struggling, he knows himself to be in peril. But Hermione Granger made no such request of her own allies. Harry Potter is angered with you now, Padma Patil, more angered than he would ever be on his own behalf... and <i>he</i> has allies of his own."</p>
 
@@ -58,7 +58,7 @@
 
 <p>"Oh, don't be afraid," breathed the voice. "I will not hurt you. For you see, Padma Patil, Hermione Granger truly is innocent. <i>She</i> does not stand on the precipice, <i>she</i> is not falling. She did not ask her allies to refrain from hurting you, because the thought did not even occur to her as a possibility. And Harry Potter knows very well that if he hurt you or caused you to be hurt, for Hermione Granger's sake, then she would never speak to him again until the Sun burned low and the last star failed in the night sky." The voice was very sad now. "She truly is a kindly girl, a person such as I could only wish to be..."</p>
 
-<p>"Granger can't cast the Patronus Charm!" said Padma. "If she was really as nice as she pretends to be -"</p>
+<p>"Granger can't cast the Patronus Charm!" said Padma. "If she was really as nice as she pretends to be —"</p>
 
 <p>"Can <i>you</i> cast the Patronus Charm, Padma Patil? You dared not even attempt it, you feared what the result would be."</p>
 
@@ -68,7 +68,7 @@
 
 <p>The corridor <i>was</i> becoming colder, she was certain of it, as though someone were using the Chilling Charm.</p>
 
-<p>"And Harry Potter is not Hermione Granger's only ally." Now there was an undertone of dry amusement in that whisper, it reminded her suddenly and frighteningly of Professor Quirrell. "Filius Flitwick and Minerva McGonagall are quite fond of her, I do believe. Did it occur to you that if those two learned what you were doing to Hermione Granger, they might become less fond of you? They might not intervene openly, perhaps; but they might be a little slower to award you House Points, a little slower to steer opportunities your way -"</p>
+<p>"And Harry Potter is not Hermione Granger's only ally." Now there was an undertone of dry amusement in that whisper, it reminded her suddenly and frighteningly of Professor Quirrell. "Filius Flitwick and Minerva McGonagall are quite fond of her, I do believe. Did it occur to you that if those two learned what you were doing to Hermione Granger, they might become less fond of you? They might not intervene openly, perhaps; but they might be a little slower to award you House Points, a little slower to steer opportunities your way —"</p>
 
 <p>"Potter <i>snarked</i> on me?"</p>
 
@@ -78,7 +78,7 @@
 
 <p>"I wonder how many people will end up caring for you, Padma Patil, on this path that you now tread. Is it worth that much, just to distance yourself further from your sister? To be the shadow to Parvati's light? Your deepest fear has always been to fall into harmony with her, <i>back</i> into harmony with her I should say; but is it worth hurting an innocent girl, just to make yourself that much more different? Must you be the <i>evil</i> twin, Padma Patil, can you not find a different good to pursue?"</p>
 
-<p>Her heart was hammering in her chest. She'd, she'd never talked about that with <i>anyone -</i></p>
+<p>Her heart was hammering in her chest. She'd, she'd never talked about that with <i>anyone —</i></p>
 
 <p>"I have always wondered at how students bully each other," sighed the voice. "How children make life difficult for themselves, how they turn their schools into prisons even with their own hands. Why do human beings make their own lives so unpleasant? I can give you a part of the answer, Padma Patil. It is because people do not stop and think before causing pain, if they do not imagine that they themselves could also be hurt, that they might also suffer from their own misdeeds. But suffer you will, oh, yes, Padma Patil, suffer you will, if you stay on this road. You will suffer the same pain of loneliness, the same pain of others' fear and distrust, that you now inflict on Hermione Granger. Only for you it will be deserved."</p>
 
@@ -88,23 +88,23 @@
 
 <p>There was silence. It went on for a time, and Padma realized that she had been dismissed.</p>
 
-<p>Padma almost dropped her wand, when she tried to put it back into her pocket. She almost fell, when she took a step forward away from the wall, and turned to go -</p>
+<p>Padma almost dropped her wand, when she tried to put it back into her pocket. She almost fell, when she took a step forward away from the wall, and turned to go —</p>
 
 <p>"I have not always chosen rightly beween Light and Dark," the whisper said, now loud and harsh directly into her ear. "Do not take my wisdom as a final word, girl, do not fear to question it, for though I tried I have sometimes failed, oh, yes, I have failed. But you are hurting a true innocent, and you will achieve none of your ambitions by doing so, it is not for any cunning plan. You are inflicting pain purely for the sake of the pleasure it brings you. I have not always chosen rightly between Light and Dark, but that I know for darkness, for certain. You are hurting an innocent girl, and escaping retribution only because she is too kindly to tolerate her allies moving against you. I cannot hurt you for that, so know only that I cannot respect it. You are unworthy of Slytherin; go and do your Herbology homework, Ravenclaw girl!"</p>
 
-<p>The final whisper came out in a louder hiss that sounded almost like a snake, and Padma fled, she fled down the corridors like Lethifolds were chasing her, she ran heedless of the rules about running in the corridors, even when she passed other students who looked at her in surprise, she did not stop, she ran all the way to the Ravenclaw dorms with her pulse pounding in her neck, the door asked her "Why does the Sun shine in the day instead of the nighttime?" and it took her three tries before she could make her answer coherent, and then the door came open and she saw -</p>
+<p>The final whisper came out in a louder hiss that sounded almost like a snake, and Padma fled, she fled down the corridors like Lethifolds were chasing her, she ran heedless of the rules about running in the corridors, even when she passed other students who looked at her in surprise, she did not stop, she ran all the way to the Ravenclaw dorms with her pulse pounding in her neck, the door asked her "Why does the Sun shine in the day instead of the nighttime?" and it took her three tries before she could make her answer coherent, and then the door came open and she saw —</p>
 
 <p>- a few girls and boys, some young and some old, all staring at her, and in one corner at the pentagonal table, Harry Potter and Michael Corner and Kevin Entwhistle, looking up from their textbooks.</p>
 
 <p>"Sweet Merlin!" exclaimed Penelope Clearwater, rising from a couch. "What happened to you, Padma?"</p>
 
-<p>"I," she stuttered, "I, I heard - a ghost -"</p>
+<p>"I," she stuttered, "I, I heard — a ghost —"</p>
 
-<p>"It wasn't the Bloody Baron, was it?" said Clearwater. She drew her wand and a moment later she was holding a cup, and then an <i>Aguamenti</i> later the cup was filled with water. "Here, drink this, sit down -"</p>
+<p>"It wasn't the Bloody Baron, was it?" said Clearwater. She drew her wand and a moment later she was holding a cup, and then an <i>Aguamenti</i> later the cup was filled with water. "Here, drink this, sit down —"</p>
 
 <p>Padma was already striding toward the pentagonal table. She looked at Harry Potter, who was looking at her with his own gaze, calm and grave and a little sad.</p>
 
-<p>" <i>You</i> did this!" Padma said. "How - you - how dare you!"</p>
+<p>" <i>You</i> did this!" Padma said. "How — you — how dare you!"</p>
 
 <p>There was a sudden hush in the Ravenclaw dorm.</p>
 
@@ -112,7 +112,7 @@
 
 <p>And said, "Is there anything I can help you with?"</p>
 
-<p>"Don't deny it," Padma said, her voice shaking, " <i>you</i> set that ghost on me, it <i>said</i> -"</p>
+<p>"Don't deny it," Padma said, her voice shaking, " <i>you</i> set that ghost on me, it <i>said</i> —"</p>
 
 <p>"I mean it," Harry said. "Can I help you with anything? Get you some food, or go fetch a soda for you, or help you with your homework, or anything like that?"</p>
 
@@ -124,7 +124,7 @@
 
 <p>She stared at him, and knew, in that moment, that he'd gotten his own warning, same as her.</p>
 
-<p>"I..." she said. "I've got to write six inches on <i>lomillialor</i> -"</p>
+<p>"I..." she said. "I've got to write six inches on <i>lomillialor</i> —"</p>
 
 <p>"Let me run up to my dorm room and get my Herbology stuff," Harry said. He rose from the pentagonal table, looked at Entwhistle and Corner. "Sorry, guys, I'll see you later."</p>
 
@@ -136,7 +136,7 @@
 
 <hr />
 
-<p>And she talked about a lot of things with Harry Potter besides <i>lomillialor</i> wood - even her fear of falling back into harmony with Parvati, which she'd never talked about with <i>anyone</i> before, but then Harry's ghostly ally already knew. And Harry had reached into his pouch and pulled out some <i>odd</i> books, loaning them to her on condition of complete secrecy, saying that if she could comprehend those books it would change the pattern of her thinking enough that she'd never fall into harmony with Parvati again...</p>
+<p>And she talked about a lot of things with Harry Potter besides <i>lomillialor</i> wood — even her fear of falling back into harmony with Parvati, which she'd never talked about with <i>anyone</i> before, but then Harry's ghostly ally already knew. And Harry had reached into his pouch and pulled out some <i>odd</i> books, loaning them to her on condition of complete secrecy, saying that if she could comprehend those books it would change the pattern of her thinking enough that she'd never fall into harmony with Parvati again...</p>
 
 <p>At nine o' clock, when Harry said he had to go, the essay was only half done.</p>
 
@@ -152,7 +152,7 @@
 
 <p>But even though Padma was sweating, she knew what she had to do.</p>
 
-<p>The girl came closer -</p>
+<p>The girl came closer —</p>
 
 <p>"I'm sorry."</p>
 
@@ -174,17 +174,17 @@
 
 <p>Harry was starting to sweat. He'd never actually heard Hermione scream at him before, and it was quite loud in the empty classroom.</p>
 
-<p>"I - but - but I <i>was</i> nice!" Harry protested. "I practically <i>redeemed</i> her, Padma was going down the wrong path and I turned her off it! I probably changed her whole life to be happier! Besides, you should've heard the <i>original</i> version of what Professor Quirrell suggested I do -" at which point Harry realized what he was saying and closed his mouth a second too late.</p>
+<p>"I — but — but I <i>was</i> nice!" Harry protested. "I practically <i>redeemed</i> her, Padma was going down the wrong path and I turned her off it! I probably changed her whole life to be happier! Besides, you should've heard the <i>original</i> version of what Professor Quirrell suggested I do —" at which point Harry realized what he was saying and closed his mouth a second too late.</p>
 
 <p>Hermione clutched at her chestnut curls, a gesture Harry hadn't seen from her before. "What'd <i>he</i> say to do? <i>Kill</i> her?"</p>
 
 <p>The Defense Professor had suggested that Harry identify all the key influential students inside and outside his year and try to gain control of the entire Hogwarts rumor mill, remarking that this was a generally useful and amusing challenge for any true Slytherin attending Hogwarts.</p>
 
-<p>"Nothing like <i>that,</i>" Harry said quickly, "he just said in a general way that I should get influence over the people spreading rumors, and <i>I</i> decided that the <i>nice</i> version of that would be to just inform Padma directly about the meaning of what she was doing, and the possible consequences of her actions, instead of trying to threaten her or anything like that -"</p>
+<p>"Nothing like <i>that,</i>" Harry said quickly, "he just said in a general way that I should get influence over the people spreading rumors, and <i>I</i> decided that the <i>nice</i> version of that would be to just inform Padma directly about the meaning of what she was doing, and the possible consequences of her actions, instead of trying to threaten her or anything like that —"</p>
 
 <p>" <i>You call that not threatening someone?</i> " Hermione's hands were pulling at her hair now.</p>
 
-<p>"Um..." Harry said. "I guess she might've felt a <i>little</i> threatened, but Hermione, people will do whatever they think they can get away with, they don't care about how much it hurts other people if it doesn't hurt themselves, if Padma thinks there's <i>no</i> consequences to spreading lies about you then of <i>course</i> she'll just go on doing it -"</p>
+<p>"Um..." Harry said. "I guess she might've felt a <i>little</i> threatened, but Hermione, people will do whatever they think they can get away with, they don't care about how much it hurts other people if it doesn't hurt themselves, if Padma thinks there's <i>no</i> consequences to spreading lies about you then of <i>course</i> she'll just go on doing it —"</p>
 
 <p>"And you think there's going to be no consequences to what <i>you</i> did?"</p>
 
@@ -194,7 +194,7 @@
 
 <p>Harry opened his mouth and no words came out, he just... hadn't thought about it that way, actually...</p>
 
-<p>Hermione reached down to grab her books from the table where she'd slammed them. "I'm not talking to you for a week, and I'll <i>tell</i> everyone I'm not talking to you for a week, and I'll tell them <i>why</i>, and <i>maybe</i> that'll undo some of what you just did. And after that week, I'll - I'll decide then what to do, I guess -"</p>
+<p>Hermione reached down to grab her books from the table where she'd slammed them. "I'm not talking to you for a week, and I'll <i>tell</i> everyone I'm not talking to you for a week, and I'll tell them <i>why</i>, and <i>maybe</i> that'll undo some of what you just did. And after that week, I'll — I'll decide then what to do, I guess —"</p>
 
 <p>" <i>Hermione!</i> " Harry's own voice rose to a shriek of desperation. " <i>I was trying to help!</i> "</p>
 
@@ -202,7 +202,7 @@
 
 <p>"Harry," she said, and her voice trembled a little beneath the anger, "Professor Quirrell is sucking you into the darkness, he really is, I mean it, Harry."</p>
 
-<p>"This... wasn't him, this wasn't what he said to do, this was just <i>me</i> -"</p>
+<p>"This... wasn't him, this wasn't what he said to do, this was just <i>me</i> —"</p>
 
 <p>Hermione's voice was almost a whisper now. "Someday you're going to go out to lunch with him, and it will be your dark side that comes back, or maybe even you won't come back at all."</p>
 
@@ -212,7 +212,7 @@
 
 <p>And Hermione just turned around and strode out and slammed the door behind her.</p>
 
-<p><i>Way to invoke the laws of dramatic irony, moron,</i> observed Harry's Internal Critic. <i>Now you're going to die this Saturday, your last words will be 'I'm sorry, Hermione', and she'll always regret that the last thing she did was slam the door -</i></p>
+<p><i>Way to invoke the laws of dramatic irony, moron,</i> observed Harry's Internal Critic. <i>Now you're going to die this Saturday, your last words will be 'I'm sorry, Hermione', and she'll always regret that the last thing she did was slam the door —</i></p>
 
 <p><i>Oh, shut up.</i></p>
 
@@ -228,7 +228,7 @@
 
 <p>...in which case Padma wouldn't have been redeemed, she would have stayed on the wrong path, and she herself would have suffered from that eventually. It wasn't as if Harry had <i>lied</i> to Padma in any way, when he was Time-Turned and invisible and using the Ventriloquism Charm.</p>
 
-<p>Harry still wasn't sure whether he'd done the right thing, or <i>a</i> right thing, and Hermione hadn't relented on not talking to him - though she was talking a lot with Padma. It hurt more than Harry had expected, going back to studying by himself; like his brain had already started to forget its long-honed skill of being alone.</p>
+<p>Harry still wasn't sure whether he'd done the right thing, or <i>a</i> right thing, and Hermione hadn't relented on not talking to him — though she was talking a lot with Padma. It hurt more than Harry had expected, going back to studying by himself; like his brain had already started to forget its long-honed skill of being alone.</p>
 
 <p>The days until Saturday's lunch with Professor Quirrell seemed to go by very, very slowly.</p>
 
