--- a/051.htm
+++ b/051.htm
@@ -14,11 +14,11 @@
 
 <p>Then the waitress came in again bearing their food, and this time, a minute after the waitress had departed, Professor Quirrell gestured for the door to close and lock, and began to speak twenty-nine security Charms, one of the ones in Mr. Bester's sequence being left out this time, which somewhat puzzled Harry.</p>
 
-<p>Professor Quirrell finished his Charms -</p>
+<p>Professor Quirrell finished his Charms —</p>
 
-<p>- stood up from his chair -</p>
+<p>- stood up from his chair —</p>
 
-<p>- blurred into a green snake, banded in blue and white -</p>
+<p>- blurred into a green snake, banded in blue and white —</p>
 
 <p>- hissed, " <i>Hungry, boy? Eat your fill sswiftly, we sshall need both sstrength and time.</i>"</p>
 
@@ -92,11 +92,11 @@
 
 <p>And so in that room shielded from every possible scrying, which Professor Quirrell had personally and further secured, it was not until <i>after</i> Harry was wearing the true Cloak of Invisibility that he reached beneath his shirt and twisted the outer shell of the Time-Turner just once.</p>
 
-<p>The Time-Turner's inner hourglass stayed anchored and motionless, the setting twisted around it -</p>
+<p>The Time-Turner's inner hourglass stayed anchored and motionless, the setting twisted around it —</p>
 
 <p>The food vanished from the table, the chairs leaped back into place, the door sprang open.</p>
 
-<p>Mary's Room was deserted, as it should have been, because Professor Quirrell had earlier contacted Mary's Place under a false name to inquire whether the room would be available at this hour - not to reserve it, not to place a canceled reservation that might be noted, but only to inquire.</p>
+<p>Mary's Room was deserted, as it should have been, because Professor Quirrell had earlier contacted Mary's Place under a false name to inquire whether the room would be available at this hour — not to reserve it, not to place a canceled reservation that might be noted, but only to inquire.</p>
 
 <p><i>Step seven.</i></p>
 
@@ -154,7 +154,7 @@
 
 <p>"Treasonous and illegal doesn't bother me," said Harry. "Risks bother me and the stakes would need to be commensurate, but I can't imagine <i>you</i> taking risks frivolously."</p>
 
-<p>Professor Quirrell nodded. "I would not. It is a terrible abuse of my friendship with you, and of such trust as is placed in my teaching position at Hogwarts -"</p>
+<p>Professor Quirrell nodded. "I would not. It is a terrible abuse of my friendship with you, and of such trust as is placed in my teaching position at Hogwarts —"</p>
 
 <p>"You can skip this part," Harry said.</p>
 
@@ -200,7 +200,7 @@
 
 <p>Harry saw it in a single leap of intuition, his mouth racing almost ahead of his thoughts.</p>
 
-<p><i>There was no hint, no warning, we all thought -</i></p>
+<p><i>There was no hint, no warning, we all thought —</i></p>
 
 <p>"A person by the name of Black," Harry said.</p>
 
@@ -208,7 +208,7 @@
 
 <p>"Well," said Professor Quirrell after a while. "So much for not telling you the name until after you had accepted the mission. I would ask whether you're reading <i>my</i> mind, but that's flatly impossible."</p>
 
-<p>Harry said nothing, but it was simple enough if you <i>believed</i> in the processes of modern democracy. The most obvious person in Azkaban to be innocent was the one who hadn't gotten a trial -</p>
+<p>Harry said nothing, but it was simple enough if you <i>believed</i> in the processes of modern democracy. The most obvious person in Azkaban to be innocent was the one who hadn't gotten a trial —</p>
 
 <p>"I am <i>certainly</i> impressed, Mr. Potter," said Professor Quirrell. His face was grave. "But this is a serious matter, and if there is some way others could make the same deduction, I <i>must</i> know. So tell me, Mr. Potter. How in the name of Merlin, of Atlantis, and the void between the stars, did you guess that I was talking about Bellatrix?"</p>
 
