--- a/052.htm
+++ b/052.htm
@@ -8,7 +8,7 @@
 
 <p>Harry's hand snapped the small wooden twig.</p>
 
-<p>A hook yanked motionlessly at Harry's abdomen as the portkey activated, feeling like a much harder pull this time than the smaller transports between the Hogwarts grounds and Diagon Alley -</p>
+<p>A hook yanked motionlessly at Harry's abdomen as the portkey activated, feeling like a much harder pull this time than the smaller transports between the Hogwarts grounds and Diagon Alley —</p>
 
 <p>- and dropped him into the middle of a huge roll of thunder dying away, and a lash of cold rain whipping him across the face, the water coating Harry's glasses and blinding him in an instant, turning the world into a blur even as he began to fall toward the raging ocean waves far below.</p>
 
@@ -60,7 +60,7 @@
 
 <p>Harry pulled up sharply as he approached the north corner, giving himself more safety margin than he would have bothered with in flying classes, but not too much. As soon as he'd come to a halt, he began to slowly lower his broomstick again, toward what looked like the solid roof of the tip of the north corner.</p>
 
-<p>Descending through the illusory roof while invisible was a strange experience, and then Harry found himself in a metal corridor lighted with a dim orange light - which, Harry realized after a startled glance, was coming from an old-fashioned mantled gas lamp...</p>
+<p>Descending through the illusory roof while invisible was a strange experience, and then Harry found himself in a metal corridor lighted with a dim orange light — which, Harry realized after a startled glance, was coming from an old-fashioned mantled gas lamp...</p>
 
 <p>...for magic would fail, be drained away after a time, in the presence of Dementors.</p>
 
@@ -114,7 +114,7 @@
 
 <p>Harry had been told to cast a Bubble-Head Charm on himself. To prevent himself from smelling anything.</p>
 
-<p>All the enthusiasm and heroism had worn off already, as Harry had known it would, it hadn't taken long even by his standards, the process had completed itself the very first time they passed one of those metal doors. Every metal door was locked with a huge lock, a lock of simple unmagical metal that wouldn't have stopped a first-year Hogwarts student - if you still had a wand, if you still had your magic, which the prisoners didn't. Those metal doors were not the doors of individual cells, Professor Quirrell had said, each one opened into a corridor in which there would be a group of cells. Somehow that helped a little, not thinking that each door corresponded directly to a prisoner who was waiting right behind it. Instead there might be <i>more</i> than one prisoner, which diminished the emotional impact; just like the study showing that people contributed more when they were told that a given amount of money was required to save one child's life, than when told the same total amount was needed to save eight children...</p>
+<p>All the enthusiasm and heroism had worn off already, as Harry had known it would, it hadn't taken long even by his standards, the process had completed itself the very first time they passed one of those metal doors. Every metal door was locked with a huge lock, a lock of simple unmagical metal that wouldn't have stopped a first-year Hogwarts student — if you still had a wand, if you still had your magic, which the prisoners didn't. Those metal doors were not the doors of individual cells, Professor Quirrell had said, each one opened into a corridor in which there would be a group of cells. Somehow that helped a little, not thinking that each door corresponded directly to a prisoner who was waiting right behind it. Instead there might be <i>more</i> than one prisoner, which diminished the emotional impact; just like the study showing that people contributed more when they were told that a given amount of money was required to save one child's life, than when told the same total amount was needed to save eight children...</p>
 
 <p>Harry was finding it increasingly hard not to think about it, and every time he did, the light of his Patronus fluctuated.</p>
 
@@ -166,17 +166,17 @@
 
 <p>The snake darted on ahead, swiftly twisting across the floor.</p>
 
-<p>A moment later -</p>
+<p>A moment later —</p>
 
 <p>" <i>Sshe iss alone,</i>" hissed the snake.</p>
 
 <p><i>Stay,</i> Harry thought to his Patronus, which took up a position just to one side of the door, as though guarding it; and then Harry pushed the door open further, and followed within.</p>
 
-<p>The first cell Harry looked at contained a dessicated corpse, skin gone grey and mottled, flesh worn through in places to expose the bone beneath, no eyes -</p>
+<p>The first cell Harry looked at contained a dessicated corpse, skin gone grey and mottled, flesh worn through in places to expose the bone beneath, no eyes —</p>
 
 <p>Harry shut his eyes. He could still do that, he was still invisible, he wasn't betraying anything by shutting his eyes.</p>
 
-<p>He'd known it already, he'd read it on page six of his Transfiguration book, that you stayed in Azkaban until your prison term was done. If you died before it was up they kept you there until they released your corpse. If your term was for life, they just left the body in the cell until the cell was needed, at which point they threw your body into the Dementors' pit. But it was still a shock to see, that corpse had been a <i>person</i> who'd just been <i>left</i> there -</p>
+<p>He'd known it already, he'd read it on page six of his Transfiguration book, that you stayed in Azkaban until your prison term was done. If you died before it was up they kept you there until they released your corpse. If your term was for life, they just left the body in the cell until the cell was needed, at which point they threw your body into the Dementors' pit. But it was still a shock to see, that corpse had been a <i>person</i> who'd just been <i>left</i> there —</p>
 
 <p>The light in the room wavered.</p>
 
@@ -192,7 +192,7 @@
 
 <p>You could tell the woman wasn't a skeleton, that her head wasn't a skull, because the texture of skin was still different from the texture of bone, no matter how white and pale she'd become, waiting in the dark alone. Either they weren't feeding her much, or what she ate, the shadows of Death drained from her; for her eyes seemed shrunken below their lids, her lips looked too shriveled to close over her teeth. The color seemed leached out of the black clothing she had worn into prison, like the Dementors had drained that too. They'd been meant to be daring, those clothes, and now they lay loosely over a skeleton, exposing shriveled skin.</p>
 
-<p><i>I'm here to save her, I'm here to save her, I'm here to save her,</i> Harry thought to himself, desperately, over and over with an effort like Occlumency, willing his Patronus not to go out, to stay and <i>protect Bellatrix from the Dementors</i> -</p>
+<p><i>I'm here to save her, I'm here to save her, I'm here to save her,</i> Harry thought to himself, desperately, over and over with an effort like Occlumency, willing his Patronus not to go out, to stay and <i>protect Bellatrix from the Dementors</i> —</p>
 
 <p>In his heart, in his core, Harry held to all his pity and his compassion, his will to save her from the darkness; the silver radiance coming in through the open door brightened, even as he thought it.</p>
 
