--- a/053.htm
+++ b/053.htm
@@ -48,7 +48,7 @@
 
 <p>"Your wand," murmured Bellatrix, "I took it from the Potters' house and hid it, my lord... under the tombstone to the right of your father's grave... will you kill me, now, if that was all you wished of me... I think I must have always wanted you to be the one to kill me... but I can't remember now, it must have been a happy thought..."</p>
 
-<p>Harry's heart wrenched inside him, it was unbearable, and - and he couldn't cry, couldn't let his Patronus fade -</p>
+<p>Harry's heart wrenched inside him, it was unbearable, and — and he couldn't cry, couldn't let his Patronus fade —</p>
 
 <p>Harry's face showed a flicker of annoyance, and his voice was sharp as it said, "Enough foolishness. You're to come with me, Bella dear, unless you prefer the company of the Dementors."</p>
 
@@ -86,7 +86,7 @@
 
 <p><i>What do you think you know, and how do you think you know it?</i></p>
 
-<p>If you <i>did</i> commit the perfect crime, nobody would ever find out - so how could anyone possibly <i>know</i> that there weren't perfect crimes?</p>
+<p>If you <i>did</i> commit the perfect crime, nobody would ever find out — so how could anyone possibly <i>know</i> that there weren't perfect crimes?</p>
 
 <p>And as soon as you looked at it that way, you realized that perfect crimes probably got committed <i>all the time</i>, and the coroner marked it down as death by natural causes, or the newspaper reported that the shop had never been very profitable and had finally gone out of business...</p>
 
