--- a/058.htm
+++ b/058.htm
@@ -14,7 +14,7 @@
 
 <p>But to accomplish the same end as a first-year Hogwarts student, you had to be <i>efficient.</i></p>
 
-<p>Luckily - well, not <i>luckily</i>, luck had nothing to do with it - <i>conscientiously</i>, Harry had practiced Transfiguration for an extra hour every day, to the point where he was ahead of even Hermione in that one class; he'd practiced partial Transfiguration to the point where his thoughts had begun taking the true universe for granted, so that it required only slightly more effort to keep its timeless quantum nature in mind, even as he kept a firm mental separation between the concept of Form and the concept of substance.</p>
+<p>Luckily — well, not <i>luckily</i>, luck had nothing to do with it — <i>conscientiously</i>, Harry had practiced Transfiguration for an extra hour every day, to the point where he was ahead of even Hermione in that one class; he'd practiced partial Transfiguration to the point where his thoughts had begun taking the true universe for granted, so that it required only slightly more effort to keep its timeless quantum nature in mind, even as he kept a firm mental separation between the concept of Form and the concept of substance.</p>
 
 <p>And the <i>problem</i> with that art having become so routine...</p>
 
@@ -164,7 +164,7 @@
 
 <p>But staying behind was the sensible, safe, <i>sane</i> thing to do, and Harry was feeling more relaxed than regretful.</p>
 
-<p>Harry turned to Bellatrix; he opened his mouth to instruct her a final time -</p>
+<p>Harry turned to Bellatrix; he opened his mouth to instruct her a final time —</p>
 
 <p>And there was a hiss, a weak hiss, a hiss that sounded slow and confused, and the hiss said,</p>
 
@@ -190,7 +190,7 @@
 
 <p>" <i>Sstop!</i> " said the snake. Its voice was stronger now. " <i>Sstop, sstop, sstop! What do you mean, goodbye?</i> "</p>
 
-<p>" <i>Esscape plan iss rissky,</i>" said Harry. " <i>My life iss not at sstake, only yourss and herss. Sso I am sstaying, turning mysself in -</i>"</p>
+<p>" <i>Esscape plan iss rissky,</i>" said Harry. " <i>My life iss not at sstake, only yourss and herss. Sso I am sstaying, turning mysself in —</i>"</p>
 
 <p>" <i>No!</i> " said the snake. The hiss was forceful. " <i>Musst not! Not permitted!</i> "</p>
 
@@ -202,7 +202,7 @@
 
 <p>The Earth ceased to turn on its axis, paused in its orbit around the Sun.</p>
 
-<p>The snake's hiss was now more furious than anything Harry had ever heard from the human Professor Quirrell. " <i>Sslay him? Had I ssought to sslay him he would have been dead within ssecondss, fool boy, he wass no match for me! I ssought to ssubdue, to dominate, force him to drop sshieldss upon hiss mind, needed to read him, to know who awaited hiss reply, learn detailss for memory sspell -"</i></p>
+<p>The snake's hiss was now more furious than anything Harry had ever heard from the human Professor Quirrell. " <i>Sslay him? Had I ssought to sslay him he would have been dead within ssecondss, fool boy, he wass no match for me! I ssought to ssubdue, to dominate, force him to drop sshieldss upon hiss mind, needed to read him, to know who awaited hiss reply, learn detailss for memory sspell —"</i></p>
 
 <p>" <i>You casst killing cursse!</i> "</p>
 
@@ -214,9 +214,9 @@
 
 <p>Again the pause in the planet's spin. Harry hadn't thought of that.</p>
 
-<p>" <i>Witlesss dunce of a plotter,</i>" hissed the snake, so angrily that the hisses seemed to overlap and slither over each other's tails, " <i>clever imbecile, cunning idiot, fool of an untrained Sslytherin, your missplaced misstrust hass ruined -"</i></p>
+<p>" <i>Witlesss dunce of a plotter,</i>" hissed the snake, so angrily that the hisses seemed to overlap and slither over each other's tails, " <i>clever imbecile, cunning idiot, fool of an untrained Sslytherin, your missplaced misstrust hass ruined —"</i></p>
 
-<p>" <i>Thiss iss not a fair time to argue,</i>" Harry observed mildly. The surge of relief trying to flood through him was canceled by the increased tension. " <i>Ssince I cannot get angry at you properly, without opening mysself to life-eaterss. Musst russh, ssomeone may have heard noisse -"</i></p>
+<p>" <i>Thiss iss not a fair time to argue,</i>" Harry observed mildly. The surge of relief trying to flood through him was canceled by the increased tension. " <i>Ssince I cannot get angry at you properly, without opening mysself to life-eaterss. Musst russh, ssomeone may have heard noisse —"</i></p>
 
 <p>" <i>Explain esscape plan,</i>" the snake said imperiously. " <i>Sswiftly!</i> "</p>
 
@@ -240,7 +240,7 @@
 
 <hr />
 
-<p>The old wizard reached out toward another metal door, from behind which came a endless dead mutter, "I'm not serious, I'm not serious, I'm not serious..." The red-golden phoenix on his shoulder was already screaming urgently, and the old wizard was already wincing, when -</p>
+<p>The old wizard reached out toward another metal door, from behind which came a endless dead mutter, "I'm not serious, I'm not serious, I'm not serious..." The red-golden phoenix on his shoulder was already screaming urgently, and the old wizard was already wincing, when —</p>
 
 <p>Another cry pierced the corridor, phoenix-like but not the true phoenix's call.</p>
 
@@ -254,9 +254,9 @@
 
 <hr />
 
-<p>Professor Quirrell had assumed his true form, this time - Polyjuice only lasted for an hour without redosing - and though the Defense Professor was pale, leaning against the metal bars of the nearest cell, his magic was strong enough to seize his wand without a word, even as Bellatrix doffed the Cloak and placed it obediently in Harry's waiting hand. The sense of doom was building once more, though not in full force, as the Defense Professor's power returned, the fringes of its vast force clashing with Harry's slight childish aura.</p>
+<p>Professor Quirrell had assumed his true form, this time — Polyjuice only lasted for an hour without redosing — and though the Defense Professor was pale, leaning against the metal bars of the nearest cell, his magic was strong enough to seize his wand without a word, even as Bellatrix doffed the Cloak and placed it obediently in Harry's waiting hand. The sense of doom was building once more, though not in full force, as the Defense Professor's power returned, the fringes of its vast force clashing with Harry's slight childish aura.</p>
 
-<p>Harry said aloud the description of his Muggle device, naming it to the observing wizard, and then a Finite from Harry turned all his hard work back into an ice cube. Professor Quirrell could not cast spells on something Harry had Transfigured, for that would be an interaction, however slight, between their magics, but -</p>
+<p>Harry said aloud the description of his Muggle device, naming it to the observing wizard, and then a Finite from Harry turned all his hard work back into an ice cube. Professor Quirrell could not cast spells on something Harry had Transfigured, for that would be an interaction, however slight, between their magics, but —</p>
 
 <p>Three seconds after, Professor Quirrell was holding his own Transfigured version of the Muggle device. A single barked word and a sweep of his wand, and the residue of glue was gone from the magical item; three more incantations later, the magical and technological were fused together as though into a single thing, and Charms of Unbreakability and flawless function had been cast upon the Muggle device.</p>
 
@@ -296,7 +296,7 @@
 
 <p>Bellatrix followed behind him, she took the cufflike devices on her wrists and chained her hands to the grips of the broomstick, even as Harry's right hand shoved his wand into his pouch.</p>
 
-<p>And the three shot forward through the hole in the wall -</p>
+<p>And the three shot forward through the hole in the wall —</p>
 
 <p>- emerging into the open air, directly above the Dementors' pit, in the interior of the vast triangular prism that was Azkaban, the blue sky now clearly visible above them, shining down its daylight.</p>
 
