--- a/059.htm
+++ b/059.htm
@@ -66,11 +66,11 @@
 
 <p><i>Is there some way of transplanting an imaginary personality to someone else's head?</i> asked Hufflepuff. <i>I don't want to live in yours anymore.</i></p>
 
-<p>Harry shoved it all into the back of his mind, there really wasn't anything he could do about it right now. Was there anything he <i>should</i> be worrying about -</p>
+<p>Harry shoved it all into the back of his mind, there really wasn't anything he could do about it right now. Was there anything he <i>should</i> be worrying about —</p>
 
 <p>Then Harry glanced behind him, remembering for the first time to check whether Bellatrix or Professor Quirrell had been blown off the broomstick.</p>
 
-<p>But the green snake was still in its harness, and the emaciated woman was still clinging to the broomstick, her face still charged with unhealthy color and her eyes still bright and dangerous. Her shoulders were shaking like she was laughing hysterically, and her lips were moving as though to shout, but no sound was coming out -</p>
+<p>But the green snake was still in its harness, and the emaciated woman was still clinging to the broomstick, her face still charged with unhealthy color and her eyes still bright and dangerous. Her shoulders were shaking like she was laughing hysterically, and her lips were moving as though to shout, but no sound was coming out —</p>
 
 <p>Oh, right.</p>
 
@@ -128,13 +128,13 @@
 
 <p>The borrowed wand dangled lifelessly from the strap attached to her unmoving hand.</p>
 
-<p><i>YOU HAVE GOT TO BE KIDDING -</i></p>
+<p><i>YOU HAVE GOT TO BE KIDDING —</i></p>
 
 <p>Harry's mind remembered then, the Pepper-Up potion came at a cost; Bellatrix would <i>ssleep for a conssiderable time,</i> Professor Quirrell had said.</p>
 
-<p>And in the same instant another part of Harry became utterly convinced, looking back at the chalk-white emaciated woman, seeming deader in the bright sunlight than anything Harry had ever seen alive, that she <i>was</i> dead, that she had just uttered her last word, that Professor Quirrell had misjudged the dosage -</p>
+<p>And in the same instant another part of Harry became utterly convinced, looking back at the chalk-white emaciated woman, seeming deader in the bright sunlight than anything Harry had ever seen alive, that she <i>was</i> dead, that she had just uttered her last word, that Professor Quirrell had misjudged the dosage —</p>
 
-<p>- or deliberately sacrificed Bellatrix to guard their own escape -</p>
+<p>- or deliberately sacrificed Bellatrix to guard their own escape —</p>
 
 <p><i>Is she breathing?</i></p>
 
@@ -152,7 +152,7 @@
 
 <p>Strange, it was strange, that even genuinely believing that Professor Quirrell hadn't meant to kill the Auror (for it <i>would</i> have been stupid), thinking of the Defense Professor's reassurances no longer felt reassuring.</p>
 
-<p>Then it occurred to Harry that he had yet to check -</p>
+<p>Then it occurred to Harry that he had yet to check —</p>
 
 <p>Harry looked back, and hissed, " <i>Teacher?</i> "</p>
 
@@ -180,7 +180,7 @@
 
 <p>"Amelia," said the old wizard. There was no trace of any of his customary levity, his eyes were hard as sapphires beneath his half-moon glasses. "I must leave Azkaban and I must do so <i>now</i>. Is there any faster way than a broomstick to get beyond the wards?"</p>
 
-<p>"No -"</p>
+<p>"No —"</p>
 
 <p>"Then I require your fastest broomstick, at once!"</p>
 
@@ -206,7 +206,7 @@
 
 <p>Amelia didn't spare any breath for sighs. "When will you know?"</p>
 
-<p>The old wizard's voice was grim, quiet and yet somehow rising above the wind. "Three things they need for perfection, if it is that one: The flesh of the Dark Lord's most faithful servant, the blood of the Dark Lord's greatest foe, and access to a certain grave. I had thought Harry Potter safe, with their attempt on Azkaban all but failed - though I still set guards upon him - but now I am fearful indeed. They have access to Time, someone with a Time-Turner is sending messages for them; and I suspect the kidnap attempt on Harry Potter has already taken place some hours ago. Which is why <i>we</i> have not heard about it, being in Azkaban where Time cannot knot itself. That past came after our own future, you see."</p>
+<p>The old wizard's voice was grim, quiet and yet somehow rising above the wind. "Three things they need for perfection, if it is that one: The flesh of the Dark Lord's most faithful servant, the blood of the Dark Lord's greatest foe, and access to a certain grave. I had thought Harry Potter safe, with their attempt on Azkaban all but failed — though I still set guards upon him — but now I am fearful indeed. They have access to Time, someone with a Time-Turner is sending messages for them; and I suspect the kidnap attempt on Harry Potter has already taken place some hours ago. Which is why <i>we</i> have not heard about it, being in Azkaban where Time cannot knot itself. That past came after our own future, you see."</p>
 
 <p>"And if it is the other?" shouted Amelia. What she had heard already was worrying enough; that sounded like the darkest of Dark rituals, and centering on the dead Dark Lord himself.</p>
 
@@ -232,15 +232,15 @@
 
 <p>"That would be the Animagus," whispered Harry's lips. <i>Oh,</i> thought the Harry behind glass, listening to the sound of his own lips, <i>that makes sense; Professor Quirrell must have used a different name.</i></p>
 
-<p>"Since when is <i>he</i> a - bah, forget it." The witch laid her wand on the snake's nose for a moment, then shook her head sharply. "Nothing wrong with him that a day's rest won't cure. <i>Her...</i>"</p>
+<p>"Since when is <i>he</i> a — bah, forget it." The witch laid her wand on the snake's nose for a moment, then shook her head sharply. "Nothing wrong with him that a day's rest won't cure. <i>Her...</i>"</p>
 
 <p>"Can you wake him up now?" whispered Harry's lips. <i>Is that a good idea?</i> thought Harry, but his lips definitely seemed to think so.</p>
 
-<p>Again the sharp headshake. "If an Innervate didn't work on him -" began the witch.</p>
+<p>Again the sharp headshake. "If an Innervate didn't work on him —" began the witch.</p>
 
 <p>"I did not attempt one," whispered Harry's lips.</p>
 
-<p>"What? Why - oh, never mind. <i>Innervate.</i>"</p>
+<p>"What? Why — oh, never mind. <i>Innervate.</i>"</p>
 
 <p>There was a pause, and then a snake slowly crawled out of its harness. Slowly the green head came up, looked around.</p>
 
@@ -266,7 +266,7 @@
 
 <p>"Truly?" said the Defense Professor, sounding slightly surprised.</p>
 
-<p>"Not even a tiny little bit. If I didn't owe you -"</p>
+<p>"Not even a tiny little bit. If I didn't owe you —"</p>
 
 <p>The Defense Professor started to laugh, and then it turned into more of a coughing fit.</p>
 
@@ -278,7 +278,7 @@
 
 <p>Again that whisper from the empty air above the broomstick: "What is the chance of undoing all that was done to her?"</p>
 
-<p>"Oh, let's see. Legilimency and unknown Dark rituals, ten years for that to set in place, followed by ten years of Dementor exposure? Undo <i>that?</i> You're out of your skull, Mister Whoever-You-Are. The question is whether there's anything <i>left,</i> and I'd call that maybe one chance in three -" The witch suddenly cut herself off. Her voice, when it spoke again, was quieter. "If you were her friend, before... then no, you're never getting her back. Best understand that now."</p>
+<p>"Oh, let's see. Legilimency and unknown Dark rituals, ten years for that to set in place, followed by ten years of Dementor exposure? Undo <i>that?</i> You're out of your skull, Mister Whoever-You-Are. The question is whether there's anything <i>left,</i> and I'd call that maybe one chance in three —" The witch suddenly cut herself off. Her voice, when it spoke again, was quieter. "If you were her friend, before... then no, you're never getting her back. Best understand that now."</p>
 
 <p><i>I'm voting that this is a performance,</i> said the Inner Critic. <i>She wouldn't just blurt all that out in response to one question unless she was looking for an opportunity.</i></p>
 
@@ -286,7 +286,7 @@
 
 <p>"What potion did you give her?" the witch said after opening Bellatrix's mouth and peering inside, her wand flashing multiple colors of illumination.</p>
 
-<p>The man lying on the ground calmly said, "Pepper-Up -"</p>
+<p>The man lying on the ground calmly said, "Pepper-Up —"</p>
 
 <p>" <i>Were you out of your mind?</i> "</p>
 
@@ -296,7 +296,7 @@
 
 <p>The Defense Professor, eyes still closed, took a sheet of paper from his robes; a moment later, words began to appear on it, accompanied by tiny wisps of smoke. When the smoke had stopped rising, the paper floated over toward the woman.</p>
 
-<p>The woman looked over the paper with raised eyebrows, gave a sardonic snort. "This had better work, Jeremy, or my last will and testament says that my whole estate goes into putting a bounty on your head. Speaking of which -"</p>
+<p>The woman looked over the paper with raised eyebrows, gave a sardonic snort. "This had better work, Jeremy, or my last will and testament says that my whole estate goes into putting a bounty on your head. Speaking of which —"</p>
 
 <p>The Defense Professor reached again into his robes and tossed the witch a bag that made a clinking sound. The witch caught it, weighed it, made a pleased sound.</p>
 
@@ -304,7 +304,7 @@
 
 <p>"Wait," said the Defense Professor, and with a gesture retrieved his wand from Bellatrix's hand and harness. Then his hand pointed the wand at Bellatrix, and moved in a small circular gesture, accompanied by a quiet, " <i>Obliviate</i>."</p>
 
-<p>" <i>That's it</i>," snapped the witch, "I'm taking her out of here before anyone does her any more damage -" One arm came around to hug the bony form of Bellatrix Black to her side, and they both disappeared with the loud POP! of Apparition.</p>
+<p>" <i>That's it</i>," snapped the witch, "I'm taking her out of here before anyone does her any more damage —" One arm came around to hug the bony form of Bellatrix Black to her side, and they both disappeared with the loud POP! of Apparition.</p>
 
 <p>And there was silence in that lumpy place, but for the gentle rush of the passing waves, and a little breath of wind.</p>
 
@@ -318,7 +318,7 @@
 
 <p>The pale man lying on the ground didn't laugh, but from the broomstick Harry's eyes saw the sides of Professor Quirrell's lips curling up, the edge of that familiar sardonic smile. "I cannot say that I bothered keeping count. How many are you?"</p>
 
-<p>It shouldn't have shaken the inner Harry so much, hearing that response, and yet he felt - he felt - unstable, like his own center had been subtracted -</p>
+<p>It shouldn't have shaken the inner Harry so much, hearing that response, and yet he felt — he felt — unstable, like his own center had been subtracted —</p>
 
 <p>Oh.</p>
 
