--- a/060.htm
+++ b/060.htm
@@ -6,25 +6,25 @@
 
 <p>Harry slowly sat up in the midst of darkness. His body ached, and not only in the places where it had laid on the hard concrete. Images tumbled over each other in his memory, everything his unconscious brain had been too tired to discharge into a proper nightmare.</p>
 
-<p>Twelve terrible voids floating down a metal corridor, tarnishing the metal around them, light dimmed and temperature falling as the emptiness tried to suck all life out of the world -</p>
+<p>Twelve terrible voids floating down a metal corridor, tarnishing the metal around them, light dimmed and temperature falling as the emptiness tried to suck all life out of the world —</p>
 
-<p>Chalk-white skin, stretched just above the bone that had remained after fat and muscle faded -</p>
+<p>Chalk-white skin, stretched just above the bone that had remained after fat and muscle faded —</p>
 
-<p>A metal door -</p>
+<p>A metal door —</p>
 
-<p>A woman's voice -</p>
+<p>A woman's voice —</p>
 
-<p><i>No, I didn't mean it, please don't die -</i></p>
+<p><i>No, I didn't mean it, please don't die —</i></p>
 
-<p><i>I can't remember my children's names any more -</i></p>
+<p><i>I can't remember my children's names any more —</i></p>
 
-<p><i>Don't go, don't take it away, don't don't don't -</i></p>
+<p><i>Don't go, don't take it away, don't don't don't —</i></p>
 
 <p>"What was that place?" Harry said hoarsely, in a voice pushed out of his throat like water forced through a too-thin pipe, in the darkness it sounded almost as shattered as Bellatrix Black's voice had been. " <i>What was that place? That wasn't a prison, that was HELL!</i> "</p>
 
 <p>"Hell?" said the calm voice of the Defense Professor. "You mean the Christian punishment fantasy? I suppose there is a similarity."</p>
 
-<p>"How -" Harry's voice was blocking, there was something huge lodged in his throat. "How - how could they -" <i>People</i> had built that place, someone had <i>made</i> Azkaban, they'd made it on <i>purpose,</i> they'd done it <i>deliberately,</i> that woman, she'd had children, children she wouldn't remember, some judge had <i>decided</i> for that to happen to her, someone had needed to <i>drag</i> her into that cell and lock its door while she screamed, someone fed her every day and walked away <i>without letting her out</i> -</p>
+<p>"How —" Harry's voice was blocking, there was something huge lodged in his throat. "How — how could they —" <i>People</i> had built that place, someone had <i>made</i> Azkaban, they'd made it on <i>purpose,</i> they'd done it <i>deliberately,</i> that woman, she'd had children, children she wouldn't remember, some judge had <i>decided</i> for that to happen to her, someone had needed to <i>drag</i> her into that cell and lock its door while she screamed, someone fed her every day and walked away <i>without letting her out</i> —</p>
 
 <p>" <i>HOW COULD PEOPLE DO THAT?</i> "</p>
 
@@ -34,7 +34,7 @@
 
 <p>A faint smile twitched on the Defense Professor's lips. "You know, Mr. Potter, if He-Who-Must-Not-Be-Named had come to rule over magical Britain, and built such a place as Azkaban, he would have built it because he enjoyed seeing his enemies suffer. And if instead he began to find their suffering distasteful, why, he would order Azkaban torn down the next day. As for those who did make Azkaban, and those who do not tear it down, while preaching lofty sermons and imagining themselves <i>not</i> to be villains... well, Mr. Potter, I think if I had my choice of taking tea with them, or taking tea with You-Know-Who, I should find my sensibilities less offended by the Dark Lord."</p>
 
-<p>"I don't understand," Harry said, his voice was shaking, he'd read about the classic experiment on the psychology of prisons, the ordinary college students who had turned sadistic as soon as they were assigned the role of prison guards; only now he realized that the experiment hadn't examined the right question, the one most important question, they hadn't looked at the key people, not the prison guards but <i>everyone else,</i> "I really don't understand, Professor Quirrell, how can people just stand by and let this happen, <i>why</i> is the country of magical Britain <i>doing this</i> -" Harry's voice stopped.</p>
+<p>"I don't understand," Harry said, his voice was shaking, he'd read about the classic experiment on the psychology of prisons, the ordinary college students who had turned sadistic as soon as they were assigned the role of prison guards; only now he realized that the experiment hadn't examined the right question, the one most important question, they hadn't looked at the key people, not the prison guards but <i>everyone else,</i> "I really don't understand, Professor Quirrell, how can people just stand by and let this happen, <i>why</i> is the country of magical Britain <i>doing this</i> —" Harry's voice stopped.</p>
 
 <p>The Defense Professor's eyes appeared to be the same color as always, in the pale blue light, for that light was the same color as Quirinus Quirrell's irises, those never-thawing chips of ice. "Welcome, Mr. Potter, to your first encounter with the realities of politics. What do the wretched creatures in Azkaban have to offer any faction? Who would benefit from aiding them? A politician who openly sided with them would associate themselves with criminals, with weakness, with distasteful things that people would rather not think about. Alternatively, the politician could demonstrate their might and cruelty by calling for longer sentences; to make a display of strength requires a victim to crush beneath you, after all. And the populace applauds, for it is their instinct to back the winner." A coldly amused laugh. "You see, Mr. Potter, no one ever quite believes that <i>they</i> will go to Azkaban, so they see no harm in it for themselves. As for what they inflict on others... I suppose you were once told that people care about that sort of thing? It is a lie, Mr. Potter, people don't care in the slightest, and if you had not led a vastly sheltered childhood you would have noticed that long ago. Console yourself with this: those now prisoner in Azkaban voted for the same Ministers of Magic who pledged to move their cells closer to the Dementors. I admit, Mr. Potter, that I see little hope for democracy as an effective form of government, but I admire the poetry of how it makes its victims complicit in their own destruction."</p>
 
@@ -70,15 +70,15 @@
 
 <p>Finally the Defense Professor shrugged, as though it were of no account. "I all but spelled it out for you, Mr. Potter. I told you everything you needed to deduce the answer, if you had been mature enough to consider that first obvious question. Bellatrix Black was the Dark Lord's most powerful servant, her loyalty the most assured; she was the single person most likely to be entrusted with some part of the lost lore of Slytherin that should have been yours."</p>
 
-<p>Slowly the anger crept over Harry, slowly the wrath, something terrible beginning to boil his blood, in just a few moments he would say something that he really shouldn't say while the two of them were alone in a deserted warehouse -</p>
+<p>Slowly the anger crept over Harry, slowly the wrath, something terrible beginning to boil his blood, in just a few moments he would say something that he really shouldn't say while the two of them were alone in a deserted warehouse —</p>
 
-<p>"But she <i>was</i> innocent," said the Defense Professor. He was not smiling. "And the degree to which all her choices were taken away from her, so that she never had a chance to suffer for her <i>own</i> mistakes... it struck me as <i>excessive</i>, Mr. Potter. If she tells you nothing of use -" The Defense Professor gave another small shrug. "I shall not consider this day's work a waste."</p>
+<p>"But she <i>was</i> innocent," said the Defense Professor. He was not smiling. "And the degree to which all her choices were taken away from her, so that she never had a chance to suffer for her <i>own</i> mistakes... it struck me as <i>excessive</i>, Mr. Potter. If she tells you nothing of use —" The Defense Professor gave another small shrug. "I shall not consider this day's work a waste."</p>
 
 <p>"How altruistic of you," Harry said coldly. "So if all wizards are like You-Know-Who inside, are you an exception to that, then?"</p>
 
 <p>The Defense Professor's eyes were still in shadow, dark pits that could not be met. "Call it a whim, Mr. Potter. It has sometimes amused me to play the part of a hero. Who knows but that You-Know-Who would say the same."</p>
 
-<p>Harry opened his mouth a final time -</p>
+<p>Harry opened his mouth a final time —</p>
 
 <p>And found that he couldn't say it, he couldn't ask the last question, the last and most important question, he couldn't make the words come out. Even though a refusal like that was forbidden to a rationalist, for all that he'd ever recited the Litany of Tarski or the Litany of Gendlin or sworn that whatever could be destroyed by the truth should be, in that one moment, he could not bring himself to say his last question out loud. Even though he knew he was thinking wrongly, even though he knew he was supposed to be better than this, he still couldn't say it.</p>
 
@@ -92,7 +92,7 @@
 
 <p><i>Genuine emotion on his part?</i></p>
 
-<p>"I see," said Professor Quirrell. "I suppose that answers -"</p>
+<p>"I see," said Professor Quirrell. "I suppose that answers —"</p>
 
 <p>"No," said the boy in a cool, collected voice, "you do not get to frame the conversation that easily, Professor. I went to considerable lengths to protect you and get you out of Azkaban safely, <i>after</i> I thought you had tried to kill a police officer. That included facing down twelve Dementors without a Patronus Charm. I wonder, if I had apologized when you demanded it, would you have said thank-you in turn? Or am I correct in thinking that it was my submission you demanded there, and not only my respect?"</p>
 
@@ -126,13 +126,13 @@
 
 <p>"By the way," said the boy. "Hermione Granger would never have built Azkaban, no matter who was going to be put in it. And she'd die before she hurt an innocent. Just mentioning that, since you said before that all wizards are like You-Know-Who inside, and that's just false as a point of simple fact. Would've realized it earlier if I hadn't been," the boy gave a brief grim smile, "stressed out."</p>
 
-<p>The Defense Professor's eyes were half-lidded, his expression distant. "People's insides are not always like their outsides, Mr. Potter. Perhaps she simply wishes others to think of her as a good girl. She cannot use the Patronus Charm -"</p>
+<p>The Defense Professor's eyes were half-lidded, his expression distant. "People's insides are not always like their outsides, Mr. Potter. Perhaps she simply wishes others to think of her as a good girl. She cannot use the Patronus Charm —"</p>
 
 <p>"Hah," said the boy; his smile seemed realer now, warmer. "She's having trouble for exactly the same reason I did. There's enough light in her to destroy Dementors, I'm sure. She wouldn't be able to <i>stop</i> herself from destroying Dementors, even at the cost of her own life..." The boy trailed off, and then his voice resumed. " <i>I</i> might not be such a good person, maybe; but they do exist, and she's one of them."</p>
 
 <p>Dryly. "She is young, and to make a show of kindness costs her little."</p>
 
-<p>There was a pause at this. Then the boy said, "Professor, I have to ask, when you see something all dark and gloomy, doesn't it ever occur to you to try and <i>improve</i> it somehow? Like, yes, something goes terribly wrong in people's heads that makes them think it's great to torture criminals, but that doesn't mean they're truly evil inside; and maybe if you taught them the right things, showed them what they were doing wrong, you could change -"</p>
+<p>There was a pause at this. Then the boy said, "Professor, I have to ask, when you see something all dark and gloomy, doesn't it ever occur to you to try and <i>improve</i> it somehow? Like, yes, something goes terribly wrong in people's heads that makes them think it's great to torture criminals, but that doesn't mean they're truly evil inside; and maybe if you taught them the right things, showed them what they were doing wrong, you could change —"</p>
 
 <p>Professor Quirrell laughed, then, and not with the emptiness of before. "Ah, Mr. Potter, sometimes I do forget how very young you are. Sooner you could change the color of the sky." Another chuckle, this one colder. "And the reason it is easy for you to forgive such fools and think well of them, Mr. Potter, is that you yourself have not been sorely hurt. You will think less fondly of commonplace idiots after the first time their folly costs you something dear. Such as a hundred Galleons from your own pocket, perhaps, rather than the agonizing deaths of a hundred strangers." The Defense Professor was smiling thinly. He took a pocket-watch out of his robes, looked at it. "Let us depart now, if there is nothing more to say between us."</p>
 
@@ -150,7 +150,7 @@
 
 <p>In a deserted side-road of Diagon Alley, where scraps of un-Vanished trash could be seen lodged into the edges of the brick street and the blank brick building-sides that surrounded it, along with scattered dirt and other signs of neglect, an ancient wizard and his phoenix Apparated into existence.</p>
 
-<p>The wizard was already reaching within his robes for his hourglass when, in habit, his eyes jumped to a random spot between the road and the wall, to memorize it -</p>
+<p>The wizard was already reaching within his robes for his hourglass when, in habit, his eyes jumped to a random spot between the road and the wall, to memorize it —</p>
 
 <p>And the old wizard blinked in surprise; there was a scrap of parchment in that spot.</p>
 
@@ -160,7 +160,7 @@
 
 <p>Slowly the wizard let it flutter from his fingers. Absently he reached down to the pavement, and picked up the nearest scrap of parchment, which looked remarkably similar to the one he had just taken; he touched it with his wand, and a moment later it was inscribed with the same word "NO", in the same handwriting, which was his own.</p>
 
-<p>The old wizard had planned to go back three hours to when Harry Potter first arrived in Diagon Alley. He had already watched, upon his instruments, the boy leaving Hogwarts, and that could not be undone (his one attempt to fool his own instruments, and so control Time without altering its appearance to himself, had ended in sufficient disaster to convince him to never again try such trickery). He had hoped to retrieve the boy at the first possible moment after his arrival, and take him to another safe location, if not Hogwarts (for his instruments had not shown the boy's return). But now -</p>
+<p>The old wizard had planned to go back three hours to when Harry Potter first arrived in Diagon Alley. He had already watched, upon his instruments, the boy leaving Hogwarts, and that could not be undone (his one attempt to fool his own instruments, and so control Time without altering its appearance to himself, had ended in sufficient disaster to convince him to never again try such trickery). He had hoped to retrieve the boy at the first possible moment after his arrival, and take him to another safe location, if not Hogwarts (for his instruments had not shown the boy's return). But now —</p>
 
 <p>"A paradox if I retrieve him immediately after he arrives in Diagon Alley?" murmured the old wizard to himself. "Perhaps they did not set in motion their plan to rob Azkaban, until after they had confirmed his arrival here... or else... perhaps..."</p>
 
@@ -172,5 +172,5 @@
 
 <p>The boy just looked at him. And then said, "Oh, really?"</p>
 
-<p>"Truly," said the man. "I know nothing, and of my guesses I will not speak. Yet I will say this much -"</p>
+<p>"Truly," said the man. "I know nothing, and of my guesses I will not speak. Yet I will say this much —"</p>
 
