--- a/066.htm
+++ b/066.htm
@@ -1,6 +1,6 @@
 <p><i>Hessitation iss alwayss eassy, rarely usseful.</i></p>
 
-<p>So the Defense Professor had told him; and while you could quibble about the details of the proverb, Harry understood the weaknesses of Ravenclaws well enough to know that you had to try <i>answering</i> your own quibbles. Did some plans call for waiting? Yes, many plans called for <i>delayed action</i>; but that was not the same as <i>hesitating</i> to <i>choose</i>. Not delaying because you knew the right moment to do what was necessary, but delaying because you couldn't make up your mind - there was no cunning plan which called for that.</p>
+<p>So the Defense Professor had told him; and while you could quibble about the details of the proverb, Harry understood the weaknesses of Ravenclaws well enough to know that you had to try <i>answering</i> your own quibbles. Did some plans call for waiting? Yes, many plans called for <i>delayed action</i>; but that was not the same as <i>hesitating</i> to <i>choose</i>. Not delaying because you knew the right moment to do what was necessary, but delaying because you couldn't make up your mind — there was no cunning plan which called for that.</p>
 
 <p>Did you sometimes need more information to choose? Yes, but that could also turn into an excuse for delaying; and it would be <i>tempting</i> to delay, when you were faced with a choice between two painful alternatives, and <i>not choosing</i> would avoid the mental pain for a time. So you would pick a piece of information you couldn't easily obtain, and claim that you couldn't possibly decide without it; that would be your excuse. Although if you knew <i>what</i> information you needed, knew <i>when</i> and <i>how</i> you would obtain that information, and knew what you would <i>do</i> depending on each possible observation, then that was less suspicious as an excuse for hesitating.</p>
 
@@ -28,7 +28,7 @@
 
 <p>" <i>Lessson I learned is not to try plotss that would make girl-child friend think I am evil or boy-child friend think I am sstupid,</i>" Harry snapped back. He'd been planning a more temporizing response than that, but somehow the words had just slipped out.</p>
 
-<p>The <i>sssss</i>-ing sound that came from the snake was not heard by Harry as words, only as pure fury. A moment later, " <i>You told them -</i>"</p>
+<p>The <i>sssss</i>-ing sound that came from the snake was not heard by Harry as words, only as pure fury. A moment later, " <i>You told them —</i>"</p>
 
 <p>" <i>Of coursse not! But know what they would ssay.</i>"</p>
 
@@ -36,11 +36,11 @@
 
 <p>" <i>You sserioussly care what thosse two think?</i> " came the snake's final hiss. " <i>True younglingss thosse two are, not like you. Could not weigh adult matterss.</i>"</p>
 
-<p>" <i>Might have done better than me,</i>" Harry hissed. " <i>Boy-child friend would have assked after ssecret motivess before asssenting to resscue woman -</i>"</p>
+<p>" <i>Might have done better than me,</i>" Harry hissed. " <i>Boy-child friend would have assked after ssecret motivess before asssenting to resscue woman —</i>"</p>
 
 <p>" <i>Glad you undersstand that now,</i>" the snake hissed coldly. " <i>Alwayss assk after other'ss advantage. Next learn to alwayss assk after your own. If my plan iss not to your tasste, what iss yours?</i> "</p>
 
-<p>" <i>If necesssary - sstay at sschool ssix yearss and sstudy. Hogwartss sseemss fine place to dwell. Bookss, friendss, sstrange but tassty food.</i>" Harry wanted to chuckle, but there wasn't any gesture in Parseltongue for the kind of laughter he wanted to express.</p>
+<p>" <i>If necesssary — sstay at sschool ssix yearss and sstudy. Hogwartss sseemss fine place to dwell. Bookss, friendss, sstrange but tassty food.</i>" Harry wanted to chuckle, but there wasn't any gesture in Parseltongue for the kind of laughter he wanted to express.</p>
 
 <p>The pits of the snake's eyes seemed almost black. " <i>Eassy to ssay that now. Ssuch as you and I, we do not tolerate imprissonment. You will losse patience long before sseventh year, perhapss before end of thiss one. I sshall plan accordingly.</i>"</p>
 
@@ -48,17 +48,17 @@
 
 <hr />
 
-<p>Hannah Abbott looked as unnerved as Hermione had ever seen her (except on the day of the phoenix, the day Bellatrix Black had escaped, which shouldn't ought to count for anyone). The Hufflepuff girl had come over to the Ravenclaw table during dinner, and tapped Hermione on her shoulder, and very nearly dragged her away -</p>
+<p>Hannah Abbott looked as unnerved as Hermione had ever seen her (except on the day of the phoenix, the day Bellatrix Black had escaped, which shouldn't ought to count for anyone). The Hufflepuff girl had come over to the Ravenclaw table during dinner, and tapped Hermione on her shoulder, and very nearly dragged her away —</p>
 
 <p>"Neville and Harry Potter are learning dueling from Mr. Diggory!" Hannah blurted as soon as they were a few steps away from the table.</p>
 
 <p>"Who?" said Hermione.</p>
 
-<p>" <i>Cedric Diggory!</i> " said Hannah. "He's the Captain of our Quidditch Team, and general of an army, and he's taking <i>all</i> the electives and getting better grades than anyone, and I hear he learns dueling from professional tutors during the summers, and he once beat <i>two</i> seventh-year students, and even some teachers call him the Super Hufflepuff, and Professor Sprout says we should all emu, uh, emudate him or something like that, and -"</p>
+<p>" <i>Cedric Diggory!</i> " said Hannah. "He's the Captain of our Quidditch Team, and general of an army, and he's taking <i>all</i> the electives and getting better grades than anyone, and I hear he learns dueling from professional tutors during the summers, and he once beat <i>two</i> seventh-year students, and even some teachers call him the Super Hufflepuff, and Professor Sprout says we should all emu, uh, emudate him or something like that, and —"</p>
 
 <p>After Hannah finally stopped for air (the list had gone on for a while), Hermione managed to insert a word in edgewise.</p>
 
-<p>"Sunshine Soldier Abbott!" said Hermione. "Calm <i>down</i>. We're not going to be fighting General Diggory, right? Sure, Neville's studying to beat us, but we can study too -"</p>
+<p>"Sunshine Soldier Abbott!" said Hermione. "Calm <i>down</i>. We're not going to be fighting General Diggory, right? Sure, Neville's studying to beat us, but we can study too —"</p>
 
 <p>"Don't you <i>see?</i> " Hannah shrieked, raising her voice a lot louder then it should've been, if they were trying to keep the conversation private from all the Ravenclaws looking at them. "Neville isn't studying to beat <i>us!</i> He's practicing so he can fight <i>Bellatrix Black!</i> They're going to go through us like a Bludger through a stack of pancakes!"</p>
 
@@ -68,7 +68,7 @@
 
 <p>"Oh, <i>honestly!</i> " said Hermione. Sometimes it was hard being the only sensible person in your whole school year. "Haven't you ever heard the saying, the only thing we have to fear is fear itself?"</p>
 
-<p>" <i>What?</i> " said Hannah. "That's crazy, what about Lethifolds lurking in the darkness, and being put under the Imperius Curse, and horrible Transfiguration accidents and -"</p>
+<p>" <i>What?</i> " said Hannah. "That's crazy, what about Lethifolds lurking in the darkness, and being put under the Imperius Curse, and horrible Transfiguration accidents and —"</p>
 
 <p>"I <i>mean,</i>" said Hermione, exasperation leaking out into her now-raised voice, she'd been hearing this sort of thing <i>all week</i> now, "how about if we wait until <i>after</i> the Chaos Legion <i>actually</i> crushes us to get so scared of them and <i>did you just mutter 'Gryffindors' under your voice?</i> "</p>
 
