--- a/071.htm
+++ b/071.htm
@@ -14,11 +14,11 @@
 
 <p>Parvati had straightened up at this, exclaiming that this meant they were the <i>only ones</i> who could do something about Hogwarts's bully problem, which made it <i>really truly</i> heroinic. Plus the <i>whole reason</i> their parents had moved to Britain was so that the two of them could attend the world's only magical school with a 0% fatality rate, and what was the point if they didn't take advantage and try a few things?</p>
 
-<p>To which General Granger had responded that Parvati didn't understand the point of a perfect safety record <i>at all</i> -</p>
+<p>To which General Granger had responded that Parvati didn't understand the point of a perfect safety record <i>at all</i> —</p>
 
 <p>Lavender had said that if they were <i>really</i> all friends together and not Hermione's followers like Professor Quirrell thought, then they should vote on things like this.</p>
 
-<p>Daphne had expected that hers would be the deciding vote after Hermione and Susan and Hannah voted no. And so Daphne had considered it carefully after her first flush of enthusiasm wore off. She <i>was</i> a Slytherin, after all, and that meant it was <i>her</i> responsibility to keep a watchful eye on their own interests while they were all running around trying to help people - her job to figure out how risky it really was, and whether it would be worth it for <i>them</i>, just like Mother would have done in her place. Always looking out for yourself and your friends like that, was what real Slytherining was all about...</p>
+<p>Daphne had expected that hers would be the deciding vote after Hermione and Susan and Hannah voted no. And so Daphne had considered it carefully after her first flush of enthusiasm wore off. She <i>was</i> a Slytherin, after all, and that meant it was <i>her</i> responsibility to keep a watchful eye on their own interests while they were all running around trying to help people — her job to figure out how risky it really was, and whether it would be worth it for <i>them</i>, just like Mother would have done in her place. Always looking out for yourself and your friends like that, was what real Slytherining was all about...</p>
 
 <p>Hannah Abbott, the nervous little Hufflepuff girl, had in a small trembling voice said "Yes."</p>
 
@@ -38,9 +38,9 @@
 
 <p>"Y'know," Lavender said thoughtfully, "I wonder if maybe what <i>really</i> makes someone a hero, is that when they try something like this, something interesting <i>actually happens</i>."</p>
 
-<p>"I bet you're right," said Tracey. "I bet if we had <i>Harry Potter</i> with us, we'd run into three bullies and a hidden room full of treasure in the first five minutes. I bet that all General Chaos has to do is go to the bathroom and he, like, finds Slytherin's Chamber of Secrets or something -"</p>
+<p>"I bet you're right," said Tracey. "I bet if we had <i>Harry Potter</i> with us, we'd run into three bullies and a hidden room full of treasure in the first five minutes. I bet that all General Chaos has to do is go to the bathroom and he, like, finds Slytherin's Chamber of Secrets or something —"</p>
 
-<p>Daphne couldn't quite let that one go past. "You think Lord Slytherin would've put the entrance to the Chamber of Secrets in a <i>bathroom -</i>"</p>
+<p>Daphne couldn't quite let that one go past. "You think Lord Slytherin would've put the entrance to the Chamber of Secrets in a <i>bathroom —</i>"</p>
 
 <p>"What I'm <i>saying,</i>" said Susan, as Tracey was opening her mouth to reply, "is that we've got no way of actually <i>finding</i> any bullies. I mean, all <i>they've</i> got to do is find a Hufflepuff somewhere, but we've got to run across them at exactly the right <i>time</i>, d'you see? Which is a <i>very good problem</i> because if we <i>did</i> find them we'd all get squished like bugs. Can't we just do the forbidden third-floor corridor like we're <i>supposed</i> to?"</p>
 
@@ -50,7 +50,7 @@
 
 <p>"Come to think..." Parvati said slowly, "I mean, what're the odds that Harry Potter would run across those five bullies on his <i>first morning</i> of school? He must've had <i>some</i> way of finding them."</p>
 
-<p>Daphne happened to be standing where looking at Parvati let her see Hermione, so she noticed the Ravenclaw girl's expression change - and then she realized that the Sunshine General had <i>also</i> found some bullies just recently -</p>
+<p>Daphne happened to be standing where looking at Parvati let her see Hermione, so she noticed the Ravenclaw girl's expression change — and then she realized that the Sunshine General had <i>also</i> found some bullies just recently —</p>
 
 <p>"Oh!" said Padma in a tone of sudden realization. "Of course! He got told by the ghost of Salazar Slytherin!"</p>
 
@@ -72,7 +72,7 @@
 
 <p>In fact... now that Daphne <i>thought</i> about it...</p>
 
-<p>"So," said Parvati. "We've got to ask the Boy-Who-Lived where to find Salazar Slytherin's ghost? Wow, I guess if I'm saying stuff like that out loud, I might actually be turning into a heroine -"</p>
+<p>"So," said Parvati. "We've got to ask the Boy-Who-Lived where to find Salazar Slytherin's ghost? Wow, I guess if I'm saying stuff like that out loud, I might actually be turning into a heroine —"</p>
 
 <p>"Yes!" said Lavender. "We've got to ask the Boy-Who-Lived where to find Salazar Slytherin's ghost!"</p>
 
@@ -82,7 +82,7 @@
 
 <hr />
 
-<p>It said something, Hermione Granger thought, and it was something rather sad - as the eight of them strolled back through the maze of twisty little passages that was Hogwarts, their time before the next class having run out without finding any bullies - that she genuinely didn't know whether Harry Potter had been led around by the ghost of Salazar Slytherin or a phoenix or <i>what.</i> And whatever Harry had done, she hoped it <i>didn't</i> work for them. And most of all she hoped that the others didn't vote for Tracey's idea of stunning Harry Potter and carting his unconscious body around with them to attract Adventures. That couldn't possibly work in real life, or, if it did, she was giving up.</p>
+<p>It said something, Hermione Granger thought, and it was something rather sad — as the eight of them strolled back through the maze of twisty little passages that was Hogwarts, their time before the next class having run out without finding any bullies — that she genuinely didn't know whether Harry Potter had been led around by the ghost of Salazar Slytherin or a phoenix or <i>what.</i> And whatever Harry had done, she hoped it <i>didn't</i> work for them. And most of all she hoped that the others didn't vote for Tracey's idea of stunning Harry Potter and carting his unconscious body around with them to attract Adventures. That couldn't possibly work in real life, or, if it did, she was giving up.</p>
 
 <p>Hermione looked from witch to witch, Tracey chatting with Lavender, and the others making occasional remarks; and her gaze caught on a girl who was subdued and quiet, the one person whose thoughts right now she couldn't guess at all.</p>
 
@@ -90,7 +90,7 @@
 
 <p>Hermione had thought she'd made her voice soft, but everyone stopped walking, and Lavender and Tracey halted their conversation and looked at them.</p>
 
-<p>Hannah's cheeks were already reddening, and just as Hannah opened her mouth -</p>
+<p>Hannah's cheeks were already reddening, and just as Hannah opened her mouth —</p>
 
 <p>"It's 'cause she's got more courage than <i>you</i> think, obviously," said Lavender.</p>
 
@@ -142,7 +142,7 @@
 
 <p>As their Charms session that day ended and the first-year Ravenclaws began shuffling out of the class, Hermione was already wincing to herself. They'd made it to class just barely before the opening gong, they'd had to run right over to their desks and sit down, so there hadn't been time for the awful thing to happen <i>yet;</i> but that just meant that Hermione got to look forward to the coming disaster for the <i>whole class.</i></p>
 
-<p>Sure enough, after Professor Flitwick squeaked his dismissal and everyone rose from their chairs, Harry began walking toward her; and for her own part Hermione shoved her book into her mokeskin pouch and very quickly walked over to the door and threw it open and headed into the corridors, and of course Harry followed her with a surprised look because they had a library session scheduled -</p>
+<p>Sure enough, after Professor Flitwick squeaked his dismissal and everyone rose from their chairs, Harry began walking toward her; and for her own part Hermione shoved her book into her mokeskin pouch and very quickly walked over to the door and threw it open and headed into the corridors, and of course Harry followed her with a surprised look because they had a library session scheduled —</p>
 
 <p>"Hermione?" Harry said as he closed the door behind him. "What's wrong?"</p>
 
@@ -156,7 +156,7 @@
 
 <p>There was a little bit of silence in the corridor outside the classroom.</p>
 
-<p>The door opened again, and Su peered out with an inquiring look -</p>
+<p>The door opened again, and Su peered out with an inquiring look —</p>
 
 <p>"Well, we've got to get to the library," Harry said quite casually, his face looking relaxed, "would you mind following us?" and began to walk off in the direction that led to the library on odd-numbered days of the month, and Su made like she was going to follow but Harry's face turned toward her for a moment.</p>
 
@@ -164,11 +164,11 @@
 
 <p>Padma looked rather smug, then; and said, "I <i>should've</i> figured it out earlier, really. There was that <i>hiss</i> in the ghost's voice, I should've thought Parselmouth right away, even before he started talking about Godric Gryffindor."</p>
 
-<p>Harry's face didn't change. "May I ask, Miss Patil, whether you've shared this thought with -"</p>
+<p>Harry's face didn't change. "May I ask, Miss Patil, whether you've shared this thought with —"</p>
 
 <p>"She said it in front of everyone in S.P.H.E.W.," Hermione said.</p>
 
-<p>Harry's eyes had that look they had when he was very rapidly calculating something, and then he said, "Hermione, what's the chance that -"</p>
+<p>Harry's eyes had that look they had when he was very rapidly calculating something, and then he said, "Hermione, what's the chance that —"</p>
 
 <p>"She said it in front of Lavender <i>and</i> Tracey."</p>
 
@@ -186,17 +186,17 @@
 
 <p>Tracey added having her own servants to her list of Ambitions, and entered.</p>
 
-<p>The Malfoy private bedroom looked just like Daphne's. She'd been privately hoping for diamond chandeliers or golden frescos on the walls - she'd never have said it in front of Daphne, but the House of Malfoy <i>was</i> a step up from Greengrass. But it was just a small bedroom like Daphne's, and the only difference was that Malfoy's stuff was decorated in silver snakes instead of emerald plants.</p>
+<p>The Malfoy private bedroom looked just like Daphne's. She'd been privately hoping for diamond chandeliers or golden frescos on the walls — she'd never have said it in front of Daphne, but the House of Malfoy <i>was</i> a step up from Greengrass. But it was just a small bedroom like Daphne's, and the only difference was that Malfoy's stuff was decorated in silver snakes instead of emerald plants.</p>
 
-<p>As she stepped through the doorway, Draco Malfoy - who was perfectly groomed even inside his own bedroom - rose up from his desk chair to greet her with a small friendly bow, wearing a charming smile just like she was someone who <i>mattered,</i> which made Tracey so flustered that she forgot everything she'd rehearsed inside her head and just blurted out, "I've got something to tell you!"</p>
+<p>As she stepped through the doorway, Draco Malfoy — who was perfectly groomed even inside his own bedroom — rose up from his desk chair to greet her with a small friendly bow, wearing a charming smile just like she was someone who <i>mattered,</i> which made Tracey so flustered that she forgot everything she'd rehearsed inside her head and just blurted out, "I've got something to tell you!"</p>
 
 <p>"Yes, Gregory said so," Draco Malfoy said smoothly. "Please, Miss Davis, sit down." He gestured to <i>his own desk chair</i>, even as he sat down on his bed.</p>
 
-<p>She felt somewhat lightheaded as she carefully sat herself down in Malfoy's own chair, her fingers unthinkingly fiddling with how her dress robes fell across her knees, trying to make them look as elegant and uncreased as Draco Malfoy's -</p>
+<p>She felt somewhat lightheaded as she carefully sat herself down in Malfoy's own chair, her fingers unthinkingly fiddling with how her dress robes fell across her knees, trying to make them look as elegant and uncreased as Draco Malfoy's —</p>
 
 <p>"So, Miss Davis," said Draco Malfoy. "What did you want to tell me?"</p>
 
-<p>Tracey hesitated, and then when Malfoy's face started to look a bit impatient, just stammered it all out, everything Padma had said about Salazar Slytherin's ghost sending Harry Potter to stop bullies and also what Daphne had told her about Hermione Granger being in on it -</p>
+<p>Tracey hesitated, and then when Malfoy's face started to look a bit impatient, just stammered it all out, everything Padma had said about Salazar Slytherin's ghost sending Harry Potter to stop bullies and also what Daphne had told her about Hermione Granger being in on it —</p>
 
 <p>Draco Malfoy's expression didn't change at all as she spoke, not even in the slightest, and it dawned on Tracey with a sickening lurch in her stomach.</p>
 
@@ -206,7 +206,7 @@
 
 <p>"Well," said Draco Malfoy, with a smile that wasn't quite as charming as his last one, "I <i>do</i> believe that's what Padma said and what Daphne said, so thank you anyway, Miss Davis." The boy rose from where he'd been sitting on his bed, and Tracey, not even thinking, rose from the chair.</p>
 
-<p>As he was escorting her to the door, just as he was about to turn the knob, it occurred to Tracey that - "You didn't ask what I wanted for the information," she said.</p>
+<p>As he was escorting her to the door, just as he was about to turn the knob, it occurred to Tracey that — "You didn't ask what I wanted for the information," she said.</p>
 
 <p>Draco Malfoy gave her some kind of look, she didn't quite know what it was supposed to mean, and he didn't say anything.</p>
 
@@ -248,7 +248,7 @@
 
 <p>"Hey, Millicent," Daphne said as she drew near, making her voice low and excited, "guess what I figured out today?"</p>
 
-<p>"The thing about Salazar Slytherin's ghost helping Granger?" said Millicent. "I already heard about that -"</p>
+<p>"The thing about Salazar Slytherin's ghost helping Granger?" said Millicent. "I already heard about that —"</p>
 
 <p>"No," Daphne said in a hushed whisper, "this is even <i>better.</i>"</p>
 
