--- a/082.htm
+++ b/082.htm
@@ -1,4 +1,4 @@
-<p>Phoenix travel was a sensation entirely unlike Apparition or portkeys. You caught on fire - you definitely felt yourself catching on fire, even though there was no pain - and instead of burning to ashes, the fire burned all the way through you and you <i>became</i> fire, and then you went out in one place and blazed up in another. It didn't sicken the stomach like portkeys or Apparition, but it was a rather unnerving experience nonetheless. If the underlying truth of phoenix travel really was becoming a specific instantiation of a more general Fire, then that seemed to hint you could potentially burn <i>anywhere -</i> even in the distant past, or in another universe, or in two places at once. You might go out in one place and blaze up in a hundred others, and the you who arrived at Hogwarts would never know the difference. Though Harry had read what he could about phoenixes, trying to figure out how to get one of his own, and there'd been no hint of anything remotely like <i>that</i> capability.</p>
+<p>Phoenix travel was a sensation entirely unlike Apparition or portkeys. You caught on fire — you definitely felt yourself catching on fire, even though there was no pain — and instead of burning to ashes, the fire burned all the way through you and you <i>became</i> fire, and then you went out in one place and blazed up in another. It didn't sicken the stomach like portkeys or Apparition, but it was a rather unnerving experience nonetheless. If the underlying truth of phoenix travel really was becoming a specific instantiation of a more general Fire, then that seemed to hint you could potentially burn <i>anywhere —</i> even in the distant past, or in another universe, or in two places at once. You might go out in one place and blaze up in a hundred others, and the you who arrived at Hogwarts would never know the difference. Though Harry had read what he could about phoenixes, trying to figure out how to get one of his own, and there'd been no hint of anything remotely like <i>that</i> capability.</p>
 
 <p>Harry caught fire and went out and blazed up somewhere else; and just like that he, and the Headmaster, and the unconscious form of Hermione Granger held in the Headmaster's arms, were occupying another place; with Fawkes above them all. A calm, warm room of bright stone columns, skylit on all four sides, populated by white beds in long rows, four of which had silencing veils drawn around them, and the rest empty.</p>
 
@@ -22,7 +22,7 @@
 
 <p>"The phoenix chooses but once," said the old wizard. "They might perhaps leave a master who chooses evil over good; they will not leave a master forced to choose between one good and another. Phoenixes are not arrogant. They know the limits of their own wisdom." Stern indeed, that ancient gaze. "Unlike you, Harry."</p>
 
-<p>"Choose between one good and another," Harry echoed flatly. "Like Hermione Granger's life, versus a hundred thousand Galleons." The rage and indignation Harry wanted to put into his voice wasn't quite there, for some reason, maybe because -</p>
+<p>"Choose between one good and another," Harry echoed flatly. "Like Hermione Granger's life, versus a hundred thousand Galleons." The rage and indignation Harry wanted to put into his voice wasn't quite there, for some reason, maybe because —</p>
 
 <p>"You are hardly in a position to speak to me of that, Harry Potter." The Headmaster's voice was deceptively soft. "Or what was that look of reluctance that I saw upon your face, there in the Most Ancient Hall?"</p>
 
@@ -32,7 +32,7 @@
 
 <p>" <i>Is</i> that what you were thinking, Harry?" The blue eyes were keen, and there was a terrifying moment when Harry wondered if the world's most powerful wizard could see right past his Occlumency barriers.</p>
 
-<p>" <i>Yes,</i>" Harry said, "I flinched away from the pain of losing all the money in my vault. But I <i>did</i> it! <i>That's</i> what counts! And <i>you</i> -" The indignation that had faltered out of Harry's voice returned. "You <i>actually</i> put a price on Hermione Granger's life, and you put it below a hundred thousand Galleons!"</p>
+<p>" <i>Yes,</i>" Harry said, "I flinched away from the pain of losing all the money in my vault. But I <i>did</i> it! <i>That's</i> what counts! And <i>you</i> —" The indignation that had faltered out of Harry's voice returned. "You <i>actually</i> put a price on Hermione Granger's life, and you put it below a hundred thousand Galleons!"</p>
 
 <p>"Oh?" the old wizard said softly. "And what price do you put on her life, then? A million Galleons?"</p>
 
@@ -48,7 +48,7 @@
 
 <p>And if the old wizard's words hadn't hit quite so hard, and quite so close to home, Harry might not have said what he said then.</p>
 
-<p>"Lucius was right," Harry ground out. "You never had a wife, you never had a daughter, you've never had anything but war -"</p>
+<p>"Lucius was right," Harry ground out. "You never had a wife, you never had a daughter, you've never had anything but war —"</p>
 
 <p>The old wizard's left hand closed hard upon Harry's wrist, bony fingers digging into the still-developing muscle of Harry's arm, and for a moment Harry was paralyzed with the shock of it, he had forgotten what it meant that adults were stronger.</p>
 
@@ -64,7 +64,7 @@
 
 <p>"You think," yelled Harry, after his lips unlocked, "that you can win any argument, just by standing here?"</p>
 
-<p>The old wizard ignored him, dragging Harry across the room. His right hand, no longer holding his wand, grabbed up a vial of silver fluid -</p>
+<p>The old wizard ignored him, dragging Harry across the room. His right hand, no longer holding his wand, grabbed up a vial of silver fluid —</p>
 
 <p>Harry blinked in shock; the vial of silver fluid had been standing next to a picture of <i>Dumbledore,</i> or so it had appeared to Harry in the brief moment before he was dragged past.</p>
 
@@ -76,7 +76,7 @@
 
 <p>"Put your head into the Pensieve, Harry Potter." The old wizard's voice was stern.</p>
 
-<p>Harry had heard that word before, but he couldn't remember where . "What - does this do -"</p>
+<p>Harry had heard that word before, but he couldn't remember where . "What — does this do —"</p>
 
 <p>"Memories," the old wizard said. "You will see my memory. My oath that it is safe. Now look into the Pensieve, Ravenclaw, if you still care anything at all for your precious truth!"</p>
 
@@ -108,13 +108,13 @@
 
 <p><i>"Shall I tell Voldie's messenger no?" said Alastor's voice, now strangely gentle. "You don't have to do it yourself, old friend."</i></p>
 
-<p><i>"No - I will say it myself - I must -"</i></p>
+<p><i>"No — I will say it myself — I must —"</i></p>
 
 <hr />
 
 <p>The memory ended with a shock and Harry ripped his head out of the glowing water, gasping as though he'd been deprived of air.</p>
 
-<p>The transition between scenes, between decade-old reality and present moment, was another jolt to Harry's mind; in some fashion his immersion in the past had unanchored him. The broken old man sobbing in his office had been another person in another era, Harry had understood that much; someone softer -</p>
+<p>The transition between scenes, between decade-old reality and present moment, was another jolt to Harry's mind; in some fashion his immersion in the past had unanchored him. The broken old man sobbing in his office had been another person in another era, Harry had understood that much; someone softer —</p>
 
 <p>Before it had all vanished like dissipating smoke, returning the <i>now,</i> the present day.</p>
 
@@ -122,9 +122,9 @@
 
 <p>"Do you also wish to see my brother as he died under the Cruciatus?" said Albus Dumbledore. "Voldemort sent me that memory as well!"</p>
 
-<p>"And that - " Harry was having trouble producing a voice, for the growing sickness in his chest. " <i>That</i> was when -" The words seemed to burn in his throat, as the awful knowledge dawned on him, the horrible understanding. "That was when you burned Narcissa Malfoy alive in her own bedroom."</p>
+<p>"And that — " Harry was having trouble producing a voice, for the growing sickness in his chest. " <i>That</i> was when —" The words seemed to burn in his throat, as the awful knowledge dawned on him, the horrible understanding. "That was when you burned Narcissa Malfoy alive in her own bedroom."</p>
 
-<p>Albus Dumbledore's gaze was cold as he answered. "To that question only a fool would say yea or nay. What matters is that the Death Eaters believe I killed her, and that belief kept safe the families of all who served the Order of the Phoenix - until this day. Now do you understand what you have done? What you have done to your <i>friends,</i> Harry Potter, and to any that stand with you?" The old wizard seemed to grow still taller and more terrible, as his voice rose louder. "You have made them all targets, and targets they will remain! Until you prove, the only way it can be proven, that you are no longer willing to pay such prices!"</p>
+<p>Albus Dumbledore's gaze was cold as he answered. "To that question only a fool would say yea or nay. What matters is that the Death Eaters believe I killed her, and that belief kept safe the families of all who served the Order of the Phoenix — until this day. Now do you understand what you have done? What you have done to your <i>friends,</i> Harry Potter, and to any that stand with you?" The old wizard seemed to grow still taller and more terrible, as his voice rose louder. "You have made them all targets, and targets they will remain! Until you prove, the only way it can be proven, that you are no longer willing to pay such prices!"</p>
 
 <p>"And is it true?" Harry said. There was a buzzing sensation filling him, his body growing more distant. "What Draco said, that Narcissa Malfoy never got her hands dirty, that she was only Lucius's wife? She was an enabler, I get that, but I can't back that deserving being <i>burned alive</i>."</p>
 
@@ -142,7 +142,7 @@
 
 <p>The old wizard's eyes widened behind the half-moon glasses.</p>
 
-<p>"And here's the thing," Harry said, "here's the thing I've been thinking about over and over. The Dark Lord gave Lily Potter the chance to walk away. He said that she could flee. He <i>told</i> her that dying in front of the crib wouldn't save her baby. 'Step aside, foolish woman, if you have any sense in you at all -'" An awful chill came over Harry as he spoke those words from his own lips, but he shook it off and continued. "And afterward I kept thinking, I couldn't seem to stop myself from thinking, wasn't the Dark Lord <i>right?</i> If only Mother had stepped away. She tried to curse the Dark Lord but it was suicide, she had to have <i>known</i> that it was suicide. Her choice wasn't between her life and mine, her choice was for herself to live or for both of us to die! If she'd only done the logical thing and walked away, I mean, I love Mum too, but Lily Potter would be alive right now and she would be my mother!" Tears were blurring Harry's eyes. "Only now I understand, I know what Mother must have felt. She <i>couldn't</i> step aside from the crib. She couldn't! Love doesn't walk away!"</p>
+<p>"And here's the thing," Harry said, "here's the thing I've been thinking about over and over. The Dark Lord gave Lily Potter the chance to walk away. He said that she could flee. He <i>told</i> her that dying in front of the crib wouldn't save her baby. 'Step aside, foolish woman, if you have any sense in you at all —'" An awful chill came over Harry as he spoke those words from his own lips, but he shook it off and continued. "And afterward I kept thinking, I couldn't seem to stop myself from thinking, wasn't the Dark Lord <i>right?</i> If only Mother had stepped away. She tried to curse the Dark Lord but it was suicide, she had to have <i>known</i> that it was suicide. Her choice wasn't between her life and mine, her choice was for herself to live or for both of us to die! If she'd only done the logical thing and walked away, I mean, I love Mum too, but Lily Potter would be alive right now and she would be my mother!" Tears were blurring Harry's eyes. "Only now I understand, I know what Mother must have felt. She <i>couldn't</i> step aside from the crib. She couldn't! Love doesn't walk away!"</p>
 
 <p>It was like the old wizard had been struck, struck by a chisel that shattered him straight down the middle.</p>
 
@@ -150,9 +150,9 @@
 
 <p>"I don't know!" shouted Harry. "I wasn't listening either!"</p>
 
-<p>"I - I'm sorry, Harry - I -" The old wizard pressed his hands to his face, and Harry saw that Albus Dumbledore was weeping. "I should not have said, such things to you - I should not, have resented, your innocence -"</p>
+<p>"I — I'm sorry, Harry — I —" The old wizard pressed his hands to his face, and Harry saw that Albus Dumbledore was weeping. "I should not have said, such things to you — I should not, have resented, your innocence —"</p>
 
-<p>Harry stared at the wizard for another second, and then Harry turned and marched out of the black room, down the stairs, through the office -</p>
+<p>Harry stared at the wizard for another second, and then Harry turned and marched out of the black room, down the stairs, through the office —</p>
 
 <p>"I really don't know why you're still on his shoulder," Harry said to Fawkes.</p>
 
@@ -170,7 +170,7 @@
 
 <p>Harry's eyes dropped down to his textbook, but the section was so familiar it might as well have been a blank parchment.</p>
 
-<p><i>Dumbledore fought a war against a Dark Lord who deliberately set out to break him in the cruelest possible way. He had to choose between losing his war and his brother. Albus Dumbledore knows, he learned in the worst possible way, that there are limits to the value of one life; and it almost broke his sanity to admit it. But you, Harry Potter -</i> you <i>already knew better.</i></p>
+<p><i>Dumbledore fought a war against a Dark Lord who deliberately set out to break him in the cruelest possible way. He had to choose between losing his war and his brother. Albus Dumbledore knows, he learned in the worst possible way, that there are limits to the value of one life; and it almost broke his sanity to admit it. But you, Harry Potter —</i> you <i>already knew better.</i></p>
 
 <p>"Shut up," the boy whispered to the empty Transfiguration classroom, though there was nobody there to hear it.</p>
 
@@ -194,7 +194,7 @@
 
 <p>Harry closed his eyes.</p>
 
-<p>Like the Sorting Hat speaking inside his head -</p>
+<p>Like the Sorting Hat speaking inside his head —</p>
 
 <p><i>What is the real reason for your anger?</i></p>
 
